Add remaining cite shortcodes

--- a/content/1-history/1.md
+++ b/content/1-history/1.md
@@ -23,7 +23,7 @@ Structural conservation of a canvas painting can be a more profound intervention
 
 Fifty years ago, a traditional lining method was considered a normal component of any conservation treatment. The lining used was defined by the choice of adhesive, and these materials had a surprisingly wide range of properties, from water based to water repellent. The goal of lining was to turn a fragile canvas painting into one that was much more resilient, but the means and the outcome were not well defined. The dangers in lining were recognized, however, and it was normally carried out by skilled and experienced professionals. But attempts were also made to automate and deskill the process by using hot tables and vacuum pressure.
 
-For the student, there was little published information except for some early discussions on reservations about glue lining, the justification for introducing wax-resin adhesives, and designs for hot tables ([[Ruhemann 1953]]; [[Straub and Rees-Jones 1955]]). From this background, W. Percival-Prescott conceived the Conference on Comparative Lining Techniques, held in Greenwich (London) in 1974. This ambitious project brought together experts from various backgrounds, but it succeeded in uncovering much confusion of purpose and also a genuine desire to improve the situation ([[Percival-Prescott 2003b]]). Traditional methods were described by practitioners, and several research projects investigating alternative adhesives and lining methods were presented. A wide variety of conservation aims emerged, from restoring the original appearance of a painting to accepting its existing condition ([[Mehra 2003]]). For the first time, the advantages and disadvantages of all materials and methods were openly debated, including wax lining methods ([[Berger and Zeliger 2003]]; [[Cummings and Hedley 2003]]).
+For the student, there was little published information except for some early discussions on reservations about glue lining, the justification for introducing wax-resin adhesives, and designs for hot tables ({% cite 'Ruhemann 1953' %}; {% cite 'Ruhemann 1953' %}). From this background, W. Percival-Prescott conceived the Conference on Comparative Lining Techniques, held in Greenwich (London) in 1974. This ambitious project brought together experts from various backgrounds, but it succeeded in uncovering much confusion of purpose and also a genuine desire to improve the situation ({% cite 'Ruhemann 1953' %}). Traditional methods were described by practitioners, and several research projects investigating alternative adhesives and lining methods were presented. A wide variety of conservation aims emerged, from restoring the original appearance of a painting to accepting its existing condition ({% cite 'Ruhemann 1953' %}). For the first time, the advantages and disadvantages of all materials and methods were openly debated, including wax lining methods ({% cite 'Ruhemann 1953' %}; {% cite 'Ruhemann 1953' %}).
 
 During a period when lining was widely, uncritically accepted, most practitioners had a limited range of experience and had honed their skills in a narrow lining specialty based on one specific adhesive. The establishment of conservation training courses with academic aspirations has now largely replaced the former apprenticeship training, which passed on the strengths and skills of existing practices but had no mechanism to compare or improve on them. Formal training has provided impetus for conservation science, and the study of conservation methods has influenced the materials and practice of conservators, and even some artists.
 
@@ -33,19 +33,19 @@ After Greenwich, it was clear that an understanding of the structure and mechani
 
 {% figure 'fig-1-1' %}
 
-The response of paintings to moisture had been a particular concern since the nineteenth century. Mecklenburg’s plot of tension against RH for all the materials on a stretched and primed canvas was a major advance ([[Mecklenburg 1982]]; [[Mecklenburg and Tumosa 1991a]]). Gerry Hedley explained the mechanism of canvas shrinking when exposed to water or RH approaching 100%. He also saw the effect of initial weave crimp transfer from warp to weft ([[Hedley 1993]]; [[Hedley and Odlyha 1993]]). The differing influence of pigments on the drying (curing) of linseed oil explained why the application of moisture and pressure is not enough to flatten most mature lead white paints. Temperature response of paintings was also investigated ([[Michalski 1991]]). Cracking of otherwise flexible acrylic paintings at extremely low temperatures was at first surprising. The concept of glass transition temperature (Tg) clarified why familiar flexible materials became brittle at these low temperatures.
+The response of paintings to moisture had been a particular concern since the nineteenth century. Mecklenburg’s plot of tension against RH for all the materials on a stretched and primed canvas was a major advance ({% cite 'Ruhemann 1953' %}; {% cite 'Ruhemann 1953' %}). Gerry Hedley explained the mechanism of canvas shrinking when exposed to water or RH approaching 100%. He also saw the effect of initial weave crimp transfer from warp to weft ({% cite 'Ruhemann 1953' %}; {% cite 'Ruhemann 1953' %}). The differing influence of pigments on the drying (curing) of linseed oil explained why the application of moisture and pressure is not enough to flatten most mature lead white paints. Temperature response of paintings was also investigated ({% cite 'Ruhemann 1953' %}). Cracking of otherwise flexible acrylic paintings at extremely low temperatures was at first surprising. The concept of glass transition temperature (Tg) clarified why familiar flexible materials became brittle at these low temperatures.
 
 Long-term mechanical behavior, such as relaxation and creep, have also been measured, providing useful predictions of future behavior. It took sixteen years to collect the data shown in ([fig. 1.2](#fig-1-2)) at the Canadian Conservation Institute, which shows the relaxation (loss of tension) of stretched canvas paintings and linings over that period of time, plotted on a logarithmic time axis. Such data is critical when deciding on the best choice of adhesive and lining material.
 
 {% figure 'fig-1-2' %}
 
-The use of biaxial stretching, first proposed by Berger ({Berger and Russell 2000}), and electronic speckle pattern interferometry (ESPI) for strain measurement ([fig. 1.3](#fig-1-3)) enabled Young and Hibberd to look in further detail at conservation issues and lining practice, such as the strain associated with stretcher attachments ([[Young and Hibberd 1999]]; [[Young and Hibberd 2000]]). The complex structure of stretched canvas is now understood in sufficient detail to consider computer modeling of the mechanical properties of both paintings and linings. It also offers the opportunity to study in more detail the effects of minimal treatments on more contemporary paintings ([[Hagan et al. 2007]]; [[Hagan et al. 2011]]). Temporary solutions and physical protection may prove to be our best options, but many have not yet been fully assessed objectively.
+The use of biaxial stretching, first proposed by Berger ({Berger and Russell 2000}), and electronic speckle pattern interferometry (ESPI) for strain measurement ([fig. 1.3](#fig-1-3)) enabled Young and Hibberd to look in further detail at conservation issues and lining practice, such as the strain associated with stretcher attachments ({% cite 'Ruhemann 1953' %}; {% cite 'Ruhemann 1953' %}). The complex structure of stretched canvas is now understood in sufficient detail to consider computer modeling of the mechanical properties of both paintings and linings. It also offers the opportunity to study in more detail the effects of minimal treatments on more contemporary paintings ({% cite 'Ruhemann 1953' %}; {% cite 'Ruhemann 1953' %}). Temporary solutions and physical protection may prove to be our best options, but many have not yet been fully assessed objectively.
 
 {% figure 'fig-1-3' %}
 
 ## Conservation Practice
 
-Transferring research results into conservation practice on historic objects involves special problems. Understanding materials in a pristine state is not enough to predict the behavior of deteriorated old paintings ([[Ackroyd 2002]]; [[Hackney 2004b]]; [[Phenix 1995]]; [[Reeve 1984]]; [[Scharff 2012]]). Since an assessment of physical condition and appropriate treatment requires such knowledge, measuring slow processes, such as “natural” aging, is increasingly necessary in order to make reliable long-term decisions.
+Transferring research results into conservation practice on historic objects involves special problems. Understanding materials in a pristine state is not enough to predict the behavior of deteriorated old paintings ({% cite 'Ruhemann 1953' %}; {% cite 'Ruhemann 1953' %}; {% cite 'Ruhemann 1953' %}; {% cite 'Ruhemann 1953' %}; {% cite 'Ruhemann 1953' %}). Since an assessment of physical condition and appropriate treatment requires such knowledge, measuring slow processes, such as “natural” aging, is increasingly necessary in order to make reliable long-term decisions.
 
 Progress in devising and applying new conservation treatments is made difficult because at some stage practical experience can be gained only by working directly on unique and valuable original aged material ([fig. 1.4](#fig-1-4)). It might be argued that this amounts to carrying out scientific experiments lacking a control. As a consequence, we can choose our treatment method but cannot be sure it was the best of several possible options.
 
@@ -53,9 +53,9 @@ Progress in devising and applying new conservation treatments is made difficult 
 
 In the UK, original nineteenth-century loose linings have provided a limited source of acceptable experimental material, but such material has still not been replicated reliably in all its aspects by artificial aging methods.
 
-For the conservator concerned with historic paintings, it is important to be aware of artists’ changing methods, materials, and intentions. There is much detail, accumulated from the examination of examples of painting practice, to inform the conservator of the likely behavior of a specific painting to be treated. For the period from the latter part of the nineteenth century until the present, artists were less bound by academy controls; their aims became more adventurous, and their materials and methods expanded. As paintings from this period increasingly demand attention and treatment, the conservator is presented with a variety of interesting new problems and conflicts, many of which have already contributed to modified conservation practice for works on canvas, currently leading to a more preventive approach. The demands of much recently created art provide a challenge that requires radical solutions, and they are pointing to new directions in conservation of both contemporary and traditional art ([[Heiber 2003]]).
+For the conservator concerned with historic paintings, it is important to be aware of artists’ changing methods, materials, and intentions. There is much detail, accumulated from the examination of examples of painting practice, to inform the conservator of the likely behavior of a specific painting to be treated. For the period from the latter part of the nineteenth century until the present, artists were less bound by academy controls; their aims became more adventurous, and their materials and methods expanded. As paintings from this period increasingly demand attention and treatment, the conservator is presented with a variety of interesting new problems and conflicts, many of which have already contributed to modified conservation practice for works on canvas, currently leading to a more preventive approach. The demands of much recently created art provide a challenge that requires radical solutions, and they are pointing to new directions in conservation of both contemporary and traditional art ({% cite 'Ruhemann 1953' %}).
 
-Some developments of lining processes using new materials, such as sailcloth fabric ([[Hedley and Villers 1982]]) and Beva 371 adhesive ([[Berger 1975]]), have so far survived the test of time. Exploring the properties and stability of possible alternative conservation structural materials is a major undertaking, made more difficult by the risk that material manufacturers may discontinue their supply. Economics also conspire to deter time-consuming structural treatments. As a consequence, for many contemporary paintings, restoration often challenges existing experience and costs much more than preventing damage ([fig. 1.5](#fig-1-5)).
+Some developments of lining processes using new materials, such as sailcloth fabric ({% cite 'Ruhemann 1953' %}) and Beva 371 adhesive ({% cite 'Ruhemann 1953' %}), have so far survived the test of time. Exploring the properties and stability of possible alternative conservation structural materials is a major undertaking, made more difficult by the risk that material manufacturers may discontinue their supply. Economics also conspire to deter time-consuming structural treatments. As a consequence, for many contemporary paintings, restoration often challenges existing experience and costs much more than preventing damage ([fig. 1.5](#fig-1-5)).
 
 {% figure 'fig-1-5' %}
 
@@ -65,7 +65,7 @@ Given the many unavoidable problems encountered in conservation treatments, prot
 
 Improvements in the environment of modern museums (controlled and filtered air conditioning, UV filtration); careful handling and operating procedures; and protection during transport and handling have all contributed to more reliable conditions. Defining exact relative humidity/temperature (RH/T) conditions is virtually impossible, but the absence of identifiable damage that can be directly attributed to current museum conditions is a positive indicator. However, more recently, an open-ended commitment to long-term protection by air-conditioning has been challenged as expensive and unsustainable in energy terms.
 
-In the past, the risks of travel were unpredictable and thought to be large. Conservators were therefore obliged to reinforce a painting’s structure to the best of their powers. With increasing loan and exhibition programs and major blockbuster exhibitions, this has become an international problem. The transport environment has now been examined in terms of shock, vibration, moisture content, and temperature along with their consequences for paintings in transit. Criteria for behavior and designs for packing cases to minimize exposure to risks have become established. An interesting observation from the Art in Transit research group was that, by using reliable methods and tight procedures, transport risks could be reduced below those of handling within a museum ([[Mecklenburg 1991]]).
+In the past, the risks of travel were unpredictable and thought to be large. Conservators were therefore obliged to reinforce a painting’s structure to the best of their powers. With increasing loan and exhibition programs and major blockbuster exhibitions, this has become an international problem. The transport environment has now been examined in terms of shock, vibration, moisture content, and temperature along with their consequences for paintings in transit. Criteria for behavior and designs for packing cases to minimize exposure to risks have become established. An interesting observation from the Art in Transit research group was that, by using reliable methods and tight procedures, transport risks could be reduced below those of handling within a museum ({% cite 'Ruhemann 1953' %}).
 
 By introducing consistent procedures for the physical protection of works of art, it is easier to avoid much accidental damage and unnecessary early deterioration. Successful collections care procedures have together made the idea that lining is a requirement much less persuasive and forced us to be more precise about its purpose.
 
@@ -79,17 +79,17 @@ For the period between 1900 and 1960, air pollution was at its worst in many cou
 
 {% figure 'fig-1-6' %}
 
-Efflorescence can occur on the surface of oil paintings, especially unvarnished ones, and sometimes, on glazed works, it is transferred onto the glass. This deposit has been analyzed as fatty acids ([[Williams 1989]]), and these fatty acids must have been released from the oil paint. The hydrolysis of oils is well known, and migration of its reaction products within dried oil paint films explains efflorescence.
+Efflorescence can occur on the surface of oil paintings, especially unvarnished ones, and sometimes, on glazed works, it is transferred onto the glass. This deposit has been analyzed as fatty acids ({% cite 'Ruhemann 1953' %}), and these fatty acids must have been released from the oil paint. The hydrolysis of oils is well known, and migration of its reaction products within dried oil paint films explains efflorescence.
 
-There has been a major advance in understanding the degradation of oil paint and how it changes the paint’s optical performance and our perception of a painted image ([[Boon, Van der Weerd, and Keune 2002]]; [[Keune 2005]]). We are all familiar with the increase in transparency of oil paintings and grounds. The impregnation and lining of paintings with thin grounds can cause increases in transparency, especially when wax resin has been used ([[Bomford and Staniforth 1981]]). We now know that old paint films form an ionomeric structure that continues to deteriorate by hydrolysis and oxidation. Saponification reactions of free acids with alkaline or basic metals present in finer pigments, such as calcium, magnesium, lead, and zinc, can dissolve pigments into the paint. Removal of these light-dispersing pigments causes the paint to increase in transparency.
+There has been a major advance in understanding the degradation of oil paint and how it changes the paint’s optical performance and our perception of a painted image ({% cite 'Ruhemann 1953' %}; {% cite 'Ruhemann 1953' %}). We are all familiar with the increase in transparency of oil paintings and grounds. The impregnation and lining of paintings with thin grounds can cause increases in transparency, especially when wax resin has been used ({% cite 'Ruhemann 1953' %}). We now know that old paint films form an ionomeric structure that continues to deteriorate by hydrolysis and oxidation. Saponification reactions of free acids with alkaline or basic metals present in finer pigments, such as calcium, magnesium, lead, and zinc, can dissolve pigments into the paint. Removal of these light-dispersing pigments causes the paint to increase in transparency.
 
-I recently made some experiments involving mixing acid-base titration indicators into various fresh white oil paints and then painting them out. In a few minutes, the pH 4, 4.1, and 4.7 indicators began to change color, but the pH 3.3 and 3.7 indicators remained unchanged for months. For comparison, samples were removed and exposed to ammonia vapor to return them to their initial color (for a short time). Similar control samples in artists acrylic paint did not change color at all. This demonstrates that oil paint becomes acidic within a short period of time ([[Hackney 2020]]).
+I recently made some experiments involving mixing acid-base titration indicators into various fresh white oil paints and then painting them out. In a few minutes, the pH 4, 4.1, and 4.7 indicators began to change color, but the pH 3.3 and 3.7 indicators remained unchanged for months. For comparison, samples were removed and exposed to ammonia vapor to return them to their initial color (for a short time). Similar control samples in artists acrylic paint did not change color at all. This demonstrates that oil paint becomes acidic within a short period of time ({% cite 'Ruhemann 1953' %}).
 
-The acidic nature of dried oil paint is the reason why artists do not paint directly on canvas but instead protect it with a coat of glue size. The application of an oil ground or paint on top of this water-soluble size layer produces many of the structural and mechanical problems that we have to deal with. A hot glue size will engulf the canvas, but when applied cold it can accumulate on the canvas surface ([[Morgan et al. 2012]]). If and when a glue size cracks, its barrier properties are reduced and volatile breakdown products (VOCs) may reach the canvas.
+The acidic nature of dried oil paint is the reason why artists do not paint directly on canvas but instead protect it with a coat of glue size. The application of an oil ground or paint on top of this water-soluble size layer produces many of the structural and mechanical problems that we have to deal with. A hot glue size will engulf the canvas, but when applied cold it can accumulate on the canvas surface ({% cite 'Ruhemann 1953' %}). If and when a glue size cracks, its barrier properties are reduced and volatile breakdown products (VOCs) may reach the canvas.
 
-Similarly, if we add a consolidating or lining adhesive that can become acidic on oxidation, the canvas will be exposed to more rapid deterioration. These arguments suggest more research is needed into both conservation adhesives and ways of achieving adequate deacidification of canvas ([[Hackney, Townsend, and Wyplosz 1996]]; [[Ryder 1986]]).
+Similarly, if we add a consolidating or lining adhesive that can become acidic on oxidation, the canvas will be exposed to more rapid deterioration. These arguments suggest more research is needed into both conservation adhesives and ways of achieving adequate deacidification of canvas ({% cite 'Ruhemann 1953' %}; {% cite 'Ruhemann 1953' %}).
 
-Enclosure on display or in storage to reduce moisture exchange and deposition of external pollution, such as nitrogen dioxide and particulates, is an important conservation measure ([[McClure 2012]]) and a more sustainable alternative to air-conditioning, but measurements within enclosures demonstrate that we have to be careful in its use ([fig. 1.7a and b](#fig-1-7))
+Enclosure on display or in storage to reduce moisture exchange and deposition of external pollution, such as nitrogen dioxide and particulates, is an important conservation measure ({% cite 'Ruhemann 1953' %}) and a more sustainable alternative to air-conditioning, but measurements within enclosures demonstrate that we have to be careful in its use ([fig. 1.7a and b](#fig-1-7))
 
 {% figure 'fig-1-7' %}
 
