--- a/content/1-history/7.md
+++ b/content/1-history/7.md
@@ -21,9 +21,9 @@ The past forty-five years have seen technical refinements of traditional methods
 
 ## The Current State of Terminology
 
-One of the efforts of the Greenwich conference proceedings was the production of a handbook of terms used in the lining of paintings—an attempt to define about three hundred terms so that conservators from different countries and different lining traditions and philosophies could communicate effectively. This handbook was reproduced for subsequent conferences and seminars, and it is included as a glossary in the volume republished nearly 20 years ago ([[Villers 2003b]]). Despite the handbook’s status as a key resource in the training of paintings conservators, and despite international efforts to standardize terminology in the realm of conservation of cultural heritage,[^1] Cecil Krarup Andersen found in 2012 that the frequency of deviations from terminology established in the Greenwich Handbook increased with the passage of time in English-language publications included in AATA ([[Andersen 2012]]).
+One of the efforts of the Greenwich conference proceedings was the production of a handbook of terms used in the lining of paintings—an attempt to define about three hundred terms so that conservators from different countries and different lining traditions and philosophies could communicate effectively. This handbook was reproduced for subsequent conferences and seminars, and it is included as a glossary in the volume republished nearly 20 years ago ({% cite 'Villers 2003b' %}). Despite the handbook’s status as a key resource in the training of paintings conservators, and despite international efforts to standardize terminology in the realm of conservation of cultural heritage,[^1] Cecil Krarup Andersen found in 2012 that the frequency of deviations from terminology established in the Greenwich Handbook increased with the passage of time in English-language publications included in AATA ({% cite 'Andersen 2012' %}).
 
-The reasons behind these deviations are many. Given the adoption of English as a lingua franca in conservation literature, Andersen and others have noted the persistence of English cognates in different lining traditions, resulting in a collection of terms having essentially the same meaning: lining, relining, doubling, and redoubling, for example. Additionally, the introduction of new materials and innovative approaches to treatment have given rise to adjustments to classical terminology and the creation of new terms and variants. Further confusion can result from techniques falling under umbrella terms while being fundamentally different procedures. For example, the thread-by-thread tear-mending techniques first described by Winfried Heiber ([[Heiber 2003]]), and adapted by Petra Demuth and others, have influenced the development of various bridging and reweaving techniques for the stabilization and reestablishment of tension in torn supports. Of the two, reweaving may be more consistent with Heiber’s approach, yet both approaches may be described as thread-by-thread tear mending or a modified Heiber technique.
+The reasons behind these deviations are many. Given the adoption of English as a lingua franca in conservation literature, Andersen and others have noted the persistence of English cognates in different lining traditions, resulting in a collection of terms having essentially the same meaning: lining, relining, doubling, and redoubling, for example. Additionally, the introduction of new materials and innovative approaches to treatment have given rise to adjustments to classical terminology and the creation of new terms and variants. Further confusion can result from techniques falling under umbrella terms while being fundamentally different procedures. For example, the thread-by-thread tear-mending techniques first described by Winfried Heiber ({% cite 'Heiber 2003' %}), and adapted by Petra Demuth and others, have influenced the development of various bridging and reweaving techniques for the stabilization and reestablishment of tension in torn supports. Of the two, reweaving may be more consistent with Heiber’s approach, yet both approaches may be described as thread-by-thread tear mending or a modified Heiber technique.
 
 One might suggest that our terminology has sprawled due to the lack of an explicit, unified imperative for international consistency. Inconsistent terminology may be cause for alarm; however, this “problem” is a natural consequence of parallel research and practical innovation that leverages the material traditions of varied regional practice. The expansion of our shared lexicon and authors’ apparent agency to redefine accepted terminology suggests that the international community has engaged in rapid adoption of new techniques and materials to such a degree that flexibility has been valued over rigid language structures. To stifle experimental creativity by imposing specific linguistic constraints could strip some of the nuance from technical descriptions of practical applications—particularly if those communications originate from outside of English-speaking traditions. If the trajectory of modern structural treatment is founded upon flexible decision-making trees—an intentional move away from prescriptive treatment—then it is imperative that paintings conservators aim to embrace and understand the breadth of traditions and techniques that exist internationally.
 
@@ -33,7 +33,7 @@ In the current global environment, with its mounting uncertainties due to climat
 
 ### A Living, Multilingual Terminology
 
-Of course, conservators must be able to communicate the technical aspects of their work with precision and clarity, and we must be willing to make nuanced adjustments to our terminology with the accumulation of scientific, philosophical, and practical information—shifting away from idealistic “reversibility” in favor of the practical “retreatability,” and gaining a more granular understanding of increased transparency of oil paint films ([[Van Loon 2008]]) due to deterioration processes and through structural intervention ([[Froment 2019]]), for example. Although the adoption of English as the operating language imposes some structure for a shared terminology, doing so also inhibits the participation and investment of experts globally, and we risk the erosion of nuance with each translation. If conservators embrace international collaboration as a benchmark of sustainable practice,[^2] we will increase the probability of discovering new insights and relationships among differing international (and intergenerational) practices.
+Of course, conservators must be able to communicate the technical aspects of their work with precision and clarity, and we must be willing to make nuanced adjustments to our terminology with the accumulation of scientific, philosophical, and practical information—shifting away from idealistic “reversibility” in favor of the practical “retreatability,” and gaining a more granular understanding of increased transparency of oil paint films ({% cite 'Van Loon 2008' %}) due to deterioration processes and through structural intervention ({% cite 'Froment 2019' %}), for example. Although the adoption of English as the operating language imposes some structure for a shared terminology, doing so also inhibits the participation and investment of experts globally, and we risk the erosion of nuance with each translation. If conservators embrace international collaboration as a benchmark of sustainable practice,[^2] we will increase the probability of discovering new insights and relationships among differing international (and intergenerational) practices.
 
 An updated terminology for the structural treatment of paintings on fabric supports—and indeed for topics within the specialty of paintings conservation and across disciplines—could be produced in the following manner:
 
@@ -79,7 +79,7 @@ A reasonable compromise that would provide some degree of confidentiality while 
 
 ### Increasing Practitioners’ Command of Diverse Treatment Methodologies
 
-An outgrowth of the production of a new international terminology and broader publication of practical treatment information (and indeed, of the Conserving Canvas initiative) should be the increase of conservators’ capacity for understanding and commanding multiple approaches for structural treatment. The past few decades have seen a proliferation of new cleaning technologies aimed at greater specificity, efficacy ([[Ormsby et al. 2010]]), control ([[Tauber et al. 2018]]), and increased safety to the practitioner.[^4] Yet the same demand for specificity in structural treatment is seemingly lacking; a paintings conservator might be expected to utilize only a few structural treatment procedures each for humidification, consolidation, tear mending, and lining. One goal of modern structural treatment should be to work toward the understanding of and proficiency in multiple techniques to service different needs and to achieve differing effects.
+An outgrowth of the production of a new international terminology and broader publication of practical treatment information (and indeed, of the Conserving Canvas initiative) should be the increase of conservators’ capacity for understanding and commanding multiple approaches for structural treatment. The past few decades have seen a proliferation of new cleaning technologies aimed at greater specificity, efficacy ({% cite 'Ormsby et al. 2010' %}), control ({% cite 'Tauber et al. 2018' %}), and increased safety to the practitioner.[^4] Yet the same demand for specificity in structural treatment is seemingly lacking; a paintings conservator might be expected to utilize only a few structural treatment procedures each for humidification, consolidation, tear mending, and lining. One goal of modern structural treatment should be to work toward the understanding of and proficiency in multiple techniques to service different needs and to achieve differing effects.
 
 The ways in which we describe treatment parameters can be expanded by considering varied approaches. For instance, a more nuanced understanding of treatment possibilities makes it possible to better define one’s intent with a treatment: whether or not adhesive methods are required, and if they are, where within the structure of the painting one aims to localize the adhesive bond, and what is intended for the method of retreatability. From there, the choice of materials and the ability to control the conditions imposed upon the painting during treatment determines (in part) the success at realizing the intent of the treatment.
 
@@ -111,7 +111,7 @@ Our ever-evolving understanding of the structural treatment of paintings on fabr
 
 [^3]: The Multilingual Technical Scientific Glossary in Conservation and Restoration was a multiphase project (2001–7) focused on the production of a common thesaurus in English, German, French, Italian, and Spanish. See <http://www.associazionegiovanniseccosuardo.it/?q=en/node/163>.
 
-[^4]: For several examples, see [[Angelova et al. 2017]].
+[^4]: For several examples, see {% cite 'Angelova et al. 2017' %}.
 
 [^5]: <https://echa.europa.eu/regulations/reach/understanding-reach>.
 
