--- a/content/2-present-practice/11.md
+++ b/content/2-present-practice/11.md
@@ -75,7 +75,7 @@ After the complete evaporation of solvents, always keeping the painting tensione
 
 It’s important to underline that this method is not an alternative to the use of a hot table, but it permits heat transfer from the back also when working with the painting facedown is required.[^15] Using a vacuum system and applying heat through a tub containing pre-heated water guarantees that the whole surface is treated with the same pressure and temperature, substantially reducing the risk of nonhomogeneous performance of the thermoplastic adhesive.
 
-In preparation for mending structural damages, some adhesives were tested ([table 11.1](#table-11-1)). To avoid damage to the original canvas in the future, the breaking point of the adhesive should be equal to or slightly less than the toughness value of the original yarn (see [[Orata 2009]]), measured by tension test with a dynamometer. The adhesive with a breaking point that is similar to that of the original yarn is highlighted in red in the table.
+In preparation for mending structural damages, some adhesives were tested ([table 11.1](#table-11-1)). To avoid damage to the original canvas in the future, the breaking point of the adhesive should be equal to or slightly less than the toughness value of the original yarn (see {% cite 'Orata 2009' %}), measured by tension test with a dynamometer. The adhesive with a breaking point that is similar to that of the original yarn is highlighted in red in the table.
 
 {% figure 'table-11-1' %}
 
@@ -85,7 +85,7 @@ With the first steps of consolidation, tear mending, and humidification complete
 
 Glue-paste lining did not seem suitable, not only because it would increase the weight of the whole structure, but also (mostly) due to the difficulty in maintaining the appearance of the painted surface, preventing the seams’ stitches from impressing on the front, and preserving the original seams. Lining with Beva 371 was also discarded due to the evaporation of a large amount of solvent (such as toluene) during the operation. Cold lining, using the Mehra system, was just as risky for the large amount of butyl acetate (or similar solvent) needed to reactivate Plextol.[^17] Using a thermoplastic adhesive in aqueous dispersion appeared to be a good solution to avoid the use of a fair amount of solvent, with its attendant risks of toxicity and fire.
 
-A study focused on testing different adhesives obtained by mixing Plextol B500 and Dispersion K360,[^18] in different proportions, was carried out to obtain a final mixture to be reactivated by heating. Empirical tests were performed to define the approximate reactivation temperature and the reversibility of each mixture ([[Orata and Capellaro 2013]]\|, 57–66) in order to identify the one that would better fit the features and conservative conditions of the painting ([table 11.2](#table-11-2)). The possibility to match specific needs makes this acrylic-based class of adhesives very advantageous in devising innovative solutions.
+A study focused on testing different adhesives obtained by mixing Plextol B500 and Dispersion K360,[^18] in different proportions, was carried out to obtain a final mixture to be reactivated by heating. Empirical tests were performed to define the approximate reactivation temperature and the reversibility of each mixture ({% cite 'Orata and Capellaro 2013' %}\|, 57–66) in order to identify the one that would better fit the features and conservative conditions of the painting ([table 11.2](#table-11-2)). The possibility to match specific needs makes this acrylic-based class of adhesives very advantageous in devising innovative solutions.
 
 {% figure 'table-11-2' %}
 
