--- a/content/2-present-practice/12.md
+++ b/content/2-present-practice/12.md
@@ -27,9 +27,9 @@ abstract: "During the 2016 conservation of Puvis de Chavannes’s *Philosophy* m
 
 ## Introduction
 
-Since its introduction by Gustav A. Berger in the early 1970s, Beva 371 has been widely used as an adhesive for the lining of easel paintings and the mounting of murals onto rigid supports ([[Berger and Russell 2000]]). As it is a relatively recent introduction to the field of paintings conservation, the necessity of reversing a Beva 371 lining is an uncommon occurrence. While the reversal of paintings lined onto canvas supports with Beva 371 can be somewhat demanding, the removal of a large-scale mural painting adhered to a rigid support with Beva 371 presents the conservator with an extraordinary set of challenges.
+Since its introduction by Gustav A. Berger in the early 1970s, Beva 371 has been widely used as an adhesive for the lining of easel paintings and the mounting of murals onto rigid supports ({% cite 'Berger and Russell 2000' %}). As it is a relatively recent introduction to the field of paintings conservation, the necessity of reversing a Beva 371 lining is an uncommon occurrence. While the reversal of paintings lined onto canvas supports with Beva 371 can be somewhat demanding, the removal of a large-scale mural painting adhered to a rigid support with Beva 371 presents the conservator with an extraordinary set of challenges.
 
-With the application of heat and solvents, canvas lining fabrics can be peeled away from the reverse of an easel painting, but rigid support panels cannot, therefore different strategies must be devised. The strong adhesive properties of Beva 371 and its rather high activation temperature further complicate the procedure. The adhesive used for the marouflage procedure described in this essay is Beva 371b, which replaced the original Berger formulation in 2010. Laropal K80 (BASF), a tackifier in the original adhesive, was discontinued in 2008. In the reformulated Beva 371b, “an aldehyde ketone resin” was substituted for it ([[Conservator’s Products Company 2010]]).
+With the application of heat and solvents, canvas lining fabrics can be peeled away from the reverse of an easel painting, but rigid support panels cannot, therefore different strategies must be devised. The strong adhesive properties of Beva 371 and its rather high activation temperature further complicate the procedure. The adhesive used for the marouflage procedure described in this essay is Beva 371b, which replaced the original Berger formulation in 2010. Laropal K80 (BASF), a tackifier in the original adhesive, was discontinued in 2008. In the reformulated Beva 371b, “an aldehyde ketone resin” was substituted for it ({% cite 'Conservator’s Products Company 2010' %}).
 
 In 2016, Puvis de Chavannes’s *Philosophy* mural ([fig. 12.1](#fig-12-1)), one of nine monumental murals the artist painted for the Grand Staircase of the Boston Public Library in 1895–96, underwent a major conservation campaign. Delamination of the 435.6 x 217.8 cm mural canvas and failure of the underlying plaster necessitated emergency removal of the mural from the wall, mounting of the canvas onto a rigid support panel, and reinstallation in its niche. The project was presented by the authors at the 2017 AIC Conference General Session in Chicago; however, time constraints did not permit a thorough discussion of the unexpected failure of the aluminum honeycomb panel support during the lining procedure. This necessitated the reversal of the marouflage lining and replacement of the panel with one of better design and materials.
 
@@ -39,13 +39,13 @@ In addition to describing the procedure implemented to reverse the marouflage an
 
 ## Project Overview
 
-The murals in the grand staircase of the Boston Public Library were painted on canvas by Puvis de Chavannes in Paris. The artist achieved his famed fresco-like surfaces by using various innovative techniques, including painting on a coarse, plain-weave linen canvas; priming the canvas with animal glue size; applying an extremely thin, absorbent chalk ground bound in animal glue; draining his oils by placing them on blotting paper; thinning his paints with turpentine; adding extensive amounts of white lead to his color mixtures; and leaving the mural surfaces unvarnished ([[Hensick, Olivier, and Pocobene 1997]]).
+The murals in the grand staircase of the Boston Public Library were painted on canvas by Puvis de Chavannes in Paris. The artist achieved his famed fresco-like surfaces by using various innovative techniques, including painting on a coarse, plain-weave linen canvas; priming the canvas with animal glue size; applying an extremely thin, absorbent chalk ground bound in animal glue; draining his oils by placing them on blotting paper; thinning his paints with turpentine; adding extensive amounts of white lead to his color mixtures; and leaving the mural surfaces unvarnished ({% cite 'Hensick, Olivier, and Pocobene 1997' %}).
 
 Upon completion, the reverse of each mural was primed with red lead in oil, rolled, shipped to Boston, and mounted to the plaster walls using the marouflage technique ([fig. 12.2](#fig-12-2)). The original method of attachment was to adhere the canvas to the wall with a paste of lead white in linseed oil applied to both the wall and the back of the canvas painting, which was then pressed onto the wall with rollers. While the adhesive was curing, the canvas was secured around the perimeter by a series of metal tacks.
 
 {% figure 'fig-12-2' %}
 
-In late 2014, a large canvas bulge and undulations were discovered in the upper portions of the mural. Salt efflorescence observed on the surrounding marble confirmed moisture infiltration. None of this was a surprise, as the mural has had a history of moisture problems, as noted in 1993 when the Puvis de Chavannes murals were last conserved by the Straus Center for Conservation, Harvard Art Museums ([[Hensick, Olivier, and Pocobene 1997]]). Mapping of the mural surface revealed that nearly 80% of the canvas had separated from the plaster substrate, yet along the left and bottom edges, the canvas was still very firmly attached to the wall.
+In late 2014, a large canvas bulge and undulations were discovered in the upper portions of the mural. Salt efflorescence observed on the surrounding marble confirmed moisture infiltration. None of this was a surprise, as the mural has had a history of moisture problems, as noted in 1993 when the Puvis de Chavannes murals were last conserved by the Straus Center for Conservation, Harvard Art Museums ({% cite 'Hensick, Olivier, and Pocobene 1997' %}). Mapping of the mural surface revealed that nearly 80% of the canvas had separated from the plaster substrate, yet along the left and bottom edges, the canvas was still very firmly attached to the wall.
 
 Furthermore, a large area of the plaster substrate had also detached from the wall structure and was exerting considerable outward pressure on the canvas, raising fears of catastrophic failure. The plaster substrate consisted of expanded metal lath coated with three plaster layers: scratch coat, brown coat, and finishing coat, all composed of lime plaster of approximately 2.2 cm total thickness. Inserting a microspatula between the canvas and plaster instantly shattered the paint film, indicating that the canvas and ground were extremely brittle. This also confirmed that the adhered portions of canvas could not be separated from the plaster without incurring considerable damage to the paint surface.
 
@@ -133,7 +133,7 @@ After a review of the specifications and materials used to make the panel, it wa
 
 ## Modification of the Beva 371b Adhesive
 
-The challenges encountered during reversal of the partially adhered portion of the mural led to a reconsideration of the properties of Beva 371b: namely, its high strength and the temperature needed to release it. Recently, Ploeger et al. considered the strength of Berger’s adhesive formulation and proposed the need for further research and development of adhesives with reduced strength and activation temperature ([[Ploeger, McGlinchey, and de la Rie 2015]]). As the entire Puvis de Chavannes marouflage may need to be reversed at some point in the future, thought was given to how conservators would go about doing this and what could be done during the present procedure to make that task less challenging. Once mounted onto its rigid support panel, the mural canvas would be in a relatively stress-free state, so such a high-strength adhesive would not be necessary. The question was how to go about reducing the strength and tack of Beva 371b while still providing sufficient adhesion. Additionally, lowering the activation temperature of the adhesive was deemed a desirable characteristic, especially for the brittle paint and ground layers.
+The challenges encountered during reversal of the partially adhered portion of the mural led to a reconsideration of the properties of Beva 371b: namely, its high strength and the temperature needed to release it. Recently, Ploeger et al. considered the strength of Berger’s adhesive formulation and proposed the need for further research and development of adhesives with reduced strength and activation temperature ({% cite 'Ploeger, McGlinchey, and de la Rie 2015' %}). As the entire Puvis de Chavannes marouflage may need to be reversed at some point in the future, thought was given to how conservators would go about doing this and what could be done during the present procedure to make that task less challenging. Once mounted onto its rigid support panel, the mural canvas would be in a relatively stress-free state, so such a high-strength adhesive would not be necessary. The question was how to go about reducing the strength and tack of Beva 371b while still providing sufficient adhesion. Additionally, lowering the activation temperature of the adhesive was deemed a desirable characteristic, especially for the brittle paint and ground layers.
 
 As supplied by the manufacturer, paraffin wax makes up 9% of Beva 371b. It was deduced that the addition of a low-temperature paraffin wax to the stock solution would reduce not only the activation temperature of the adhesive but also the percentage of the other resins and tackifiers in the solution, thereby reducing the adhesive’s strength. Empirical tests were performed to determine if a modified adhesive with these desirable properties could be produced. Using Beva 371b dry resin mix, batches of the adhesive were weighed out and dissolved in solvents according to the manufacturer’s directions. They were then modified by adding 5% and 10% by weight of paraffin wax. A paraffin wax with a melting temperature of 50^°^C–54.4^°^C was chosen for testing. A control sample of unmodified Beva 371b was also prepared for comparison. Scrap samples of thick nineteenth-century decorative canvas, along with linen interleaf fabrics, were adhered to small honeycomb test panels. From the tests, it was determined that it was possible to sufficiently adhere the test samples at a much lower temperature of 54.4^°^C measured at the paint surface. The tests also indicated that at the interface between the aluminum panel and linen interleaf, the temperature remained below 60^°^C
 
