--- a/content/2-present-practice/13.md
+++ b/content/2-present-practice/13.md
@@ -20,9 +20,9 @@ abstract: "Over the past decades, lining of paintings has become more and more a
 
 ## Introduction
 
-After the influential talks by Vishwa Mehra and Westby Percival-Prescott at the 1974 Comparative Lining Techniques conference in Greenwich, the dangers of lining became clear to everyone. Lining came to be understood more and more as a massive, largely irreversible intervention in the structure of the painting. The dangers of treatments involving heat and moisture to alter the original surface were pointed out by Mehra. Similarly, Percival‑Prescott described the lining cycle as leading to constant material loss ([[Percival-Prescott 2003b]]). In addition, lined paintings often appear rigid and flat.
+After the influential talks by Vishwa Mehra and Westby Percival-Prescott at the 1974 Comparative Lining Techniques conference in Greenwich, the dangers of lining became clear to everyone. Lining came to be understood more and more as a massive, largely irreversible intervention in the structure of the painting. The dangers of treatments involving heat and moisture to alter the original surface were pointed out by Mehra. Similarly, Percival‑Prescott described the lining cycle as leading to constant material loss ({% cite 'Percival-Prescott 2003b' %}). In addition, lined paintings often appear rigid and flat.
 
-As a consequence, part of the conservation world started to further develop lining techniques and do research on the mechanic behavior of canvases to diminish these adverse effects. In contrast, Percival-Prescott himself went as far as to postulate a need for a lining moratorium. A large part of the community, especially in German-speaking countries adopted this approach and turned away from lining in favor of developing new methods. The most influential of these methods is probably the thread-by-thread tear-mending propagated by Winfried Heiber ([[Heiber 2003]]).
+As a consequence, part of the conservation world started to further develop lining techniques and do research on the mechanic behavior of canvases to diminish these adverse effects. In contrast, Percival-Prescott himself went as far as to postulate a need for a lining moratorium. A large part of the community, especially in German-speaking countries adopted this approach and turned away from lining in favor of developing new methods. The most influential of these methods is probably the thread-by-thread tear-mending propagated by Winfried Heiber ({% cite 'Heiber 2003' %}).
 
 Today in Germany, the preferred methods for structural treatments are various forms of strip-lining and tear-mending, and it is a common goal to avoid lining altogether. Nonetheless, at the museum where Julia Brandt did her pre-career internship, she was trained to execute several lining techniques. Penetrating lining techniques were sometimes seen as a time-saving option, as they combined several steps in one, such as stabilizing the support and adhering and flattening the paint layers. Cold linings and nap-bond methods were seen as a good way to make paintings save for travel.
 
@@ -34,7 +34,7 @@ In most cases, even when paintings at first sight seem beyond recovery, local tr
 
 ## The Painter Engelbert Zimmermann and His Totentanz Cycle
 
-The painting *The Last Judgment* is the central piece of Engelbert Zimmermann’s Totentanz (danse macabre) series, which is owned by the Stadtmuseum Wasserburg am Inn, a small community museum in eastern Bavaria. The large-format painting, which dates from the beginning of the nineteenth century, had several horizontal tears, one of which divided the support in half (see [fig. 13.1](#fig-13-1)). The series was created in 1839 for the mortuary hall of the Wasserburg cemetery and is based on a model by Hans Holbein the Younger. His series Imagines Mortis (Images of Death)—does not show the dance of Death with his victims as was customary in the Middle Ages, but rather individual, self-contained scenes accompanied by interpretative verses and Bible quotations ([[Wunderlich 2010]]). The Totentanz from Wasserburg is considered one of the few remaining monumental cycles of this kind from the first half of the nineteenth century ({% cite 'Sörries 1998' '276' %}).
+The painting *The Last Judgment* is the central piece of Engelbert Zimmermann’s Totentanz (danse macabre) series, which is owned by the Stadtmuseum Wasserburg am Inn, a small community museum in eastern Bavaria. The large-format painting, which dates from the beginning of the nineteenth century, had several horizontal tears, one of which divided the support in half (see [fig. 13.1](#fig-13-1)). The series was created in 1839 for the mortuary hall of the Wasserburg cemetery and is based on a model by Hans Holbein the Younger. His series Imagines Mortis (Images of Death)—does not show the dance of Death with his victims as was customary in the Middle Ages, but rather individual, self-contained scenes accompanied by interpretative verses and Bible quotations ({% cite 'Wunderlich 2010' %}). The Totentanz from Wasserburg is considered one of the few remaining monumental cycles of this kind from the first half of the nineteenth century ({% cite 'Sörries 1998' '276' %}).
 
 Zimmermann was born in Wasserburg in 1807, the son of a carpenter. He was enrolled in figure drawing at the Munich Art Academy in 1827, but nothing is recorded about his further career and very few paintings by him are known. The mortuary hall was built in 1830 as part of the expansion and renovation of the Wasserburg cemetery, and a few years later Zimmermann was commissioned to furnish it. The cycle he created consists of six rectangular paintings (135 x 85 cm), and a central painting depicting the Last Judgment (225 x 130 cm).[^1] Initially, a cycle of eighteen paintings was planned. In a declaration from August 24 of the same year, however, the number was reduced by half (and in the end, only seven seem to have been executed); the free wall surfaces were to be filled with aphorisms.
 
@@ -100,7 +100,7 @@ The requirements for the lining adhesive were the same as those for the patch ad
 
 -   Finally, given the limited financial resources and the size of the painting, the adhesive (as well as the fabric) needed to be affordable.
 
-A selection of natural and synthetic adhesives was tested for these requirements: Beva 371 Film (thin), Lascaux 360 HV and 498 HV acrylic adhesives in different proportions, Plextol D 540[^7] and Dispersion K 360[^8] mixed in different proportions, and Plexigum PQ 611[^9] in Shellsol D 40 were tested as adhesives for patches and lining. The Beva 371 film was rejected due to its thickness and the resulting low flexibility. Producing a thinner film from Beva Gel was considered to pose a serious health risk due to the necessary solvent. The Lascaux acrylic adhesives and the Plextol mixtures gave the same results. As the Lascaux products are more expensive, we decided to use a mixture of Plextol D 540 and Dispersion K 360 in a 7:3 ratio. The mixture was taken from literature on mist-lining ([[Seymour and Van Och 2005]]).
+A selection of natural and synthetic adhesives was tested for these requirements: Beva 371 Film (thin), Lascaux 360 HV and 498 HV acrylic adhesives in different proportions, Plextol D 540[^7] and Dispersion K 360[^8] mixed in different proportions, and Plexigum PQ 611[^9] in Shellsol D 40 were tested as adhesives for patches and lining. The Beva 371 film was rejected due to its thickness and the resulting low flexibility. Producing a thinner film from Beva Gel was considered to pose a serious health risk due to the necessary solvent. The Lascaux acrylic adhesives and the Plextol mixtures gave the same results. As the Lascaux products are more expensive, we decided to use a mixture of Plextol D 540 and Dispersion K 360 in a 7:3 ratio. The mixture was taken from literature on mist-lining ({% cite 'Seymour and Van Och 2005' %}).
 
 Plexigum PQ 611 fulfilled to a large extent all requirements, but it is more difficult to process on large surfaces than Plextol D 540. It was therefore chosen for the patches, and Plextol D 540 in mixture with Dispersion K 360 for the lining. The different solubility of Plextol D 540 and Plexigum PQ 611 make it possible to remove the lining without removing the patches from the tears.
 
@@ -122,7 +122,7 @@ The Stabiltex was laid out on a siliconized paper and Plexigum PQ 611 40% in She
 
 ### Lining
 
-A thin, bleached canvas by Nordmeyer & Kortmann was used as lining canvas. The adhesives used were Plextol D 540 and Dispersion K 360 in a ratio of 7:3. The Plextol mixture was sprayed onto the lining canvas with a compressed air gun at 3 mbar and allowed to dry. The result was an adhesive fluff that allows superficial bonding to the original canvas without penetrating it. The adhesive has a very low peeling force, which allows easy removal of the lining canvas. This procedure corresponds to mist-lining ([[Seymour and Van Och 2005]]). Using calculations from preliminary testing, one liter of adhesive was needed to line the painting.
+A thin, bleached canvas by Nordmeyer & Kortmann was used as lining canvas. The adhesives used were Plextol D 540 and Dispersion K 360 in a ratio of 7:3. The Plextol mixture was sprayed onto the lining canvas with a compressed air gun at 3 mbar and allowed to dry. The result was an adhesive fluff that allows superficial bonding to the original canvas without penetrating it. The adhesive has a very low peeling force, which allows easy removal of the lining canvas. This procedure corresponds to mist-lining ({% cite 'Seymour and Van Och 2005' %}). Using calculations from preliminary testing, one liter of adhesive was needed to line the painting.
 
 The prepared lining canvas was pushed from the right side between the stretcher and the support and then ironed onto the back at a temperature of approximately 45°C. In the curved segment at the top, the lining canvas was fixed with staples onto a strip of acid-free cardboard that became an intermediate layer on the inside of the stretcher ([fig. 13.6](#fig-13-6)).
 
