--- a/content/2-present-practice/14.md
+++ b/content/2-present-practice/14.md
@@ -30,11 +30,11 @@ As early as the eighteenth century, inventories list paintings without a straine
 
 Canvas paintings with paper facings—partial or covering the entire surface—testify to the lack of time and space for proper conservation treatments. Bonifazio Veronese’s *Raising of Lazarus* (early sixteenth century; 148 x 205.5 cm, GG 6679) has a typical mid-twentieth century facing with newsprint paper. In the mid-1980s, Philippe de Champaigne’s *Lamentation of Cain* (1656; 312 x 394 cm, GG 371)[^3] was faced with sheets of Japanese paper. However, restoration was delayed much longer than planned, and the facings—applied with an aqueous medium—may have caused damage, such as blanching of the varnishes. Often loose paint chips adhere better to the paper facing than to the support, making the paper’s removal difficult. Our efforts to remove facings and properly consolidate flaking paint layers are ongoing.[^4] This experience over time has led to a much more critical view of facings.
 
-As mentioned, our collection is housed at different locations, but earlier decades saw attempts to centralize all holdings. The KHM’s new central storage facility, built in 2011, proved vital for storing large canvases ([[Götz and Oberthaler 2013]]). All paintings are now stored on racks and are accessible without direct handling. The racks in the storage room for large-scale canvas paintings measures 5 x 8 meters and can accommodate even the largest canvases, including those still rolled or stored between cardboard sheets ([fig. 14.1](#fig-14-1)).[^5] At present, the KHM storage holds 3,142 paintings and about 1,085 frames. Hopefully, soon all canvas paintings will be accessible and mounted on stretchers.
+As mentioned, our collection is housed at different locations, but earlier decades saw attempts to centralize all holdings. The KHM’s new central storage facility, built in 2011, proved vital for storing large canvases ({% cite 'Götz and Oberthaler 2013' %}). All paintings are now stored on racks and are accessible without direct handling. The racks in the storage room for large-scale canvas paintings measures 5 x 8 meters and can accommodate even the largest canvases, including those still rolled or stored between cardboard sheets ([fig. 14.1](#fig-14-1)).[^5] At present, the KHM storage holds 3,142 paintings and about 1,085 frames. Hopefully, soon all canvas paintings will be accessible and mounted on stretchers.
 
 {% figure 'fig-14-1' %}
 
-A significant number of lined canvas paintings suffer from infestation by *Stegobium paniceum* (biscuit beetle)*,* which primarily affects canvases lined around 1900, when a thick layer of glue paste with a high content of animal glue was used. To avoid new infestations, all objects or paintings are treated in the anoxic nitrogen chamber prior to storage. Both conservators and our building department focus on integrated pest management. We use traps to monitor insect activity, some with lights to attract insects. Since 2011, we have had one case of reinfestation in the central storage building, which we countered with tiny parasitoid wasps, *Lariophagus distinguendus,* which parasitize the beetle’s larvae, ending the infestation ([[Querner, Oberthaler, and Strolz 2019]]).
+A significant number of lined canvas paintings suffer from infestation by *Stegobium paniceum* (biscuit beetle)*,* which primarily affects canvases lined around 1900, when a thick layer of glue paste with a high content of animal glue was used. To avoid new infestations, all objects or paintings are treated in the anoxic nitrogen chamber prior to storage. Both conservators and our building department focus on integrated pest management. We use traps to monitor insect activity, some with lights to attract insects. Since 2011, we have had one case of reinfestation in the central storage building, which we countered with tiny parasitoid wasps, *Lariophagus distinguendus,* which parasitize the beetle’s larvae, ending the infestation ({% cite 'Querner, Oberthaler, and Strolz 2019' %}).
 
 ## Titian’s *Ecce Homo*: An Eighteenth-Century Lining—Partial Interventions Instead of Relining
 
@@ -108,7 +108,7 @@ Although lining was standard practice for centuries, quite a few canvas painting
 
 A new installation at the Kunstkammer gave it a new lease on life; it is paired with the bust that is depicted in the painting.[^23] Libalt’s still life must have been commissioned by Leopold Wilhelm himself. It is listed in his 1659 inventory, though it is dated a year later on the painting itself.
 
-Unlined seventeenth-century paintings are rare and the still life’s surface texture, with its illusionistic, almost 3D-rendering of the carpet, motivated us to find a way to stabilize the picture without lining it. Pressed for time, we collaborated with a specialized freelance team, who performed the treatment in time by organizing several round-the-clock shifts of tear-menders.[^24] (For details of the treatment, see [[Walde, Wernitznig, and Oberthaler 2014]].)
+Unlined seventeenth-century paintings are rare and the still life’s surface texture, with its illusionistic, almost 3D-rendering of the carpet, motivated us to find a way to stabilize the picture without lining it. Pressed for time, we collaborated with a specialized freelance team, who performed the treatment in time by organizing several round-the-clock shifts of tear-menders.[^24] (For details of the treatment, see {% cite 'Walde, Wernitznig, and Oberthaler 2014' %}.)
 
 To begin, we removed the painting from the strainer and examined the various interventions and format changes (see [fig. 14.6](#fig-14-6)). In addition to the painting’s reduced width mentioned above, its height had been extended by the addition of two strips of canvas.[^25]
 
