--- a/content/2-present-practice/8.md
+++ b/content/2-present-practice/8.md
@@ -76,7 +76,7 @@ The stretcher, the temporary strip lining, and facings were all removed, and the
 
 ### Preparation of the Lining Canvas
 
-The lining canvas was prepared in an upper studio, as the ceiling height in the lining studio was too low to accommodate the wooden loom. The canvas—a single piece of linen with double warp and weft yarns—was stretched onto an expandable loom and wetted and prestretched three times to reduce the canvas’s potential to shrink. The final wetting was done using a deacidifying solution of magnesium bicarbonate in distilled water with the intention of improving the longevity of the lining and its future removability ([[Ryder 1986]]).
+The lining canvas was prepared in an upper studio, as the ceiling height in the lining studio was too low to accommodate the wooden loom. The canvas—a single piece of linen with double warp and weft yarns—was stretched onto an expandable loom and wetted and prestretched three times to reduce the canvas’s potential to shrink. The final wetting was done using a deacidifying solution of magnesium bicarbonate in distilled water with the intention of improving the longevity of the lining and its future removability ({% cite 'Ryder 1986' %}).
 
 The lining canvas was sized with one part Lascaux 375 to three parts mineral spirit, applied by brush. This not only provides a uniform appearance at the back after lining but also aids future reversibility by ensuring that more of the adhesive remains stuck to the lining canvas, rather than to the back of the original. Knots in the canvas were more readily removed (with scalpels) after the sizing, and both sides of the canvas were lightly sanded to give a smooth surface before a further six coats of Lascaux 375, diluted 1:1 in mineral spirit, were brushed onto one side of the canvas, with 24 hours drying time allowed between each coat. This produced an even adhesive layer that completely covered the canvas texture. The Lascaux 375 adhesive was not applied to the back of the painting, as that would have produced an overly strong bond between the two canvases and would impair the future removal of the lining.
 
@@ -98,7 +98,7 @@ The air extraction system consisted of plastic plumbing pipes drilled with holes
 
 The top sheet of thinner Melinex, three sheets taped together, was placed over the picture and taped to the top of the loom. Previously, the wooden keys in the corners had been covered with foam, and the edges of the loom rounded, in order to avoid any sharp edges inside the envelope that might tear the thin Melinex when under vacuum.
 
-Apart from its size and the air extraction system, the construction of the envelope did not differ significantly from the one presented by Gerry Hedley, Stephen Hackney, and Alan Cummings at the Greenwich lining conference in 1974 ([[Hedley, Hackney, and Cummings 2003]]). As they discovered, the rigidity of the underlying thick Melinex is important in preventing areas of impasto and surface distortions in the painting from becoming “centered,” or partially pushed out to the back of the lining when under vacuum.
+Apart from its size and the air extraction system, the construction of the envelope did not differ significantly from the one presented by Gerry Hedley, Stephen Hackney, and Alan Cummings at the Greenwich lining conference in 1974 ({% cite 'Hedley, Hackney, and Cummings 2003' %}). As they discovered, the rigidity of the underlying thick Melinex is important in preventing areas of impasto and surface distortions in the painting from becoming “centered,” or partially pushed out to the back of the lining when under vacuum.
 
 The pumps were not fitted with pressure gauges, and three holes were drilled into the tubing at both ends to introduce air leakage and thereby a reduction in pressure. This number of holes was sufficient to allow the top layer of Melinex to be comfortably pushed away from the paint surface.
 
