--- a/content/2-present-practice/9.md
+++ b/content/2-present-practice/9.md
@@ -28,9 +28,9 @@ abstract: "Mist lining was developed by Jos van Och at the Stichting Restauratie
 
 Lining canvas paintings has ever been a contentious action. Many canvas paintings have been lined, and at times relined. Age and condition have often not been prerequisites for implementing linings, as for a time it was seen as a preventative measure. Linings were intended to carry the load that the original damaged support could no longer bear, as well as solving a multitude of other structural issues, including consolidation and improvement of cupping and planar distortions. This often “one-stop” process was deemed long lasting, beneficial, and cost efficient. The type of lining carried out tended to be dependent on the training of the conservator-restorer, studio practice, and geographical location. Time has shown that the life span of linings is determinable, and the lining cycle continues.
 
-The “moratorium” on lining called for after 1974 Greenwich conference on comparative lining techniques ([[Villers 2003b]]) never materialized, but the idea encouraged conservators to think of other options for structural repair. Full linings fell out of fashion, and strip-lining as well as thread-by-thread tear mending became standard practice. However, these options cannot be used for severely structurally compromised canvas paintings—thus, full lining continues to be necessary. The mist-lining process is still a relatively new technique and not yet part of many conservators’ toolkits. Familiarity with this process can expand the contemporary conservator’s repertoire and provide one of a few ethical solutions for structural support.
+The “moratorium” on lining called for after 1974 Greenwich conference on comparative lining techniques ({% cite 'Villers 2003b' %}) never materialized, but the idea encouraged conservators to think of other options for structural repair. Full linings fell out of fashion, and strip-lining as well as thread-by-thread tear mending became standard practice. However, these options cannot be used for severely structurally compromised canvas paintings—thus, full lining continues to be necessary. The mist-lining process is still a relatively new technique and not yet part of many conservators’ toolkits. Familiarity with this process can expand the contemporary conservator’s repertoire and provide one of a few ethical solutions for structural support.
 
-The mist-lining process was invented and developed by Jos van Och in the 1990s at the Stichting Restauratie Atelier Limburg (SRAL) ([[Fife, van Och, and Harrison 2017]]; [[Seymour and van Och 2005]];[[van Och and Hoppenbrouwers 2003]]). The term *mist lining* was coined by SRAL in the early 2000s and is now used to denote the technique, system, and process. The mist-lining system has roots in developments in structural treatments for lining canvases initially presented in the 1970s by Gustav Berger and Vishwa R. Mehra ([[Berger 1972a]]; [[Mehra 1975a]]; [[Mehra 1975b]]).
+The mist-lining process was invented and developed by Jos van Och in the 1990s at the Stichting Restauratie Atelier Limburg (SRAL) ({% cite 'Fife, van Och, and Harrison 2017' %}; {% cite 'Seymour and van Och 2005' %};{% cite 'van Och and Hoppenbrouwers 2003' %}). The term *mist lining* was coined by SRAL in the early 2000s and is now used to denote the technique, system, and process. The mist-lining system has roots in developments in structural treatments for lining canvases initially presented in the 1970s by Gustav Berger and Vishwa R. Mehra ({% cite 'Berger 1972a' %}; {% cite 'Mehra 1975a' %}; {% cite 'Mehra 1975b' %}).
 
 Mist lining is a noninvasive lining technique that involves spraying minimal amounts of an acrylic dispersion resin onto an auxiliary canvas before adhering that canvas to the reverse of the original support, often without tension. This open adhesive network is regenerated from the dry state, eliminating moisture. Solvent vapors (or gentle heat) are used to swell and tackify the adhesive.[^1] Bonding occurs under light pressure when the adhesive is activated. The system can be classified as a cold-lining method and forms a nap bond. The lining adhesive remains sandwiched between the two canvases with no impregnation of either textiles or decorative layers, which aids reversibility and negates any alteration of appearance.
 
@@ -42,13 +42,13 @@ The mist-lining process is not a stand-alone procedure and must be considered in
 
 Mist lining is typically carried out after any reduction of planar distortions, overall treatment of the support, consolidation of paint layers, individual mending and/or strengthening of tears and holes, and removal of undesired superficial layers. Deformations are first flattened by prestretching the support and applying gentle and gradual lateral tension, often combined with humidification. Conversely, the mist-lining system will conform to any preexisting out-of-plane deformations and thus can be used to support (modern) canvas paintings devised with a more three-dimensional nature.
 
-Consolidation of paint layers occurs as a separate step using an appropriate adhesive. Removal of varnish layers and overpaints is carried out prior to lining, though linings can be effectuated with any nonoriginal coatings left intact. Subsequent treatments often involve filling of paint losses, retouching, and revarnishing. After lining, it is imperative to consider fully the implications of the choice of solvent for varnish application, or the use of heat to impress texture in fills, as both solvent exposure and heat will affect the lining adhesive. Some examples of pretreatments implemented prior to mist lining are reported in the *Mist-Lining Handbook* ([[Seymour and Strombek 2022]]). Mist lining has been a successful choice for paintings that have a past structural treatment legacy, whether lined with glue-paste or wax-resin adhesives or both. Research has been carried out showing that the sprayed acrylic adhesive adheres well to canvases impregnated with wax resin ([[Contreras 2015]];[[Fischer 2002]]). This property enables the use of heat on these thermo-sensitive structures to be avoided.
+Consolidation of paint layers occurs as a separate step using an appropriate adhesive. Removal of varnish layers and overpaints is carried out prior to lining, though linings can be effectuated with any nonoriginal coatings left intact. Subsequent treatments often involve filling of paint losses, retouching, and revarnishing. After lining, it is imperative to consider fully the implications of the choice of solvent for varnish application, or the use of heat to impress texture in fills, as both solvent exposure and heat will affect the lining adhesive. Some examples of pretreatments implemented prior to mist lining are reported in the *Mist-Lining Handbook* ({% cite 'Seymour and Strombek 2022' %}). Mist lining has been a successful choice for paintings that have a past structural treatment legacy, whether lined with glue-paste or wax-resin adhesives or both. Research has been carried out showing that the sprayed acrylic adhesive adheres well to canvases impregnated with wax resin ({% cite 'Contreras 2015' %};{% cite 'Fischer 2002' %}). This property enables the use of heat on these thermo-sensitive structures to be avoided.
 
 The mist-lining process allows conservators to make the best choice for the needs of the individual canvas painting, rather than using a standardized technique to solve all issues. The choice to use the mist-lining system, thus, comes at the initial stage of the decision-making process—when considering the treatment plan—although the commitment to using the system can be altered, if necessary, as treatment progresses. The order of treatments, therefore, needs to be fully considered before the plan is confirmed. Our philosophy is to leave options open as much as possible. Each step of the treatment process is thought through, taking into account the consequences for subsequent procedures and future behavior of materials inherent in the system. For this reason, the pretreatments described have great importance.
 
 The decision to use this system comes with a caveat. Expectations for results need to be tempered to accept surfaces that are not as “flat as a board” or linings that are not as “rigid as a plank.” This system does not produce the same degree of surface finish and stiffness provided by traditional linings. The natural drape of the canvas and texture of paint layers will not be significantly altered during lining. Any out-of-plane texture or impasto (including cupping) that exists before lining will be maintained. Consolidation problems are not resolved. The key, as mentioned, is to treat these defects, as necessary, prior to lining and to accept a certain natural “aged” look. (This may mean taking a different approach to dealing with clients or owners of paintings.) Nor does the system provide a stiff lining support. Mist lining moves away from the idea that the lining should carry all the stress within the laminate structure. Instead, a mist lining provides “gentle” support to the original materials, helping to mitigate dimensional changes induced by climatic variations, but not preventing them.
 
-These aspects of the system remain open to debate. No complete scientific study comparing mist-lining results to those of other lining systems has been carried out. This “new” approach thus remains unprovable. However, numerous paintings, large and small in scale and presenting a wide variety of past treatments and conditions, have been lined with this system. These have performed well over the last thirty years, so perhaps the “proof is in the pudding.” Ongoing research aims to provide further insight and answers to these issues ([[Poulis, Seymour, and Yasmine 2020]]).
+These aspects of the system remain open to debate. No complete scientific study comparing mist-lining results to those of other lining systems has been carried out. This “new” approach thus remains unprovable. However, numerous paintings, large and small in scale and presenting a wide variety of past treatments and conditions, have been lined with this system. These have performed well over the last thirty years, so perhaps the “proof is in the pudding.” Ongoing research aims to provide further insight and answers to these issues ({% cite 'Poulis, Seymour, and Yasmine 2020' %}).
 
 ## The Mist-Lining Process
 
@@ -60,7 +60,7 @@ The technique requires little equipment and is easy to set up in the studio or o
 
 Factors influencing the choice of lining canvas are the ability to develop a nap, flexibility versus rigidity (drape), responsiveness to humidity fluctuations, type of weave, and thickness of the canvas. The response rate of warp and weft threads to external conditions should be similar. Open-weave fabrics are preferred, as less tension is required to decrimp the fabric and to remount the painting. More importantly, solvent vapors can diffuse more readily through open-weave textiles so less solvent volume is required during activation.
 
-A wide range of textiles have been used by the SRAL team over the years. Research into the mechanical properties of linen, polyester, and mixed-fiber textiles have been considered ([[Young and Jardine 2012]]). Choices are made on a case-by-case basis. The canvas requires a spun-yarn textile fabric, rather than a monofilament. Typically, open-weave lightweight natural linen fabrics or a fire-resistant lightweight spun-yarn polyester textile (Trevera CS) are used. Many other fabric types have also been experimented with and employed ([[Seymour and Strombek 2022]]).
+A wide range of textiles have been used by the SRAL team over the years. Research into the mechanical properties of linen, polyester, and mixed-fiber textiles have been considered ({% cite 'Young and Jardine 2012' %}). Choices are made on a case-by-case basis. The canvas requires a spun-yarn textile fabric, rather than a monofilament. Typically, open-weave lightweight natural linen fabrics or a fire-resistant lightweight spun-yarn polyester textile (Trevera CS) are used. Many other fabric types have also been experimented with and employed ({% cite 'Seymour and Strombek 2022' %}).
 
 The lining canvas may be tensioned prior to the application of the sprayed adhesive. Natural linen textiles are decrimped, only if the weave is dense, as the necessity is less for open-weave textiles. The desired tension of the lining textile is dependent on numerous factors. Firstly, the conservator should determine if the lining process will take place under tension or with either or both canvases in a free state. This decision may depend on logistics (size), the condition of the painting (first lining or relining), and future display (environmental factors). Tension is thus considered a variable in the process and cannot be quantified with a constant number; however, the tension applied when preparing the lining canvas should not be more than what will be required when remounting the painting. The aim is not to overstretch the adhesive when the lining is complete and to effect in an undisturbed point-to-point bond between the two canvases.
 
@@ -70,7 +70,7 @@ Interleaf textiles can be inserted as required to provide enhanced local (to sup
 
 ### The Adhesive
 
-Currently, two methacrylic ester-acrylic ester copolymer dispersions are mixed to obtain desired performance stiffness and solubility characteristics. Plextol D 540 and Dispersion K 360 (adjusted to pH 7) are used in a 30:70 ratio, but other formulations are being further investigated due to the discontinuation of Plextol D 540. The manufacturer of Plextol (Synthomer) has recommended as a substitute Plextol D 512.[^4] This and other alternatives (Plextol D 498 and Plextol B 500) are being tested to compare results at Delft University of Technology (TU Delft) ([[Poulis, Seymour, and Mosleh 2020]]).[^5]
+Currently, two methacrylic ester-acrylic ester copolymer dispersions are mixed to obtain desired performance stiffness and solubility characteristics. Plextol D 540 and Dispersion K 360 (adjusted to pH 7) are used in a 30:70 ratio, but other formulations are being further investigated due to the discontinuation of Plextol D 540. The manufacturer of Plextol (Synthomer) has recommended as a substitute Plextol D 512.[^4] This and other alternatives (Plextol D 498 and Plextol B 500) are being tested to compare results at Delft University of Technology (TU Delft) ({% cite 'Poulis, Seymour, and Mosleh 2020' %}).[^5]
 
 A high-volume, low-pressure (HVLP) compressed-air spray gun is used to spray the adhesive onto the canvas in a fine mist. The spray mist only encapsulates the raised nap and does not impregnate the lining fabric or create a continuous coating. As only the nap is coated, the mechanical-physical properties of the canvas are unchanged; it remains flexible and able to conform to the drape and morphology dictated by the original canvas.
 
@@ -96,7 +96,7 @@ Air is extracted from the center of the envelope by including a piece of cloth s
 
 When the centrifugal fan is turned on, air is extracted from between the two plastic membranes evenly. Sharp edges (e.g., working loom members) should be padded with cloth coverings. These also aid in the extraction of air from the center of the envelope to the ring system. Thin nonwoven fabrics can also be placed over the paint surface if desired; however, these stop the upper plastic membrane from following the morphology of the surface and may diminish the bond achieved. The exact conformation to the surfaces (upper paint and lower textile) by the plastic sheets permits a point-to-point bonding at a low, even pressure.
 
-Although the low-pressure envelope is used in the lining process it can also be used for a variety of other conservation treatments. Further information on the materials used is provided in the *Mist-Lining Handbook* ([[Seymour and Strombek 2022]]). We advise some experimentation prior to determining the setup for the low-pressure envelope.
+Although the low-pressure envelope is used in the lining process it can also be used for a variety of other conservation treatments. Further information on the materials used is provided in the *Mist-Lining Handbook* ({% cite 'Seymour and Strombek 2022' %}). We advise some experimentation prior to determining the setup for the low-pressure envelope.
 
 ### Bond Formation
 
@@ -128,9 +128,9 @@ We recommend that conservators experiment and become comfortable with the system
 
 ## Mist-Lining Dissemination
 
-The SRAL team has imparted our knowledge and experiences of the Mist-Lining system to the wider conservation field over the years (see Appendix for a chronology of workshops and conferences disseminating the mist-lining system). Students studying conservation in The Netherlands have been instructed in the system since the early 1990s. International interns, fellows, and junior conservators working at SRAL over the past thirty years have all used the system. Papers have been written describing it, and presentations have been given at conferences (see [Barbosa et al.](/8-posters/53/) and [Brandt and Volbracht](/2-present-practice/13/) in this publication); [[Costantini 2013]]; [[Iaccarino Idelson and Garofalo 2019]]; [[Ruuben and Robbins 2011]]). Dissemination has had successes and failures and has led to further modifications in the system. The expertise of the system still remains largely in-house at SRAL, however, and the use of this relatively new system is not widespread. Because the system is adaptive and tailored to the needs of the painting, it is full of variables that may be difficult to grasp if not encountered in practice. Thus, confidence in considering this non-invasive and gentle approach to the structural repair of canvases may be lacking in many conservators less familiar with the system.
+The SRAL team has imparted our knowledge and experiences of the Mist-Lining system to the wider conservation field over the years (see Appendix for a chronology of workshops and conferences disseminating the mist-lining system). Students studying conservation in The Netherlands have been instructed in the system since the early 1990s. International interns, fellows, and junior conservators working at SRAL over the past thirty years have all used the system. Papers have been written describing it, and presentations have been given at conferences (see [Barbosa et al.](/8-posters/53/) and [Brandt and Volbracht](/2-present-practice/13/) in this publication); {% cite 'Costantini 2013' %}; {% cite 'Iaccarino Idelson and Garofalo 2019' %}; {% cite 'Ruuben and Robbins 2011' %}). Dissemination has had successes and failures and has led to further modifications in the system. The expertise of the system still remains largely in-house at SRAL, however, and the use of this relatively new system is not widespread. Because the system is adaptive and tailored to the needs of the painting, it is full of variables that may be difficult to grasp if not encountered in practice. Thus, confidence in considering this non-invasive and gentle approach to the structural repair of canvases may be lacking in many conservators less familiar with the system.
 
-In 2019, with the generous support of the Getty Foundation’s Conserving Canvas Initiative, SRAL organized the Mist-Lining Workshop to further disseminate this technique and share our experiences. The aim was to provide midcareer conservators from different world regions with hands-on experience of this alternative option for the structural repair of canvas paintings. At the same time, this global group also brought new thoughts and inspired further adaptations and developments of the mist-lining system ([[Nadeau et al. 2020]]). The workshop was documented in film and print. The video, produced by Bigeye Productions, can be viewed on YouTube for further insight.[^7] The resulting *Mist-Lining Handbook* ([[Seymour and Strombek, 2022]]) provides a valuable resource to the field. It is full of information on case studies, material information, and sources. Once practiced, the mist-lining system’s variables become something that the conservator can use to tailor treatment to the particular needs of each case. The materials and equipment needed are low cost and relatively easy to source locally. We hope that these new resources will give this viable system new traction as a treatment option.
+In 2019, with the generous support of the Getty Foundation’s Conserving Canvas Initiative, SRAL organized the Mist-Lining Workshop to further disseminate this technique and share our experiences. The aim was to provide midcareer conservators from different world regions with hands-on experience of this alternative option for the structural repair of canvas paintings. At the same time, this global group also brought new thoughts and inspired further adaptations and developments of the mist-lining system ({% cite 'Nadeau et al. 2020' %}). The workshop was documented in film and print. The video, produced by Bigeye Productions, can be viewed on YouTube for further insight.[^7] The resulting *Mist-Lining Handbook* ({% cite 'Seymour and Strombek, 2022' %}) provides a valuable resource to the field. It is full of information on case studies, material information, and sources. Once practiced, the mist-lining system’s variables become something that the conservator can use to tailor treatment to the particular needs of each case. The materials and equipment needed are low cost and relatively easy to source locally. We hope that these new resources will give this viable system new traction as a treatment option.
 
 ## Conclusion
 
@@ -174,7 +174,7 @@ The idea that the original canvas will never be the same again after a lining is
 
 [^2]: European Confederation of Conservator-Restorers’ Organisations (E.C.C.O.), “Professional Guidelines I: The Profession” (2002): https://www.ecco-eu.org/wp-content/uploads/2021/03/ECCO_professional_guidelines_I.pdf; “Professional Guidelines II: Code of Ethics” (2003): https://www.ecco-eu.org/wp-content/uploads/2021/03/ECCO_professional_guidelines_II.pdf.
 
-[^3]: *Panorama Mesdag* project (1986–1996). The *Panorama* was painted by Hendrik Willem Mesdag and workshop in 1881; it is 14.70 m high x 114.70 m in circumference ([[van der Donk, de Herder, and van Lier 1996]]). See also Panorama Mesdag Geschiedenis en restauratie van een schilderij zonder grenzen: https://www.npo.nl/close-up/11-07-2015/AT_2037854. While not technically a mist lining, the Beva 371 lining adhesive was flocked and the heat-activated bond was set using a low-pressure envelope developed by Jos van Och. This remains the largest known painting lined (vertically) in situ.
+[^3]: *Panorama Mesdag* project (1986–1996). The *Panorama* was painted by Hendrik Willem Mesdag and workshop in 1881; it is 14.70 m high x 114.70 m in circumference ({% cite 'van der Donk, de Herder, and van Lier 1996' %}). See also Panorama Mesdag Geschiedenis en restauratie van een schilderij zonder grenzen: https://www.npo.nl/close-up/11-07-2015/AT_2037854. While not technically a mist lining, the Beva 371 lining adhesive was flocked and the heat-activated bond was set using a low-pressure envelope developed by Jos van Och. This remains the largest known painting lined (vertically) in situ.
 
 [^4]: Email correspondence between Kate Seymour and Thomas Bernhofer, technical service manager, Coatings, SBU Functional Solutions, Synthomer, March 28, 2018. See also http://www.synthomer.com.
 
