--- a/content/3-open-questions/16.md
+++ b/content/3-open-questions/16.md
@@ -32,17 +32,17 @@ abstract: "This study presents a novel technique to determine the tensile streng
 
 In order to make educated decisions about the ability to transport paintings and the potential need for an appropriate conservation treatment, it is crucial to know the mechanical strength of a canvas. However, methods to measure this and related parameters are scarce. Even today, the assessment of original canvas is often based only on its optical appearance, such as browning and yellowing, and pH value. However, these parameters are not directly related to age and mechanical properties.
 
-Flax is frequently used for the canvases of historical paintings. It is a natural fiber and consists mainly of cellulose. The most dominant degradation process of such canvases is the depolymerization of cellulose by hydrolysis, which in turn influences their mechanical strength ([[Timar-Balazsy and Eastop 1998]]). In 1939, Staudinger and Reinecke investigated a potential correlation between aging, cellulose depolymerization, and the mechanical strength of historical canvas ([[Staudinger and Reinecke 1939]]). However, this correlation has so far not been experimentally proven. For paper, in contrast, a link between the mechanical properties and the degree of cellulose depolymerization has been found ([[Zou et al. 1994]]).
+Flax is frequently used for the canvases of historical paintings. It is a natural fiber and consists mainly of cellulose. The most dominant degradation process of such canvases is the depolymerization of cellulose by hydrolysis, which in turn influences their mechanical strength ({% cite 'Timar-Balazsy and Eastop 1998' %}). In 1939, Staudinger and Reinecke investigated a potential correlation between aging, cellulose depolymerization, and the mechanical strength of historical canvas ({% cite 'Staudinger and Reinecke 1939' %}). However, this correlation has so far not been experimentally proven. For paper, in contrast, a link between the mechanical properties and the degree of cellulose depolymerization has been found ({% cite 'Zou et al. 1994' %}).
 
-In textile engineering. the tensile strength of fabrics is determined by using standard protocols that require a minimum length of 200 mm; for the testing of yarns, a minimum length of 250 mm is needed. Those requirements limit their application to conservation research. If large amounts of sample material are available, such as for artificially aged canvas, it is possible to determine the strength of the material using methods such as the standard tensile test method on fabric or yarn, which gives a maximum tensile strength value ([[Reumann 2000]]), but to date no direct correlation between the age-related chemical alterations of the cellulose molecular constitution and the physical consequences for the fabric has been established ([[Young 2005]]). The reason for this is the lack of methods to investigate original canvases. Thus, the determination of the degree of cellulose depolymerization by viscometry was until now the only method available to investigate the constitution of original canvas ([[Stoll and Fengel 1981]]). However, the measured degree of polymerization is difficult to assess with respect to the aging process and the mechanical properties. Therefore, a technique for measuring the mechanical properties on smaller components of a canvas such as yarns or fibers is needed.
+In textile engineering. the tensile strength of fabrics is determined by using standard protocols that require a minimum length of 200 mm; for the testing of yarns, a minimum length of 250 mm is needed. Those requirements limit their application to conservation research. If large amounts of sample material are available, such as for artificially aged canvas, it is possible to determine the strength of the material using methods such as the standard tensile test method on fabric or yarn, which gives a maximum tensile strength value ({% cite 'Reumann 2000' %}), but to date no direct correlation between the age-related chemical alterations of the cellulose molecular constitution and the physical consequences for the fabric has been established ({% cite 'Young 2005' %}). The reason for this is the lack of methods to investigate original canvases. Thus, the determination of the degree of cellulose depolymerization by viscometry was until now the only method available to investigate the constitution of original canvas ({% cite 'Stoll and Fengel 1981' %}). However, the measured degree of polymerization is difficult to assess with respect to the aging process and the mechanical properties. Therefore, a technique for measuring the mechanical properties on smaller components of a canvas such as yarns or fibers is needed.
 
-Yarns are structures comprised of fibers, and a yarn’s geometry is determined by the fibers’ diameter, gradient angle, density, and the homogeneity of the material ([[Peirce 1937]]). It is likely that the strong influence the fabric geometry has on the measurements may prevent a direct correlation of the age with tensile strength as determined by the above-mentioned standard methodology. It seems conceivable that the thinnest site of the sample ruptures first, or that thinner single fibers are displaced from longer single fibers during the measurement. Thus, we conclude that to determine a correlation between the degree of polymerization of cellulose and the mechanical properties a novel technique for measuring the tensile strength is needed—one that greatly excludes the influence of the textile geometry on the measurement.
+Yarns are structures comprised of fibers, and a yarn’s geometry is determined by the fibers’ diameter, gradient angle, density, and the homogeneity of the material ({% cite 'Peirce 1937' %}). It is likely that the strong influence the fabric geometry has on the measurements may prevent a direct correlation of the age with tensile strength as determined by the above-mentioned standard methodology. It seems conceivable that the thinnest site of the sample ruptures first, or that thinner single fibers are displaced from longer single fibers during the measurement. Thus, we conclude that to determine a correlation between the degree of polymerization of cellulose and the mechanical properties a novel technique for measuring the tensile strength is needed—one that greatly excludes the influence of the textile geometry on the measurement.
 
-To date, three standard methods are used to determine the strength of cellulosic fiber material: (1) the band-pulling method on plain textile structures ([[DIN 1999]]); (2) the determination of the maximal tensile strength on single fibers ([[DIN 2009]]); and (3) the determination of the maximal tensile strength on staple fibers ([[DIN 1996]]). However, as already mentioned, none of these standard techniques fulfills the requirements applicable to original canvas samples. The comparison of the degree of cellulose polymerization with the maximum tensile strength of artificially aged linen (flax fabric), measured with the band-pulling method on plain-weave fabrics, did not yield a correlation ([[Von Reden 2018]]). In this study, we propose that the influence of the fabric geometry during these measurements prevents the resulting values from faithfully resembling the molecular condition of the cellulose, and that the same applies to the determination of the maximum tensile strength on single yarn.
+To date, three standard methods are used to determine the strength of cellulosic fiber material: (1) the band-pulling method on plain textile structures ({% cite 'DIN 1999' %}); (2) the determination of the maximal tensile strength on single fibers ({% cite 'DIN 2009' %}); and (3) the determination of the maximal tensile strength on staple fibers ({% cite 'DIN 1996' %}). However, as already mentioned, none of these standard techniques fulfills the requirements applicable to original canvas samples. The comparison of the degree of cellulose polymerization with the maximum tensile strength of artificially aged linen (flax fabric), measured with the band-pulling method on plain-weave fabrics, did not yield a correlation ({% cite 'Von Reden 2018' %}). In this study, we propose that the influence of the fabric geometry during these measurements prevents the resulting values from faithfully resembling the molecular condition of the cellulose, and that the same applies to the determination of the maximum tensile strength on single yarn.
 
-In the research field of paper analysis, an alternative method for the analysis of single fiber strength is frequently applied to this problem: the determination of the zero-span tensile strength ([[TAPPI 2007]]). The special feature of this method is the fact that the clamping distance is reduced to almost zero, and hence the strength of the fibers is measured at a defined position. In this way, measurement errors arising from the heterogeneity of the material along the overall length of the sample are minimized. In the international literature, the resulting value is named zero-span tensile strength ([[Henniges and Potthast 2015]]; [[Henniges and Potthast 2000]]). Applying the zero-span tensile strength test method to yarn would represent an important technical advancement.
+In the research field of paper analysis, an alternative method for the analysis of single fiber strength is frequently applied to this problem: the determination of the zero-span tensile strength ({% cite 'TAPPI 2007' %}). The special feature of this method is the fact that the clamping distance is reduced to almost zero, and hence the strength of the fibers is measured at a defined position. In this way, measurement errors arising from the heterogeneity of the material along the overall length of the sample are minimized. In the international literature, the resulting value is named zero-span tensile strength ({% cite 'Henniges and Potthast 2015' %}; {% cite 'Henniges and Potthast 2000' %}). Applying the zero-span tensile strength test method to yarn would represent an important technical advancement.
 
-Previous studies have reported on this topic, but to date no standardized protocol or validation of the method exists ([[Hackney and Hedley 1984]]; [[Leene et al. 1975]]). Transferring this technique to the conservation of paintings, however, would be highly desirable. The goal of our work was to investigate the applicability of the zero-span tensile strength method to single yarns and to develop a standard protocol. The second aim was to use this technique to study samples derived from original canvas to assess its implementation in conservation research. The overarching question was whether a correlation between the intrinsic viscosity and the maximum tensile strength exists. This study was conducted at the Dresden University of Fine Arts, Germany.
+Previous studies have reported on this topic, but to date no standardized protocol or validation of the method exists ({% cite 'Hackney and Hedley 1984' %}; {% cite 'Leene et al. 1975' %}). Transferring this technique to the conservation of paintings, however, would be highly desirable. The goal of our work was to investigate the applicability of the zero-span tensile strength method to single yarns and to develop a standard protocol. The second aim was to use this technique to study samples derived from original canvas to assess its implementation in conservation research. The overarching question was whether a correlation between the intrinsic viscosity and the maximum tensile strength exists. This study was conducted at the Dresden University of Fine Arts, Germany.
 
 ## Methods
 
@@ -50,7 +50,7 @@ Previous studies have reported on this topic, but to date no standardized protoc
 
 The general workflow of this study is as follows: yarn samples were taken from both new and artificially aged fabrics as well as from original canvas paintings. The maximum tensile strength at zero length of single yarn samples was determined using the newly developed method described in more detail below. Then identical sample material was disassembled into single fibers and the intrinsic viscosity (limiting viscosity number) determined.
 
-The existing protocol for the zero-span tensile strength determination of paper was modified for its application to yarn samples, and a standard protocol was developed. The general rules for measuring maximum tensile strength also apply to the zero-span tensile strength. The critical difference between the protocols is the clamping distance. In reality, the clamping distance for determining the zero-span tensile strength is set to 0.1 mm in order to avoid compression of the sample. Here, we used a modified version of a testing machine that was originally developed for the analysis of historical paper ([[Lichtblau 2007]]). We used a zwickiLine Z0.5 TS material testing machine equipped with an Xforce precision force sensor (nominal force=500 N), pneumatic sample holders, and an adjustment system for a highly precise arrangement and guidance of the specimens. [Fig. 16.1](#fig-16-1) shows the front view of the four special clamps for the zero-span tensile strength, which are arranged in pairs at a vertical distance of 0.1 mm.
+The existing protocol for the zero-span tensile strength determination of paper was modified for its application to yarn samples, and a standard protocol was developed. The general rules for measuring maximum tensile strength also apply to the zero-span tensile strength. The critical difference between the protocols is the clamping distance. In reality, the clamping distance for determining the zero-span tensile strength is set to 0.1 mm in order to avoid compression of the sample. Here, we used a modified version of a testing machine that was originally developed for the analysis of historical paper ({% cite 'Lichtblau 2007' %}). We used a zwickiLine Z0.5 TS material testing machine equipped with an Xforce precision force sensor (nominal force=500 N), pneumatic sample holders, and an adjustment system for a highly precise arrangement and guidance of the specimens. [Fig. 16.1](#fig-16-1) shows the front view of the four special clamps for the zero-span tensile strength, which are arranged in pairs at a vertical distance of 0.1 mm.
 
 {% figure 'fig-16-1' %}
 
@@ -86,17 +86,17 @@ For conducting a measurement for one canvas, the following steps were performed:
 
 {% figure 'fig-16-2' %}
 
-2.  To obtain a statistically significant result for the tensile strength for one canvas, it was necessary to measure twelve yarn sections with 5 mm length each. From the maximum tensile load measured in newtons, the diameter-normalized maximal tensile strength (*f~H~*) was calculated following *f*~H~ = F/Tt with Tt = fineness (in units of tex) in order to compare yarns of different fineness ([[Reumann 2000]]).
+2.  To obtain a statistically significant result for the tensile strength for one canvas, it was necessary to measure twelve yarn sections with 5 mm length each. From the maximum tensile load measured in newtons, the diameter-normalized maximal tensile strength (*f~H~*) was calculated following *f*~H~ = F/Tt with Tt = fineness (in units of tex) in order to compare yarns of different fineness ({% cite 'Reumann 2000' %}).
 
-3.  To determine the fineness, the mass was divided by the length of the yarn ([[Hartwig and Reumann 2000]]).
+3.  To determine the fineness, the mass was divided by the length of the yarn ({% cite 'Hartwig and Reumann 2000' %}).
 
 4.  For the final data analysis, the highest and the lowest values were excluded, and the average and the corresponding standard deviation were calculated from the remaining 10 values.
 
 ### Determination of the Limiting Viscosity Number (Staudinger Index) Using Capillary Viscometry
 
-The average degree of polymerization has been established in the field of conservation research to describe the degree of decomposition and the molecular condition of cellulose ([[Stoll and Fengel 1981]]). The degree of polymerization is calculated based on the experimentally determined limiting viscosity number. However, for this calculation different methods have been described, leading to different results ([[Stoll and Fengel 1981]]). Thus, in order to directly compare results from different studies, the standard DIN 54 270 part 1 suggests omitting the calculation of the degree of polymerization and instead using the limiting viscosity number as the reference value ([[DIN 1976]]). Just like the degree of polymerization, the limiting viscosity number increases as the chain length of the cellulose molecules increases.
+The average degree of polymerization has been established in the field of conservation research to describe the degree of decomposition and the molecular condition of cellulose ({% cite 'Stoll and Fengel 1981' %}). The degree of polymerization is calculated based on the experimentally determined limiting viscosity number. However, for this calculation different methods have been described, leading to different results ({% cite 'Stoll and Fengel 1981' %}). Thus, in order to directly compare results from different studies, the standard DIN 54 270 part 1 suggests omitting the calculation of the degree of polymerization and instead using the limiting viscosity number as the reference value ({% cite 'DIN 1976' %}). Just like the degree of polymerization, the limiting viscosity number increases as the chain length of the cellulose molecules increases.
 
-The intrinsic viscosity of all yarn samples was determined using capillary viscometry. This method allows investigation of original sample material as well, since the necessary sample amount is less than 15 mg. All experiments were performed according to the standard DIN 54 270 part 3 ([[DIN 1977]]), with minor modifications ([[Bräunig et al. 2016]]). The basic principle is as follows: The yarn sample is disassembled into single fibers, then dissolved in alkaline iron tartrate system (in German EWNN~mod(NaCl)~), and the viscosity of the resulting solution is determined using a Micro-Ubbelohde viscometer. The time required for a defined volume of a test liquid to pass a defined distance in a capillary of a known diameter is used to calculate the kinematic viscosity of that liquid. The dissolved cellulose sample is inserted into the viscometer, aspirated, and then the flow time back through the device caused by gravity is measured (twice per sample) with two independent fillings. The result given here is the mean value of the two measurements.
+The intrinsic viscosity of all yarn samples was determined using capillary viscometry. This method allows investigation of original sample material as well, since the necessary sample amount is less than 15 mg. All experiments were performed according to the standard DIN 54 270 part 3 ({% cite 'DIN 1977' %}), with minor modifications ({% cite 'Bräunig et al. 2016' %}). The basic principle is as follows: The yarn sample is disassembled into single fibers, then dissolved in alkaline iron tartrate system (in German EWNN~mod(NaCl)~), and the viscosity of the resulting solution is determined using a Micro-Ubbelohde viscometer. The time required for a defined volume of a test liquid to pass a defined distance in a capillary of a known diameter is used to calculate the kinematic viscosity of that liquid. The dissolved cellulose sample is inserted into the viscometer, aspirated, and then the flow time back through the device caused by gravity is measured (twice per sample) with two independent fillings. The result given here is the mean value of the two measurements.
 
 ### Sample Material and Preparation
 
@@ -132,7 +132,7 @@ A direct correlation of the intrinsic viscosity with the tensile strength of his
 
 Following up on our studies, the measurement of lower strength values would be of value. Therefore, the use of significantly finer microstrength sensors is recommended. By increasing the number of investigated paintings, we may be able to obtain a broader set of comparative data.
 
-In comparison to the current standard techniques of tensile strength determination, the required sample material could be significantly reduced to 60 mm of fiber per canvas in total. Nevertheless, ethically, such an intervention represents a significant decision for an original painting. Thus, in its current state, this method is best suited for scientific research. For its application as a standard method for original paintings, further optimization and reduction of sample requirements are needed. Furthermore, it must be taken into account that, depending on the painting, the samples are usually taken from the tacking margin and not from the center of the canvas. Due to differences in degradation mechanisms in tensioned and nontensioned canvases, different results can be expected in the two areas ([[von Reden 2018]]).
+In comparison to the current standard techniques of tensile strength determination, the required sample material could be significantly reduced to 60 mm of fiber per canvas in total. Nevertheless, ethically, such an intervention represents a significant decision for an original painting. Thus, in its current state, this method is best suited for scientific research. For its application as a standard method for original paintings, further optimization and reduction of sample requirements are needed. Furthermore, it must be taken into account that, depending on the painting, the samples are usually taken from the tacking margin and not from the center of the canvas. Due to differences in degradation mechanisms in tensioned and nontensioned canvases, different results can be expected in the two areas ({% cite 'von Reden 2018' %}).
 
 The measurement of zero-span tensile strength serves the overarching goal of being able to reproducibly extrapolate from the strength of the measured position to the strength of the whole original canvas. For this, the influence of yarn and fabric geometry on canvas strength must be investigated. By knowing these relationships, an assessment of the strength of the canvas should be possible, which can then serve as a basis for decisions on stabilization treatments, such as tear mending, strip-lining, or lining, which are of utmost relevance to the conservator.
 
