--- a/content/3-open-questions/17.md
+++ b/content/3-open-questions/17.md
@@ -106,7 +106,7 @@ Each case study painting, SAAM reconstructed recipe, and raw material sample was
 
 GC/MSD provided supplemental information about the material composition of each adhesive mixture. Odd-numbered chain length hydrocarbons and certain fatty acids (including palmitic, stearic, and lignoceric acids) identified beeswax in the sample. Odd- and even-numbered hydrocarbons with a reduced fatty acid content indicated the presence of microcrystalline wax in the unadulterated samples such as *The Windmill* and SAAM 6. However, the presence of microcrystalline wax was more difficult to detect in samples containing a mixture of ingredients. Multiwax W-445 was present in all 12 samples; however, it was detected in only three case study paintings (*The Lesson*, *Plenty*, and *The Windmill*) and four recreated recipes (SAAM 2, and 4–6). In this data subset, beeswax was absent from six of the seven samples.
 
-Some natural resins were successfully identified with GC/MSD: 5-dammarenolic acid methyl ester signaled the presence of dammar, dehydroabietic acid and 7-oxo-dehydroabietic acid[^1] signaled colophony, and α- or β-amyrin signaled gum elemi. The two proprietary resins Zonarez B-85 and Piccolyte S-85 were not conclusively detected with GC/MSD ([fig. 17.2](#fig-17-2), [table 17.2](#table-17-2)). This could be the result of shortcomings in the sample derivatization process or sensitivity of the GC/MSD instrument. Other research publications have also cited discrepancies in identifying resins due to oxidation, depolymerization, or cross-linking of the material as it ages ([[Bleton and Tchapla 2009]]; [[Lluveras et. al 2010]]; [[Martín-Ramos et al. 2018]]; [[Modugno and Ribechini 2009]]).
+Some natural resins were successfully identified with GC/MSD: 5-dammarenolic acid methyl ester signaled the presence of dammar, dehydroabietic acid and 7-oxo-dehydroabietic acid[^1] signaled colophony, and α- or β-amyrin signaled gum elemi. The two proprietary resins Zonarez B-85 and Piccolyte S-85 were not conclusively detected with GC/MSD ([fig. 17.2](#fig-17-2), [table 17.2](#table-17-2)). This could be the result of shortcomings in the sample derivatization process or sensitivity of the GC/MSD instrument. Other research publications have also cited discrepancies in identifying resins due to oxidation, depolymerization, or cross-linking of the material as it ages ({% cite 'Bleton and Tchapla 2009' %}; {% cite 'Lluveras et. al 2010' %}; {% cite 'Martín-Ramos et al. 2018' %}; {% cite 'Modugno and Ribechini 2009' %}).
 
 {% figure 'fig-17-2' %}
 
