--- a/content/3-open-questions/18.md
+++ b/content/3-open-questions/18.md
@@ -42,9 +42,9 @@ It is evident that lining has allowed many paintings on canvas to survive into t
 
 {% figure 'fig-18-1' %}
 
-In Spain, it was not only the passing of time and the lack of care that caused the poor condition of the works, but also the historical vicissitudes of the country, some of which, we now know, led to the need for numerous treatments to the paintings’ supports. For example, on Christmas Eve in 1734, a fire broke out in the Real Alcázar de Madrid, which housed the royal collections, many of which are now in the Museo del Prado. Many paintings burned, and others were in such a bad state that they had to be cut into pieces—and as a result many canvases were lined. Juan García de Miranda and Andrés de la Calleja were the first court painters put in charge of restorations. Their inventories recount the works saved, for example, Titian’s *Charles V at the Battle of Mühlberg*, which they identified as being in very bad condition ([[Barreno Sevillano 1980]]).
+In Spain, it was not only the passing of time and the lack of care that caused the poor condition of the works, but also the historical vicissitudes of the country, some of which, we now know, led to the need for numerous treatments to the paintings’ supports. For example, on Christmas Eve in 1734, a fire broke out in the Real Alcázar de Madrid, which housed the royal collections, many of which are now in the Museo del Prado. Many paintings burned, and others were in such a bad state that they had to be cut into pieces—and as a result many canvases were lined. Juan García de Miranda and Andrés de la Calleja were the first court painters put in charge of restorations. Their inventories recount the works saved, for example, Titian’s *Charles V at the Battle of Mühlberg*, which they identified as being in very bad condition ({% cite 'Barreno Sevillano 1980' %}).
 
-Between 1808 and 1814, during the Napoleonic Wars, many works were taken to Paris from different parts of Spain (Cádiz, Sevilla, Madrid) and arrived in terrible condition. Before being returned to Spain, some canvases were treated with linings in France, such as *Juan the Patrician’s Dream* by Murillo. Similarly, some paintings on panels were transferred to canvas, including among others, Raphael’s *Christ Falls on the Way to Calvary*, also known as *El Pasmo de Sicilia* ([[González Mozo and Alonso 2011]]).
+Between 1808 and 1814, during the Napoleonic Wars, many works were taken to Paris from different parts of Spain (Cádiz, Sevilla, Madrid) and arrived in terrible condition. Before being returned to Spain, some canvases were treated with linings in France, such as *Juan the Patrician’s Dream* by Murillo. Similarly, some paintings on panels were transferred to canvas, including among others, Raphael’s *Christ Falls on the Way to Calvary*, also known as *El Pasmo de Sicilia* ({% cite 'González Mozo and Alonso 2011' %}).
 
 During the Spanish Civil War (1936–39), the great works of art at the Museo del Prado and other areas on the front line were evacuated to avoid damage during the fighting. Despite the care with which they were packed and transported, incidents occurred that caused some canvases to tear, and they were later lined; these include Goya’s *The 2nd of May 1808 in Madrid,* also known as *La carga de los mamelucos.*
 
@@ -68,13 +68,13 @@ It was not easy to find all the recipes used. In some cases, old documentary inf
 
 ### The Origin of the Use of *Gacha*, or Glue Paste
 
-Knowing the materials used to prepare a canvas is essential to understanding the behavior of the lining treatment. With reference to the recipe, materials, and ingredients used in canvases in Spain, interesting research has been done (e.g., [[Gayo and Jover de Celis 2010]]), but we still have a lot to learn. For example, the presence of ashes in the preparatory layers has only recently been confirmed in paintings ([[Jover de Celis and Gayo 2014]]; [[Carò, Centeno, and Mahon 2018]]), although it appeared in recipes and treatises.
+Knowing the materials used to prepare a canvas is essential to understanding the behavior of the lining treatment. With reference to the recipe, materials, and ingredients used in canvases in Spain, interesting research has been done (e.g., {% cite 'Gayo and Jover de Celis 2010' %}), but we still have a lot to learn. For example, the presence of ashes in the preparatory layers has only recently been confirmed in paintings ({% cite 'Jover de Celis and Gayo 2014' %}; {% cite 'Carò, Centeno, and Mahon 2018' %}), although it appeared in recipes and treatises.
 
-Through the documents we know that from the moment people started painting on canvas, a flour paste was used to prepare the canvas. Giorgio Vasari has written about flour with walnut oil, glue, and white lead for preparing the canvas ({% cite 'Vasari (1568) 1998' '119' %}). An anonymous Spanish manuscript from the end of the sixteenth century also mentions preparing the canvas with glue, flour, and gypsum and states that “if it were all flour, it would be better” ([[Bruquetas Galán 1998]]).
+Through the documents we know that from the moment people started painting on canvas, a flour paste was used to prepare the canvas. Giorgio Vasari has written about flour with walnut oil, glue, and white lead for preparing the canvas ({% cite 'Vasari (1568) 1998' '119' %}). An anonymous Spanish manuscript from the end of the sixteenth century also mentions preparing the canvas with glue, flour, and gypsum and states that “if it were all flour, it would be better” ({% cite 'Bruquetas Galán 1998' %}).
 
-We find the same in Francisco Pacheco’s treatise from the mid-seventeenth century: “Some work with flour or mill-dust paste, cooking oil and a little honey (which you can eat even if you are not hungry); they apply a coating of this to a well-stretched canvas to cover over the pores … But experience has taught me that any paste of gypsum, flour or ash gets damp and with time rots the canvas and the painting comes out in scabs” ({% cite 'Pacheco (1638) 1990' '481' %}). And Antonio Palomino relates similar concerns in 1715, when explaining how to prepare the mixture by boiling and shaking it to avoid lumps: *gacha* paste with flour and water, honey and a little linseed oil ({% cite 'Palomino (1715) 1947' '483' %}). In some cases, the presence of flour paste has been identified by scientific analysis ([[Helwig and Daly Hartin 1999]]).
+We find the same in Francisco Pacheco’s treatise from the mid-seventeenth century: “Some work with flour or mill-dust paste, cooking oil and a little honey (which you can eat even if you are not hungry); they apply a coating of this to a well-stretched canvas to cover over the pores … But experience has taught me that any paste of gypsum, flour or ash gets damp and with time rots the canvas and the painting comes out in scabs” ({% cite 'Pacheco (1638) 1990' '481' %}). And Antonio Palomino relates similar concerns in 1715, when explaining how to prepare the mixture by boiling and shaking it to avoid lumps: *gacha* paste with flour and water, honey and a little linseed oil ({% cite 'Palomino (1715) 1947' '483' %}). In some cases, the presence of flour paste has been identified by scientific analysis ({% cite 'Helwig and Daly Hartin 1999' %}).
 
-A treatise by Spaniard Vicente Poleró published in the mid-nineteenth century points to the lining of the canvas as an essential operation ([[Poleró (1853 and 1866) 2018]]). He describes the procedure: cover the paint surface with paper, and apply the adhesive to both the lining fabric mounted on a loom and to the original canvas on the back and then iron until it is completely dry. The idea was not to simply reinforce the support, but also to fix the layers of color with an impregnation of glue paste (which was surely much more compatible with the original materials than modern plastic adhesives).
+A treatise by Spaniard Vicente Poleró published in the mid-nineteenth century points to the lining of the canvas as an essential operation ({% cite 'Poleró (1853 and 1866) 2018' %}). He describes the procedure: cover the paint surface with paper, and apply the adhesive to both the lining fabric mounted on a loom and to the original canvas on the back and then iron until it is completely dry. The idea was not to simply reinforce the support, but also to fix the layers of color with an impregnation of glue paste (which was surely much more compatible with the original materials than modern plastic adhesives).
 
 Using the information gathered and the results of the questionnaire we were able to establish the different ingredients used in the recipes and their function in the mixture: thickener, adhesive, fungicide, humectant, and so forth ([table 18.1](#table-18-1)).
 
@@ -82,11 +82,11 @@ In older recipes for *gacha* paste, such as those of Juan García de Miranda in 
 
 {% figure 'fig-18-3' %}
 
-María Luisa Gómez has noted several characteristics of lining with *gacha* paste ([[Gómez 1998]]), for example that “there is no change in color, or only very slight change. Also, that the high moisture content allows for the smoothing out of cracks. However, the mixture is very hygroscopic and sensitive to humidity. There is a risk that the original canvas will shrink. There is a danger of fungal growth. Adhesion reduces rapidly in bad weather conditions, and it becomes hard and fragile. It has an acid pH. It requires the applying of heat.”[^4] She thought that the use of Venetian turpentine and other resins was not justified because they were insoluble in water, darkened, and became more fragile, and therefore suggested simplified recipes made up of only starch and animal glue with a few drops of fungicide, and that they be applied cold and used only for lining in dry climates.
+María Luisa Gómez has noted several characteristics of lining with *gacha* paste ({% cite 'Gómez 1998' %}), for example that “there is no change in color, or only very slight change. Also, that the high moisture content allows for the smoothing out of cracks. However, the mixture is very hygroscopic and sensitive to humidity. There is a risk that the original canvas will shrink. There is a danger of fungal growth. Adhesion reduces rapidly in bad weather conditions, and it becomes hard and fragile. It has an acid pH. It requires the applying of heat.”[^4] She thought that the use of Venetian turpentine and other resins was not justified because they were insoluble in water, darkened, and became more fragile, and therefore suggested simplified recipes made up of only starch and animal glue with a few drops of fungicide, and that they be applied cold and used only for lining in dry climates.
 
 ### Case Studies
 
-For some cases of lined works, we were able to find references to the date and to the restorers who carried out the treatment, and we were even able to analyze the *gacha* adhesive present in them, such as those analyzed by María Dolores Gayo at the Museo del Prado, those in the Instituto del Patrimonio Cultural de España, and Ribera’s *Crucified* *Christ*, analyzed by Andrés Sánchez Ledesma (Arte-Lab S.L.) ([[Diputación Foral de Álava 2018]]). Analyses of the *gacha* are complex because sometimes it is difficult to determine the exact composition. Apart from the difficulty of accessing representative samples, they are possibly not very homogeneous adhesives, and the quantities of certain additives were too small to be identified. We should also bear in mind other treatments and products applied to the paintings over the years, which may interfere in the analytical results.
+For some cases of lined works, we were able to find references to the date and to the restorers who carried out the treatment, and we were even able to analyze the *gacha* adhesive present in them, such as those analyzed by María Dolores Gayo at the Museo del Prado, those in the Instituto del Patrimonio Cultural de España, and Ribera’s *Crucified* *Christ*, analyzed by Andrés Sánchez Ledesma (Arte-Lab S.L.) ({% cite 'Diputación Foral de Álava 2018' %}). Analyses of the *gacha* are complex because sometimes it is difficult to determine the exact composition. Apart from the difficulty of accessing representative samples, they are possibly not very homogeneous adhesives, and the quantities of certain additives were too small to be identified. We should also bear in mind other treatments and products applied to the paintings over the years, which may interfere in the analytical results.
 
 Examples of case studies include:
 
@@ -102,11 +102,11 @@ Examples of case studies include:
 
 {% figuregroup '2' 'fig-18-5-a, fig-18-5-b' %}
 
-Both of the latter paintings have additional canvas strips to widen them. We know that *The Spinners* was lined 1785 by Jacinto Gómez, and perhaps he carried out the widening of the painting, although the painting’s measurements vary from one inventory to another at different periods, probably due to adaptations for specific locations. During the last intervention on the painting, many repaints were detected, covering damage that may have arisen from shrinkage when using a new close-weft canvas or been caused by burns during ironing ([[Macarrón, Calvo, and Gil 2017]]).
+Both of the latter paintings have additional canvas strips to widen them. We know that *The Spinners* was lined 1785 by Jacinto Gómez, and perhaps he carried out the widening of the painting, although the painting’s measurements vary from one inventory to another at different periods, probably due to adaptations for specific locations. During the last intervention on the painting, many repaints were detected, covering damage that may have arisen from shrinkage when using a new close-weft canvas or been caused by burns during ironing ({% cite 'Macarrón, Calvo, and Gil 2017' %}).
 
 ### Creating the Database
 
-For the documentary study, we gathered recipes, materials, and tools used for *gacha* linings. We collected invoices for products bought for lining and as much data referring to these as we could find, such as the restorer’s signature on the back of some canvases. Thus, in the Royal Palace we found an order for materials bearing painter-restorer Juan García de Miranda’s signature from 1735, in which the materials for the lining are listed ([[Macarrón, Calvo, and Gil 2013]]).
+For the documentary study, we gathered recipes, materials, and tools used for *gacha* linings. We collected invoices for products bought for lining and as much data referring to these as we could find, such as the restorer’s signature on the back of some canvases. Thus, in the Royal Palace we found an order for materials bearing painter-restorer Juan García de Miranda’s signature from 1735, in which the materials for the lining are listed ({% cite 'Macarrón, Calvo, and Gil 2013' %}).
 
 We also collected analyses and studies carried out in the collaborating institutions for certain selected case studies, according to their characteristics. All this information was stored in a Microsoft Access database, divided into several sections:
 
@@ -120,25 +120,25 @@ The version of the Access software we used allowed us to filter by countries and
 
 ## Experimental Stage
 
-Following in the wake of other experimental studies ([[Daly Hartin et al. 2011]]), we decided to start a scientific study of the materials of a glue-paste lining, starting with the basic ingredients: flour, glue, and cloth. Thus, a number of tests and mock-ups were carried out to assess the behavior of the lining.
+Following in the wake of other experimental studies ({% cite 'Daly Hartin et al. 2011' %}), we decided to start a scientific study of the materials of a glue-paste lining, starting with the basic ingredients: flour, glue, and cloth. Thus, a number of tests and mock-ups were carried out to assess the behavior of the lining.
 
 We used an animal glue chosen from previous tests because of its bloom strength of 240–250. Four types of flour with differing protein content were used: two kinds of finely ground white wheat flour (different brands), coarse-ground semi–whole wheat flour, and coarse-ground semi–whole rye flour. Two kinds of linen fabric were also used: open and closed weft.[^6] The adhesive was prepared at the Universitat Politècnica de València, adhesive films were made for analysis, and the linings were carried out. Some of the samples were placed on stretchers and some were not.
 
 The samples were sent to the Centre Interdiciplinaire de Conservation et de Restauration du Patrimoine (CICRP) in Marseilles for accelerated aging and study of susceptibility to biodeterioration (estimate of mold growth and pest infestation). They were also sent to Valencia (for morphological studies using optical and scanning electron microscope [SEM]), Copenhagen (examination of cross sections of mock-ups with optical microscopy [OM] and tensile and peel tests), and Maastricht (investigation of cracking using reflectance transformation imaging [RTI]). Members of the research team who specialized in the different techniques worked in each of these places. Some of the samples were studied before and after artificial aging: we measured viscosity and pH, used Fourier transform infrared spectroscopy (FTIR) for the characterization of the original materials and lining adhesives, and carried out morphological analysis using OM, SEM, and RTI. We also carried out tests of mechanical traction performance and peeling.
 
-The partial results of these tests included chemical characterization, morphological analysis, studies on mechanical behavior, and biodeterioration ([[Fuster-López et. al 2017]]).
+The partial results of these tests included chemical characterization, morphological analysis, studies on mechanical behavior, and biodeterioration ({% cite 'Fuster-López et. al 2017' %}).
 
 ## Dissemination
 
 The third phase of the project was to share the work by disseminating it widely so as to familiarize professionals with this kind of canvas lined with glue-paste. The first objectives of the project were shown in the Museo Thyssen-Bornemisza in Madrid, in 2012, along with the state of knowledge on the subject at that time.[^7]
 
-In 2012, we also presented a poster to the TechnoHeritage Congress and published some of the documentary work ([[Macarrón, Calvo, and Gil 2013]]). The following year, at Lo Stato dell’Arte 11, Matteo Rossi-Doria presented a paper on the critical recovery of traditional lining methods ([[Rossi-Doria 2013]]). In a similar context, an article was published comparing the lining systems used in Portugal and Spain ([[Calvo, Maltieira, and Barbosa 2014]]).
+In 2012, we also presented a poster to the TechnoHeritage Congress and published some of the documentary work ({% cite 'Macarrón, Calvo, and Gil 2013' %}). The following year, at Lo Stato dell’Arte 11, Matteo Rossi-Doria presented a paper on the critical recovery of traditional lining methods ({% cite 'Rossi-Doria 2013' %}). In a similar context, an article was published comparing the lining systems used in Portugal and Spain ({% cite 'Calvo, Maltieira, and Barbosa 2014' %}).
 
-In 2014, we put forward some case studies in the Association des Restaurateurs d’Art et d’Archéologie de Formation Universitaire (ARAAFU) Colloquium in Paris ([[Macarrón, Calvo, and Gil 2014]]; [[Macarrón, Calvo, Gil 2017]]). That same year we also produced a poster for the Art Technological Source Research working group’s congress at ICOM-CC in Amsterdam, whose contents we published in 2016 ([[Macarrón, Calvo, and Gil 2015]]).
+In 2014, we put forward some case studies in the Association des Restaurateurs d’Art et d’Archéologie de Formation Universitaire (ARAAFU) Colloquium in Paris ({% cite 'Macarrón, Calvo, and Gil 2014' %}; {% cite 'Macarrón, Calvo, Gil 2017' %}). That same year we also produced a poster for the Art Technological Source Research working group’s congress at ICOM-CC in Amsterdam, whose contents we published in 2016 ({% cite 'Macarrón, Calvo, and Gil 2015' %}).
 
 The partial results of the experimental section were presented and published at the ICOM-CC in Copenhagen in 2017 (Fuster-López et. al 2017]]).
 
-In 2018 we presented a summary of the project at the II Colloquium in Lisbon: Investigación en Conservación del Patrimonio (Heritage Conservation Research) ([[Macarrón, Calvo, and Gil 2018]]). More recently, in June 2019, the four authors of this essay organized and taught a workshop at the Complutense University of Madrid, Applications of Traditional and Modern Lining Methods, with the assistance of museum professionals, private practitioners, and students ([fig. 18.6](#fig-18-6)). During the workshop, a wide range of adhesive formulations were tested on facsimiles. Thanks to the Avangrid Foundation grant, Ana Calvo and Julia Betancor were able to present this research during the Conserving Canvas Symposium at Yale University in October 2019.
+In 2018 we presented a summary of the project at the II Colloquium in Lisbon: Investigación en Conservación del Patrimonio (Heritage Conservation Research) ({% cite 'Macarrón, Calvo, and Gil 2018' %}). More recently, in June 2019, the four authors of this essay organized and taught a workshop at the Complutense University of Madrid, Applications of Traditional and Modern Lining Methods, with the assistance of museum professionals, private practitioners, and students ([fig. 18.6](#fig-18-6)). During the workshop, a wide range of adhesive formulations were tested on facsimiles. Thanks to the Avangrid Foundation grant, Ana Calvo and Julia Betancor were able to present this research during the Conserving Canvas Symposium at Yale University in October 2019.
 
 {% figure 'fig-18-6' %}
 
@@ -148,7 +148,7 @@ In certain historic cases, we found linings with glue paste that had changed and
 
 Thanks to the project described in this essay, we have learned that hundreds of paintings in Spain are lined with glue paste—some three centuries ago and others more recently. Most are in good condition. However, more information is needed about works lined *a la gacha*: the recipes and application methods used and the environmental conditions of conservation.
 
-In experimental studies ([[Fuster-López et. al 2017]]) we discovered variables in biodegradation, which depends on the fineness of the flour, the proportions of flour and glue, and the kind of starch and protein when the proportion of flour to glue is constant. *Gacha* recipes with semiwhole flour are more likely to biodeteriorate than those made with finely milled white flours, and the protein content of the cereal used affects the degradation process. Regarding the mechanical and dimensional stability of linings with glue paste, we found differences related to the kind of flour used, the degree of milling or grinding, and the thickness of the weft in the canvas used for lining. This suggests that conservation strategies for the long-term care of lined paintings must be carefully assessed, taking into consideration the kind of flour used in the adhesive.
+In experimental studies ({% cite 'Fuster-López et. al 2017' %}) we discovered variables in biodegradation, which depends on the fineness of the flour, the proportions of flour and glue, and the kind of starch and protein when the proportion of flour to glue is constant. *Gacha* recipes with semiwhole flour are more likely to biodeteriorate than those made with finely milled white flours, and the protein content of the cereal used affects the degradation process. Regarding the mechanical and dimensional stability of linings with glue paste, we found differences related to the kind of flour used, the degree of milling or grinding, and the thickness of the weft in the canvas used for lining. This suggests that conservation strategies for the long-term care of lined paintings must be carefully assessed, taking into consideration the kind of flour used in the adhesive.
 
 It would be useful to continue testing to determine the different additives in the traditional recipes (garlic, oxgall, Venetian turpentine, disinfectants) to understand the role these products played in the lining and their effects. But on the basis of our findings and in the light of the current condition of works lined *a la gacha*, we must raise the following questions:
 
@@ -178,6 +178,6 @@ It would be useful to continue testing to determine the different additives in t
 
 [^5]: We would like to thank the conservator-restorer of the Museo del Prado, María Álvarez Garcillán, for all the information she provided us on the condition of this painting.
 
-[^6]: For details of all materials see [[Fuster-López et al. 2017]].
+[^6]: For details of all materials see {% cite 'Fuster-López et al. 2017' %}.
 
 [^7]: “Reinforcement Treatments of Canvas Paintings: Studio Cases, Evolution and Behavior,” Seminar presented at Universidad Complutense de Madrid y Museo Thyssen-Bornemisza, October 15, 2012.
