--- a/content/4-case-studies/22.md
+++ b/content/4-case-studies/22.md
@@ -16,7 +16,7 @@ abstract: An important recent acquisition to the collection of the National Gall
 
 ## Introduction
 
-In July 2018, the National Gallery, London, acquired a self-portrait by the Italian Baroque artist Artemisia Gentileschi, one of only a handful of works by female painters in the collection and the first painting by this artist to be represented at the Gallery. The painting, *Self-Portrait as Saint Catherine of Alexandria* (ca. 1615–17), depicts the artist herself as Saint Catherine of Alexandria, the Christian saint martyred in the early fourth century ([fig. 22.1](#fig-22-1)). Her right hand holds the martyr’s palm close to her chest, while she rests her left hand on a broken wheel with iron spikes, the instrument of Catherine’s torture and the saint’s standard attribute. The painting dates from Artemisia’s period of activity in Florence, where she lived and worked from 1613 to 1620, establishing herself as an independent artist and becoming the first woman to gain membership to the Accademia della Arti del Disegno, in 1616 ({% cite 'Bissell 1968' '154' %}; {% cite 'Bissell 1999' '141' %}; [[Whitlum-Cooper et al. 2019]]).
+In July 2018, the National Gallery, London, acquired a self-portrait by the Italian Baroque artist Artemisia Gentileschi, one of only a handful of works by female painters in the collection and the first painting by this artist to be represented at the Gallery. The painting, *Self-Portrait as Saint Catherine of Alexandria* (ca. 1615–17), depicts the artist herself as Saint Catherine of Alexandria, the Christian saint martyred in the early fourth century ([fig. 22.1](#fig-22-1)). Her right hand holds the martyr’s palm close to her chest, while she rests her left hand on a broken wheel with iron spikes, the instrument of Catherine’s torture and the saint’s standard attribute. The painting dates from Artemisia’s period of activity in Florence, where she lived and worked from 1613 to 1620, establishing herself as an independent artist and becoming the first woman to gain membership to the Accademia della Arti del Disegno, in 1616 ({% cite 'Bissell 1968' '154' %}; {% cite 'Bissell 1999' '141' %}; {% cite 'Whitlum-Cooper et al. 2019' %}).
 
 {% figure 'fig-22-1' %}
 
@@ -32,9 +32,9 @@ Three original edges remained relatively intact, with exaggerated cusping presen
 
 ## History of Lining at the National Gallery
 
-The National Gallery has a long history of undertaking structural treatments, including lining, and is active in maintaining traditional practices as well as researching and developing new methods and technologies ([[Bomford 1978]]; [[Reeve, Ackroyd, and Stephenson-Wright 1988]]; [[Young and Ackroyd 2001]]). Aqueous glue-paste hand-linings were first undertaken for the Gallery by private liners, who were commissioned by the Gallery. In a letter from the Gallery Archives (date unknown) the Gallery’s first director, Sir Charles Eastlake, writes to inform colleagues that “Mr. William Morrill of 3 Duck Lane, Wardour Street is ordinarily employed for the re-lining of pictures in the collection.”[^4] In 1880, Morrill himself writes to the director: “The price of double lining the large Weenix picture will be about 14 pounds. I should have written before but I have been very busy with the Crivelli picture which I hope very soon to complete.”[^5]
+The National Gallery has a long history of undertaking structural treatments, including lining, and is active in maintaining traditional practices as well as researching and developing new methods and technologies ({% cite 'Bomford 1978' %}; {% cite 'Reeve, Ackroyd, and Stephenson-Wright 1988' %}; {% cite 'Young and Ackroyd 2001' %}). Aqueous glue-paste hand-linings were first undertaken for the Gallery by private liners, who were commissioned by the Gallery. In a letter from the Gallery Archives (date unknown) the Gallery’s first director, Sir Charles Eastlake, writes to inform colleagues that “Mr. William Morrill of 3 Duck Lane, Wardour Street is ordinarily employed for the re-lining of pictures in the collection.”[^4] In 1880, Morrill himself writes to the director: “The price of double lining the large Weenix picture will be about 14 pounds. I should have written before but I have been very busy with the Crivelli picture which I hope very soon to complete.”[^5]
 
-While the Gallery established its conservation department in 1946, it wasn’t until the late 1940s and early 1950s that its conservators were directly employed by the Gallery ({% cite 'Bomford 1978' '3' %}).[^6]<sup>,</sup>[^7] Glue paste was the only lining adhesive used at the Gallery until around 1947, when wax-resin adhesive began to be used as an alternative adhesive, until the late 1970s, with the advent of Beva 371. All linings were done by hand until the studio bought its first vacuum hot table in 1976 ([[Reeve, Ackroyd, and Stephenson-Wright 1988]]).
+While the Gallery established its conservation department in 1946, it wasn’t until the late 1940s and early 1950s that its conservators were directly employed by the Gallery ({% cite 'Bomford 1978' '3' %}).[^6]<sup>,</sup>[^7] Glue paste was the only lining adhesive used at the Gallery until around 1947, when wax-resin adhesive began to be used as an alternative adhesive, until the late 1970s, with the advent of Beva 371. All linings were done by hand until the studio bought its first vacuum hot table in 1976 ({% cite 'Reeve, Ackroyd, and Stephenson-Wright 1988' %}).
 
 Traditional aqueous glue-paste hand-lining remains part of the conservation department’s methods for structural treatments for canvas paintings and is chosen when appropriate for a painting’s requirements, for example, when considering the type and extent of damage, the painting’s overall condition, and its treatment history. Its use, however, has evolved over the last thirty years. The current modified glue-paste recipe is the result of research undertaken at the Gallery in the late 1990s by Paul Ackroyd that evaluated the bond performance and relative stiffness of glue-paste linings. Tests revealed that a low ratio of glue to flour paste proved desirable, providing a lining that is more dimensionally stable than those with a higher glue content ({% cite 'Ackroyd 1995' '89' %}). The proportion of glue now used, at 1 part glue to 6 parts flour paste, contains far less glue than traditionally used in the UK and is more akin to European formulations.
 
@@ -64,7 +64,7 @@ Old insect damage, in the form of woodworm exit holes, was found within the back
 
 The original seam was strengthened with a PVA (polyvinyl acetate) adhesive, Resin ‘W,’ bulked with cellulose powder to fill any small gaps. Small losses in the original canvas (including parts of the seam) were filled with canvas inserts cut from new primed, linen canvas and adhered in place with the same PVA adhesive. This new primed canvas was wetted and stretched before use to reduce its response to moisture. The tear was then butt joined from the back with the PVA adhesive, and cellulose powder and a few additional linen fibers were also used to fill any small holes and gaps and add strength.
 
-Resin ‘W’ remains sensitive to water when first dry and is softened by heat once fully dry. When used either alone or mixed with small proportions of cellulose powder it makes a good malleable adhesive/filler that will allow inserts and repairs to be perfectly aligned with the original and conform well with the lining process. Although PVAs are known to become brittle with age ([[Down 2009]]; [[Howells et al. 1993]]), Resin ‘W’ has been used at the Gallery for some time for discrete canvas repairs. It does harden on aging, making it difficult to remove entirely, but it has proved durable—more so than other similar adhesives.[^10]
+Resin ‘W’ remains sensitive to water when first dry and is softened by heat once fully dry. When used either alone or mixed with small proportions of cellulose powder it makes a good malleable adhesive/filler that will allow inserts and repairs to be perfectly aligned with the original and conform well with the lining process. Although PVAs are known to become brittle with age ({% cite 'Down 2009' %}; {% cite 'Howells et al. 1993' %}), Resin ‘W’ has been used at the Gallery for some time for discrete canvas repairs. It does harden on aging, making it difficult to remove entirely, but it has proved durable—more so than other similar adhesives.[^10]
 
 ### Moisture Treatment
 
@@ -114,7 +114,7 @@ The painting was cut from the loom, leaving about a 12-cm tacking margin, and re
 
 ## Conclusion
 
-*Self-Portrait as Saint Catherine of Alexandria* by Artemisia Gentileschi was a significant acquisition and conservation project for the Gallery. A film series of the full treatment process including cleaning, structural treatment, and restoration was made and published on both the Gallery’s website ([[National Gallery 2019]]) and YouTube and was well received. Further investigations into the painter’s process were also undertaken ([[Keith et al. 2019]]; [[Melchiorre Di Crescenzo et al. 2019]]).
+*Self-Portrait as Saint Catherine of Alexandria* by Artemisia Gentileschi was a significant acquisition and conservation project for the Gallery. A film series of the full treatment process including cleaning, structural treatment, and restoration was made and published on both the Gallery’s website ({% cite 'National Gallery 2019' %}) and YouTube and was well received. Further investigations into the painter’s process were also undertaken ({% cite 'Keith et al. 2019' %}; {% cite 'Melchiorre Di Crescenzo et al. 2019' %}).
 
 After treatment, the painting embarked on a nationwide tour to unusual venues across the UK, the first venue coinciding with International Women’s day on March 8, 2019, traveling in total to two libraries, a doctor’s surgery, a school, and a prison.[^15] Thereafter, the portrait was included in the Gallery’s major exhibition, *Artemisia*, October 2020–January 2021, which included forty-one works from public and private collections and showcased the artist in the first major exhibition of her work in the UK.[^16]
 
@@ -170,7 +170,7 @@ Mowiol and chalk mix filler at 25%: 240 g Mowiol GE 04-86, 1000 ml water, enou
 
 [^11]: It was important to consider the weave orientation of the strip. Having the warp thread vertical restricts its horizontal movement when wet, thereby reducing the risk of imposing dimensional change on the original during this stage of treatment. When wet, the new machine-woven canvas curls convexly to the surface in the warp direction while also shrinking in the warp direction.
 
-[^12]: Magnesium carbonate is not soluble in water. It is mixed with a small amount of water into a paste, put in a soda syphon with a quantity of distilled water (up to 1 litre), and then the release of two carbon dioxide capsules into the syphon turns the magnesium carbonate into bicarbonate, which is soluble in water. The resulting water mixture is applied to the canvas. When dry, the magnesium bicarbonate reverts to magnesium carbonate, and this is what is left within the structure of the canvas. See [[Ryder 1986]].
+[^12]: Magnesium carbonate is not soluble in water. It is mixed with a small amount of water into a paste, put in a soda syphon with a quantity of distilled water (up to 1 litre), and then the release of two carbon dioxide capsules into the syphon turns the magnesium carbonate into bicarbonate, which is soluble in water. The resulting water mixture is applied to the canvas. When dry, the magnesium bicarbonate reverts to magnesium carbonate, and this is what is left within the structure of the canvas. See {% cite 'Ryder 1986' %}.
 
 [^13]: Rollers can also be used.
 
