--- a/content/4-case-studies/24.md
+++ b/content/4-case-studies/24.md
@@ -179,21 +179,21 @@ No longer available from manufacturer; purchased on eBay
 
 {% endbackmatter %}
 
-[^1]: *The Hours* is one of over three thousand studies on paper and canvas that came directly from Abbey’s studio to Yale University in 1937. For more information on the history of the Abbey collection, see [[Hamilton 1939]].
+[^1]: *The Hours* is one of over three thousand studies on paper and canvas that came directly from Abbey’s studio to Yale University in 1937. For more information on the history of the Abbey collection, see {% cite 'Hamilton 1939' %}.
 
-[^2]: The metal leaf was characterized with X-ray fluorescence spectroscopy (XRF) by Dr. Pablo Londero and Dr. Marcie Wiggins using the facilities and equipment of the Yale Institute for the Preservation of Cultural Heritage. For more information about Abbey’s materials and techniques, see [[Wingel et al. 2019]].
+[^2]: The metal leaf was characterized with X-ray fluorescence spectroscopy (XRF) by Dr. Pablo Londero and Dr. Marcie Wiggins using the facilities and equipment of the Yale Institute for the Preservation of Cultural Heritage. For more information about Abbey’s materials and techniques, see {% cite 'Wingel et al. 2019' %}.
 
-[^3]: Surface efflorescence is noticeably present on about half of Abbey’s preparatory studies in the YUAG collection. The efflorescence on this painting was not analyzed, but it has been characterized on other Abbey paintings as free fatty acids and metal soaps of zinc or lead. For more information, see [[Wingel et al. 2019]].
+[^3]: Surface efflorescence is noticeably present on about half of Abbey’s preparatory studies in the YUAG collection. The efflorescence on this painting was not analyzed, but it has been characterized on other Abbey paintings as free fatty acids and metal soaps of zinc or lead. For more information, see {% cite 'Wingel et al. 2019' %}.
 
-[^4]: The funori was prepared by an adapted purification process similar to the rinse, soak, heat, filter, and purify methods described in [[Swider and Smith 2005]].
+[^4]: The funori was prepared by an adapted purification process similar to the rinse, soak, heat, filter, and purify methods described in {% cite 'Swider and Smith 2005' %}.
 
 [^5]: The aluminum strainer was fabricated by Promoco Manufacturing Co., 300 Morgan Lane, West Haven, CT 06516.
 
-[^6]: Many of the advantages of using Velcro for stretching large, traveling paintings are also discussed in [[McMillan 2005]].
+[^6]: Many of the advantages of using Velcro for stretching large, traveling paintings are also discussed in {% cite 'McMillan 2005' %}.
 
-[^7]: This value was chosen as a high estimate of tensions on a stretched painting from relevant literature, such as [[Iaccarino Idelson 2009]]. The shear strength of Velcro, 8 pounds per square inch, was provided by the manufacturer.
+[^7]: This value was chosen as a high estimate of tensions on a stretched painting from relevant literature, such as {% cite 'Iaccarino Idelson 2009' %}. The shear strength of Velcro, 8 pounds per square inch, was provided by the manufacturer.
 
-[^8]: According to Velcro manufacturer specifications, nylon Velcro is rated “high” for cycle life, whereas polyester is rated “medium” (Velcro Brand Woven Fasteners Product Guide, <https://www.hookandloop.com/media/wysiwyg/pdf_content/Woven-Fasteners.pdf>). Gardiner and Weber reported that a “high” cycle life is able to withstand 10,000 closures ([[Gardiner and Weber 2010]]).
+[^8]: According to Velcro manufacturer specifications, nylon Velcro is rated “high” for cycle life, whereas polyester is rated “medium” (Velcro Brand Woven Fasteners Product Guide, <https://www.hookandloop.com/media/wysiwyg/pdf_content/Woven-Fasteners.pdf>). Gardiner and Weber reported that a “high” cycle life is able to withstand 10,000 closures ({% cite 'Gardiner and Weber 2010' %}).
 
 [^9]: Although rare earth magnets vendors supply pull force specifications, the force exerted on the canvas varies by the number and thickness of layers involved in a conservation treatment. For the purposes of this treatment the magnets had to be strong enough to suspend the metal plate and blotters against the painting surface.
 
