--- a/content/4-case-studies/25.md
+++ b/content/4-case-studies/25.md
@@ -18,7 +18,7 @@ abstract: "As part of a master’s program, the author examined a recently acqui
 
 As part of the master’s program at the École supérieure des Arts (ESA) Saint Luc University in Liege, I had the opportunity to research the collection of contemporary Congolese paintings at the Africa Museum in Tervuren, Belgium. This unique collection of two thousand paintings, including works by well-known artists such as Ange Kumbi, Chéri Samba, Tshibumba, Shula, Moke, Chéri Cherin, Thango, and Lubaki, chronicles the lives of Congolese citizens from 1968 to 2012. They were collected by Bogumil Jewsiewicki-Koss[^1] and purchased in 2012 by the Africa Museum.
 
-The first year of my master’s thesis focused on historical research and the assessment of the recently acquired collection, including entering details of inscriptions and condition into a database. The main objective was to gain an understanding of the overall condition of the collection. This eclectic collection consists of paintings made with both typical and local recycled materials. The second year of my thesis involved the research of appropriate structural treatments to preserve the paintings for the future. (This led me to the studio of Olivier Nouaille[^2] to follow Marion Guillermin’s research on Petex and Nitex, synthetic, transparent canvases ([[Guillermin 2012]]).[^3] Many of the paintings have inscriptions on the back, making the transparency of the lining materials a primary concern. A range of test samples were made and tested with synthetic adhesives, and the most promising results were used to treat one of the paintings in the collection.
+The first year of my master’s thesis focused on historical research and the assessment of the recently acquired collection, including entering details of inscriptions and condition into a database. The main objective was to gain an understanding of the overall condition of the collection. This eclectic collection consists of paintings made with both typical and local recycled materials. The second year of my thesis involved the research of appropriate structural treatments to preserve the paintings for the future. (This led me to the studio of Olivier Nouaille[^2] to follow Marion Guillermin’s research on Petex and Nitex, synthetic, transparent canvases ({% cite 'Guillermin 2012' %}).[^3] Many of the paintings have inscriptions on the back, making the transparency of the lining materials a primary concern. A range of test samples were made and tested with synthetic adhesives, and the most promising results were used to treat one of the paintings in the collection.
 
 This article is divided into three main sections. The first introduces the collection—its historical background, themes, and materials. The second outlines the collection’s current condition. The third describes the treatment of one painting and its lining onto a transparent support.
 
@@ -28,7 +28,7 @@ This article is divided into three main sections. The first introduces the colle
 
 The term *popular art* comes from me; it’s to say that our artwork is about the people’s lives and will always be understood by everyone wherever they come from. You don’t have to have been in academic school, because the message is direct and easy to understand. I wish I would have found a better word, because after a few years I realized that it was misunderstood. In the Western world, this word *popular* has another meaning, without any thoughts behind it, something without any research, and I was upset about it, because there is a research! Concerning the paintings, I’d like that everyone looks at the paintings without any judgment, prejudice, or anything and wherever they come from.
 
-—Chéri Samba ([[Our Choices Art 2017]])
+—Chéri Samba ({% cite 'Our Choices Art 2017' %})
 
 Congolese popular art originated from street advertising art (billboards) which began to appear in the late 1910s to early 1920s. The artists Lubaki and Djilatendo, whose work was noticed by gallerists in 1926, used natural pigments on the walls of houses that were made with clay and leaves. Unfortunately, these pictures didn’t last, due to the fragile supports and materials chosen. They were painted to publicize stores or to denounce something in particular: painful, moral, and historical events that had caused concern. The biggest production of mural art was in Kinshasa. Through this art, the city—known as “Kin trash can” because of the quantity of waste materials found in the street—was revitalized.
 
@@ -42,7 +42,7 @@ Because the paintings were now portable, they were also able to travel around th
 
 -   Farther north, in Brazzaville, the French collector Pierre Lods created the Poto Poto School in 1949.
 
-As a result of these different schools, two categories of artists appeared: the self-educated and the academically educated. These artists were put under the spotlight by many patrons ([[Gilungula Pela Koy 1995]]; [[Turine 2007]]).
+As a result of these different schools, two categories of artists appeared: the self-educated and the academically educated. These artists were put under the spotlight by many patrons ({% cite 'Gilungula Pela Koy 1995' %}; {% cite 'Turine 2007' %}).
 
 ### Ongoing Research
 
@@ -50,14 +50,14 @@ Jewsiewicki-Koss published extensively on Congolese art in the 1990s during his 
 
 While many other relevant publications about Congolese popular art exist, I found few studies and little research focusing on the exact type of materials used and the deterioration of these paintings. The Africa Museum’s collection was only recently acquired, and as there had been no prior condition assessments, I had the opportunity to take a closer look. I recorded the extent of the damage to the paintings in a database to focus any research on future conservation. My desire was to provide a conservation approach based on materials, rather than primarily theoretical art history.
 
-To learn more about the deterioration of the collection, I needed more information about the materials these artists used and their techniques: How did they work? How did they choose their materials? Why did they choose these types of canvases? How did they apply their mixtures, and in which order? How did they view their artwork? What were their purpose and expectations? To answer these questions and others, I interviewed Jewsiewicki-Koss ([[Debarax 2016]]), the previous owner, and Ange Kumbi,[^5] one of the famous artists represented in the collection. It was essential for me to understand the collection before undertaking the research.
+To learn more about the deterioration of the collection, I needed more information about the materials these artists used and their techniques: How did they work? How did they choose their materials? Why did they choose these types of canvases? How did they apply their mixtures, and in which order? How did they view their artwork? What were their purpose and expectations? To answer these questions and others, I interviewed Jewsiewicki-Koss ({% cite 'Debarax 2016' %}), the previous owner, and Ange Kumbi,[^5] one of the famous artists represented in the collection. It was essential for me to understand the collection before undertaking the research.
 
 ### Themes in the Collection
 
 I was mimicking comic scenes. There was a magazine that everyone loved called *Jeunes pour jeunes*, and I would copy scenes from it and sell the drawings to my friends at school. But I told myself that drawing didn’t allow me to earn much more money, so maybe I should do painting. Editors were looking for somebody who used a style that could be found in billboards in their paintings, and what I was doing was putting writing in my paintings.
 I named this kind of style the Sambain style. It meant paintings with writing. It seems that before me, such paintings didn’t exist. Each of us has to have a specific style and be considered as a model, and my aim was to make what hasn’t been made before. I noticed that people who were walking in the street didn’t stop to look at the paintings, so I had to find a way to catch people’s attention, to be more attractive. The real connoisseurs, my audience, was in the street. Especially those who stood in front of my paintings for a long time. If they read more slowly than me, they would stay a lot of time in front of it, so it was a success! What I’m interested in is to call conscience to mind and to give a moral meaning. I paint a reality that everybody knows. If it leads me to getting arrested because I tell the truth, it doesn’t upset me, because this is what I want to paint.
 
-—Chéri Samba ([[Our Choices Art 2017]])
+—Chéri Samba ({% cite 'Our Choices Art 2017' %})
 
 The museum’s collection features famous self-educated artists such as Ange Kumbi, Chéri Samba, Tshibumba Shula, Moke, Cheri Cherin, as well as others from the Academy of Fine Arts, including Thango and Lubaki. The paintings by self-educated artists depict historical and moral topics ([fig. 25.1](#fig-25-1)) as well as the daily life of the Congolese. The subjects represent the real lives of people: colonialism, prostitution, scenes of violence, AIDS and other diseases, political views, and the opinions, feelings, and sensitivities of people, as well as moments of daily life—a visit to the hairdresser, an argument between a husband and his wife, a battle against mosquitoes, and many more quotidian scenes. They also show the humor in some situations.
 
@@ -73,7 +73,7 @@ You know the working conditions were very bad before. I couldn’t buy any canva
 
 —Ange Kumbi[^6]
 
-I learned from Jewsiewicki-Koss that the artists had to sell a few paintings a week to survive. Their clients were poor. Jewsiewicki-Koss compared the price of a painting to the price of a few beers. This limited artists’ choice in materials to what they could afford. They worked outside or in indoor areas, mostly using discarded materials that were found locally ([[Debarax 2016]]).
+I learned from Jewsiewicki-Koss that the artists had to sell a few paintings a week to survive. Their clients were poor. Jewsiewicki-Koss compared the price of a painting to the price of a few beers. This limited artists’ choice in materials to what they could afford. They worked outside or in indoor areas, mostly using discarded materials that were found locally ({% cite 'Debarax 2016' %}).
 
 The supports used in the collection varied from flour sacks and other used fabrics like curtains or tablecloths to torn clothing such as jeans. They were made from different types of yarn: cotton, flax, or hemp, of different thicknesses, density, colors, and states of preservation. There are both small and large-size formats.
 
@@ -87,7 +87,7 @@ I stretched the flour sack during the process, and I put one or two layers of co
 
 —Ange Kumbi[^7]
 
-According to Jewsiewicki-Koss ([[Debarax 2016]]) a few artists made their own brushes and strainers. A painting without a strainer is cheaper, so many of the paintings were unstretched. They didn’t use varnish because it was too expensive. Apparently, some artists also used manioc flour mixed with water to make a ground layer, but often this coat cracked very quickly. Jewsiewicki-Koss reported that sometimes the artists made their own mixtures composed of acrylic or gouache, most likely house paint and maybe other unknown constituents added to palm oil. They mixed paint in pails and freely and quickly applied it to the canvas, the edges of which often show drips of paint. Paint layers were either thinly applied or had thick layers of impasto. Often the paint layer penetrated through the canvas due to the lack of a ground layer or because of the thinness of the support.
+According to Jewsiewicki-Koss ({% cite 'Debarax 2016' %}) a few artists made their own brushes and strainers. A painting without a strainer is cheaper, so many of the paintings were unstretched. They didn’t use varnish because it was too expensive. Apparently, some artists also used manioc flour mixed with water to make a ground layer, but often this coat cracked very quickly. Jewsiewicki-Koss reported that sometimes the artists made their own mixtures composed of acrylic or gouache, most likely house paint and maybe other unknown constituents added to palm oil. They mixed paint in pails and freely and quickly applied it to the canvas, the edges of which often show drips of paint. Paint layers were either thinly applied or had thick layers of impasto. Often the paint layer penetrated through the canvas due to the lack of a ground layer or because of the thinness of the support.
 
 By the way, I never tried to make my own brushes, because I bought them at the art store, not even the paint mixture with manioc flour or oil palm as Bogumil told. The famous artists, such as Moke, Bodo, Cheri Cherin, and others from the Academy of Fine Arts used the same paint found at the printer shop.”
 
@@ -97,7 +97,7 @@ The heterogeneous mixture they used looked plastic and grainy. The artists, in p
 
 The most important thing was the image, and everyone knew that the paintings lasted just a few years. When the paintings became too damaged, they were discarded.
 
-—Bogumil Jewsiewicki-Koss ([[Debarax 2016]])
+—Bogumil Jewsiewicki-Koss ({% cite 'Debarax 2016' %})
 
 ## The Collection’s State of Deterioration
 
@@ -141,9 +141,9 @@ A large area of the support was missing from the upper right corner, making hand
 
 ### Transparent Lining: Past and Continuing Research
 
-Some of the past research about transparent lining provided me with valuable information. In Knut Nicolaus’s book, we read that in 1961 Boissonnas[^10] proposed the use of fiberglass with a wax-resin lining or with Beva 371 ([[Nicolaus 1999]]). But fiberglass has some disadvantages: it is not stretchy enough, and it is almost impossible to repair holes or damage to the substrate. In 1981, Pacoud-Reme, with “three types of transparent linings done by G. Ten Kate for the paintings for the National Museum,” tested the fiberglass canvas with wax resin and a rigid support of methyl methacrylate ([[Pacoud-Reme 1981]]). In 1996, Berger referenced different kinds of synthetic canvases, such as Pe-Cap (polyester monofilament screen), but they were not transparent enough ([[Berger 1996]]).
+Some of the past research about transparent lining provided me with valuable information. In Knut Nicolaus’s book, we read that in 1961 Boissonnas[^10] proposed the use of fiberglass with a wax-resin lining or with Beva 371 ({% cite 'Nicolaus 1999' %}). But fiberglass has some disadvantages: it is not stretchy enough, and it is almost impossible to repair holes or damage to the substrate. In 1981, Pacoud-Reme, with “three types of transparent linings done by G. Ten Kate for the paintings for the National Museum,” tested the fiberglass canvas with wax resin and a rigid support of methyl methacrylate ({% cite 'Pacoud-Reme 1981' %}). In 1996, Berger referenced different kinds of synthetic canvases, such as Pe-Cap (polyester monofilament screen), but they were not transparent enough ({% cite 'Berger 1996' %}).
 
-In 2015, I followed the research by Marion Guillermin at Olivier Nouaille’s studio in Paris ([[Guillermin 2012]]). She used Petex[^11] (polyester PET) and Nitex[^12] (nylon PA), synthetic canvases that are monofilament open mesh fabrics from Sefar Inc.[^13] From the material properties provided by the manufacturer, both are stable in solvents. For abrasion and alkaline resistance, Nitex is better, whereas Petex is more resistant to acid. Unfortunately, their stability to light exposure is poor. However, the synthetic canvases are thin, elastic, easy to use, and almost completely transparent. Guillermin tested them with natural glue, but she didn’t apply her tests to real paintings.
+In 2015, I followed the research by Marion Guillermin at Olivier Nouaille’s studio in Paris ({% cite 'Guillermin 2012' %}). She used Petex[^11] (polyester PET) and Nitex[^12] (nylon PA), synthetic canvases that are monofilament open mesh fabrics from Sefar Inc.[^13] From the material properties provided by the manufacturer, both are stable in solvents. For abrasion and alkaline resistance, Nitex is better, whereas Petex is more resistant to acid. Unfortunately, their stability to light exposure is poor. However, the synthetic canvases are thin, elastic, easy to use, and almost completely transparent. Guillermin tested them with natural glue, but she didn’t apply her tests to real paintings.
 
 For the paintings in the Africa Museum’s collection, I eliminated natural adhesives and traditional canvases due to their yellowing tendency and their lack of transparency, opting for the Sefar synthetic canvases and synthetic adhesives. The aim was to find a lining with the necessary compatibility with the materials used in the paintings. The lining fabric had to be transparent, reversible, resistant to solvents, elastic, and inert (like Petex and Nitex), and the adhesive needed to be stable and reversible, transparent after drying, and easy to apply, such as Beva 371 Film (65 µm) or Plextol B500 synthetic adhesive. One of the issues was to find a technique that did not smudge the ink on the back of the painting.
 
@@ -185,7 +185,7 @@ In addition, thank you for the amazing experience at Olivier Nouaille’s studio
 
 {% endbackmatter %}
 
-[^1]: Bogumil Jewsiewicki-Koss was born in 1942 in Poland. He is an historian, archivist, art collector, and a specialist on Central Francophone Africa. He is also emeritus professor of history at Laval University, in Québec, and a researcher at Laval’s Cultures – Arts – Societies Research Center. See [[Debarax 2016]].
+[^1]: Bogumil Jewsiewicki-Koss was born in 1942 in Poland. He is an historian, archivist, art collector, and a specialist on Central Francophone Africa. He is also emeritus professor of history at Laval University, in Québec, and a researcher at Laval’s Cultures – Arts – Societies Research Center. See {% cite 'Debarax 2016' %}.
 
 [^2]: A French teacher in art conservation at Conde University in Paris.
 
