--- a/content/4-case-studies/26.md
+++ b/content/4-case-studies/26.md
@@ -26,7 +26,7 @@ A series of mid-eighteenth-century easel paintings depicting eleven apostles, Sa
 
 The paintings, which appear to be the work of a single artist, date from Mexico’s Viceregal period, and it is important to consider them in that context. The Spanish arrived in the Mexican territory in 1519, and two years later conquered the Aztec empire. In 1524, the Franciscans reached the Americas—starting the Catholic evangelization process in the former Aztec capital of Mexico-Tenochtitlan (now Mexico City) and surrounding territories ({% cite 'López Mora 2011' '14' %}).
 
-Immediately after their arrival, the Franciscans started the evangelizing to the north of Mexico City, reaching the lands of Tlalnepantla, where they constructed their first church—the Church of the Corpus Christi—in the 1530s. About ten chapels that belonged to the Corpus Christi church were built some decades later. One of them was the chapel of San Francis of Assisi Atizapan, although the first chapel with that name was later demolished. The current church of Saint Francis was built in the 1750s.[^1] That decade corresponds with the creation of the paintings, which suggests that the Apostolate series was made for the new church ([fig. 26.1](#fig-26-1)). In addition to these paintings, the church houses another group depicting saints known as the Doctors of the Church, which was painted by Carlos Clemente Lopez, a *cacique*[^2] artist active during eighteenth century ([[Ramírez Montes 2001]]\|, 106).
+Immediately after their arrival, the Franciscans started the evangelizing to the north of Mexico City, reaching the lands of Tlalnepantla, where they constructed their first church—the Church of the Corpus Christi—in the 1530s. About ten chapels that belonged to the Corpus Christi church were built some decades later. One of them was the chapel of San Francis of Assisi Atizapan, although the first chapel with that name was later demolished. The current church of Saint Francis was built in the 1750s.[^1] That decade corresponds with the creation of the paintings, which suggests that the Apostolate series was made for the new church ([fig. 26.1](#fig-26-1)). In addition to these paintings, the church houses another group depicting saints known as the Doctors of the Church, which was painted by Carlos Clemente Lopez, a *cacique*[^2] artist active during eighteenth century ({% cite 'Ramírez Montes 2001' %}\|, 106).
 
 {% figure 'fig-26-1' %}
 
@@ -82,7 +82,7 @@ A painting entitled *The Customs Yard* from 1775 by Nicolas-Bernard Lépicié, d
 
 In light of this evidence, we concluded that the canvases of the Apostolate paintings were made from the linen coverings of bales, which the artist bought to paint on. These merchant marks are also found in other important New Spanish paintings, such as the *Release of Saint Peter* by Pedro Ramirez and Miguel Cabrera’s *Holy Family* (both in the National Museum of the Viceroyalty), in others by Juan Correa, and in other anonymous paintings, such as a Virgin of Guadalupe from the Convent of Santa Brígida in Mexico City.
 
-In addition to the merchant marks, perforations in the canvases are also related to the supports’ original use. According to Paula Mues, “Repurposing canvases was also a common practice, whether by painting over existing works or by using fabrics that had defects or had been reclaimed from industrial processes. This explains why we often find canvases with a regular pattern of perforations, which were generally repaired by covering the holes with pieces of paper” ([[Mues Orts 2017]]\|, 57).
+In addition to the merchant marks, perforations in the canvases are also related to the supports’ original use. According to Paula Mues, “Repurposing canvases was also a common practice, whether by painting over existing works or by using fabrics that had defects or had been reclaimed from industrial processes. This explains why we often find canvases with a regular pattern of perforations, which were generally repaired by covering the holes with pieces of paper” ({% cite 'Mues Orts 2017' %}\|, 57).
 
 These features provided the guidelines to the conservation treatments applied to the canvases.
 
