--- a/content/5-adhesives/29.md
+++ b/content/5-adhesives/29.md
@@ -210,43 +210,43 @@ The investigation into adhesives for thread-by-thread tear mending and suitable 
 
 {% endbackmatter %}
 
-[^1]: Details about the general technique were described by Winfried Heiber, the pioneer of the thread-by-thread tear mending method ([[Heiber 1996]]; [[Heiber 2003]]; [[Heiber et al. 2012]]).
+[^1]: Details about the general technique were described by Winfried Heiber, the pioneer of the thread-by-thread tear mending method ({% cite 'Heiber 1996' %}; {% cite 'Heiber 2003' %}; {% cite 'Heiber et al. 2012' %}).
 
-[^2]: Compare with statements by Christina Young published in context of the 2003 Alternatives to Lining Conference ({% cite 'Young 2003' '55–56' %}), as well as [[Flock 2014]], [[Flock et al. 2021b]], [[Flock 2020]], and [[Flock et al. 2022]].
+[^2]: Compare with statements by Christina Young published in context of the 2003 Alternatives to Lining Conference ({% cite 'Young 2003' '55–56' %}), as well as {% cite 'Flock 2014' %}, {% cite 'Flock et al. 2021b' %}, {% cite 'Flock 2020' %}, and {% cite 'Flock et al. 2022' %}.
 
-[^3]: The publications of Winfried Heiber are basic information sources about the general technique of single thread bonding: see, for example, [[Heiber 1996]], [[Heiber 2003]], and [[Heiber et al. 2012]]. Individual essential aspects and more recent developments have been summarized by Petra Demuth ([[Demuth 2020]]). Details of the bonding procedure can be found in publications by Hannah Flock ({% cite 'Flock 2020' '23–28' %} and {% cite 'Flock et al. 2022' '173–80' %}).
+[^3]: The publications of Winfried Heiber are basic information sources about the general technique of single thread bonding: see, for example, {% cite 'Heiber 1996' %}, {% cite 'Heiber 2003' %}, and {% cite 'Heiber et al. 2012' %}. Individual essential aspects and more recent developments have been summarized by Petra Demuth ({% cite 'Demuth 2020' %}). Details of the bonding procedure can be found in publications by Hannah Flock ({% cite 'Flock 2020' '23–28' %} and {% cite 'Flock et al. 2022' '173–80' %}).
 
 [^4]: Several authors have described adhesive criteria, including {% cite 'Flock 2014' '25–33' %}, {% cite 'Reuber 2010' '17–20' %}, {% cite 'Young 2003' '56' %}, {% cite 'Flock 2020' '45–49' %} and {% cite 'Flock et al. 2022' '182–86' %}.
 
-[^5]: It is often stated as a rule of thumb that the adhesive should have a lower cohesion than the original fabric to prevent further damage, so that the bonded joint opens instead of new defects forming. However, this requirement must be specified to the effect that the resulting bond must have a lower cohesion than the surrounding material. This is of great relevance, as the adhesive behavior in the joint sometimes differs greatly from the pure adhesive material (compare to [[Flock 2014, 134–35]]). Thus, for example, both increased and reduced, of previously assumed, bond strengths can occur (based on the pure adhesive properties). Adhesive and cohesive behavior are therefore to be understood and considered as mutually influencing (compare to [[Flock 2020, 46–47]]).
+[^5]: It is often stated as a rule of thumb that the adhesive should have a lower cohesion than the original fabric to prevent further damage, so that the bonded joint opens instead of new defects forming. However, this requirement must be specified to the effect that the resulting bond must have a lower cohesion than the surrounding material. This is of great relevance, as the adhesive behavior in the joint sometimes differs greatly from the pure adhesive material (compare to {% cite 'Flock 2014' '134–35' %}). Thus, for example, both increased and reduced, of previously assumed, bond strengths can occur (based on the pure adhesive properties). Adhesive and cohesive behavior are therefore to be understood and considered as mutually influencing (compare to {% cite 'Flock 2020' '46–47' %}).
 
 [^6]: Especially regarding the often hygroscopic behavior of fabric, the bond achieved should have a certain tolerance to stress changes caused by climatic changes as well as transports of artworks or the like. The bonded area ideally accompanies the fabric’s movements instead of promoting local tension differences and thus markings. Hygroscopic adhesive properties are therefore often preferred. In this context, the rather fuzzy term of *required flexibility* is often used. It would certainly be desirable that the adhesive joint behaves in the sense of spontaneous, completely reversible shape change (elasticity, comparable to an ideal constant spring). However, a certain flexibility in the sense of adaptive behavior, which can have viscous or even plastic-ductile components within certain limits, is sometimes sufficient. Slight viscous creep tendencies of adhesives, which are similar to those of the original fabric, are therefore not necessarily a disadvantage, as long as the transfer of force through the bond can be guaranteed and no deformations or the like result. Brittle properties should be avoided. Elastic or “flexible” automatically leads to the need for suitable stiffness, that is, the corresponding resistance to (elastic) deformation: the adhesive joint should not be too soft or stretchy and should be able to transfer stresses without deformation. At the same time, overly rigid bonds should be avoided. Here in particular, the idea of the ideal adhesive material, which is sometimes perceived as contradictory, becomes clear. However, there is not so much a contradiction as a very specific, individual ideal that depends on the object, and is thus a hardly achievable mechanical property profile (compare to {% cite 'Flock 2020' '47–48' %}).
 
 [^7]: This means that, for example, the optical density, light refraction, transparency, translucency, or even opacity, and degree of gloss of the bonded area ideally correspond to the individual optical surface properties of the surrounding fabric.
 
-[^8]: Compare to [[Flock 2014]], [[Flock et al. 2019]], [[Flock et al. 2021a]], and [[Flock et al. 2021b]].
+[^8]: Compare to {% cite 'Flock 2014' %}, {% cite 'Flock et al. 2019' %}, {% cite 'Flock et al. 2021a' %}, and {% cite 'Flock et al. 2021b' %}.
 
-[^9]: For more details on scale effects, see, for example, {% cite 'Flock 2020' '51, 55' %}, [[Flock et al. 2021a]], [[Flock et al. 2021b]], and {% cite 'Flock 2014' '130–39' %}.
+[^9]: For more details on scale effects, see, for example, {% cite 'Flock 2020' '51, 55' %}, {% cite 'Flock et al. 2021a' %}, {% cite 'Flock et al. 2021b' %}, and {% cite 'Flock 2014' '130–39' %}.
 
-[^10]: This problem has already been published ([[Flock 2014]]); a more recent article in English describes the facts in the context of inevitable scattering results in bonding qualities ([[Flock et al. 2021a]]).
+[^10]: This problem has already been published ({% cite 'Flock 2014' %}); a more recent article in English describes the facts in the context of inevitable scattering results in bonding qualities ({% cite 'Flock et al. 2021a' %}).
 
 [^11]: Only in the biaxial long-term test, the durability of the bonds for the practical application can be conclusively tested, and a potentially disadvantageous creep behavior of the bonded joints be understood with sufficient test duration. A new type of creep test under constant load was designed for this purpose: the test setup enables the imitation of tensioned painting structures, testing of high sample numbers as well as a quantifiable evaluation of the bond behavior. For this purpose, a tensile frame was developed that allows constant biaxial tensile loading of the samples; digital image correlation (DIC) is used for local and global strain evaluation of the bonded area and the entire sample. In addition to serial testing, the developed long-term test setup also allows optional test extensions, for example, to include different tear geometries or external climatic influences. More details on the biaxial long-term test setup can be found in {% cite 'Flock 2020' '73–77, 124–29, 399–416, 445–49' %}.
 
-[^12]: The results are published in the dissertation of Hannah Flock, “Einzelfadenverklebung in der Gemälderestaurierung: Klebstoffe, Prüfsystematik und Ergebnisse” (Single-Thread Bonding in Painting Conservation: Adhesives, Testing Systematics and Results), see [[Flock 2020]]. The collaborative PhD project was located at the Chair of Applied Mechanics (LTM) at Saarland University, Saarbrücken, and the Cologne Institute of Conservation Sciences (CICS) at TH Köln, Cologne. The project was supervised by Prof. Dr.-Ing. Stefan Diebels (LTM) and Prof. Dr. Elisabeth Jägers (CICS). Defense of the dissertation, May 7, 2020 (summa cum laude). An English translation of the dissertation thesis is in preparation.
+[^12]: The results are published in the dissertation of Hannah Flock, “Einzelfadenverklebung in der Gemälderestaurierung: Klebstoffe, Prüfsystematik und Ergebnisse” (Single-Thread Bonding in Painting Conservation: Adhesives, Testing Systematics and Results), see {% cite 'Flock 2020' %}. The collaborative PhD project was located at the Chair of Applied Mechanics (LTM) at Saarland University, Saarbrücken, and the Cologne Institute of Conservation Sciences (CICS) at TH Köln, Cologne. The project was supervised by Prof. Dr.-Ing. Stefan Diebels (LTM) and Prof. Dr. Elisabeth Jägers (CICS). Defense of the dissertation, May 7, 2020 (summa cum laude). An English translation of the dissertation thesis is in preparation.
 
-[^13]: The results of previous test series have been published in different places: sources such as [[Reuber 2010]], [[Demuth et al. 2011]], and [[Flock 2020]] feature references to other publications.
+[^13]: The results of previous test series have been published in different places: sources such as {% cite 'Reuber 2010' %}, {% cite 'Demuth et al. 2011' %}, and {% cite 'Flock 2020' %} feature references to other publications.
 
-[^14]: Among the PVA dispersions considered, Mowilith DHS S1 showed satisfactory film properties, particularly homogeneous adhesive properties, and very good processing characteristics. It formed the most reliable bonds (compare to [[Flock 2014]] and [[Flock 2020b]]).
+[^14]: Among the PVA dispersions considered, Mowilith DHS S1 showed satisfactory film properties, particularly homogeneous adhesive properties, and very good processing characteristics. It formed the most reliable bonds (compare to {% cite 'Flock 2014' %} and {% cite 'Flock 2020b' %}).
 
-[^15]: Detailed information on the chosen setup has been published previously ([[Flock 2014]]; [[Flock 2020b]]). The details of the experimental design are therefore omitted from this section. Valuable advice for future test series, the experimental design and all the details, can be found at [[Flock 2020]].
+[^15]: Detailed information on the chosen setup has been published previously ({% cite 'Flock 2014' %}; {% cite 'Flock 2020b' %}). The details of the experimental design are therefore omitted from this section. Valuable advice for future test series, the experimental design and all the details, can be found at {% cite 'Flock 2020' %}.
 
 [^16]: Precise information on the materials and equipment used, as well as precise, illustrated instructions for the manufacture of bridging threads can be followed in detail ({% cite 'Flock 2014' 'A.4–A.5' %} and {% cite 'Flock 2020' '436' %}). The Beva 371 film was applied only on the single threads, not as a continuous layer. This idea refers to Winfried Heiber’s technique *Geweberasterhaftung* (fabric grid bonding): the melting of the thin adhesive film with a hot air gun leads to adhesive-free interstices and an accumulation of adhesive on the surface of the threads ({% cite 'Heiber 1987' '72–76' %} and {% cite 'Heiber 1999' '362–63' %}).
 
 [^17]: The specification of tensions for textile painting supports is problematic: values given in conservation literature usually cannot be compared or generally transferred. The cross sections of the painting’s layers are not known, therefore, a substitute “line-stress,” related to the fabric’s width (N/m), is often given. However, this value is given regardless of the individual structure; for example, details about the weave and fabric, type and homogeneity of the upper layers, or interaction of the layers, are not taken into account. Furthermore, with fabrics there are also concrete uncertainties when using the stress term, due to the “open-pored” structure: the fibers, which are made up from individual fibrils, are twisted together to form the threads. The threads, depending on the type of weave, interact at binding points (friction), or leave free interstices. In fact, there is no continuum, either in the individual thread, or in the fabric. Strictly speaking, no tension as stress can be defined. Hence, the approximation of the fabric as a continuous layer represents a high degree of abstraction. For this reason, also in textile technology and testing, the calculation of cross-sectional stresses (N/mm²) is uncommon. Instead, the maximum tensile forces (N) or the width-related maximum tensile force (N/m) are often used (compare to {% cite 'Flock 2020' '34' %} and {% cite 'Flock et al. 2022' '199' %}). However, such absolute values must always be embedded in the context of their details and cannot be used for simple comparisons of different sources, as is unfortunately still done (see, for example, {% cite 'Michalski 2022' '230–31' %}). The authors would like to distance themselves explicitly from such compilations.
 
-[^18]: The testing parameters of all mended samples as well as of intact reference samples were as follows: clamping length 100 mm, minor pre-load of 0.1 N with 5 mm/min, and test speed rate of 20 mm/min (compare to [[Flock et al. 2021b]]). Important note: in later tests a more suitable, increased pre-load of 1 N was implemented ({% cite 'Flock 2020' '62–63' %}).
+[^18]: The testing parameters of all mended samples as well as of intact reference samples were as follows: clamping length 100 mm, minor pre-load of 0.1 N with 5 mm/min, and test speed rate of 20 mm/min (compare to {% cite 'Flock et al. 2021b' %}). Important note: in later tests a more suitable, increased pre-load of 1 N was implemented ({% cite 'Flock 2020' '62–63' %}).
 
-[^19]: For more detail about investigations of inherent scatters see [[Flock et al. 2021a]].
+[^19]: For more detail about investigations of inherent scatters see {% cite 'Flock et al. 2021a' %}.
 
 [^20]: The tested reference canvas strips were each 12 threads wide or approximately 12.5 mm fabric width. Although a certain scaling effect can be seen for intact fabrics ({% cite 'Flock 2014' '84' %}), it should not be concluded that 270 N per 12.5 mm leads to a maximum load capacity of \~21,600 N/m. Nevertheless, it is clear that even 270 N/m is a value to which many canvas paintings are probably not permanently exposed.
 
@@ -258,9 +258,9 @@ The investigation into adhesives for thread-by-thread tear mending and suitable 
 
 [^24]: According to Fourier-transform infrared spectroscopy (FTIR) analyses by Elisabeth Jägers, the copolymeric EVA dispersion Evacon-R has a much higher proportion of ethylene, which acts as an internal plasticizer. Therefore, Evacon-R is much more stretchable and softer than pH-neutral adhesive Lineco (the product could be identified in the spectrum as an EVA dispersion, but its much lower proportion of ethylene could be the reason it is incorrectly identified as a homopolymeric PVA dispersion on the container bottle ({% cite 'Flock 2014' '28–29, A.3.2' %}).
 
-[^25]: These results were presented at the 2011 Canadian Conservation Institute symposium “Adhesives and Consolidants for Conservation: Research and Applications” ([[Demuth et al. 2011]]).
+[^25]: These results were presented at the 2011 Canadian Conservation Institute symposium “Adhesives and Consolidants for Conservation: Research and Applications” ({% cite 'Demuth et al. 2011' %}).
 
-[^26]: See {% cite 'Flock 2014' '52–56, 130–32' %}; compare to [[Flock et al. 2021b]].
+[^26]: See {% cite 'Flock 2014' '52–56, 130–32' %}; compare to {% cite 'Flock et al. 2021b' %}.
 
 [^27]: Due to ethylene as internal plasticizer: see note 24.
 
@@ -268,7 +268,7 @@ The investigation into adhesives for thread-by-thread tear mending and suitable 
 
 [^29]: Butt joints with the two-component epoxy UHU Plus Schnellfest had less tensile strength in comparison and also showed an increased scatter range of the bonding qualities. Epoxy resins are therefore not to be preferred for conventional linen fabrics. Presumably, the poor processing properties lead to lower bond strengths by comparison, unlike what would be expected from these high-strength adhesives ({% cite 'Flock 2020' '97, 153–55' %}).
 
-[^30]: This topic is described in detail in [[Flock et al. 2019]] and thus is briefly summarized here.
+[^30]: This topic is described in detail in {% cite 'Flock et al. 2019' %} and thus is briefly summarized here.
 
 [^31]: Arbocel fibers were considered as midlength fibers with 120–200 µm: a minimum length of 40 µm and a maximum of 300 µm were investigated. However, this does not directly indicate what the critical lower and upper fiber length limits are.
 
@@ -278,7 +278,7 @@ The investigation into adhesives for thread-by-thread tear mending and suitable 
 
 [^34]: Done by measuring 0.6 µl per thread with a fine pipette and reproducing the droplet volume with a microdosing device. See {% cite 'Flock 2014' '308–21' %} for details on device, materials, and procedure for adhesive dosing.
 
-[^35]: See [[Flock et al. 2019]] and [[Demuth and Flock 2019]]. For a summary in English, refer to <https://www.th-koeln.de/mam/downloads/deutsch/hochschule/fakultaeten/kulturwissenschaften/_englisch_.pdf>, pp. 6–10 (accessed April 26, 2022).
+[^35]: See {% cite 'Flock et al. 2019' %} and {% cite 'Demuth and Flock 2019' %}. For a summary in English, refer to <https://www.th-koeln.de/mam/downloads/deutsch/hochschule/fakultaeten/kulturwissenschaften/_englisch_.pdf>, pp. 6–10 (accessed April 26, 2022).
 
 [^36]: The Consolidation Pen Winnie comes with two sizes of syringes (0.5 ml and 1 ml): the maximum internal temperature is approximately 63°C–68°C. The precise fit of the reusable syringe allows optimal heat transfer. Syringes with a diameter of up to about 6.5 mm can be inserted. The use of a particularly short syringe is extremely handy, with a maximum length of approximately 11 cm including plunger. The flow and droplet formation of the adhesive solution are caused by the extremely low pressure of the syringe plunger. All the individual parts described, for example, syringes, low-binding pipette tips, and silicone tube, are included in the Winnie starter kit.
 
