--- a/content/6-interventions/30.md
+++ b/content/6-interventions/30.md
@@ -18,9 +18,9 @@ abstract: "The practice of minimal intervention came about as a response to inva
 
 The 1974 Greenwich Conference on Comparative Lining Techniques might be called the seminal meeting for the field of painting conservation in the twentieth century. Implicit was an international agreement that the craft-oriented methods used for the structural treatment of paintings in the past, specifically lining paintings, be reviewed in the context of scientific investigation, and that new, informed methods must be adopted for our profession to evolve and avoid the mistakes of the past.
 
-New tools like vacuum hot tables, low-pressure suction tables, and regulated humidity chambers were being developed and employed. Modern technology offered an expanding variety of new synthetic materials, which were being anxiously embraced, along with high-tech testing methods to evaluate these materials. All of this elicited excitement and confidence in all that was new to our profession. However, an underlying movement was stirring as well, mostly associated with a conservator named Westby Percival-Prescott, who was concerned about the notion that we must act prophylactically, and that we may be simply replacing the how and what without first addressing the why. ([[Villers 2003b]]).
+New tools like vacuum hot tables, low-pressure suction tables, and regulated humidity chambers were being developed and employed. Modern technology offered an expanding variety of new synthetic materials, which were being anxiously embraced, along with high-tech testing methods to evaluate these materials. All of this elicited excitement and confidence in all that was new to our profession. However, an underlying movement was stirring as well, mostly associated with a conservator named Westby Percival-Prescott, who was concerned about the notion that we must act prophylactically, and that we may be simply replacing the how and what without first addressing the why. ({% cite 'Villers 2003b' %}).
 
-Over the next couple of decades, a more cautious approach known as “Minimal Intervention” was becoming the mantra of more and more painting conservators. When I began my training in the mid-1980s, I was one of the young converts to this approach, even though some of my mentors considered Prescott an alarmist whose call for “a lining moratorium” was holding back progress in our field. While Prescott was advocating for caution and further investigation into both the efficacy and unintended consequences of lining, other critics soon came forward with much more scathing accusations of conservators destroying artworks due to their lack of connoisseurship and a rush to adopt new materials and methods ([[Walden 1985]]; [[Beck and Daley 1994]]).
+Over the next couple of decades, a more cautious approach known as “Minimal Intervention” was becoming the mantra of more and more painting conservators. When I began my training in the mid-1980s, I was one of the young converts to this approach, even though some of my mentors considered Prescott an alarmist whose call for “a lining moratorium” was holding back progress in our field. While Prescott was advocating for caution and further investigation into both the efficacy and unintended consequences of lining, other critics soon came forward with much more scathing accusations of conservators destroying artworks due to their lack of connoisseurship and a rush to adopt new materials and methods ({% cite 'Walden 1985' %}; {% cite 'Beck and Daley 1994' %}).
 
 A cadre of conservators were similarly advocating for what might be described as a gentler approach to treating paintings. Take, for example, the 1988 American Institute for Conservation (AIC) meeting in New Orleans. Sandwiched between the presentation of technical reports by two engineers, Gustav Berger and Marion Mecklenberg, Lance Mayer and Gay Myers presented a paper titled “Thoughts on Unlined Paintings.” In this presentation they pondered “the ways in which conservators wrestle…with the actual treatment of unlined paintings” ({% cite 'Mayer and Myers 1988' '222' %}) and stated that “The trend toward treating paintings conservatively implies…changing ways of thinking…\[toward\]…minimal treatment of problems as they develop, rather than thinking that any conservation treatment can solve all of a painting’s past, present and future problems” ({% cite 'Mayer and Myers 1988' '227' %}).
 
@@ -72,7 +72,7 @@ A suction platen may be the most versatile tool for local interventions. My desi
 
 ## Retensioning Tears
 
-While the Trecker, designed by Heiber ([[Demuth and Heiber 2000]]) is very useful for pulling the edges of tears together, its weight and size can make using it awkward, particularly in tight spots close to the stretcher bars.
+While the Trecker, designed by Heiber ({% cite 'Demuth and Heiber 2000' %}) is very useful for pulling the edges of tears together, its weight and size can make using it awkward, particularly in tight spots close to the stretcher bars.
 
 As seen in [fig. 30.8](#fig-30-8) a simple aluminum corner brace can be attached directly to the stretcher, with a piece of Fome-Cor used as a spacer so that the edge of the aluminum does not quite touch the reverse of the canvas. Then a thin piece of plastic G‑10 is slipped under the stretcher to protect the canvas from the edge of the aluminum. Unwaxed dental floss is attached to opposing sides of the tear with either Beva film or Command strips, and then threaded under the aluminum. Pushpins are tied to the other ends of the threads. Tension can then be incrementally increased to bring the edges of the tear together by pulling on and repositioning the pins.
 
