--- a/content/6-interventions/31.md
+++ b/content/6-interventions/31.md
@@ -42,9 +42,9 @@ abstract: "Structural damage to a canvas, such as tears, presents unique problem
 
 ## Introduction
 
-In the field of painting conservation, there are long-established treatment techniques for addressing structural repairs, such as tears in the canvas support. These techniques range from more invasive treatments, such as linings ([[Bailey 2017]]; [[Berger 1974]]; [[Berger 1975]]; [[Bernstein 1974]]; [[Fieux 1974]]; {:Goist 1977]]; [[Levenson 1974]]; [[Slabczynski 1960]]; [[Stoner 1994]]; [[Wales 1968]]) to less invasive treatments, such as patches and localized thread-by-thread repairs ([[Barnett 1992]]; [[Bustin 2003]]; [[Heiber 2003]]; [[Piotrowska and Amann 2009]]; [[Proctor 1994]]). After the 1974 Greenwich conference ([[Villers 2003b]]), there was a shift in thought away from invasive techniques and an effort to devise less-invasive techniques ([[Hackney 2004a]]; [[Keck 1977]]).
+In the field of painting conservation, there are long-established treatment techniques for addressing structural repairs, such as tears in the canvas support. These techniques range from more invasive treatments, such as linings ({% cite 'Bailey 2017' %}; {% cite 'Berger 1974' %}; {% cite 'Berger 1975' %}; {% cite 'Bernstein 1974' %}; {% cite 'Fieux 1974' %}; {:Goist 1977]]; {% cite 'Levenson 1974' %}; {% cite 'Slabczynski 1960' %}; {% cite 'Stoner 1994' %}; {% cite 'Wales 1968' %}) to less invasive treatments, such as patches and localized thread-by-thread repairs ({% cite 'Barnett 1992' %}; {% cite 'Bustin 2003' %}; {% cite 'Heiber 2003' %}; {% cite 'Piotrowska and Amann 2009' %}; {% cite 'Proctor 1994' %}). After the 1974 Greenwich conference ({% cite 'Villers 2003b' %}), there was a shift in thought away from invasive techniques and an effort to devise less-invasive techniques ({% cite 'Hackney 2004a' %}; {% cite 'Keck 1977' %}).
 
-The development of the thread-by-thread tear mending technique, published by Winfried Heiber ([[Heiber 2003]]; [[Proctor 1994]]), enabled a new phase of less-invasive treatments of structural repairs in painting conservation, which were more sympathetic to the canvas, did not alter the surface appearance of a painting, recreated the aesthetic properties of the canvas, and were reversible. Heiber’s technique involves the retwining of the torn and splayed threads and then reintegrating them into the weave matrix to reestablish the overall tension of the canvas in the torn and damaged area. It is well established that a fluctuating environment causes the canvas fibers to swell and contract ([[Cornelius 1967]]), placing stress on the canvas, paint layers, and any structural damage and repairs ([[Berger and Russell 1990]]). The theory behind Heiber’s repairs is that when individual fibers are reconnected, the integrity of the canvas is restored, and the whole canvas responds uniformly to environmental fluctuations; this in turn reduces localized stress on the mend.
+The development of the thread-by-thread tear mending technique, published by Winfried Heiber ({% cite 'Heiber 2003' %}; {% cite 'Proctor 1994' %}), enabled a new phase of less-invasive treatments of structural repairs in painting conservation, which were more sympathetic to the canvas, did not alter the surface appearance of a painting, recreated the aesthetic properties of the canvas, and were reversible. Heiber’s technique involves the retwining of the torn and splayed threads and then reintegrating them into the weave matrix to reestablish the overall tension of the canvas in the torn and damaged area. It is well established that a fluctuating environment causes the canvas fibers to swell and contract ({% cite 'Cornelius 1967' %}), placing stress on the canvas, paint layers, and any structural damage and repairs ({% cite 'Berger and Russell 1990' %}). The theory behind Heiber’s repairs is that when individual fibers are reconnected, the integrity of the canvas is restored, and the whole canvas responds uniformly to environmental fluctuations; this in turn reduces localized stress on the mend.
 
 The success of a Heiber mend is dependent on factors such as the type of damage to the canvas threads, as well as the size, direction, and location of the tear. The two most common categories of damage to the threads are tearing from the canvas weave and cuts, and the associated bonds for each affect the ability of the mend to withstand stresses. Tears involving torn threads can be reconnected by overlapping and intermingling fibers from opposing threads, and then adhering them with a small amount of adhesive. This type of join creates the strongest bond, and it can withstand greater amounts of stress. Tears where the threads have been cut are reconnected to the opposing thread with a butt join and a small amount of locally applied adhesive. This type of join relies mostly on the strength of the adhesive, rather than the combination of the canvas fibers and adhesive; it is less successful when placed under stress and less able to maintain planarity.
 
@@ -56,7 +56,7 @@ This paper uses four case studies undertaken at Amann + Estabrook Conservation A
 
 ## Verso Reinforcements
 
-At Amann + Estabrook, Gore-Tex sutures[^1] sewn into the weave matrix have been found to provide a passive, inert, and flexible support network that helps counter mechanical forces ([[Hartman 2017]]; [[Piotrowska and Amann 2009]]). They are fully reversible and can be removed easily if required. The sutures also lend themselves to variations and can be adapted to suit each individual case. They can be varied in length, concentration, and sewing methods, thereby reducing the potential for telegraphing through to the face.
+At Amann + Estabrook, Gore-Tex sutures[^1] sewn into the weave matrix have been found to provide a passive, inert, and flexible support network that helps counter mechanical forces ({% cite 'Hartman 2017' %}; {% cite 'Piotrowska and Amann 2009' %}). They are fully reversible and can be removed easily if required. The sutures also lend themselves to variations and can be adapted to suit each individual case. They can be varied in length, concentration, and sewing methods, thereby reducing the potential for telegraphing through to the face.
 
 Gore-Tex sutures, commonly used in dental surgery, are a microporous, flexible polytetrafluoroethylene monofilament with a stainless-steel needle fused to either end of the monofilament. They are soft and easy to manipulate. They can also be dyed to match the fabric support of a painting, and thus be a discreet addition to a conservation treatment. They come in a variety of monofilament thicknesses, needle gauges, and needle types. Generally, the preferred Gore-Tex suture for most treatments where suture reinforcements are needed is the thinnest gauge: monofilament CV-8 with a needle gauge of TTc-7 and a taper needle shape.
 
@@ -74,7 +74,7 @@ The painting had a 5 1/2 inch vertical tear located in the bottom left corner, 1
 
 The tear’s size, direction, location, and type within the overall painting are fundamental when determining the damage to the overall structural integrity of the canvas support caused by the tear. Once assessed, this helps determine how to proceed with conservation treatment. In this case, the tear was 5 1/2 inches long (13.9 cm), ran vertically, and was 23 3/4 to 28 5/8inches (60.3–72.7 cm) from the lower edge and 1 inch (2.5 cm) from the left turning edge. Lastly, the threads in the tear were torn rather than cut bluntly. The length of the tear was relatively small in proportion to the overall height of the painting—only 5%.
 
-Under observation while in the studio, the tear did not increase in size or form distortions within the support. From this, it was determined that the overall impact of the tear on the integrity of the canvas was minimal. As the tear ran vertically, it was estimated that the tear did not bear significant weight from the canvas and was not greatly affected by gravity. The location of the tear, close to the left turning edge and approximately 25 inches from the lower edge, was predicted to be under a low amount of strain—an estimate which was again supported by the lack of distortions in area ([[Berger and Russell 1988]]). Lastly, threads within the tear were torn and pulled out of the weave, which meant that, when rewoven, opposing threads would overlap and create a strong repair. As the tear’s size, direction, and location had minimal impact on the overall integrity of the canvas, additional verso reinforcements to the tear were not necessary; the treatment was more aesthetic than structural. This minimal approach provided the flexibility to potentially add reinforcements in the future should it be necessary.
+Under observation while in the studio, the tear did not increase in size or form distortions within the support. From this, it was determined that the overall impact of the tear on the integrity of the canvas was minimal. As the tear ran vertically, it was estimated that the tear did not bear significant weight from the canvas and was not greatly affected by gravity. The location of the tear, close to the left turning edge and approximately 25 inches from the lower edge, was predicted to be under a low amount of strain—an estimate which was again supported by the lack of distortions in area ({% cite 'Berger and Russell 1988' %}). Lastly, threads within the tear were torn and pulled out of the weave, which meant that, when rewoven, opposing threads would overlap and create a strong repair. As the tear’s size, direction, and location had minimal impact on the overall integrity of the canvas, additional verso reinforcements to the tear were not necessary; the treatment was more aesthetic than structural. This minimal approach provided the flexibility to potentially add reinforcements in the future should it be necessary.
 
 ### Treatment
 
@@ -92,7 +92,7 @@ The face of the painting was accidentally slashed with a boxcutter when the work
 
 ### Discussion
 
-Here again, the size, direction, location, and type of the tear all were major factors that influenced the treatment steps and consideration of verso reinforcements. The size of the tear was 13.5 inches (34.3 cm), which was 11% of the overall length of the edge of the painting. Because of this length, combined with the horizontal direction of the tear and its central location, it was estimated that there would be significant stress placed on the tear mend from the weight of the canvas. Another factor to consider in this case was the type of tear: a blunt cut, which meant no “reweaving” of the canvas would be possible due to the lack of overlapping threads. Mends for this type of tear mostly rely on the adhesive to bridge the tear, which makes them, generally, very weak mends ([[Flock et al. 2020]]). With these combined factors and the inherent flexibility of the canvas, it was determined that verso reinforcements of Gore-Tex sutures woven into the canvas weave were necessary to bridge the mend and create a lasting repair.
+Here again, the size, direction, location, and type of the tear all were major factors that influenced the treatment steps and consideration of verso reinforcements. The size of the tear was 13.5 inches (34.3 cm), which was 11% of the overall length of the edge of the painting. Because of this length, combined with the horizontal direction of the tear and its central location, it was estimated that there would be significant stress placed on the tear mend from the weight of the canvas. Another factor to consider in this case was the type of tear: a blunt cut, which meant no “reweaving” of the canvas would be possible due to the lack of overlapping threads. Mends for this type of tear mostly rely on the adhesive to bridge the tear, which makes them, generally, very weak mends ({% cite 'Flock et al. 2020' %}). With these combined factors and the inherent flexibility of the canvas, it was determined that verso reinforcements of Gore-Tex sutures woven into the canvas weave were necessary to bridge the mend and create a lasting repair.
 
 ### Treatment
 
