--- a/content/6-interventions/32.md
+++ b/content/6-interventions/32.md
@@ -17,7 +17,7 @@ abstract: "Today the collection of the Neue Pinakothek in Munich comprises a col
 
 Publications offer us only a fragmentary understanding of developments in conservation. One such fragment is the plea to “do in future only that which is absolutely necessary, and if in doubt, do nothing at all—always heeding the fact that each intervention is in and of itself irreversible” ({% cite 'Weddigen 1980' '30' %}). This statement represents a shift witnessed in the field of paintings conservation in German-speaking countries around 1980.[^1] This new approach called into question the suitability of lining canvas paintings as the default method for treating many types of defects. As a result, lining was indeed largely replaced by less invasive alternatives in the following years. Retaining an artwork’s “untouched” condition, thus enabling later generations to uncover clues whose significance may not yet be understood, gained importance as a value in its own right.[^2] Around the same time, an occupational profile was developed for conservation-restoration that defined academic training as a future standard. Considering the treatment of canvas paintings, this change took place over years and—depending on the country—at different times, influenced by leading conservators and university teaching. Nowadays, more than a generation of German-speaking conservators see lining as an almost exclusively historical technique that is only taught to elucidate its various methods.
 
-At the 1974 international Conference on Comparative Lining Techniques in Greenwich, lining was not yet challenged per se; the focus was on improving materials and methods. While the exchange of ideas across language borders was still quite limited at this time,[^3]the impact of this conference is nevertheless visible in some German publications published thereafter.[^4] By the annual meeting of the Deutscher Restauratorenverband (German Association of Conservators-Restorers) in 1980, however, lining was fundamentally questioned and alternatives sought ([[von Manteuffel-Szoege 1980]]). Here, probably for the first time in such an arena, thread-by-thread tear mending was presented ([[Gabler 1979]]). In Switzerland, too, criticism was being leveled at traditional lining techniques under the caption “Gaining experience through failure” ([[Weddigen 1981]]). Occasional discussions of improved lining methods followed,[^5] but from the 1990s onward it was all about tear mending with adhesives, and later stitching (see, for example, [[Heiber 1996]] and [[Beltinger 1992]]). In this context, retrospectives published in 1983 on the history of lining, marouflage, and paintings transfer assume an almost epitaphic quality ({Marty 1983}; [[Schaible 1983a]]; [[Schaible 1983b]]; [[Schiessl 1983]]).
+At the 1974 international Conference on Comparative Lining Techniques in Greenwich, lining was not yet challenged per se; the focus was on improving materials and methods. While the exchange of ideas across language borders was still quite limited at this time,[^3]the impact of this conference is nevertheless visible in some German publications published thereafter.[^4] By the annual meeting of the Deutscher Restauratorenverband (German Association of Conservators-Restorers) in 1980, however, lining was fundamentally questioned and alternatives sought ({% cite 'von Manteuffel-Szoege 1980' %}). Here, probably for the first time in such an arena, thread-by-thread tear mending was presented ({% cite 'Gabler 1979' %}). In Switzerland, too, criticism was being leveled at traditional lining techniques under the caption “Gaining experience through failure” ({% cite 'Weddigen 1981' %}). Occasional discussions of improved lining methods followed,[^5] but from the 1990s onward it was all about tear mending with adhesives, and later stitching (see, for example, {% cite 'Heiber 1996' %} and {% cite 'Beltinger 1992' %}). In this context, retrospectives published in 1983 on the history of lining, marouflage, and paintings transfer assume an almost epitaphic quality ({Marty 1983}; {% cite 'Schaible 1983a' %}; {% cite 'Schaible 1983b' %}; {% cite 'Schiessl 1983' %}).
 
 At a conservation conference in 1984, Winfried Heiber used a microscope linked to a projection screen to give a live demonstration of thread-by-thread tear mending.[^6] In his comprehensive description of the method published in 1996, Heiber noted in amazement that “an idea can quietly assert itself—with little to no publication, very modest practical instruction on the part of the protagonists, no indoctrination attempts and no divisive fundamental discussions” ({% cite 'Heiber 1996' '117' %}).
 
@@ -49,7 +49,7 @@ By contrast, only about a third of the paintings in the Neue Pinakothek were acq
 
 ## Conservation History of the Collections
 
-Initially, the paintings were still “young” and had little need for conservation. Any necessary treatments were carried out by Alte Pinakothek conservators (see also [[Wiesmann 2007]]). Some fifty years ago, with a growing number of museum buildings and an increase in staff, the responsibility of caring for certain collections was divided up among the conservators—a structure that is still in place today. This specialization reflects the altered professional profile of the conservator, who no longer steps in only once intervention is required but now also acts preventively by overseeing a host of museum processes, including exhibitions and loans.
+Initially, the paintings were still “young” and had little need for conservation. Any necessary treatments were carried out by Alte Pinakothek conservators (see also {% cite 'Wiesmann 2007' %}). Some fifty years ago, with a growing number of museum buildings and an increase in staff, the responsibility of caring for certain collections was divided up among the conservators—a structure that is still in place today. This specialization reflects the altered professional profile of the conservator, who no longer steps in only once intervention is required but now also acts preventively by overseeing a host of museum processes, including exhibitions and loans.
 
 Following the Second World War, the Doerner-Institut was affiliated with the Staatsgemäldesammlungen. Two separate restoration workshops then operated side by side until they were united under the name Doerner-Institut in 1977.[^7] Reports of previous differences in working methods can be simply summarized: The museum conservators tended to practice more “considered” collection care, preferring to rely on tradition and experience and thus taking a more cautious approach to new developments. The conservators at the research facility Doerner-Institut, on the other hand, were more open to experimental approaches using new materials and methods.
 
@@ -161,7 +161,7 @@ Great appreciation is due my teachers Winfried Heiber and Hans Brammer, who in d
 
 [^6]: Annual conference of the Deutscher Restauratorenverband 1984 in Marburg.
 
-[^7]: For the history of the Doerner-Institut, see [[Burmester 2016]].
+[^7]: For the history of the Doerner-Institut, see {% cite 'Burmester 2016' %}.
 
 [^8]: Bayerische Staatsgemäldesammlungen, Gemäldekataloge (Bavarian State Paintings Collections, catalogues), vols. II (1969), III (1978), IV (2003), V (1984), VI (1977), VII (1990), VIII/1–3 (2003).
 
@@ -183,4 +183,4 @@ Great appreciation is due my teachers Winfried Heiber and Hans Brammer, who in d
 
 [^17]: We have my predecessor, Konrad Laudenbacher, to thank for this collection of around 50 stretchers.
 
-[^18]: Reference is made to two examples of the author’s own research, in which analysis of the canvas attachments provided important information regarding artistic intention and history of the painting: [[Poggendorf 2015]] and [[Boitelle, Poggendorf, and Stevenson forthcoming]].
+[^18]: Reference is made to two examples of the author’s own research, in which analysis of the canvas attachments provided important information regarding artistic intention and history of the painting: {% cite 'Poggendorf 2015' %} and {% cite 'Boitelle, Poggendorf, and Stevenson forthcoming' %}.
