--- a/content/6-interventions/33.md
+++ b/content/6-interventions/33.md
@@ -36,7 +36,7 @@ The rehousing of the V&A’s reserve collection from premises in West London to 
 
 ## Early Preventive Conservation
 
-The first curator of paintings at the SKM, Richard Redgrave (1804–1888), had a protocol for dealing with newly acquired paintings that we would now describe as preventive conservation ([[Costaras 2013]]). Redgrave’s acquisition procedure involved cleaning the reverse of paintings, as well as the front, and putting a backing on the frame. A few years later, putting glass in the frames became a policy. During the years that I have worked at the V&A, a great many of the paintings in the collection have passed through the studio, and I have had the opportunity to observe their condition. It is striking how many canvases are unlined. I noted, thanks to helpful labels on the reverse, that the treatment of almost all the paintings that were lined was carried out in the 1890s or early 1900s by F. Haines & Sons (more of Haines & Sons later). Redgrave described the state of the Sheepshanks paintings on their acquisition in 1856:
+The first curator of paintings at the SKM, Richard Redgrave (1804–1888), had a protocol for dealing with newly acquired paintings that we would now describe as preventive conservation ({% cite 'Costaras 2013' %}). Redgrave’s acquisition procedure involved cleaning the reverse of paintings, as well as the front, and putting a backing on the frame. A few years later, putting glass in the frames became a policy. During the years that I have worked at the V&A, a great many of the paintings in the collection have passed through the studio, and I have had the opportunity to observe their condition. It is striking how many canvases are unlined. I noted, thanks to helpful labels on the reverse, that the treatment of almost all the paintings that were lined was carried out in the 1890s or early 1900s by F. Haines & Sons (more of Haines & Sons later). Redgrave described the state of the Sheepshanks paintings on their acquisition in 1856:
 
 > When in the spring of last year the pictures were given over to the Department, the greater number had been left, during the years they had been in Mr. Sheepshanks’ possession, in the state in which they had been purchased direct from the studios of the various artists or elsewhere…and all had gradually accumulated dirt and discoloration on their surface, and much dust behind the canvases (a source of mischief too often neglected). ({% cite 'Committee of Council on Education 1858' '64' %})
 
@@ -68,11 +68,11 @@ The correspondence between the SKM officials and Haines & Sons is in the museum 
 
 One of the paintings listed in the estimate, by David Teniers the Younger (1610–1690), *Rocky Landscape with Figures,* ca. 1660–1690 (1349-1869), came into the studio in 2014 prior to going on loan. The canvas support was sound and in plane. The label on the reverse reads, “1349-1869 Lined, the surface cleaned by / sponging. The old varnish removed by / friction and the picture thinly varnished / by Messrs F. Haines & Sons June 27, 1896.” There were two very small areas of lifting paint and a thin film of surface dirt, showing some air exchange into the frame. I fixed the paint with sturgeon glue and removed the dirt from front and back. It is satisfying to be able to link the estimate to the painting and see that the treatment was carried out and was effective.
 
-In the early days, paintings were sent to Haines & Sons’s premises. It was from Jacob Simon’s talk at the British Association of Paintings Conservator-Restorers conference, A Changing Art, held in London in 2016, that I learned of the correspondence with Haines & Sons regarding the equipment for setting up a lining studio within the SKM in 1892 ([[Simon 2017]]). The requirements included a 41 1/2 x 33 inch (105.4 x 83.8 cm) slate, four irons, and a set of looms of different sizes—at a cost of £5 for the slate, 25 shillings for each iron, and £6.15s for the looms.[^5]
+In the early days, paintings were sent to Haines & Sons’s premises. It was from Jacob Simon’s talk at the British Association of Paintings Conservator-Restorers conference, A Changing Art, held in London in 2016, that I learned of the correspondence with Haines & Sons regarding the equipment for setting up a lining studio within the SKM in 1892 ({% cite 'Simon 2017' %}). The requirements included a 41 1/2 x 33 inch (105.4 x 83.8 cm) slate, four irons, and a set of looms of different sizes—at a cost of £5 for the slate, 25 shillings for each iron, and £6.15s for the looms.[^5]
 
 In an estimate for lining and other treatments for four pictures, dated October 28, 1892, is a painting by John James Chalon, *Hastings: Boats Making the Shore in a Breeze,* 1819 (168 × 245 cm) (FA.234\[O\]).[^6] The cost of the lining was £1.10s; to remove the surface dirt and thinly varnish the painting was to cost £1.5s. The painting is still in good condition; both support and paint layers are sound. Interestingly, Haines & Sons may have preferred to continue to carry out the work on their premises rather than at the museum. In a postscript to the estimate, it states, “The price quoted—for doing them away from the Museum: if done at the Museum the cost would be somewhat more.”
 
-In the *Seventh Report of the Science and Art Department,* from1860, Redgrave recorded that he had started to place paintings at eye level under glass to protect them ([[Committee of Council on Education 1860]]). From the frames themselves we can see that the glass was placed in a removable, narrow, gilded frame that was inserted into the picture frame from the front. Protection front and back, even if not fully sealed, appears to have provided a useful buffer to fluctuating relative humidity and significantly slowed the deposition of dirt, particularly on the reverse.
+In the *Seventh Report of the Science and Art Department,* from1860, Redgrave recorded that he had started to place paintings at eye level under glass to protect them ({% cite 'Committee of Council on Education 1860' %}). From the frames themselves we can see that the glass was placed in a removable, narrow, gilded frame that was inserted into the picture frame from the front. Protection front and back, even if not fully sealed, appears to have provided a useful buffer to fluctuating relative humidity and significantly slowed the deposition of dirt, particularly on the reverse.
 
 The first donations and bequests in the 1850s to 1880s, which were near-contemporary art at the time, have benefited the most from the preventive conservation practices. Scanning a list of paintings acquired in 1869, the Townshend Bequest, I noted that many were less than ten years old. Similarly, of the ninety-five paintings acquired in 1886, a large number were between ten and twenty years old. It is true that some exhibit drying cracks from the use of materials popular at the time, but the significant point is that no age cracks are yet obvious on many of these paintings. The recent work preparing the reserve collection for its move to East London has shown that most of the paintings with problems are those that either had no backing or had lost it.
 
@@ -104,7 +104,7 @@ Three Korean paintings on cotton were acquired recently, which date from the ear
 
 {% figure 'fig-33-6' %}
 
-Preparations for a touring exhibition of the works of John Constable meant that 50 oil sketches passed through the studio in 2010.[^13] *Landscape with Double Rainbow,* 1812 (33.7 x 38.4 cm) (328-1888), is on a mixture of supports, paper adhered to canvas as well as an original lining. Constable used a variety of supports for his oil sketches: frequently a homemade paper laminate, primed in different colors. At other times he reused his own canvas paintings, cutting them into small sections ([[Costaras and Richardson 2010]]). It is possible that in this instance he tried to peel off one layer of paper to get a fresh surface to paint on; the surface is irregular, with sections of paper missing. Clare Richardson and I speculated that Constable used the nearest support to hand to capture the fleeting atmospheric effect. An X-ray image shows at least one other composition within the support ({% cite 'Costaras and Richardson 2010' '151' %}).
+Preparations for a touring exhibition of the works of John Constable meant that 50 oil sketches passed through the studio in 2010.[^13] *Landscape with Double Rainbow,* 1812 (33.7 x 38.4 cm) (328-1888), is on a mixture of supports, paper adhered to canvas as well as an original lining. Constable used a variety of supports for his oil sketches: frequently a homemade paper laminate, primed in different colors. At other times he reused his own canvas paintings, cutting them into small sections ({% cite 'Costaras and Richardson 2010' %}). It is possible that in this instance he tried to peel off one layer of paper to get a fresh surface to paint on; the surface is irregular, with sections of paper missing. Clare Richardson and I speculated that Constable used the nearest support to hand to capture the fleeting atmospheric effect. An X-ray image shows at least one other composition within the support ({% cite 'Costaras and Richardson 2010' '151' %}).
 
 Constable painted over the top of the torn paper and canvas support regardless, lined it, and continued to work on it. When it came to the studio, the canvases were delaminating and the edges were frail. Wheat-starch paste was used to reattach the two canvases and left to dry under weight. With the help of Susan Catcher, our colleague in Paper Conservation, we strip-lined the painting with wheat-starch paste and Japanese paper ([fig. 33.7](#fig-33-7)). Wheat-starch paste was also used to attach the paper to the strainer. Serendipitously, the shrinkage of the paper as it dried exerted a gentle tension on the canvas without making it too taut.
 
