--- a/content/7-modern-contemporary/39.md
+++ b/content/7-modern-contemporary/39.md
@@ -23,9 +23,9 @@ abstract: "In 2018, the Conservation Department of the Menil Collection performe
 
 “Why subject it to this rack-like torture? . . . Restorers are amazing. They have transformed my guitar into a tambourine.” So said Georges Braque to John Richardson after viewing one of his still lifes that had been wax-resin lined. He completed the sentiment with a tap of his brush on the painting’s taut surface ({% cite 'Richardson 2004' '533' %}).
 
-In 2016, the Conservation Department at the Menil Collection began a long-anticipated cleaning of Georges Braque’s 1943 painting *Pitcher, Candlestick, and Black Fish* (*Vase et poisson noir*). The painting had been treated in 1961 by Caroline Keck, receiving a “superficial cleaning,” wax-resin lining, and a poly butyl methacrylate varnish.[^1] The motivation for lining was largely preventative. In a letter in the painting’s file, Keck explains that “the result of the rolling and its mishandling has caused cracks to develop, some easily seen with the eye in the yellow area, others developing definitely in the structure but visible under magnification only at this stage…this is an important moment to treat the painting, to prevent any serious damage and even loss of surface as these cracks go further.”[^2] The painting was likely rolled twice in 1940, when Braque travelled to the south of France and then back to Paris at the beginning of World War II ([[Danchev 2006]]).
+In 2016, the Conservation Department at the Menil Collection began a long-anticipated cleaning of Georges Braque’s 1943 painting *Pitcher, Candlestick, and Black Fish* (*Vase et poisson noir*). The painting had been treated in 1961 by Caroline Keck, receiving a “superficial cleaning,” wax-resin lining, and a poly butyl methacrylate varnish.[^1] The motivation for lining was largely preventative. In a letter in the painting’s file, Keck explains that “the result of the rolling and its mishandling has caused cracks to develop, some easily seen with the eye in the yellow area, others developing definitely in the structure but visible under magnification only at this stage…this is an important moment to treat the painting, to prevent any serious damage and even loss of surface as these cracks go further.”[^2] The painting was likely rolled twice in 1940, when Braque travelled to the south of France and then back to Paris at the beginning of World War II ({% cite 'Danchev 2006' %}).
 
-That Braque sought variation in his final surfaces is effectively demonstrated by Favero, Mysak, and Khandekar in their technical study of twenty-one paintings from 1928 to 1944. Braque achieved a variety of textural effects by mixing sand, fine gravel, and quartz into his grounds or using combs and sculptors’ tools to scrape through wet paint ([[Favero, Mysak, and Khandekar 2013]]). He created more delicate variations of surface by mixing varnish or beeswax into the paint or by selectively varnishing certain passages. Richardson describes his practice of applying a varnish to certain passages, sometimes according to a viewer’s expectations of an object’s reflectance (as in his paintings of the 1920s and ’30s, where shiny objects such as a glass vase received a glossy finish while matte objects such as a lemon received nothing), or sometimes in deliberately playful ways that go against a viewer’s expectations by rendering inherently shiny objects matte ({% cite 'Richardson 2004' '533' %}).
+That Braque sought variation in his final surfaces is effectively demonstrated by Favero, Mysak, and Khandekar in their technical study of twenty-one paintings from 1928 to 1944. Braque achieved a variety of textural effects by mixing sand, fine gravel, and quartz into his grounds or using combs and sculptors’ tools to scrape through wet paint ({% cite 'Favero, Mysak, and Khandekar 2013' %}). He created more delicate variations of surface by mixing varnish or beeswax into the paint or by selectively varnishing certain passages. Richardson describes his practice of applying a varnish to certain passages, sometimes according to a viewer’s expectations of an object’s reflectance (as in his paintings of the 1920s and ’30s, where shiny objects such as a glass vase received a glossy finish while matte objects such as a lemon received nothing), or sometimes in deliberately playful ways that go against a viewer’s expectations by rendering inherently shiny objects matte ({% cite 'Richardson 2004' '533' %}).
 
 In *Pitcher,* the cleaning revealed that Braque manipulated the final surface sheen with two black paints—one that is velvety matte and one that is glossy—to establish subtle contrasts across the surface.[^3] For instance, a fish featured in the foreground is almost entirely painted in matte black paint except for two small reveals around its eye and gills where Braque left underlying glossy paint in reserve, creating a shiny iris and gleaming gill line ([fig. 39.1](#fig-39-1)).
 
@@ -39,7 +39,7 @@ Given Braque’s practices regarding his differentiated paint surfaces, the rati
 
 ## Treatment Trials
 
-The wax extraction on the painting was preceded by forty-eight test trials performed on strips of the lining canvas, which was removed from the painting mechanically by peeling it back at a low angle. Examination of the canvas fibers after removal of the lining revealed that they were in good condition and had not been shaved prior to lining. Of the trials, the first twenty-eight were more exploratory in nature, while the final twenty were more controlled, as the most important treatment parameters emerged. The lining canvas strips were subjected to different conditions exploring multiple variables, including solvent location in relation to the bulk of the wax-resin mixture (whether the solvent was introduced from the back or from both front and back), the type of solvent, the solvent delivery system (brush-applied, gelled, or by fabric), the wicking layers (number of layers, type of material used, and frequency of change out during treatment), the temperature, and the use of suction. Initially, gels were used as a solvent delivery system, after the methods published by Bettina Landgrebe and Gunnar Heydenreich ([[Landgrebe 1988]]; [[Heydenreich 1994]]). However, relatively early on, it became clear that Evolon CR could deliver solvent as effectively as a gel, while minimizing preparation and simultaneously acting as a means for absorption.
+The wax extraction on the painting was preceded by forty-eight test trials performed on strips of the lining canvas, which was removed from the painting mechanically by peeling it back at a low angle. Examination of the canvas fibers after removal of the lining revealed that they were in good condition and had not been shaved prior to lining. Of the trials, the first twenty-eight were more exploratory in nature, while the final twenty were more controlled, as the most important treatment parameters emerged. The lining canvas strips were subjected to different conditions exploring multiple variables, including solvent location in relation to the bulk of the wax-resin mixture (whether the solvent was introduced from the back or from both front and back), the type of solvent, the solvent delivery system (brush-applied, gelled, or by fabric), the wicking layers (number of layers, type of material used, and frequency of change out during treatment), the temperature, and the use of suction. Initially, gels were used as a solvent delivery system, after the methods published by Bettina Landgrebe and Gunnar Heydenreich ({% cite 'Landgrebe 1988' %}; {% cite 'Heydenreich 1994' %}). However, relatively early on, it became clear that Evolon CR could deliver solvent as effectively as a gel, while minimizing preparation and simultaneously acting as a means for absorption.
 
 A general setup of the trials from the Willard suction table surface upward was as follows: heat and/or suction provided by a vacuum hot table, one to three wicking layers (Evolon CR, paper towels, or linen), an “acting” solvent layer (sheet of Evolon CR or gel containing a solvent with a high chemical affinity for the wax resin), the lining canvas strip face up,[^5] and in some trials a low-polarity “superficial” solvent applied by brush or Evolon CR to the face. Evolon CR is a nonwoven textile composed of polyester and polyamide microfilaments that can absorb up to four times its weight in water and slightly more than that in hydrocarbon solvents.[^6] The acting solvent layer is meant to promote dissolution of the wax resin, while the superficial solvent encourages movement of deeply impregnated wax resin out of the lining canvas and into the wicking layers below.
 
@@ -111,7 +111,7 @@ In addition to an improved clarity of weave, a number of previously invisible ma
 
 {% figure 'fig-39-6' %}
 
-Several areas of lighter canvas appeared on the back, including six horizontal lines, corresponding with cracks on the front, and a few larger forms, coinciding with areas of thin paint application. It seems likely that these, and other intermittent light areas, are areas of blanched wax or wax resin left in the canvas interstices. Some of these light areas have fine white deposits; Fourier transform infrared (FTIR) analysis of a sample from one deposit closely matches the reference spectra for wax.[^9] Current analysis is inconclusive regarding the presence of a resin such as dammar, Ketone Resin N, or Zonarez B-85, which were common components in the Kecks’ wax-resin mixtures.[^10] Analysis of the white deposits with gas-chromatography mass-spectrometry is forthcoming. UV photos taken of the back of the canvas after wax-extraction show a faint fluorescence in these areas, suggesting the presence of wax or wax-resin residues ([fig. 39.7](#fig-39-7)). The blanching may be related to the higher evaporation rate of solvents at an air interface, such as a comparatively open pathway of a crack versus a solid paint film ([[Hansen 1970]]).
+Several areas of lighter canvas appeared on the back, including six horizontal lines, corresponding with cracks on the front, and a few larger forms, coinciding with areas of thin paint application. It seems likely that these, and other intermittent light areas, are areas of blanched wax or wax resin left in the canvas interstices. Some of these light areas have fine white deposits; Fourier transform infrared (FTIR) analysis of a sample from one deposit closely matches the reference spectra for wax.[^9] Current analysis is inconclusive regarding the presence of a resin such as dammar, Ketone Resin N, or Zonarez B-85, which were common components in the Kecks’ wax-resin mixtures.[^10] Analysis of the white deposits with gas-chromatography mass-spectrometry is forthcoming. UV photos taken of the back of the canvas after wax-extraction show a faint fluorescence in these areas, suggesting the presence of wax or wax-resin residues ([fig. 39.7](#fig-39-7)). The blanching may be related to the higher evaporation rate of solvents at an air interface, such as a comparatively open pathway of a crack versus a solid paint film ({% cite 'Hansen 1970' %}).
 
 {% figure 'fig-39-7' %}
 
@@ -119,7 +119,7 @@ UV photos were taken of all eight Evolon CR sheets used during treatment as a wa
 
 The weight of the canvas decreased by 14%, a percentage significantly lower than the weight changes that were achieved during the most successful trials, which were consistently over 30%.[^11] The percentage difference between the trials and the painting does not necessarily mean less wax resin was removed, however, because—when compared to the lining canvas strips—the wax resin contributed less to the weight of the painting due to the paint and ground layers.
 
-Spectrophotometry measurements were taken from fifteen locations in total: 3 from the ground on the tacking margins and twelve from areas within the face of the painting. The measurements of the ground on the tacking margins confirmed quantitatively what is apparent visually: the color of the ground became lighter and warmer.[^12] The ΔE~76~ of an average of three measurements taken from the ground is 4.12 ± 0.41, the L\* increased by 3.71 ±0.37 toward white, the a\* increased by 0.537 ± 0.12 toward red, and the b\* increased by 1.71 ±0.20 toward yellow. It is likely the reduction in wax resin increased scattering, resulting in a brighter color ([[Rees Jones 1990]]).
+Spectrophotometry measurements were taken from fifteen locations in total: 3 from the ground on the tacking margins and twelve from areas within the face of the painting. The measurements of the ground on the tacking margins confirmed quantitatively what is apparent visually: the color of the ground became lighter and warmer.[^12] The ΔE~76~ of an average of three measurements taken from the ground is 4.12 ± 0.41, the L\* increased by 3.71 ±0.37 toward white, the a\* increased by 0.537 ± 0.12 toward red, and the b\* increased by 1.71 ±0.20 toward yellow. It is likely the reduction in wax resin increased scattering, resulting in a brighter color ({% cite 'Rees Jones 1990' %}).
 
 Following the wax-resin extraction, the tacking margins received an edge-lining with linen and Beva 371 film. During restretching, some consolidation was necessary along the turnover edges, and it was possible to use sturgeon glue, indicating the possibility of treatment with aqueous methods. The painting will receive a rigid backing board and will be reframed and glazed.
 
@@ -137,9 +137,9 @@ We need to better understand what is causing the blanching around cracks and are
 
 ## Conclusion
 
-Wax-resin linings have a mixed legacy—they partially address physics at the expense of certain aesthetics. Qualities like saturation and color harmony are sacrificed for a planarity free from distortions that can impair legibility. Though wax-resin impregnation has been shown to improve tensile properties ([[Hedley 1975]]) and increase protection against changes in humidity for short exposure times ([[Young and Ackroyd 2001]]), it has also been shown to increase contraction forces resulting from long exposures to high humidity ([[Andersen et al. 2014]]).
+Wax-resin linings have a mixed legacy—they partially address physics at the expense of certain aesthetics. Qualities like saturation and color harmony are sacrificed for a planarity free from distortions that can impair legibility. Though wax-resin impregnation has been shown to improve tensile properties ({% cite 'Hedley 1975' %}) and increase protection against changes in humidity for short exposure times ({% cite 'Young and Ackroyd 2001' %}), it has also been shown to increase contraction forces resulting from long exposures to high humidity ({% cite 'Andersen et al. 2014' %}).
 
-Its impact on color change is similarly contradictory. Wax-resin linings affect color saturation to varying degrees, dependent upon the presence of sizing, pigment type, medium type, layer thickness, and hiding power ({% cite 'Nieder, Hendricks, and Burnstock 2011' '98' %}; {% cite 'Froment 2019' '439' %}). Bomford and Staniforth have demonstrated that wax-resin impregnation has a significant impact on the color of canvas of varying weights as well as grounds of differing compositions, particularly those that are underbound, but whether such a change is visible in the painting is dependent on the degree to which the canvas or ground plays a visible role in the composition ([[Bomford and Staniforth 1981]]). Though recent studies have indicated that certain artists chose to have their paintings lined very early in a painting’s life or even during the painting process ([[Hackney 2004b]]), it is clear from Richardson’s writings that Braque preferred a surface in which the variable qualities of stretched canvas are visible.
+Its impact on color change is similarly contradictory. Wax-resin linings affect color saturation to varying degrees, dependent upon the presence of sizing, pigment type, medium type, layer thickness, and hiding power ({% cite 'Nieder, Hendricks, and Burnstock 2011' '98' %}; {% cite 'Froment 2019' '439' %}). Bomford and Staniforth have demonstrated that wax-resin impregnation has a significant impact on the color of canvas of varying weights as well as grounds of differing compositions, particularly those that are underbound, but whether such a change is visible in the painting is dependent on the degree to which the canvas or ground plays a visible role in the composition ({% cite 'Bomford and Staniforth 1981' %}). Though recent studies have indicated that certain artists chose to have their paintings lined very early in a painting’s life or even during the painting process ({% cite 'Hackney 2004b' %}), it is clear from Richardson’s writings that Braque preferred a surface in which the variable qualities of stretched canvas are visible.
 
 A treatment such as this one is not undertaken lightly. In terms of solvent amounts and their potential effects on paint films, the treatment is not dissimilar to the process of cleaning. Above all, the words of the artist offer direction. Without its lining, *Pitcher, Candlestick, and Black Fish* presents a planarity that is more congruent with its age and honors its history. Furthermore, reduction of the wax-resin adhesive allows physical response to environmental fluctuations. Perhaps most importantly, it restores the relationship of the canvas’s materiality and paint layers to one more in keeping with Braque’s artistic practice. When considering Braque’s statements about the interconnectedness of those two elements at the start of treatment, the question became why continue to subject it to this racklike torture?
 
@@ -197,7 +197,7 @@ All trials involved the following procedure with adjustments for specific variab
 
 [^3]: The painting was surface cleaned with saliva, the poly butyl methacrylate coating was removed with ShellSol A100 and cotton swabs, and the bleached shellac coating was removed with a sequential application of isopropanol and 2,2,4 trimethyl pentane (iso-octane) applied with cotton swabs or a brush while working underneath the microscope.
 
-[^4]: FTIR data taken by C. E. Rogge, using the same instrumental parameters as in note 1. Photographs of the varnished painting taken under ultraviolet illumination showed a coating with a blue-green fluorescence, rather than the characteristic orange fluorescence typically associated with shellac. Chemical bleaching destroys the compounds responsible for the orange fluorescence. See [[Sutherland 2010]].
+[^4]: FTIR data taken by C. E. Rogge, using the same instrumental parameters as in note 1. Photographs of the varnished painting taken under ultraviolet illumination showed a coating with a blue-green fluorescence, rather than the characteristic orange fluorescence typically associated with shellac. Chemical bleaching destroys the compounds responsible for the orange fluorescence. See {% cite 'Sutherland 2010' %}.
 
 [^5]: The face was defined as the side that had the least amount of wax resin.
 
