--- a/content/7-modern-contemporary/40.md
+++ b/content/7-modern-contemporary/40.md
@@ -21,7 +21,7 @@ abstract: "Single cracks in contemporary paintings on canvas can be disfiguring 
 
 ## Introduction
 
-Single cracks or localized cracks in contemporary paintings on canvas can be disfiguring due to cupping. A local treatment, if successful, has the advantage of avoiding risks that a whole painting treatment presents to the remainder of the painting. Although cupping may be removed temporarily by moisture, solvent vapors, and/or heat, maintaining flatness may require reinforcements, which in turn, may surface.[^1] In 1999, we published a study of fourteen different methods for local treatments of such cracks in slack paintings ([[Hough and Michalski 1999]]). Here, we will discuss the appearance of these treatments in paintings twenty-one years later, with and without keying out (i.e., with both taut and slack conditions).
+Single cracks or localized cracks in contemporary paintings on canvas can be disfiguring due to cupping. A local treatment, if successful, has the advantage of avoiding risks that a whole painting treatment presents to the remainder of the painting. Although cupping may be removed temporarily by moisture, solvent vapors, and/or heat, maintaining flatness may require reinforcements, which in turn, may surface.[^1] In 1999, we published a study of fourteen different methods for local treatments of such cracks in slack paintings ({% cite 'Hough and Michalski 1999' %}). Here, we will discuss the appearance of these treatments in paintings twenty-one years later, with and without keying out (i.e., with both taut and slack conditions).
 
 ## Mechanical Modeling
 
@@ -31,7 +31,7 @@ During curing, paint layers (which are “fatter” layers) attempt to shrink mo
 
 {% figure 'fig-40-1' %}
 
-By combining equations from geometry with Timoshenko’s equation for curvature of a two-layer laminate ([[Timoshenko 1925]]), we can derive the height of the curl in the paint-ground laminate.[^2] Height depends on the difference in shrinkages, the thickness of the laminate (in this case, paint and ground), and the width (w) of the region that is free to curl. The inset graph of [fig. 40.1](#fig-40-1) shows cupping height (y-axis) for various laminate thicknesses (x-axis), for paintings where the paint layers are equal to, or not more than a few times thicker than, the ground, and are not especially soft compared to the ground.[^3] Plots are shown for a range of differential shrinkages, with 0.2% as a difference we can expect for an oil paint on a lean ground, whether oil or acrylic.[^4] The blue circle marks the predicted curl for the model paintings in this study. Much larger shrinkages due to severe aging or solvent leaching will drive much larger curl.
+By combining equations from geometry with Timoshenko’s equation for curvature of a two-layer laminate ({% cite 'Timoshenko 1925' %}), we can derive the height of the curl in the paint-ground laminate.[^2] Height depends on the difference in shrinkages, the thickness of the laminate (in this case, paint and ground), and the width (w) of the region that is free to curl. The inset graph of [fig. 40.1](#fig-40-1) shows cupping height (y-axis) for various laminate thicknesses (x-axis), for paintings where the paint layers are equal to, or not more than a few times thicker than, the ground, and are not especially soft compared to the ground.[^3] Plots are shown for a range of differential shrinkages, with 0.2% as a difference we can expect for an oil paint on a lean ground, whether oil or acrylic.[^4] The blue circle marks the predicted curl for the model paintings in this study. Much larger shrinkages due to severe aging or solvent leaching will drive much larger curl.
 
 The size layer is not considered in this model for curl (equations for a three-layer system are beyond the scope of this paper). However, one can expect shrinkage of the size layer to counteract shrinkage of the paint layer, especially at low humidities, but in Hough’s measurements of curl in the experimental samples (see Profile Measurement below), curl definitely increased with lower relative humidity (RH) ({% cite 'Hough 2000' 'fig. 11' %}),[^5] showing that shrinkage of the paint layer dominated shrinkage of the size layer. We can qualify this simple two-layer model for curl, paint-ground, as an estimate of the maximum expected curl.
 
@@ -121,7 +121,7 @@ Details of each treatment are as follows. 1. Moisture, heat, and flattening; no 
 
 In the first phase of the study, the profiles of each crack were scanned using a mechanical scanner developed for this project. The scanner provided a profile of a 20.5 cm (8 in.) line perpendicular to the center of the crack, with a sensitivity of about 1µm in height. Unfortunately, over the years the scanner had been discarded, so for the height measurements at twenty-one years, we used calibrated raking light photographs. Calibration was made using a 0.6 mm leaf from a feeler gauge, held firmly below each crack by magnets behind the painting.
 
-For further information on the experimental methods and materials, and initial results for the slack painting condition, please refer to our article ([[Hough and Michalski 1999]]) or Hough’s thesis ([[Hough 2000]]).
+For further information on the experimental methods and materials, and initial results for the slack painting condition, please refer to our article ({% cite 'Hough and Michalski 1999' %}) or Hough’s thesis ({% cite 'Hough 2000' %}).
 
 ### Taut Painting Condition
 
@@ -199,7 +199,7 @@ Our conclusions fall into two categories: those that have practical ramification
 
 -   The neatest theoretical solution to both cupping and surfacing would be to adhere the fracture faces in a butt joint. Treatment 14 showed moderately good control of cupping. This treatment may eventually fail, but at least it will never surface. For this reason alone, more study of this option is warranted.
 
--   Data on samples before treatment showed that low RH substantially increases curl ([[Hough 2000]]). Low RH also drives overall tension in a painting. Therefore, low RH will drive curl in slack paintings and surfacing in taut paintings.
+-   Data on samples before treatment showed that low RH substantially increases curl ({% cite 'Hough 2000' %}). Low RH also drives overall tension in a painting. Therefore, low RH will drive curl in slack paintings and surfacing in taut paintings.
 
 -   Careful lighting can reduce the visibility of cupping.
 
@@ -223,11 +223,11 @@ Our conclusions fall into two categories: those that have practical ramification
 
 [^3]: Given initial values of m=n=1 (see previous note) a plot of h stays within 25% of initial value despite changes in thickness ratio, n, by a factor of 3, or changes in elasticity ratio, m, by a factor of 7. Heavy impasto, or paints known to be soft, such as poor driers, will need the full equation, rather than the graph of [fig. 40.1](#fig-40-1).
 
-[^4]: Curing shrinkage of linseed oil was suggested as a contributor to paint failure as early as 1929 ([[Clark and Tschentke 1929]]). Pure medium with driers, cured in the dark, shrank 1% to 1.6% by volume, so 0.3%–0.5% in length. A paint of 35% pigment volume concentration (PVC) would experience \~65% of pure oil values, so \~0.2–0.3%. A ground at critical PVC would shrink negligibly in comparison. Browne reported dimensional change for films of linseed oil paints after they were released from the casting substrate and exposed to cycles of high relative humidity ([[Browne 1955]]). Michalski plotted the nonrecoverable shrinkage from Browne’s data: \~0.3% for an oil paint of 30% PVC, consistent with Clark and Tschentke ({% cite 'Michalski 1991' 'n25' %}).
+[^4]: Curing shrinkage of linseed oil was suggested as a contributor to paint failure as early as 1929 ({% cite 'Clark and Tschentke 1929' %}). Pure medium with driers, cured in the dark, shrank 1% to 1.6% by volume, so 0.3%–0.5% in length. A paint of 35% pigment volume concentration (PVC) would experience \~65% of pure oil values, so \~0.2–0.3%. A ground at critical PVC would shrink negligibly in comparison. Browne reported dimensional change for films of linseed oil paints after they were released from the casting substrate and exposed to cycles of high relative humidity ({% cite 'Browne 1955' %}). Michalski plotted the nonrecoverable shrinkage from Browne’s data: \~0.3% for an oil paint of 30% PVC, consistent with Clark and Tschentke ({% cite 'Michalski 1991' 'n25' %}).
 
 [^5]: Since the RH in the room where cupping was measured varied gradually over the course of the study, all cupping heights prior to treatment were plotted versus RH in order to derive a correction factor to normalize results to 50% RH. The factor was 2.1% height increase per 1% RH drop, for example, 21% height increase when RH is reduced from 50% to 40% RH (slack paintings).
 
-[^6]: The stress-alignment concept was introduced to our field in an unpublished report by Marion Mecklenburg. His original term was “force realignment” ([[Mecklenburg 1982]]).
+[^6]: The stress-alignment concept was introduced to our field in an unpublished report by Marion Mecklenburg. His original term was “force realignment” ({% cite 'Mecklenburg 1982' %}).
 
 [^7]: The original formulation of Beva was used in all experiments.
 
