--- a/content/8-posters/41.md
+++ b/content/8-posters/41.md
@@ -30,7 +30,7 @@ Founded in 1934 with the hire of Sheldon Keck as restorer, the BkM Conservation 
 
 Documentation has been integral to conservation practice at BkM since the beginning. Although reports have become more nuanced over time, many early records were abbreviated, rarely elaborating on the treatment rationale or describing the materials and techniques in a way that would allow the processes to be reproduced. Often reports were unsigned, recipe components were not itemized or quantified, and procedures were summarized using undefined terms (such as “the Dutch method” for lining preparations). With a few notable exceptions, this lack of detail presents challenges in understanding the relationship between current condition issues and previous treatments.
 
-Archival research has provided valuable insights into BkM treatment methods absent in the documentation. In 1954 and 1962, Sheldon and Caroline produced two films for a general audience, both of which illustrate the complex operation of performing a wax-resin lining. The earlier film features a lining executed with a hand iron ([fig. 41.1](#fig-41-1)) ([[Keck and Keck 1954]]), and in the later one, conservators demonstrate the use of a vacuum hot table ([fig. 41.2](#fig-41-2)) ([[Keck and Keck 1962]]). In both films, the narration illuminates the reasoning behind each action and material selected. The filmed processes are remarkably consistent with physical evidence of lining observed on many paintings in the collection, such as paper residues on the tacking margins or brush marks and fingerprints on the versos of paintings lined by hand.
+Archival research has provided valuable insights into BkM treatment methods absent in the documentation. In 1954 and 1962, Sheldon and Caroline produced two films for a general audience, both of which illustrate the complex operation of performing a wax-resin lining. The earlier film features a lining executed with a hand iron ([fig. 41.1](#fig-41-1)) ({% cite 'Keck and Keck 1954' %}), and in the later one, conservators demonstrate the use of a vacuum hot table ([fig. 41.2](#fig-41-2)) ({% cite 'Keck and Keck 1962' %}). In both films, the narration illuminates the reasoning behind each action and material selected. The filmed processes are remarkably consistent with physical evidence of lining observed on many paintings in the collection, such as paper residues on the tacking margins or brush marks and fingerprints on the versos of paintings lined by hand.
 
 {% figure 'fig-41-1' %}
 
@@ -48,7 +48,7 @@ Most of the paintings wax-resin lined at BkM were between fifty and 125 years ol
 
 {% figure 'fig-41-3' %}
 
-Fluctuations in the number of linings performed each year may correspond with significant events ([fig. 41.4](#fig-41-4)). Keck performed the first wax-resin lining on record at BkM in 1936, two years after he was hired.[^1] This initial delay may relate to setting up a new laboratory rather than a concerted effort on his part. In 1943, Keck left to serve in World War II as one of the Monuments Men in the U.S. Army’s Monuments, Fine Arts, and Archives Program ([[Monuments Men Foundation n.d.]]). Few paintings were lined until Caroline assumed his museum duties and resumed the practice.
+Fluctuations in the number of linings performed each year may correspond with significant events ([fig. 41.4](#fig-41-4)). Keck performed the first wax-resin lining on record at BkM in 1936, two years after he was hired.[^1] This initial delay may relate to setting up a new laboratory rather than a concerted effort on his part. In 1943, Keck left to serve in World War II as one of the Monuments Men in the U.S. Army’s Monuments, Fine Arts, and Archives Program ({% cite 'Monuments Men Foundation n.d.' %}). Few paintings were lined until Caroline assumed his museum duties and resumed the practice.
 
 {% figure 'fig-41-4' %}
 
