--- a/content/8-posters/42.md
+++ b/content/8-posters/42.md
@@ -18,7 +18,7 @@ abstract: "The 1974 Greenwich conference participants reviewed both past and cur
 
 In 2017, in the article that provided the subtitle for this paper, David Bomford wrote the following with 20/20 hindsight:
 
-The \[1974\] Greenwich Lining Conference had two profound and contradictory effects, one immediate and practical, the other philosophical and slow-burning. The first was to open the eyes of many of those present to the advances in the technology of lining, including machinery and materials . . . The second effect was to set in motion something quite different—a debate that questioned the whole basis of lining. Westby Percival-Prescott’s keynote “The Lining Cycle” conjured up a graphic picture of the spiral of repeated treatment, deterioration, and re-treatment in which canvas paintings become trapped once they are lined for the first time. ([[Bomford 2017\| 5]])
+The \[1974\] Greenwich Lining Conference had two profound and contradictory effects, one immediate and practical, the other philosophical and slow-burning. The first was to open the eyes of many of those present to the advances in the technology of lining, including machinery and materials . . . The second effect was to set in motion something quite different—a debate that questioned the whole basis of lining. Westby Percival-Prescott’s keynote “The Lining Cycle” conjured up a graphic picture of the spiral of repeated treatment, deterioration, and re-treatment in which canvas paintings become trapped once they are lined for the first time. ({% cite 'Bomford 2017' '5' %})
 
 This paper presents vignettes related to this landmark conference, accompanied by quotes from interviews from the Foundation for Advancement in Conservation (FAIC) Oral History File.
 
@@ -28,7 +28,7 @@ Westby Percival-Prescott (1923–2005) ([fig. 42.1](#fig-42-1)) was a major forc
 
 {% figure 'fig-42-1' %}
 
-In 1975, Percival-Prescott reported that the lectures and/or demonstrations at Greenwich fell into three main categories ([[Percival-Prescott 1975]]). The first was traditional hand-linings: Russian sturgeon glue; Italian flour paste and animal glue; British “compo” glue; Belgian and Polish natural beeswax and resin; and National Gallery, London hand lining. The second was hot-table linings: Swiss Lascaux synthetic wax on fiberglass fabric, vacuum hot tables, and Beva. The third category was dubbed “new alternatives” and included Courtauld vacuum envelopes using wax resin; Berger vacuum envelopes using the verso of the painting as the top of the envelope; Mehra’s prototype cold vacuum lining table and Plextol B500; and how to prevent the need for lining at all.
+In 1975, Percival-Prescott reported that the lectures and/or demonstrations at Greenwich fell into three main categories ({% cite 'Percival-Prescott 1975' %}). The first was traditional hand-linings: Russian sturgeon glue; Italian flour paste and animal glue; British “compo” glue; Belgian and Polish natural beeswax and resin; and National Gallery, London hand lining. The second was hot-table linings: Swiss Lascaux synthetic wax on fiberglass fabric, vacuum hot tables, and Beva. The third category was dubbed “new alternatives” and included Courtauld vacuum envelopes using wax resin; Berger vacuum envelopes using the verso of the painting as the top of the envelope; Mehra’s prototype cold vacuum lining table and Plextol B500; and how to prevent the need for lining at all.
 
 In the United States, we quickly heard about a “moratorium on lining.” As Gillian Lewis told me:
 
@@ -56,7 +56,7 @@ I had been doing only *pasta* linings. A little wax lining every now and then. I
 
 John Brealey (1925–2002) chaired a panel at Greenwich and mounted a photographic display of his treatments of the nine huge (nine-foot square) paintings on canvas by Mantegna in Hampton Court, a series known as The Triumphs of Caesar. Commissioned in 1484, they were “very thinly painted, on fine linen, with practically no ground … like gouache.”[^5] They were overpainted in oil in the eighteenth century and again with oil by Roger Fry in the nineteenth, and then wax lined in the 1930s by Stanley Kennedy-North (1887–1942), who used 15-pound irons that created “welts” in the paintings. In interviews and lectures, Brealey told our students about removing a “ton” of wax.[^6] His treatments took more than nine years. Brealey spoke against wax lining in his interviews and celebrated unlined paintings in his lectures. For a time, Brealey supported Robert Fieux’s research and Fabri-Sil lining (more on this shortly).
 
-Beva 371 (Berger’s ethylene vinyl acetate) was first formulated in 1970 and presented at the International Institute for Conservation of Historic and Artistic Works’ Congress in Lisbon in 1972. Two years later, Gustav Berger (1920–2006) presented demonstrations, a film, and four papers at Greenwich: “Effects of Consolidation Measures on Fibrous Materials,” “Wax Impregnation of Cellulose: An Irreversible Process,” “Lining of a Torn Painting with BEVA 371,” and “Some Effects of Impregnating Adhesives on Paint Film.” Only a decade later, in 1984, Gerry Hedley received 93 replies to his international questionnaire on lining, and Beva 371 was found to be the most widely used lining adhesive ([[Hedley and Villers 1984]]).
+Beva 371 (Berger’s ethylene vinyl acetate) was first formulated in 1970 and presented at the International Institute for Conservation of Historic and Artistic Works’ Congress in Lisbon in 1972. Two years later, Gustav Berger (1920–2006) presented demonstrations, a film, and four papers at Greenwich: “Effects of Consolidation Measures on Fibrous Materials,” “Wax Impregnation of Cellulose: An Irreversible Process,” “Lining of a Torn Painting with BEVA 371,” and “Some Effects of Impregnating Adhesives on Paint Film.” Only a decade later, in 1984, Gerry Hedley received 93 replies to his international questionnaire on lining, and Beva 371 was found to be the most widely used lining adhesive ({% cite 'Hedley and Villers 1984' %}).
 
 In his 1995 FAIC interview, Berger noted:
 
