--- a/content/8-posters/45.md
+++ b/content/8-posters/45.md
@@ -17,7 +17,7 @@ abstract: "Wax-resin lining is known to alter colors in paintings. To date, howe
 
 Wax-resin lining was invented in the Netherlands in the first half of the nineteenth century. Until the 1970s, it was considered an all-over cure for structural alterations in canvas paintings and therefore was used extensively by conservators in the Netherlands and abroad. The technique, however, proved to have detrimental effects on paintings’ material and physical characteristics, including color changes. Although today the use of wax-resin lining is almost extinct, most paintings preserved in the Netherlands received this treatment in the past.
 
-This research examined the impact of wax-resin linings on the color of ground layers in seventeenth-century Netherlandish paintings on canvas ([[Froment 2019]]). In these works, the ground is often left visible and used as a middle tone. Therefore, any color change of the ground would significantly alter the overall aesthetic of the painting. Furthermore, color change is considered a sign of the modification of the painting’s materials, which is relevant for the future conservation of these works. The results of the research aim to support the work of conservation professionals in identifying color change due to lining, thus preventing misinterpretation of the works and enabling an adaption of conservation strategies.
+This research examined the impact of wax-resin linings on the color of ground layers in seventeenth-century Netherlandish paintings on canvas ({% cite 'Froment 2019' %}). In these works, the ground is often left visible and used as a middle tone. Therefore, any color change of the ground would significantly alter the overall aesthetic of the painting. Furthermore, color change is considered a sign of the modification of the painting’s materials, which is relevant for the future conservation of these works. The results of the research aim to support the work of conservation professionals in identifying color change due to lining, thus preventing misinterpretation of the works and enabling an adaption of conservation strategies.
 
 ## Hypothesis
 
@@ -25,7 +25,7 @@ Material evidence found in four paintings by Jacob Jordaens (1593–1678) in the
 
 {% figure 'fig-45-1' %}
 
-Technical examination revealed that though the paintings were in different states of condition, they had aged in identical environments and received similar restoration treatments, including wax-resin linings in 1963 ([[van Eikema Hommes and Froment 2011]]). Differing degrees of darkness were particularly striking ([figs. 45.2](#fig-45-2)), ([45.3](#fig-45-3)).
+Technical examination revealed that though the paintings were in different states of condition, they had aged in identical environments and received similar restoration treatments, including wax-resin linings in 1963 ({% cite 'van Eikema Hommes and Froment 2011' %}). Differing degrees of darkness were particularly striking ([figs. 45.2](#fig-45-2)), ([45.3](#fig-45-3)).
 
 {% figure 'fig-45-2' %}
 
@@ -41,7 +41,7 @@ Central to the research was the study of visual phenomena observed on naturally 
 
 The materials and techniques used for the reconstruction were based on material evidence from paintings selected for their relevance to the research. These included works by Jordaens in the Royal Palace Amsterdam as well as paintings by Gerard van Honthorst (1592–1656) and Theodor van Thulden (1606–1678) created for the Oranjezaal, a painted ballroom in the Huis ten Bosch, a royal palace just outside of The Hague. *The Night Watch,* 1642, by Rembrandt (1606/7–1669) was also considered.
 
-Technical study of the grounds of these paintings identified three types of single ground and four types of double ground, with colors of either off-white, beige, red, brown, or gray. Mineral composition was analyzed with a scanning electron microscope with energy dispersive X-ray. Binding media were investigated using gas chromatography–mass spectrometry (GC-MS) and Fourier transform infrared spectroscopy (FTIR). Ground recipes found in documentary sources from the period and results of technical research from other paintings were also incorporated ([[Stols-Witlox 2017]]).
+Technical study of the grounds of these paintings identified three types of single ground and four types of double ground, with colors of either off-white, beige, red, brown, or gray. Mineral composition was analyzed with a scanning electron microscope with energy dispersive X-ray. Binding media were investigated using gas chromatography–mass spectrometry (GC-MS) and Fourier transform infrared spectroscopy (FTIR). Ground recipes found in documentary sources from the period and results of technical research from other paintings were also incorporated ({% cite 'Stols-Witlox 2017' %}).
 
 Thirty-two different ground types were reconstructed. Each of them was applied in a single layer on linen canvas previously sized with gelled animal glue. The mineral components used for the grounds were chalk, lead white, raw umber, yellow iron oxide, red iron oxide, tile red, charcoal black, quartz, and ball clay. Each type was used both independently and in mixtures of various ratios. Two types of binding media were used: linseed oil and animal glue.
 
@@ -101,7 +101,7 @@ By correlating experimental results from the reconstructions with results of the
 
 ### Quartz-Containing Oil-Bound Grounds
 
-After 1642, canvas paintings by Rembrandt are frequently primed with a quartz containing ground. Results of technical analysis revealed that this ground consists mainly of clay minerals, with a high proportion of quartz sand in linseed oil ([[Groen 2005]]). Research suggests that the composition of quartz ground varies among paintings, with the variables including the type of clay minerals and the proportion of trace elements such as chalk, iron oxide, and carbon black. An experiment in this study examined the influence of the clay-to-quartz ratio, as well as the effect of adding of yellow iron oxide on the extent of color change.
+After 1642, canvas paintings by Rembrandt are frequently primed with a quartz containing ground. Results of technical analysis revealed that this ground consists mainly of clay minerals, with a high proportion of quartz sand in linseed oil ({% cite 'Groen 2005' %}). Research suggests that the composition of quartz ground varies among paintings, with the variables including the type of clay minerals and the proportion of trace elements such as chalk, iron oxide, and carbon black. An experiment in this study examined the influence of the clay-to-quartz ratio, as well as the effect of adding of yellow iron oxide on the extent of color change.
 
 Each quartz-containing oil-bound ground showed substantial color change following impregnation ([fig. 45.7](#fig-45-7)). The change was among the most significant of all oil-bound grounds tested, with differences ranging from 4.23 to 6.80 ∆E\* units. Trends indicated that the higher the ratio of quartz to clay, the greater the change. Although the inclusion of 3% yellow iron oxide tended to reduce this effect, color change remained significant. Finally, each of the quartz-containing grounds tested changed color to a similar extent regardless of thickness.
 
