--- a/content/8-posters/46.md
+++ b/content/8-posters/46.md
@@ -34,9 +34,9 @@ In this poster, textiles that have been hidden for centuries between paint and l
 
 Close examinations enabled Lab O to analyze the weave structure of the patterned textile canvas. Using software developed for computer-aided handlooms, Lab O then developed a weave draft for the reproduction of these linen textiles.
 
-A weave draft of the El Greco canvas had already been published ([[de los Rios y Rojas and Socorro 1977]]). Four high-resolution X-ray images, provided by the museums that hold the paintings, were deciphered to find the pattern of these textiles.
+A weave draft of the El Greco canvas had already been published ({% cite 'de los Rios y Rojas and Socorro 1977' %}). Four high-resolution X-ray images, provided by the museums that hold the paintings, were deciphered to find the pattern of these textiles.
 
-After consulting the first published book on weaving ([[Ziegler 1677]]) and a modern facsimile, translation, and study ([[Hilts, Ziegler, and Lumscher 1990]]), a weave draft was generated for each textile using software developed to interface with computer-aided handlooms.
+After consulting the first published book on weaving ({% cite 'Ziegler 1677' %}) and a modern facsimile, translation, and study ({% cite 'Hilts, Ziegler, and Lumscher 1990' %}), a weave draft was generated for each textile using software developed to interface with computer-aided handlooms.
 
 All reconstructions were then woven in linen on a dobby loom.
 
