--- a/content/8-posters/48.md
+++ b/content/8-posters/48.md
@@ -32,7 +32,7 @@ The main reasons for using wax and wax-resin compositions for consolidation were
 
 After the negative effects of wax and wax-resin impregnation of canvas paintings were scientifically proven and presented by Gustav Berger and Harold Zeliger in 1975, the application of these materials by Russian conservators came to be limited, primarily performed only for the consolidation of murals made in oil technique ({% cite 'Fedoseeva 1999' '24–36' %}).
 
-One of the great problems mentioned by Berger and Zeliger is the difficulty of removal of wax and wax resin from the structure of canvas ([[Berger and Zeliger 1975]]). Wax treatment limits the use of other restoration materials, particularly water-based ones, for conservation. In this regard, diverse methods of wax/wax-resin extraction have been developed and suggested. The most widely adopted method is the use of a heated spatula and filter paper for absorption of melting wax. The main disadvantage of such a procedure is that, during heating, wax is only partly absorbed by the paper, and it also penetrates deeper in the structure of canvas fibers.
+One of the great problems mentioned by Berger and Zeliger is the difficulty of removal of wax and wax resin from the structure of canvas ({% cite 'Berger and Zeliger 1975' %}). Wax treatment limits the use of other restoration materials, particularly water-based ones, for conservation. In this regard, diverse methods of wax/wax-resin extraction have been developed and suggested. The most widely adopted method is the use of a heated spatula and filter paper for absorption of melting wax. The main disadvantage of such a procedure is that, during heating, wax is only partly absorbed by the paper, and it also penetrates deeper in the structure of canvas fibers.
 
 Another popular method of wax removal is mineral-spirit compresses. After being subjected to the solvent, wax softens and can be easily taken away—but only from the surface of the canvas. In 1988, Landgrebe suggested using solvent pastes based on hydroxypropyl cellulose (Klucel M) and solvent mixtures ({% cite 'Nicolaus 1999' '95' %}).
 
@@ -40,7 +40,7 @@ To achieve more complete removal of wax-resin adhesives, any such treatment shou
 
 ## A New Process for Wax Removal
 
-In 2004, in the State Research Institute for Restoration (GOSNIIR), in Moscow, Russia, Vilena Kireeva and Maria Churakova developed a procedure of removing oil-resin stains from the canvas structure with pyrogenic silicon dioxide (trade name AEROSIL) ([[Kireeva and Churakova 2013]]). This procedure was first applied during the restoration of the painting *Adoration of the Magi* by the eighteenth-century German artist Johann Knechtel ([[Churakova 2005]]). Earlier, the same substance had been successfully used to clean old, dried oil from a parchment in the Department of Conservation of Medieval Manuscripts at GOSNIIR.[^1]
+In 2004, in the State Research Institute for Restoration (GOSNIIR), in Moscow, Russia, Vilena Kireeva and Maria Churakova developed a procedure of removing oil-resin stains from the canvas structure with pyrogenic silicon dioxide (trade name AEROSIL) ({% cite 'Kireeva and Churakova 2013' %}). This procedure was first applied during the restoration of the painting *Adoration of the Magi* by the eighteenth-century German artist Johann Knechtel ({% cite 'Churakova 2005' %}). Earlier, the same substance had been successfully used to clean old, dried oil from a parchment in the Department of Conservation of Medieval Manuscripts at GOSNIIR.[^1]
 
 This poster presents the results of the case study of applying an AEROSIL and mineral spirit mixture to remove beeswax from a canvas.
 
@@ -50,13 +50,13 @@ AEROSIL is a trade name of a line of fumed silica (SiO~2~) products produced by 
 
 SiCl~4~ + 2H~2~ + O~2~ = SiO~2~ + 4HCl
 
-The adsorption properties of AEROSIL are determined by silanol (SiOH) and siloxane (SiOSi) functional groups presented on its surface ([[Evonik n.d.]]; [[Zhuravlev 2000]]).
+The adsorption properties of AEROSIL are determined by silanol (SiOH) and siloxane (SiOSi) functional groups presented on its surface ({% cite 'Evonik n.d.' %}; {% cite 'Zhuravlev 2000' %}).
 
 For beeswax removal, purified mineral spirit (Maimeri) was used as a solvent. AEROSIL and mineral spirit were mixed in ratio of 1 mg to 10 ml (respectively), until the mixture form a transparent, gel-like substance.
 
 ### Procedure Outline
 
-Kireeva and Churakova offered two ways of working with the paste. In the first, the paste is spread on the stain that needs to be removed and is covered with cellophane film to prevent solvent evaporation (in their work, ethanol was used). For better absorption, the paste is applied in a thick layer using a metal spatula or palette knife and left for ten to fifteen minutes. In the case study described by the authors, the paste was colored by the removed resin ([[Kireeva and Churakova 2013]]). After the specified time, the cellophane film is removed to allow the solvent to evaporate. The solvent is considered to have evaporated from the paste when the latter loses its transparency. The dried paste, with the absorbed material, is then cleaned from the surface of the canvas with scalpel, bristle brush, and vacuum cleaner. These operations should be repeated until the maximum possible stain removal has occurred.
+Kireeva and Churakova offered two ways of working with the paste. In the first, the paste is spread on the stain that needs to be removed and is covered with cellophane film to prevent solvent evaporation (in their work, ethanol was used). For better absorption, the paste is applied in a thick layer using a metal spatula or palette knife and left for ten to fifteen minutes. In the case study described by the authors, the paste was colored by the removed resin ({% cite 'Kireeva and Churakova 2013' %}). After the specified time, the cellophane film is removed to allow the solvent to evaporate. The solvent is considered to have evaporated from the paste when the latter loses its transparency. The dried paste, with the absorbed material, is then cleaned from the surface of the canvas with scalpel, bristle brush, and vacuum cleaner. These operations should be repeated until the maximum possible stain removal has occurred.
 
 The second method employs heat to accelerate the absorption process. This option works more effectively in the case of thicker and uneven stains. The paste is applied on the treated area, covered with fluoroplastic film, and ironed with a heated spatula at a temperature of 40°C–50°C for around three to five minutes. After the heating procedure, the fluoroplastic film is removed, and the paste is left on the treated area surface until the solvent evaporates. As in the first method, the solvent is considered evaporated when the paste loses its transparency and becomes whitish or colored with the resin. Cleaning the residues of the paste from the surface of the canvas is done as described in the first method. If necessary, the procedure can be repeated.
 
