--- a/content/8-posters/49.md
+++ b/content/8-posters/49.md
@@ -37,7 +37,7 @@ abstract: "Evolon CR, an absorbent fabric composed of polyester and polyamide mi
 
 ## Introduction
 
-Despite the successful use of Evolon CR (a nonwoven tissue made of a polyester and polyamide blend[^1]) in removing overpaint and varnish ([[Ribits 2017]]), little research has been done on its ability to poultice wax-resin mixtures. Confronted with two wax-resin-lined paintings that required relining, the authors sought a method that would achieve a homogeneous surface topography and remove residual wax-resin mixtures on the verso. The successful reduction of wax-resin mixtures ([fig. 49.1a](#fig-49-1-a)) prompted further research into the efficacy of this method and into the constituent materials poulticed into and onto the Evolon CR tissue. The goals of this study were to better understand the chemical and physical properties of Evolon CR and to evaluate the tissue’s efficacy at reducing wax-resin mixtures in an effort to improve and expand its practical use in conservation.
+Despite the successful use of Evolon CR (a nonwoven tissue made of a polyester and polyamide blend[^1]) in removing overpaint and varnish ({% cite 'Ribits 2017' %}), little research has been done on its ability to poultice wax-resin mixtures. Confronted with two wax-resin-lined paintings that required relining, the authors sought a method that would achieve a homogeneous surface topography and remove residual wax-resin mixtures on the verso. The successful reduction of wax-resin mixtures ([fig. 49.1a](#fig-49-1-a)) prompted further research into the efficacy of this method and into the constituent materials poulticed into and onto the Evolon CR tissue. The goals of this study were to better understand the chemical and physical properties of Evolon CR and to evaluate the tissue’s efficacy at reducing wax-resin mixtures in an effort to improve and expand its practical use in conservation.
 
 {% figure 'fig-49-1-a' %}
 
@@ -125,7 +125,7 @@ In summary, the results from all experiments indicate that Evolon CR is an effec
 
 ## Evolon CR in Practice
 
-Much still remains to be understood about practical uses of Evolon CR, yet results from these experiments indicate that, under our testing conditions, it was less effective to use two layers compared to a single sheet of solvent-wetted tissue. Additionally, while Evolon CR can be used more than once, its ability to poultice wax-resin significantly decreases after its first use. Finally, our results indicate solvent choice plays an important role in poulticing, and that this role, at least for the removal of wax-resin, is stronger than that resulting from the chemical composition of the Evolon CR fibers. Our studies did not use controlled loading of Evolon CR, a recently developed parameter of application where the tissue is loaded with only a fraction of its maximum solvent capacity instead of full saturation ([[Tauber et al. 2019]]).
+Much still remains to be understood about practical uses of Evolon CR, yet results from these experiments indicate that, under our testing conditions, it was less effective to use two layers compared to a single sheet of solvent-wetted tissue. Additionally, while Evolon CR can be used more than once, its ability to poultice wax-resin significantly decreases after its first use. Finally, our results indicate solvent choice plays an important role in poulticing, and that this role, at least for the removal of wax-resin, is stronger than that resulting from the chemical composition of the Evolon CR fibers. Our studies did not use controlled loading of Evolon CR, a recently developed parameter of application where the tissue is loaded with only a fraction of its maximum solvent capacity instead of full saturation ({% cite 'Tauber et al. 2019' %}).
 
 ## Future Directions
 
