--- a/content/8-posters/50.md
+++ b/content/8-posters/50.md
@@ -32,9 +32,9 @@ This poster sheds light on how Japanese conservators restored oil paintings usin
 
 ## Wax-Resin Recipes for Lining Used in Japan
 
-As a first step, interviews about the composition of wax resin and the ways in which it was applied were conducted with some conservators who had treated oil paintings in the 1970s and 1980s in Japan using this method. In particular, the authors interviewed conservators who had been involved with the War Record Paintings Conservation project, which was an enterprise of national importance at that time ([[National Museum of Modern Art, Tokyo 1977]]). These conservators made significant contributions to the establishment of Japanese oil paintings conservation.
+As a first step, interviews about the composition of wax resin and the ways in which it was applied were conducted with some conservators who had treated oil paintings in the 1970s and 1980s in Japan using this method. In particular, the authors interviewed conservators who had been involved with the War Record Paintings Conservation project, which was an enterprise of national importance at that time ({% cite 'National Museum of Modern Art, Tokyo 1977' %}). These conservators made significant contributions to the establishment of Japanese oil paintings conservation.
 
-[Fig. 50.1](#fig-50-1) shows various recipes of wax resin, which were obtained through the interviews and the related bibliographic surveys. Wax-resin linings were introduced into Japan via two different routes: from Belgium’s Institut Royal du Patrimoine Artistique (Royal Institute for Cultural Heritage \[KIK-IRPA\]) and from the United States’ New York University (NYU).[^1] Most of the recipes used in Japan originated from Georges Messens’s recipe, used at KIK-IRPA. Tsuneyuki Morita and Mitsuhiko Kuroe studied under Messens ([[Kuroe 1969]]; [[Kuroe 1975]]),[^2] and they brought his recipe and method into Japan in the late 1960s.
+[Fig. 50.1](#fig-50-1) shows various recipes of wax resin, which were obtained through the interviews and the related bibliographic surveys. Wax-resin linings were introduced into Japan via two different routes: from Belgium’s Institut Royal du Patrimoine Artistique (Royal Institute for Cultural Heritage \[KIK-IRPA\]) and from the United States’ New York University (NYU).[^1] Most of the recipes used in Japan originated from Georges Messens’s recipe, used at KIK-IRPA. Tsuneyuki Morita and Mitsuhiko Kuroe studied under Messens ({% cite 'Kuroe 1969' %}; {% cite 'Kuroe 1975' %}),[^2] and they brought his recipe and method into Japan in the late 1960s.
 
 {% figure 'fig-50-1' %}
 
@@ -46,7 +46,7 @@ Based on the recipes shown in [fig. 50.1](#fig-50-1), six formulas of the lining
 
 {% figure 'table-50-1' %}
 
-Ten test pieces were prepared for each adhesive (A–F), and half of them were subjected to artificial aging. The heat aging was carried out in the Espec LHU-113 Benchtop Temperature/Humidity Chamber at 55°C and 45% RH for 3 months. This aging condition was used by Gustav Berger in 1972 to test adhesives used in the consolidation of paintings. According to the reference, the heat aging at 55°C could keep the objects below the melting point (and possible critical deterioration point) of resins ([[Berger 1972b]]). The mean value of the removal rate for each recipe was calculated as follows:
+Ten test pieces were prepared for each adhesive (A–F), and half of them were subjected to artificial aging. The heat aging was carried out in the Espec LHU-113 Benchtop Temperature/Humidity Chamber at 55°C and 45% RH for 3 months. This aging condition was used by Gustav Berger in 1972 to test adhesives used in the consolidation of paintings. According to the reference, the heat aging at 55°C could keep the objects below the melting point (and possible critical deterioration point) of resins ({% cite 'Berger 1972b' %}). The mean value of the removal rate for each recipe was calculated as follows:
 
 $$\frac{\text{sample\ }\text{weight}\text{\ after\ adhesive\ impregnation\ -\ sample\ weight\ after\ adhesive\ removal]]{\text{sample\ weight\ after\ adhesive\ impregnation\ -\ sample\ weigh\ before\ adhesive\ impregnation]]$$
 
