--- a/content/8-posters/53.md
+++ b/content/8-posters/53.md
@@ -53,19 +53,19 @@ As the paintings were larger than the table, they had to be lined in sections. T
 
 By 2015 planar distortions in the supports and the degradation of the restoration materials applied in the 1970s dictated that retreatment was required. The structural stability and aesthetic appearance of the paintings had been greatly impacted. Two types of planar deformation were present: bulges caused by the weight of the lining and creep due to the temperature sensitive adhesive, as well as slight lifting along the fold lines, caused by insufficient adhesion.
 
-That same year, the Palace Huis ten Bosch underwent extensive renovation and Schouman’s paintings were sent to Stichting Restauratie Atelier Limburg (SRAL) for treatment. Considering the paintings’ size and their display within a historic building without environmental control, the decision to reline was crucial to improve stability and flexibility and to prevent long-term deformations from recurring. Recent research shows that wax-resin lined paintings are heat and moisture sensitive ([[Andersen et al. 2014]]). A cold-lining system practiced at SRAL using an acrylic dispersion was chosen, as it would avoid the use of heat, moisture, and excessive pressure during lining. [^4] This system also allowed the needs of each individual painting within the series to be accommodated.[^5]
+That same year, the Palace Huis ten Bosch underwent extensive renovation and Schouman’s paintings were sent to Stichting Restauratie Atelier Limburg (SRAL) for treatment. Considering the paintings’ size and their display within a historic building without environmental control, the decision to reline was crucial to improve stability and flexibility and to prevent long-term deformations from recurring. Recent research shows that wax-resin lined paintings are heat and moisture sensitive ({% cite 'Andersen et al. 2014' %}). A cold-lining system practiced at SRAL using an acrylic dispersion was chosen, as it would avoid the use of heat, moisture, and excessive pressure during lining. [^4] This system also allowed the needs of each individual painting within the series to be accommodated.[^5]
 
 The lining adhesive was rolled rather than sprayed on to the lining support. This also facilitated the use of a glass-fiber interleaf material, which added stiffness to the lining system while minimizing the addition of weight. This lining system is approximately 570 g lighter per square meter than the 1970s wax-resin lining. In addition, a weaker application of adhesive was used between the glass-fiber interleaf and the original canvas - compared to that between the interleaf and lining fabric—to facilitate future reversibility, if necessary.[^6]
 
 ### Lining Adhesive
 
-The lining adhesive consisted of 70% Dispersion K 360 (pH adjusted with ammonium hydroxide), 30% Plextol D540, thickened with Rohagit SD 15, all v/v. Plextol acrylic dispersion products have been used for lining since the 1970s, and extensive research has established their aging properties ([[Down 1996]]; [[de Witte, Florquin, and Goessens-Landrie 1984]]; [[Mehra 1984]]). However, these products are subject to market influences and, thus, since the product formulations and availability have changed, the reported results may no longer be valid for products mentioned in this essay.[^7]
+The lining adhesive consisted of 70% Dispersion K 360 (pH adjusted with ammonium hydroxide), 30% Plextol D540, thickened with Rohagit SD 15, all v/v. Plextol acrylic dispersion products have been used for lining since the 1970s, and extensive research has established their aging properties ({% cite 'Down 1996' %}; {% cite 'de Witte, Florquin, and Goessens-Landrie 1984' %}; {% cite 'Mehra 1984' %}). However, these products are subject to market influences and, thus, since the product formulations and availability have changed, the reported results may no longer be valid for products mentioned in this essay.[^7]
 
 Dispersion K 360 is too soft, sticky, and flexible to make a satisfying lining adhesive alone. Combining it with Plextol D540, which has a higher molecular weight and an accordingly higher glass transition (Tg) temperature, achieves the desired stiffness of the lining adhesive. The ratio of the two acrylic dispersions is 70:30 (v:v). Adding an emulsifier, Rohagit SD 15 (also a polymethacrylic acid), increased the viscosity of the mixture, thus improving application properties and preventing impregnation of the lining adhesive into the original canvas and the lining fabric during the reactivation process. The pH of the adhesive mixture was raised to 7 using ammonium hydroxide (NH~4~OH).
 
 ### Interleaf Fabric
 
-Glass-fiber fabric was selected for its high tensile strength, dimensional stability, low moisture absorption, and high resistance to solvents and chemicals, all of which contribute to its great durability ([[Boissonas 1961]]). It is also lightweight and provides extra strength without introducing additional tension, weight, or thickness to the new lining system ([[Boissonas 2003]]). Glass-fiber fabrics use bundles of monofilament glass threads to create the weave. This woven textile does not have a nap, and a nap cannot be created without disrupting the weave draft. The lining adhesive mixture, therefore, is best applied by rolling it onto the stretched fabric. This produces an even, textured surface, promoting adhesion. The moisture content is then allowed to evaporate. The dried adhesive produces a soft and elastic film, which encases the interleaf material and is stiff enough to prevent creep formation ([[Seymour and van Och 2005,\| 99]]). This fabric is available in widths of up to 90 cm; bands of the prepared material were used.
+Glass-fiber fabric was selected for its high tensile strength, dimensional stability, low moisture absorption, and high resistance to solvents and chemicals, all of which contribute to its great durability ({% cite 'Boissonas 1961' %}). It is also lightweight and provides extra strength without introducing additional tension, weight, or thickness to the new lining system ({% cite 'Boissonas 2003' %}). Glass-fiber fabrics use bundles of monofilament glass threads to create the weave. This woven textile does not have a nap, and a nap cannot be created without disrupting the weave draft. The lining adhesive mixture, therefore, is best applied by rolling it onto the stretched fabric. This produces an even, textured surface, promoting adhesion. The moisture content is then allowed to evaporate. The dried adhesive produces a soft and elastic film, which encases the interleaf material and is stiff enough to prevent creep formation ({% cite 'Seymour and van Och 2005' '99' %}). This fabric is available in widths of up to 90 cm; bands of the prepared material were used.
 
 ### Lining Fabric
 
@@ -95,7 +95,7 @@ To ensure the tightest possible contact between lining fabric and cheesecloth, t
 
 ## Conclusion
 
-The treatment was designed to be both lasting and reversible. Relining with an acrylic adhesive mixture and glass-fiber interleaf provided a lighter, more rigid alternative to traditional lining systems and excluded the use of heat, moisture, or excess pressure. Developing this kind of treatment was possible by building on the experience of other large-scale lining projects undertaken at SRAL and can be used as a paradigm for the treatment of similar paintings ([[Schlotter 2009]]).
+The treatment was designed to be both lasting and reversible. Relining with an acrylic adhesive mixture and glass-fiber interleaf provided a lighter, more rigid alternative to traditional lining systems and excluded the use of heat, moisture, or excess pressure. Developing this kind of treatment was possible by building on the experience of other large-scale lining projects undertaken at SRAL and can be used as a paradigm for the treatment of similar paintings ({% cite 'Schlotter 2009' %}).
 
 ## Acknowledgments
 
@@ -107,17 +107,17 @@ The authors thank Ana Pereira for the FTIR-ATR analysis, Ilona Jaaranen and Basc
 
 {% endbackmatter %}
 
-[^1]: This is probably the only set of Schouman’s wall hangings still remaining in the Netherlands ([[Bol 1991: 9]]).
+[^1]: This is probably the only set of Schouman’s wall hangings still remaining in the Netherlands ({% cite 'Bol 1991' '9' %}).
 
-[^2]: Interview with Nico van Bohemen Jr., November 28, 2015, Stichting Restauratie Atelier Limburg (SRAL) archives, unpublished audio file. For transcription see [[Barbosa et al. 2015]].
+[^2]: Interview with Nico van Bohemen Jr., November 28, 2015, Stichting Restauratie Atelier Limburg (SRAL) archives, unpublished audio file. For transcription see {% cite 'Barbosa et al. 2015' %}.
 
-[^3]: For treatment steps other than the lining interventions, see [[Barbosa et al. 2015]].
+[^3]: For treatment steps other than the lining interventions, see {% cite 'Barbosa et al. 2015' %}.
 
 [^4]: The cold-lining practiced was developed under Jos van Och’s expertise and is inspired by the mist-lining system.
 
-[^5]: For a detailed description see [[Seymour and Och 2005]].
+[^5]: For a detailed description see {% cite 'Seymour and Och 2005' %}.
 
-[^6]: For treatment steps other than lining see [[Barbosa et al. 2015]].
+[^6]: For treatment steps other than lining see {% cite 'Barbosa et al. 2015' %}.
 
 [^7]: For example Plextol D360 is no longer available; it has been replaced by Dispersion K 360. Plextol D540 was discontinued after this project was completed.
 
