--- a/content/8-posters/55.md
+++ b/content/8-posters/55.md
@@ -21,13 +21,13 @@ abstract: "This paper describes the conservation treatment performed on a large-
 
 ## Background
 
-The painting entitled *The Crucifixion* originates from the neoclassical parish church of Saint Mary Magdalene in Serniki, a village in Eastern Poland. The church, designed by the architect Jakub Fontana, was funded by Eustachy Potocki (1720–1768), a Polish magnate ([[Gombin 2009]]\|, 123). Formerly a main altar painting*, The Crucifixion* was attributed by local tradition to Jan Bogumił Plersch (1732–1817), one of the most important Polish painters active during the rule of Stanisław August Poniatowski (1732–1798), the last king of Poland ([[Król-Kaczorowska 1981]]). The painting depicts Christ on the cross with figures surrounding him, and was modeled after the composition of *Coup de Lance*, which was painted in 1620 for the Convent of the Friars Minor in Antwerp by Peter Paul Rubens. Rubens’s composition was reproduced in a popular graphic print by Boetius à Bolswert. The print itself was not based on the painting but on a later drawing prepared in Rubens’s studio ([[Art Institute of Chicago n.d.]]).[^1] This print appears to have served as a direct inspiration for the author of the Serniki painting.
+The painting entitled *The Crucifixion* originates from the neoclassical parish church of Saint Mary Magdalene in Serniki, a village in Eastern Poland. The church, designed by the architect Jakub Fontana, was funded by Eustachy Potocki (1720–1768), a Polish magnate ({% cite 'Gombin 2009' %}\|, 123). Formerly a main altar painting*, The Crucifixion* was attributed by local tradition to Jan Bogumił Plersch (1732–1817), one of the most important Polish painters active during the rule of Stanisław August Poniatowski (1732–1798), the last king of Poland ({% cite 'Król-Kaczorowska 1981' %}). The painting depicts Christ on the cross with figures surrounding him, and was modeled after the composition of *Coup de Lance*, which was painted in 1620 for the Convent of the Friars Minor in Antwerp by Peter Paul Rubens. Rubens’s composition was reproduced in a popular graphic print by Boetius à Bolswert. The print itself was not based on the painting but on a later drawing prepared in Rubens’s studio ({% cite 'Art Institute of Chicago n.d.' %}).[^1] This print appears to have served as a direct inspiration for the author of the Serniki painting.
 
 *The Crucifixion* was painted with oil paint on a primed linen canvas that was sewn together from two main and four additional smaller pieces. It was once mounted on a traditional wooden stretcher, which no longer existed at the time of the conservation. Due to the painting’s rapidly declining condition, many damaging alterations, and extensive overpaintings done throughout its history ([fig. 55.1](#fig-55-1)), the painting was removed from permanent display in the main altar during the second half of the twentieth century ({% cite 'Brykowski 1975' '239' %}). It was then kept in a storage room, where it was subjected to further decay, waiting for a future conservation treatment.
 
 {% figure 'fig-55-1' %}
 
-As the project of conserving and restoring *The Crucifixion* exceeded the capabilities of a small parish, in 2014 the painting was handed over to the collection of the Museum of the John Paul II Catholic University of Lublin. It then became the subject matter of a joint master’s thesis executed at the Faculty of Conservation and Restoration of Works of Art at the Jan Matejko Academy of Fine Arts in Cracow from 2015 to 2017 ([[Dobrzańska and Lentowicz 2017]]).
+As the project of conserving and restoring *The Crucifixion* exceeded the capabilities of a small parish, in 2014 the painting was handed over to the collection of the Museum of the John Paul II Catholic University of Lublin. It then became the subject matter of a joint master’s thesis executed at the Faculty of Conservation and Restoration of Works of Art at the Jan Matejko Academy of Fine Arts in Cracow from 2015 to 2017 ({% cite 'Dobrzańska and Lentowicz 2017' %}).
 
 ## Condition and Treatment Goals
 
