--- a/content/8-posters/58.md
+++ b/content/8-posters/58.md
@@ -15,7 +15,7 @@ abstract: "This short paper describes the treatment of the *Madonna and Child wi
 
 ## Introduction
 
-The thread-by-thread method of repairing torn paintings, developed by the conservator Winfried Heiber and described in his 1996 article on the subject, is widely known and implemented, especially in the German-speaking world ([[Heiber 1996]]; [[Heiber 2003]]; [[Heiber 2012]]). While to some degree a familiar technique in U.S. museums, it remains underused in private practice—at least in New York, where lining is still a common treatment for damaged canvases. In my own experience speaking to colleagues, thread-by-thread tear repair can be seen as tedious or untenably time consuming; for clients it remains an unfamiliar remedy, one met with curiosity. This brief article hence does not present a novel solution but is rather an attempt to encourage a known procedure while presenting it in combination with additional measures— varnish removal from an old canvas and the construction of an insert lining—designed to enhance its results.
+The thread-by-thread method of repairing torn paintings, developed by the conservator Winfried Heiber and described in his 1996 article on the subject, is widely known and implemented, especially in the German-speaking world ({% cite 'Heiber 1996' %}; {% cite 'Heiber 2003' %}; {% cite 'Heiber 2012' %}). While to some degree a familiar technique in U.S. museums, it remains underused in private practice—at least in New York, where lining is still a common treatment for damaged canvases. In my own experience speaking to colleagues, thread-by-thread tear repair can be seen as tedious or untenably time consuming; for clients it remains an unfamiliar remedy, one met with curiosity. This brief article hence does not present a novel solution but is rather an attempt to encourage a known procedure while presenting it in combination with additional measures— varnish removal from an old canvas and the construction of an insert lining—designed to enhance its results.
 
 ## The Case
 
