--- a/content/8-posters/59.md
+++ b/content/8-posters/59.md
@@ -22,7 +22,7 @@ abstract: "This research shows the application of neodymium magnets in the conse
 
 ## Background
 
-During the last decades, the criterion of minimal intervention has acquired great importance and continues to guide the actions of conservative practitioners aiming to keep open options for retreatment ([[Appelbaum 1987]]). In the specific field of painted canvas supports, progress has been constant as a result of the search for new operational methodologies that continue to provide better responses to the problem of deterioration. Neodymium magnets have a wide field of application in the assembly of objects in permanent and temporary exhibitions, especially graphic works, textiles, and decorative arts collections ([[Spicer 2019]]), but specific applications for pictorial works are still scarce ([[Bestetti 2005]]; {% cite 'Rella and Saccani 2006' '17–19' %}; [[Sterp Moga and Sánchez Ortiz 2019]]) .
+During the last decades, the criterion of minimal intervention has acquired great importance and continues to guide the actions of conservative practitioners aiming to keep open options for retreatment ({% cite 'Appelbaum 1987' %}). In the specific field of painted canvas supports, progress has been constant as a result of the search for new operational methodologies that continue to provide better responses to the problem of deterioration. Neodymium magnets have a wide field of application in the assembly of objects in permanent and temporary exhibitions, especially graphic works, textiles, and decorative arts collections ({% cite 'Spicer 2019' %}), but specific applications for pictorial works are still scarce ({% cite 'Bestetti 2005' %}; {% cite 'Rella and Saccani 2006' '17–19' %}; {% cite 'Sterp Moga and Sánchez Ortiz 2019' %}) .
 
 An internal auxiliary frame equipped with a magnetic system (IAFMS) has been developed by the authors to assist the conservator in maintaining tension during conservation procedures involving thread-by-thread suture for tear mending, textile intarsia, and reinforcement with thread bridges. The frame is equipped with a magnetic system on the inner and outer edges, consisting of different magnets embedded flush with each edge and a U-shaped iron gutter, adequately protected ([fig. 59.1](#fig-59-1)). The magnets holding the gutter allow the gutter to be raised and lowered to bring the threads closer to the surface of the damaged canvas. Different magnets are housed in the gutter; these act as a clamp and allow the textile material (the necessary threads with the warp and weft) to be held according to the needs of the tear, gap, or break in the textile support. In addition, the system allows the application of a minimum tension by means of the tensioners composed of stainless-steel dowels and threaded rods and nuts placed in the four corners of the frame. In short, the IAFMS allows the tension of the threads to be maintained and exactly positioned during treatment, thus facilitating the adhesion of the suture. At the end of the procedure, the frame and the excess threads are removed from the treated area.
 
@@ -34,9 +34,9 @@ An internal auxiliary frame equipped with a magnetic system (IAFMS) has been dev
 
 The continuous environmental changes to which paintings on canvas are subjected are one of the main agents of deterioration, as the constituent materials respond in very different ways. As a result of mechanical stress and the release of this stress, the canvas becomes loose and deformed, with the consequent appearance of folds and other deformations.
 
-In 1950, Roberto Carità carried out the first studies on the quantification of the mechanical tension forces and made the first prototype of a frame with springs ([[Carità 1955]]). Gustav Berger and William Russell carried out experimental tests showing that canvases are capable of withstanding a maximum tension of 100 N/m when exposed to environmental conditions of 21°C and 60% RH ([[Berger and Russell 2000]]).
+In 1950, Roberto Carità carried out the first studies on the quantification of the mechanical tension forces and made the first prototype of a frame with springs ({% cite 'Carità 1955' %}). Gustav Berger and William Russell carried out experimental tests showing that canvases are capable of withstanding a maximum tension of 100 N/m when exposed to environmental conditions of 21°C and 60% RH ({% cite 'Berger and Russell 2000' %}).
 
-In more recent research, Antonio Iaccarino has analyzed what could be the most suitable tension parameters for paintings on canvas mounted on frames modified with a spring system. According to the results, the tensions should be between 1.5 N/cm to 2.6 N/cm, with some cases being acceptable up to 3.4 N/cm ([[Iaccarino 2009]]).
+In more recent research, Antonio Iaccarino has analyzed what could be the most suitable tension parameters for paintings on canvas mounted on frames modified with a spring system. According to the results, the tensions should be between 1.5 N/cm to 2.6 N/cm, with some cases being acceptable up to 3.4 N/cm ({% cite 'Iaccarino 2009' %}).
 
 ### Thread Tension Tests
 
