--- a/content/8-posters/60.md
+++ b/content/8-posters/60.md
@@ -47,7 +47,7 @@ Several years later, in 2011, the final treatment plan was developed under the l
 
 ### Technical Examination and Documentation
 
-The painting was extensively documented and examined under visible light, ultraviolet radiation, and infrared reflectography. The pigments were identified using scanning electron microscopy–energy dispersive X-ray analysis (SEM-EDX) and cross sections of samples taken from the painting were examined under a compound microscope. The examination using IR revealed pentimenti that showed changes to the positions of the hands and the sword itself. This helped in understanding not only the artist’s painting process but also what happened to the painting once it left the artist’s studio (for more on this, see [[Spear 2006]]). Examination of the cross section and SEM-EDX of the underside of the ground ([fig. 60.2](#fig-60-2)) revealed that the fungus had infested not only the surface but also the lining fabric, glue layer, and original canvas support as well. It was thus important to remove the old lining and reline the painting.
+The painting was extensively documented and examined under visible light, ultraviolet radiation, and infrared reflectography. The pigments were identified using scanning electron microscopy–energy dispersive X-ray analysis (SEM-EDX) and cross sections of samples taken from the painting were examined under a compound microscope. The examination using IR revealed pentimenti that showed changes to the positions of the hands and the sword itself. This helped in understanding not only the artist’s painting process but also what happened to the painting once it left the artist’s studio (for more on this, see {% cite 'Spear 2006' %}). Examination of the cross section and SEM-EDX of the underside of the ground ([fig. 60.2](#fig-60-2)) revealed that the fungus had infested not only the surface but also the lining fabric, glue layer, and original canvas support as well. It was thus important to remove the old lining and reline the painting.
 
 {% figure 'fig-60-2' %}
 
