--- a/content/8-posters/63.md
+++ b/content/8-posters/63.md
@@ -43,19 +43,19 @@ A large number of cultural properties were damaged in the March 2011 tsunami, an
 
 {% figure 'fig-63-2' %}
 
-As a first step in the rescue process, remedial treatment was undertaken to remove the surface grime and mold and to fumigate the paintings ([[Ito 2014]]). However, it was impossible to remove the embedded grime and salt without using water, so those were left untreated during this stage. Chloride compounds left on the canvasses after the tsunami ionized, and a certain amount of moisture was needed to remove them. Given the assumption that canvas shrinkage is a major factor impacting the status of the paints, the question arose as to how much shrinkage was tolerable. Based on research already carried out overseas, the shrinkage rate was set at within 0.5% ([[Mecklenburg 2007a]]; [[Mecklenburg 2007b]]), and we set a goal of minimizing the damage to the paint layer by minimizing the shrinkage as much as possible.
+As a first step in the rescue process, remedial treatment was undertaken to remove the surface grime and mold and to fumigate the paintings ({% cite 'Ito 2014' %}). However, it was impossible to remove the embedded grime and salt without using water, so those were left untreated during this stage. Chloride compounds left on the canvasses after the tsunami ionized, and a certain amount of moisture was needed to remove them. Given the assumption that canvas shrinkage is a major factor impacting the status of the paints, the question arose as to how much shrinkage was tolerable. Based on research already carried out overseas, the shrinkage rate was set at within 0.5% ({% cite 'Mecklenburg 2007a' %}; {% cite 'Mecklenburg 2007b' %}), and we set a goal of minimizing the damage to the paint layer by minimizing the shrinkage as much as possible.
 
-After carrying out several experiments, our research focused on acrylic paintings painted on cotton canvasses. We made several attempts to clean these paintings using water. In the end, myself and the rest of the research group decided to adopt a desalination method that used the blotting technique when removing salt from the acrylic paintings ([[Tsuchiya et al. 2017]]). We essentially achieved our target with regard to the amount of chlorine remaining after treatment ([[Tsuchiya 2018]]).
+After carrying out several experiments, our research focused on acrylic paintings painted on cotton canvasses. We made several attempts to clean these paintings using water. In the end, myself and the rest of the research group decided to adopt a desalination method that used the blotting technique when removing salt from the acrylic paintings ({% cite 'Tsuchiya et al. 2017' %}). We essentially achieved our target with regard to the amount of chlorine remaining after treatment ({% cite 'Tsuchiya 2018' %}).
 
 ## Desalination Process
 
 The desalination work to remove the embedded grime and salt from the canvasses could not be undertaken with any solvent besides water. However, there was a danger water might cause the canvas to shrink or the surface paints to peel off. We focused on the conservation state of fifteen large acrylic paintings among those canvas paintings damaged by the tsunami.
 
-Hardly any of the wooden frames were warped, even with the larger paintings, while the canvasses had only minimal shrinkage and there was no paint flaking. As a result, it was adjudged that shrinkage could probably be kept to a minimum even if water was applied to these canvasses. We prepared a life-size mock-up of a large acrylic painting, stretched it over an actual stretcher, and applied water ([fig. 63.3](#fig-63-3)). Hardly any shrinkage was observed ([[Tsuchiya et al. 2014]]).
+Hardly any of the wooden frames were warped, even with the larger paintings, while the canvasses had only minimal shrinkage and there was no paint flaking. As a result, it was adjudged that shrinkage could probably be kept to a minimum even if water was applied to these canvasses. We prepared a life-size mock-up of a large acrylic painting, stretched it over an actual stretcher, and applied water ([fig. 63.3](#fig-63-3)). Hardly any shrinkage was observed ({% cite 'Tsuchiya et al. 2014' %}).
 
 {% figure 'fig-63-3' %}
 
-Based on this, we undertook a desalination trial using the absolute minimum amount of moisture. We first tried a treatment method using gel sheets. Gel sheets with a 1.5% concentration and a 7:2:1 ratio of carrageenan (a seaweed-based emulsifying agent), xanthan gum, and locust bean gum were chosen for their ease of use and suitability for the syneresis process. A 16 x 11 x 2 cm sheet was pressed against the rear side of the canvas and left for about thirty minutes before being replaced with a new sheet. This process was carried out twice. However, the chlorine (CI) values of the canvas (rear side) remained at between 50%–80% of the initial values ([[Tsuchiya et al. 2015]]). This was because the gel sheets alone did not have sufficient moisture to remove the salt and other material that had seeped into the canvas fiber.
+Based on this, we undertook a desalination trial using the absolute minimum amount of moisture. We first tried a treatment method using gel sheets. Gel sheets with a 1.5% concentration and a 7:2:1 ratio of carrageenan (a seaweed-based emulsifying agent), xanthan gum, and locust bean gum were chosen for their ease of use and suitability for the syneresis process. A 16 x 11 x 2 cm sheet was pressed against the rear side of the canvas and left for about thirty minutes before being replaced with a new sheet. This process was carried out twice. However, the chlorine (CI) values of the canvas (rear side) remained at between 50%–80% of the initial values ({% cite 'Tsuchiya et al. 2015' %}). This was because the gel sheets alone did not have sufficient moisture to remove the salt and other material that had seeped into the canvas fiber.
 
 We next examined the blotter-washing technique used in paper conservation. After several experiments, we reached the conclusion that this method could be used to desalinate the acrylic paintings among the canvas paintings in Rikuzentakata City Museum’s collection, so we carried out conservation work accordingly.
 
@@ -111,7 +111,7 @@ The blotting method can be used to remove residual salt from acrylic paintings p
 
 {% figure 'table-63-3' 'is-table-scale-6' %}
 
-Researchers outside of Japan have been aware of the dangers of using excess moisture when cleaning paintings since the 1980s. In particular, there has been considerable debate about problems involving acrylic paints (a relatively new painting material), such as the swelling of resins due to the impact of various additives ([[Jablonski et al. 2003]]; [[Tumosa and Mecklenburg 2004]]; [[Ormsby and Learner 2009]]; [[Doménech-Carbó et al. 2013]]; [[Toriumi 2018]]; [[Hackney, Stephen. 2020]]). Additive agents in acrylic paints tend to rise to the surface of paints, so these paintings probably lost these additives as a result of the tsunami. Furthermore, a water-based treatment was also used during the desalination process. In light of these factors, from here on we will need to ascertain the damage to the paints by carrying out experiments while preparing specimens.
+Researchers outside of Japan have been aware of the dangers of using excess moisture when cleaning paintings since the 1980s. In particular, there has been considerable debate about problems involving acrylic paints (a relatively new painting material), such as the swelling of resins due to the impact of various additives ({% cite 'Jablonski et al. 2003' %}; {% cite 'Tumosa and Mecklenburg 2004' %}; {% cite 'Ormsby and Learner 2009' %}; {% cite 'Doménech-Carbó et al. 2013' %}; {% cite 'Toriumi 2018' %}; {% cite 'Hackney 2020' %}). Additive agents in acrylic paints tend to rise to the surface of paints, so these paintings probably lost these additives as a result of the tsunami. Furthermore, a water-based treatment was also used during the desalination process. In light of these factors, from here on we will need to ascertain the damage to the paints by carrying out experiments while preparing specimens.
 
 Acrylic paints are a new painting material, so we still have a lot to learn with regard to the deterioration process. While searching for a way to remove grime without damaging the paint layer, we need to constantly carry out post-treatment observations and the like to check for any problems with the method we adopted.
 
