--- a/content/1-history/2.md
+++ b/content/1-history/2.md
@@ -13,19 +13,19 @@ abstract: "Paintings on canvas are composite structures with mechanical properti
 
 ## Introduction
 
-Those studying the mechanical behavior of artist paints and painting structures will likely begin with the general elastic-plastic stress-strain relationships often discussed in introductory engineering texts. A classic diagram will label elastic modulus, yield point, ultimate tensile strength, and failure strain from a simple tensile test. The concepts then become incredibly complex when delving deeper into the response of polymeric materials under varying conditions. This is particularly true for artists paints when considering the influence of temperature, rate of deformation, moisture content, additives to the polymer matrix, and many other factors. To accurately characterize the small-strain behavior of paint films over a wide range of conditions, it often necessary to consider a linear viscoelastic material model ([[Ferry 1980]]). Describing the large-strain response may require adding hyperelasticity ([[Treloar 1975]]) for an extension to a nonlinear viscoelastic material ([[Christensen 1982]]). An example of this approach was developed for acrylic (latex) artists paints containing titanium dioxide ([[Hagan et al. 2009]]), which provided parameters for finite element analysis in software such as Abaqus. Calibrating such a model—even for one material—is no easy task. It involves many tests and numerical iteration to solve the best fit parameters to experimental data, and simplifying assumptions still remain.
+Those studying the mechanical behavior of artist paints and painting structures will likely begin with the general elastic-plastic stress-strain relationships often discussed in introductory engineering texts. A classic diagram will label elastic modulus, yield point, ultimate tensile strength, and failure strain from a simple tensile test. The concepts then become incredibly complex when delving deeper into the response of polymeric materials under varying conditions. This is particularly true for artists paints when considering the influence of temperature, rate of deformation, moisture content, additives to the polymer matrix, and many other factors. To accurately characterize the small-strain behavior of paint films over a wide range of conditions, it often necessary to consider a linear viscoelastic material model ({% cite 'Ferry 1980' %}). Describing the large-strain response may require adding hyperelasticity ({% cite 'Treloar 1975' %}) for an extension to a nonlinear viscoelastic material ({% cite 'Christensen 1982' %}). An example of this approach was developed for acrylic (latex) artists paints containing titanium dioxide ({% cite 'Hagan et al. 2009' %}), which provided parameters for finite element analysis in software such as Abaqus. Calibrating such a model—even for one material—is no easy task. It involves many tests and numerical iteration to solve the best fit parameters to experimental data, and simplifying assumptions still remain.
 
-When pigment particles are included in the polymer matrix of a paint film the material becomes a particle-filled composite with a viscoelastic matrix. Stiffness enhancement as a function of particle volume concentration is described in many micromechanics models; however, most give little consideration to geometry effects. The Mori-Tanaka theory is particularly useful since it considers the influence of particle shape and orientation in addition to volume fraction ([[Tandon and Weng 1986]]). Clements and Mas extended this theory from an elastic to linear viscoelastic matrix for small-strain modeling ([[Clements and Mas 2001]]). The effects of particle shape and concentration were highlighted for artists acrylic paints using kaolin, calcium carbonate (aragonite), and titanium dioxide as an inorganic phase in a recent study ([[Hagan et al. 2011a]]). From this research, it is easy to imagine that the properties of a paint layer may be different along a brushstroke relative to the transverse direction, due to the alignment of pigment particles with an aspect ratio not equal to 1. The composite structure of a painting on canvas adds further complexity given the layering of different materials and boundary conditions at the stretcher. Common treatment approaches, such as linings, add further variables.
+When pigment particles are included in the polymer matrix of a paint film the material becomes a particle-filled composite with a viscoelastic matrix. Stiffness enhancement as a function of particle volume concentration is described in many micromechanics models; however, most give little consideration to geometry effects. The Mori-Tanaka theory is particularly useful since it considers the influence of particle shape and orientation in addition to volume fraction ({% cite 'Tandon and Weng 1986' %}). Clements and Mas extended this theory from an elastic to linear viscoelastic matrix for small-strain modeling ({% cite 'Clements and Mas 2001' %}). The effects of particle shape and concentration were highlighted for artists acrylic paints using kaolin, calcium carbonate (aragonite), and titanium dioxide as an inorganic phase in a recent study ({% cite 'Hagan et al. 2011a' %}). From this research, it is easy to imagine that the properties of a paint layer may be different along a brushstroke relative to the transverse direction, due to the alignment of pigment particles with an aspect ratio not equal to 1. The composite structure of a painting on canvas adds further complexity given the layering of different materials and boundary conditions at the stretcher. Common treatment approaches, such as linings, add further variables.
 
-It is impractical to think that we can precisely understand the mechanical behavior of paintings with so many influencing factors, which additionally include chemical effects of the aging process, the physical aging of polymers ([[Struik 1980]]), load cycling, fracture, and delamination ([[Tantideeravit et al. 2013]]). While researchers work to better understand and model these materials for risk analysis, it is important to use the best information available in a heuristic approach to resolving practical problems of the moment. Waller and Michalski emphasized the value of heuristics in preventative conservation:
+It is impractical to think that we can precisely understand the mechanical behavior of paintings with so many influencing factors, which additionally include chemical effects of the aging process, the physical aging of polymers ({% cite 'Struik 1980' %}), load cycling, fracture, and delamination ({% cite 'Tantideeravit et al. 2013' %}). While researchers work to better understand and model these materials for risk analysis, it is important to use the best information available in a heuristic approach to resolving practical problems of the moment. Waller and Michalski emphasized the value of heuristics in preventative conservation:
 
-A fully rational approach would require that all possibly relevant information be obtained and used in arriving at a decision or evaluation. The cost of—and time required for—a fully rational decision is infinite. Instead, a conservator evaluates, using heuristics (simple rules of thumb or intuition), whether there is an advantage in seeking more information before deciding whether a particular issue, such as a risk to a collection, is significant or not. ([[Waller and Michalski 2004, 6]])
+A fully rational approach would require that all possibly relevant information be obtained and used in arriving at a decision or evaluation. The cost of—and time required for—a fully rational decision is infinite. Instead, a conservator evaluates, using heuristics (simple rules of thumb or intuition), whether there is an advantage in seeking more information before deciding whether a particular issue, such as a risk to a collection, is significant or not. ({% cite 'Waller and Michalski 2004' '6' %})
 
-In “Toward a Definition of the Engineering Method,” Koen defines *heuristics* as “anything that provides a plausible aid or direction in the solution of a problem but is in the final analysis unjustified, incapable of justification and fallible. It is anything that is used to guide, discover and reveal a possible, but not necessarily, correct way to solve a problem” ([[Koen 1988, 308]]). An important comparison is given to the different approaches of the scientific and engineering methods. Koen also states that “the engineering method is the use of engineering heuristics to cause the best change in a poorly understood situation within the available resources” ([[Koen 1988, 308]]). There is clearly a similarity between the work of a heritage conservation professional and an engineer, with respect to problem-solving under challenging circumstances with many unknowns.
+In “Toward a Definition of the Engineering Method,” Koen defines *heuristics* as “anything that provides a plausible aid or direction in the solution of a problem but is in the final analysis unjustified, incapable of justification and fallible. It is anything that is used to guide, discover and reveal a possible, but not necessarily, correct way to solve a problem” ({% cite 'Koen 1988' '308' %}). An important comparison is given to the different approaches of the scientific and engineering methods. Koen also states that “the engineering method is the use of engineering heuristics to cause the best change in a poorly understood situation within the available resources” ({% cite 'Koen 1988' '308' %}). There is clearly a similarity between the work of a heritage conservation professional and an engineer, with respect to problem-solving under challenging circumstances with many unknowns.
 
-A pertinent example of the engineering method is found in the renowned body of research by Mecklenburg related to the mechanics of artist materials and the effects of the museum environment. In the proceedings of the 1991 Art in Transit meeting, Mecklenburg and Tumosa present findings that highlight the tensile properties of artists paints as a function of strain rate ([[Mecklenburg and Tumosa 1991]]). In contrast, subsequent research gives descriptions of material behavior that use an elastic-plastic (time-independent) model ([[Mecklenburg 2005]]). Strain rate is fixed to a constant value in mechanical tests to generate timely and practical information on the effects of the museum environment without the burden of viscoelastic theory.
+A pertinent example of the engineering method is found in the renowned body of research by Mecklenburg related to the mechanics of artist materials and the effects of the museum environment. In the proceedings of the 1991 Art in Transit meeting, Mecklenburg and Tumosa present findings that highlight the tensile properties of artists paints as a function of strain rate ({% cite 'Mecklenburg and Tumosa 1991' %}). In contrast, subsequent research gives descriptions of material behavior that use an elastic-plastic (time-independent) model ({% cite 'Mecklenburg 2005' %}). Strain rate is fixed to a constant value in mechanical tests to generate timely and practical information on the effects of the museum environment without the burden of viscoelastic theory.
 
-The aim of this paper is to revisit some key concepts in the time-dependent mechanical behavior of paintings, as a supplement to fundamental knowledge of mechanics. The concepts relate to many of the treatment methods used in practice where material behavior is altered by changing different parameters. Detailed theory and test results are presented elsewhere; therefore, focus is given to generalized trends for clarity. A brief review of lining effects on stiffness and stress relaxation of painting is also provided to complement a more in-depth discussion regarding the Canadian Conservation Institute (CCI) Lining Project ([[Daly Hartin et al. 2011]]).
+The aim of this paper is to revisit some key concepts in the time-dependent mechanical behavior of paintings, as a supplement to fundamental knowledge of mechanics. The concepts relate to many of the treatment methods used in practice where material behavior is altered by changing different parameters. Detailed theory and test results are presented elsewhere; therefore, focus is given to generalized trends for clarity. A brief review of lining effects on stiffness and stress relaxation of painting is also provided to complement a more in-depth discussion regarding the Canadian Conservation Institute (CCI) Lining Project ({% cite 'Daly Hartin et al. 2011' %}).
 
 ### Mechanical Response of Paintings in Tension
 
@@ -45,11 +45,11 @@ A relaxation test is another useful experiment for studying time-dependent mater
 
 {% figure 'fig-2-3' %}
 
-The stress-relaxation test method outlined in ([fig. 2.4](#fig-2-4)) is the approach used in the CCI Lining Project to investigate the effects of different lining treatments for paintings on canvas ([[Michalski and Daly Hartin 1996]]). From recent work, ([fig. 2.4](#fig-2-4)) shows a plot of tension (kN/m) versus time after a fixed strain was applied to each sample ([[Daly Hartin et al. 2011]]). The initial sharp spike is caused by the rapid initial strain (see ([fig. 2.3b and c](#fig-2-3)), which is followed by a quick decay in tension due to stress relaxation. The model painting with a linen lining shows no difference from the model painting (unlined) over the measurement time scale. The sailcloth lining causes a uniform vertical shift in tension due to the stiffness of the fabric, which is constant over the sixty-hour period. An advantage of the sailcloth lining is that its stiffness allows for a stable increase in tension, with less strain imposed on the painting. In fact, the strain could be reduced to roughly half and still maintain a similar tension to the model painting in the experimental time scale. The wax resin lining also shows a strong vertical shift due to the wax stiffness; however, it also exhibits relaxation characteristics.
+The stress-relaxation test method outlined in ([fig. 2.4](#fig-2-4)) is the approach used in the CCI Lining Project to investigate the effects of different lining treatments for paintings on canvas ({% cite 'Michalski and Daly Hartin 1996' %}). From recent work, ([fig. 2.4](#fig-2-4)) shows a plot of tension (kN/m) versus time after a fixed strain was applied to each sample ({% cite 'Daly Hartin et al. 2011' %}). The initial sharp spike is caused by the rapid initial strain (see ([fig. 2.3b and c](#fig-2-3)), which is followed by a quick decay in tension due to stress relaxation. The model painting with a linen lining shows no difference from the model painting (unlined) over the measurement time scale. The sailcloth lining causes a uniform vertical shift in tension due to the stiffness of the fabric, which is constant over the sixty-hour period. An advantage of the sailcloth lining is that its stiffness allows for a stable increase in tension, with less strain imposed on the painting. In fact, the strain could be reduced to roughly half and still maintain a similar tension to the model painting in the experimental time scale. The wax resin lining also shows a strong vertical shift due to the wax stiffness; however, it also exhibits relaxation characteristics.
 
 {% figure 'fig-2-4' %}
 
-The addition of relative humidity (RH) fluctuations in ([fig. 2.4](#fig-2-4)) highlights some further trends in the lined painting response. Sailcloth and linen have no effect on the response of the painting, since the linings do not constrain the paint layers in the direction of applied tension—that is, painting and lining are free to shift across one another. In contrast, the wax lining impregnates the canvas and constrains the paint layers from shrinking or swelling due to contact with the supporting layers of the painting. The paint layers still respond to RH fluctuations; however, the wax adds surface constraint that prevents movement and a subsequent change in tension measured at the ends of the sample. A more in-depth discussion of the CCI Lining Project is provided by Daly Hartin and colleagues ([[Daly Hartin et al. 2011]]); therefore, the following discussion provides more general information regarding the viscoelastic behavior of painting materials.
+The addition of relative humidity (RH) fluctuations in ([fig. 2.4](#fig-2-4)) highlights some further trends in the lined painting response. Sailcloth and linen have no effect on the response of the painting, since the linings do not constrain the paint layers in the direction of applied tension—that is, painting and lining are free to shift across one another. In contrast, the wax lining impregnates the canvas and constrains the paint layers from shrinking or swelling due to contact with the supporting layers of the painting. The paint layers still respond to RH fluctuations; however, the wax adds surface constraint that prevents movement and a subsequent change in tension measured at the ends of the sample. A more in-depth discussion of the CCI Lining Project is provided by Daly Hartin and colleagues ({% cite 'Daly Hartin et al. 2011' %}); therefore, the following discussion provides more general information regarding the viscoelastic behavior of painting materials.
 
 #### *Time-temperature superposition*
 
@@ -57,17 +57,17 @@ Over a wide range of test conditions, it is impractical to summarize tensile dat
 
 {% figure 'fig-2-5' %}
 
-It is helpful to consider practical situations where the viscoelastic properties are of importance. As a simple example, ([fig. 2.6a](#fig-2-6)) shows a schematic of a broken and curled flake of paint that is deformed back into the plane of the painting. The radius of curvature (*r*) and film thickness (*h*) are labeled simply to highlight that it is possible to estimate the strain rate from a few parameters and define the time scale of the applied deformation. Rolling or unrolling a canvas painting is another similar and geometrically simple example. In ([fig. 2.6b](#fig-2-6)), the stiffness reduction caused by decreasing the rate of deformation is shown as the path from point A to point B along the master curve. In contrast, path A→C indicates the effect of keeping the same strain rate but using higher temperature to shift the master curve horizontally. The higher temperature accelerates the polymer relaxation and leads to a lower stiffness at a given strain rate. The horizontal shift may also be caused by a plasticizing effect, such as an increase in moisture content ([[Maksimov, Mochalov, and Urzhumtsev 1972]]). Path A→D shows a final example from the combined effect of decreasing the rate of deformation while also increasing temperature. Care should, of course, be taken when increasing temperature and moisture content, since extremes may cause unwanted effects beyond the simple relaxation process described here.
+It is helpful to consider practical situations where the viscoelastic properties are of importance. As a simple example, ([fig. 2.6a](#fig-2-6)) shows a schematic of a broken and curled flake of paint that is deformed back into the plane of the painting. The radius of curvature (*r*) and film thickness (*h*) are labeled simply to highlight that it is possible to estimate the strain rate from a few parameters and define the time scale of the applied deformation. Rolling or unrolling a canvas painting is another similar and geometrically simple example. In ([fig. 2.6b](#fig-2-6)), the stiffness reduction caused by decreasing the rate of deformation is shown as the path from point A to point B along the master curve. In contrast, path A→C indicates the effect of keeping the same strain rate but using higher temperature to shift the master curve horizontally. The higher temperature accelerates the polymer relaxation and leads to a lower stiffness at a given strain rate. The horizontal shift may also be caused by a plasticizing effect, such as an increase in moisture content ({% cite 'Maksimov, Mochalov, and Urzhumtsev 1972' %}). Path A→D shows a final example from the combined effect of decreasing the rate of deformation while also increasing temperature. Care should, of course, be taken when increasing temperature and moisture content, since extremes may cause unwanted effects beyond the simple relaxation process described here.
 
 {% figure 'fig-2-6' %}
 
-The concepts discussed in this section are often studied using a technique called dynamic mechanical analysis (DMA) ([[Nielsen and Landel 1994]]). This can rapidly give modulus data as a function of temperature and frequency using a single sample, and also show transition regions. Experiments involving tensile tests are typically used when the large-strain response, or failure properties, are of interest.
+The concepts discussed in this section are often studied using a technique called dynamic mechanical analysis (DMA) ({% cite 'Nielsen and Landel 1994' %}). This can rapidly give modulus data as a function of temperature and frequency using a single sample, and also show transition regions. Experiments involving tensile tests are typically used when the large-strain response, or failure properties, are of interest.
 
 #### *Ultimate properties*
 
 The purpose of using tensile test data in studies of artists paints is due to the interest in characterizing their large-strain response, particularly the failure criteria as a function of time and temperature. The related research work of Thor Smith in the 1960s is of interest since it shows the application of TTS to the ultimate properties of plastics and elastomers. Smith clearly summarizes an important finding in one of his many papers on this topic:
 
-> The ultimate tensile properties (the stress at break σ~b~, and the corresponding extension ratio λ~b~) vary markedly with the temperature and with the stress-time or strain-time history prior to rupture. Considerable evidence indicates that data obtained at different temperatures can often be superposed to give master curves which show the variation of σ~b~ and λ~b~ over many decades of time at a fixed temperature. Further, the temperature shift factor is the same—or nearly the same—as that used to superpose viscoelastic data representing small-deformation behavior. In other words, the same molecular parameters which influence chain mobility, thus the time and temperature dependence of linear viscoelastic response, also have a controlling effect on the time and temperature dependence of the ultimate tensile properties. ([[Smith 1965, 275]])
+> The ultimate tensile properties (the stress at break σ~b~, and the corresponding extension ratio λ~b~) vary markedly with the temperature and with the stress-time or strain-time history prior to rupture. Considerable evidence indicates that data obtained at different temperatures can often be superposed to give master curves which show the variation of σ~b~ and λ~b~ over many decades of time at a fixed temperature. Further, the temperature shift factor is the same—or nearly the same—as that used to superpose viscoelastic data representing small-deformation behavior. In other words, the same molecular parameters which influence chain mobility, thus the time and temperature dependence of linear viscoelastic response, also have a controlling effect on the time and temperature dependence of the ultimate tensile properties. ({% cite 'Smith 1965' '275' %})
 
 Recent studies on artists paints have highlighted the application of this approach for generating master curves of failure strains from tensile data. ([fig. 2.7a](#fig-2-7)) shows a generalized illustration of a failure envelope created using a similar approach to that shown for modulus data (see ([fig. 2.5](#fig-2-5))). The path to point A results in failure before reaching the target strain at the defined strain rate. Reducing the strain rate avoids failure for the path to point B, which is outside of the failure envelope. ([fig. 2.7b](#fig-2-7)) shows the path to point C outside of the failure envelope due to a horizontal shift of the master curve from a temperature increase or possibly a plasticizing effect (e.g., increased moisture content). Combining higher temperature and reduced strain rate locates point D even further from the failure line.
 
