--- a/content/1-history/4.md
+++ b/content/1-history/4.md
@@ -31,7 +31,7 @@ abstract: Since the 1970s, the Courtauld Institute of Art (CIA) and Royal Museum
 
 ## Introduction
 
-From the 1970s onwards, the National Maritime Museum (NMM), now Royal Museums Greenwich (RMG), and Courtauld Institute of Art (CIA) were at the forefront of UK developments in lining methods and the use of modern adhesives. NMM conservator Westby Percival-Prescott worked closely with Professor Stephen Rees-Jones and Gerry Hedley at the Courtauld to adopt their innovative methods, including the use of a vacuum hot table and vacuum envelope for lining ([[Percival-Prescott 2003a]]).
+From the 1970s onwards, the National Maritime Museum (NMM), now Royal Museums Greenwich (RMG), and Courtauld Institute of Art (CIA) were at the forefront of UK developments in lining methods and the use of modern adhesives. NMM conservator Westby Percival-Prescott worked closely with Professor Stephen Rees-Jones and Gerry Hedley at the Courtauld to adopt their innovative methods, including the use of a vacuum hot table and vacuum envelope for lining ({% cite 'Percival-Prescott 2003a' %}).
 
 As part of the Getty Foundation’s Conserving Canvas initiative, CIA and RMG collaborated once again to explore lining methods and our common history of lining. The first part of this collaborative project invited an expert panel of liners from the UK and Europe to review the condition of seventeen paintings from the two collections that had received structural treatment in the late twentieth century (see the Appendix at the end of this paper).[^1] We were interested to assess the longevity of the modern lining methods used in order to inform collections care for the future. Alongside this work, and to establish the structural conservation history of both institutions from the 1970s onwards, a survey of all treatment reports was undertaken, and each institution’s conservators were interviewed.
 
@@ -39,7 +39,7 @@ Of the seventeen paintings (see Appendix) examined by our experts, the majority 
 
 ## National Maritime Museum
 
-The NMM collection contains approximately four thousand paintings. In 1960, Percival-Prescott joined the NMM and founded the conservation department in the Royal Observatory building ([[Bomford 2005]]). He was joined by Ronald Chittenden, who focused solely on structural conservation, and paintings conservator Gillian Lewis. Thanks to Percival-Prescott's intense interest in painting materials and his passionate views on ethical methods of conservation, his department built and developed an international reputation ([[Bomford 2005]]). When asked by Dr. Greenhill, then director of the NMM, for a research area that could culminate in a large conference, Percival-Prescott put forward the idea of the structural conservation of canvas paintings, with a particular focus on lining. This was the origin of the Comparative Lining Techniques conference, held in Greenwich, April 23–25, 1974 ([[Percival-Prescott 2003a]]). The conference had an extraordinary impact on the conservation profession, and Percival-Prescott’s keynote speech, “The Lining Cycle,” articulated the trend for minimalism in structural treatment that still prevails today ([[Percival-Prescott 2003b]]).
+The NMM collection contains approximately four thousand paintings. In 1960, Percival-Prescott joined the NMM and founded the conservation department in the Royal Observatory building ({% cite 'Bomford 2005' %}). He was joined by Ronald Chittenden, who focused solely on structural conservation, and paintings conservator Gillian Lewis. Thanks to Percival-Prescott's intense interest in painting materials and his passionate views on ethical methods of conservation, his department built and developed an international reputation ({% cite 'Bomford 2005' %}). When asked by Dr. Greenhill, then director of the NMM, for a research area that could culminate in a large conference, Percival-Prescott put forward the idea of the structural conservation of canvas paintings, with a particular focus on lining. This was the origin of the Comparative Lining Techniques conference, held in Greenwich, April 23–25, 1974 ({% cite 'Percival-Prescott 2003a' %}). The conference had an extraordinary impact on the conservation profession, and Percival-Prescott’s keynote speech, “The Lining Cycle,” articulated the trend for minimalism in structural treatment that still prevails today ({% cite 'Percival-Prescott 2003b' %}).
 
 From 1970 to 1974, Percival-Prescott, Lewis, and Chittenden travelled throughout Europe, the East Coast of America, and Russia, to learn more about lining, meeting experts and filming them at work. Upon return to the UK studios, they experimented with the new techniques, adhesives, and fabrics discovered abroad, and extensive (unpublished) peel tests were undertaken in the Engineering Research department of the Royal Naval College, a few of which still remain in the Percival-Prescott archive at the Hamilton Kerr Institute.[^2]
 
@@ -55,17 +55,17 @@ When reviewing the treatment reports from 1965 to 2000, the impact of these vari
 
 ### Trends and Patterns: Materials
 
-In terms of adhesives used for lining and strip-lining, the NMM shows a preference for a small number of adhesives and techniques, which were refined into streamlined processes ([fig. 4.2](#fig-4-2)). Initially, wax-resin lining is the only method used. Linen was used almost exclusively,[^4] and reports mention combinations of AW2 or dammar resin with wax and elemi gum, or later, MS2 resin combined with wax, colophony, and elemi.[^5] These linings were almost all done on the hot table, using the prestretching technique and the vacuum envelope developed in-house ([[Chittenden, Lewis, and Percival-Prescott 2003]]). Chittenden’s reports were usually very brief, such as, “lined in the usual way” or “lined with satisfactory results.”[^6]
+In terms of adhesives used for lining and strip-lining, the NMM shows a preference for a small number of adhesives and techniques, which were refined into streamlined processes ([fig. 4.2](#fig-4-2)). Initially, wax-resin lining is the only method used. Linen was used almost exclusively,[^4] and reports mention combinations of AW2 or dammar resin with wax and elemi gum, or later, MS2 resin combined with wax, colophony, and elemi.[^5] These linings were almost all done on the hot table, using the prestretching technique and the vacuum envelope developed in-house ({% cite 'Chittenden, Lewis, and Percival-Prescott 2003' %}). Chittenden’s reports were usually very brief, such as, “lined in the usual way” or “lined with satisfactory results.”[^6]
 
 {% figure 'fig-4-2' %}
 
 From 1971 to 1973, five sturgeon glue linings were performed. These are rather rare in the UK and drew upon the team’s training from “masterly restorer Brianzev” in Russia ({% cite 'Percival-Prescott 2003a' 'viii' %}). Reports for the 1971 treatment of George Knight’s *Cleopatra's Needle Being Brought to England,* 1877 (BHC0641), revealed that “sturgeon bladder adhesive” was selected because the work was “painted upon a white ground and of materials which would have yellowed and darkened had wax been used.”[^7] These linings were performed only prior to the conference and were quickly abandoned; studio notes and treatment reports convey the impression that the technique was difficult to master.[^8]
 
-Beva 371 was used for both strip-lining and lining, combined with a variety of fabrics ([figs. 4.2](#fig-4-2) and [4.3](#fig-4-3)). Initially, the preference was for TenCate, a polyvinyl alcohol fabric from the Netherlands, but this was gradually superseded by polyester sailcloth, beginning in 1982, most likely introduced to the NMM by the Courtauld. Linen was used on one occasion with Beva for lining but more frequently for strip-lining. Other materials were used more sporadically in conjunction with Beva, including woven polypropylene and glass fiber. These fabrics seem to have been used experimentally around the time of the lining conference and were not incorporated into usual practice. Glass fiber, introduced by Pierre Boissonnas ([[Boissonnas 1961]]), was used over a prolonged period (1973–81), in combination with wax-resin, Beva, or Beva with added wax, to help produce transparent linings.[^9]
+Beva 371 was used for both strip-lining and lining, combined with a variety of fabrics ([figs. 4.2](#fig-4-2) and [4.3](#fig-4-3)). Initially, the preference was for TenCate, a polyvinyl alcohol fabric from the Netherlands, but this was gradually superseded by polyester sailcloth, beginning in 1982, most likely introduced to the NMM by the Courtauld. Linen was used on one occasion with Beva for lining but more frequently for strip-lining. Other materials were used more sporadically in conjunction with Beva, including woven polypropylene and glass fiber. These fabrics seem to have been used experimentally around the time of the lining conference and were not incorporated into usual practice. Glass fiber, introduced by Pierre Boissonnas ({% cite 'Boissonnas 1961' %}), was used over a prolonged period (1973–81), in combination with wax-resin, Beva, or Beva with added wax, to help produce transparent linings.[^9]
 
 {% figure 'fig-4-3' %}
 
-As surface deformations could not be addressed during a wax-resin or Beva lining, they had to be treated beforehand. The NMM developed the prestretching technique, first published at the 1974 conference, to introduce tension and address cupping and deformation out of plane ([[Chittenden, Lewis, and Percival-Prescott 2003]]). This technique was used routinely in the 1970s and 1980s.
+As surface deformations could not be addressed during a wax-resin or Beva lining, they had to be treated beforehand. The NMM developed the prestretching technique, first published at the 1974 conference, to introduce tension and address cupping and deformation out of plane ({% cite 'Chittenden, Lewis, and Percival-Prescott 2003' %}). This technique was used routinely in the 1970s and 1980s.
 
 Loose-lining starts in the early 1970s, and sixteen paintings were loose-lined in 1975 using either TenCate or Fabrene, possibly in preparation for an exhibition. TenCate was used until 1986, after which it was replaced with polyester sailcloth. One painting was loose-lined with wax-impregnated cotton duck in 1974, possibly as an experiment around the time of the conference. Linen was used regularly for loose-lining, perhaps prioritizing aesthetics over mechanical properties for this purpose (see ([fig. 4.3](#fig-4-3))).
 
@@ -77,7 +77,7 @@ Many of the paintings selected for assessment by the expert panel were paintings
 
 An early example of the typical NMM method of wax-resin lining can be seen in the treatment of Matteo Perez d'Aleccio’s *The Siege of Malta: Siege and Bombardment of St Michael, 28 June 1565,* 1656 (BHC0255). The painting was relined in 1967, and the treatment was deemed successful at the time. However, in 1989 the canvas was found to be sagging near the bottom edge, which necessitated removal from the stretcher and restretching. The painting was of a reasonably large size (137.2 x 193 cm) and was exhibited in the time between the two treatments in a fluctuating environment, so these issues were not felt to be particularly surprising.
 
-Due to failure of the previous lining along the top edge, de Loutherbourg’s *Defeat of the Spanish Armada, 8 August 1588* (BHC0264) was relined in 1973. The work was included in the exhibition accompanying the 1974 conference as an example of a contemporary lining ([fig. 4.5](#fig-4-5)). A wax-resin relining followed the standard NMM litho paper prestretching ([[Chittenden, Lewis, and Percival-Prescott 2003]]). However, complications occurred in the process. Records indicate that the large size of the painting (214.6 x 278.1 cm) necessitated relining on the hot table in two parts. After some technical difficulties in heating the table to the necessary temperature, it was found that the lined half displayed cockling due to differential thermal expansion. The expert panel cited cockling as a common phenomenon when paintings were lined in sections and said that this could often be magnified over a large scale. Despite the documented difficulties, our experts agreed that the lining appeared to be performing well, and in the long term these issues did not appear to have a detrimental effect.
+Due to failure of the previous lining along the top edge, de Loutherbourg’s *Defeat of the Spanish Armada, 8 August 1588* (BHC0264) was relined in 1973. The work was included in the exhibition accompanying the 1974 conference as an example of a contemporary lining ([fig. 4.5](#fig-4-5)). A wax-resin relining followed the standard NMM litho paper prestretching ({% cite 'Chittenden, Lewis, and Percival-Prescott 2003' %}). However, complications occurred in the process. Records indicate that the large size of the painting (214.6 x 278.1 cm) necessitated relining on the hot table in two parts. After some technical difficulties in heating the table to the necessary temperature, it was found that the lined half displayed cockling due to differential thermal expansion. The expert panel cited cockling as a common phenomenon when paintings were lined in sections and said that this could often be magnified over a large scale. Despite the documented difficulties, our experts agreed that the lining appeared to be performing well, and in the long term these issues did not appear to have a detrimental effect.
 
 {% figure 'fig-4-5' %}
 
@@ -93,7 +93,7 @@ Indeed, those reviewing these paintings in 2019 felt that the vast majority were
 
 The Courtauld collection was established by key bequests of old master paintings and Impressionist works in the 1930s. When the Department of Conservation and Technology was created in 1931, the collection’s paintings were first treated by the experienced tutors and by the students under their supervision. In 1998, Stephen Gritt was appointed as the first Courtauld Gallery conservator, and the majority of this workload shifted away from the Department.[^11] The students primarily worked on paintings from other museums, societies, and private collections that dated from the fourteenth century to modern periods, with treatments ranging from surface cleaning to full lining/relining.[^12]
 
-From the 1950s, the department was involved in lining research ([[Straub and Rees-Jones 1955]]). At the 1974 Greenwich conference, students Hedley, Stephen Hackney, and Alan Cummings presented their research work ([[Hedley, Hackney, and Cummings 2003]]). Vishwa Mehra was invited to the department on at least two occasions (1978 and 1981) to give workshops demonstrating his cold lining technique.[^13] From 1982 until his untimely death in 1990, Hedley was a lecturer focusing on, among other things, the mechanical properties of synthetic canvases as lining supports ([[Hedley and Villers 1982]]). The environment was thus favorable for experimentation and development of techniques and materials (e.g., [[Phenix and Hedley 1984]]).[^14]
+From the 1950s, the department was involved in lining research ({% cite 'Straub and Rees-Jones 1955' %}). At the 1974 Greenwich conference, students Hedley, Stephen Hackney, and Alan Cummings presented their research work ({% cite 'Hedley, Hackney, and Cummings 2003' %}). Vishwa Mehra was invited to the department on at least two occasions (1978 and 1981) to give workshops demonstrating his cold lining technique.[^13] From 1982 until his untimely death in 1990, Hedley was a lecturer focusing on, among other things, the mechanical properties of synthetic canvases as lining supports ({% cite 'Hedley and Villers 1982' %}). The environment was thus favorable for experimentation and development of techniques and materials (e.g., {% cite 'Phenix and Hedley 1984' %}).[^14]
 
 ### Trends and Patterns: Treatments
 
@@ -107,15 +107,15 @@ CIA has a long history of using wax-resin. Waxes used were beeswax, bleached bee
 
 {% figure 'fig-4-7' %}
 
-Beva was taken up shortly after the 1974 conference. Cummings and Hedley had a long conversation with Gustav Berger during the conference, and that discussion was key to the adoption of Beva at the Courtauld.[^16] PRIMAL AC-634 was introduced to the conservation world by Mehra in 1972 and began to be used at CIA soon after ([[Mehra 1972]]). It was used for cold linings until 1984, when research conducted in the department showed its poor aging properties ([[Howells et al. 1984]]). Plextol B500, also introduced by Mehra, was used for cold linings until 1992.
+Beva was taken up shortly after the 1974 conference. Cummings and Hedley had a long conversation with Gustav Berger during the conference, and that discussion was key to the adoption of Beva at the Courtauld.[^16] PRIMAL AC-634 was introduced to the conservation world by Mehra in 1972 and began to be used at CIA soon after ({% cite 'Mehra 1972' %}). It was used for cold linings until 1984, when research conducted in the department showed its poor aging properties ({% cite 'Howells et al. 1984' %}). Plextol B500, also introduced by Mehra, was used for cold linings until 1992.
 
-Fabri-Sil, a Teflon-impregnated glass fiber with a silicon pressure adhesive, was introduced to CIA in the 1980s and studied by Alan Phenix as his student research project ([[Phenix and Hedley 1984]]\|, 84.2.39). This product, developed by Fieux, was used seven times at CIA from 1983 to 1989 ([[Fieux 1977]]). It was abandoned due the weakness of the bond even after solvent reactivation, and its high cost.[^17]
+Fabri-Sil, a Teflon-impregnated glass fiber with a silicon pressure adhesive, was introduced to CIA in the 1980s and studied by Alan Phenix as his student research project ({% cite 'Phenix and Hedley 1984' %}\|, 84.2.39). This product, developed by Fieux, was used seven times at CIA from 1983 to 1989 ({% cite 'Fieux 1977' %}). It was abandoned due the weakness of the bond even after solvent reactivation, and its high cost.[^17]
 
-In terms of lining fabrics, CIA experimented with different fabrics, almost entirely synthetics, before settling on polyester sailcloth, a fabric Hedley had thoroughly researched and tested ([fig. 4.8](#fig-4-8)) ([[Hedley and Villers 1982, 154]]). Other polyester fabrics included Vylene and Permawear 122. In many treatment reports, lining fabrics were referred to as “polyester” or “polyester fabric,” and it is not possible to know precisely which fabrics were used.
+In terms of lining fabrics, CIA experimented with different fabrics, almost entirely synthetics, before settling on polyester sailcloth, a fabric Hedley had thoroughly researched and tested ([fig. 4.8](#fig-4-8)) ({% cite 'Hedley and Villers 1982' '154' %}). Other polyester fabrics included Vylene and Permawear 122. In many treatment reports, lining fabrics were referred to as “polyester” or “polyester fabric,” and it is not possible to know precisely which fabrics were used.
 
 {% figure 'fig-4-8' %}
 
-Glass fiber was used from 1975 until 1981, most likely for experimentation after the 1974 conference ([[Boissonnas 2003]]). There were also a few examples of marouflage onto aluminum honeycomb. Polypropylene was used from 1979 and abandoned by 1981. Lascaux P110, a textile with a similar appearance to linen but made of polyester, was used from 1991 until 1995.
+Glass fiber was used from 1975 until 1981, most likely for experimentation after the 1974 conference ({% cite 'Boissonnas 2003' %}). There were also a few examples of marouflage onto aluminum honeycomb. Polypropylene was used from 1979 and abandoned by 1981. Lascaux P110, a textile with a similar appearance to linen but made of polyester, was used from 1991 until 1995.
 
 As at NMM, the adhesives used for strip-lining are Beva gel and film. The fabrics used for strip-linings are mostly synthetics, apart from one example in 1986 using linen. Synthetics used include Permawear 122, polyester sailcloth, and Lascaux P110.
 
@@ -129,15 +129,15 @@ As already mentioned, very few paper records remain for the earliest treatments.
 
 While the marouflage appeared to be an extreme intervention, our expert panel remarked that this had been a popular “preventative” measure in the 1960s. Chief among the problems associated with marouflage was weave emphasis resulting from the unyielding nature of the secondary support, an unfortunate outcome in the treatment of the Pissarro. The painting appears structurally sound with no apparent justification for the marouflage. The work seemed to be an example of lining for preventative measures.
 
-In the 1980s, several Impressionist paintings, accessioned from the Princes Gate bequest, were treated before they went on display in the Courtauld Galleries for the first time ([[Brown 1981]]). All then nearly a century old, these unlined canvasses were suffering from planar distortion and embrittlement. Some paintings had large areas of unpainted ground and delicate impasto, which posed lining challenges. Each painting was treated with a different solution, which highlighted the speed of evolution of thinking in lining practice at the time, as well as the intellectual flexibility of the conservators.
+In the 1980s, several Impressionist paintings, accessioned from the Princes Gate bequest, were treated before they went on display in the Courtauld Galleries for the first time ({% cite 'Brown 1981' %}). All then nearly a century old, these unlined canvasses were suffering from planar distortion and embrittlement. Some paintings had large areas of unpainted ground and delicate impasto, which posed lining challenges. Each painting was treated with a different solution, which highlighted the speed of evolution of thinking in lining practice at the time, as well as the intellectual flexibility of the conservators.
 
-Paul Cezanne’s *Turning Road (Route Tournante),* 1905 (P.1978.PG.61) was treated in 1980 using a low-pressure, cold-lining technique learned from Mehra in 1978. The adhesive, Primal A-C64 thickened with Natrosol, was applied through a mesh screen. One particular concern was the danger of staining and potentially darkening the ground with the adhesive. The report describes painstaking spectrophotometer readings, taken before and after treatment. The lining fabric was polyester, Permawear 122, and the report contains correspondence with the manufacturer. The deformations out of plane ([fig. 4.9a](#fig-4-9-a)) were treated prior to lining by misting with water and drying on the cold lining table at minimal pressure (8.5 cm water), repeated three times with local weighting. The treatment was deemed a success and was subsequently chosen to illustrate a book in Gerry Hedley’s memory ([[Hedley 1993]]). Although it was incorrectly described as a Plextol lining, the success of the flattening moisture treatment and the lining in retaining the improved surface is commented on in the picture caption. Our expert panel agreed the lining was extremely successful in terms of correcting overall distortion while keeping a very light, unlined feel ([fig. 4.9b](#fig-4-9-b)). Only one area of lifting of the lining on the turnover edge was identified, but this was not felt to be an indicator of more widespread failure concerns.
+Paul Cezanne’s *Turning Road (Route Tournante),* 1905 (P.1978.PG.61) was treated in 1980 using a low-pressure, cold-lining technique learned from Mehra in 1978. The adhesive, Primal A-C64 thickened with Natrosol, was applied through a mesh screen. One particular concern was the danger of staining and potentially darkening the ground with the adhesive. The report describes painstaking spectrophotometer readings, taken before and after treatment. The lining fabric was polyester, Permawear 122, and the report contains correspondence with the manufacturer. The deformations out of plane ([fig. 4.9a](#fig-4-9-a)) were treated prior to lining by misting with water and drying on the cold lining table at minimal pressure (8.5 cm water), repeated three times with local weighting. The treatment was deemed a success and was subsequently chosen to illustrate a book in Gerry Hedley’s memory ({% cite 'Hedley 1993' %}). Although it was incorrectly described as a Plextol lining, the success of the flattening moisture treatment and the lining in retaining the improved surface is commented on in the picture caption. Our expert panel agreed the lining was extremely successful in terms of correcting overall distortion while keeping a very light, unlined feel ([fig. 4.9b](#fig-4-9-b)). Only one area of lifting of the lining on the turnover edge was identified, but this was not felt to be an indicator of more widespread failure concerns.
 
 {% figuregroup '2' 'fig-4-9-a, fig-4-9-b' %}
 
 Edouard Manet’s *Au Bal—Marguerite de Conflans en Toilette de Bal,* 1870–80 (P.1978.PG.233) was treated the following year, in 1981, to address the buckling of the canvas recorded in raking light photographs before treatment. Caroline Villers’s recommendation seemed to follow the successful precedent set by the treatment of the Cezanne painting: to carry out a cold lining at low pressure. A change of plan is described with Villers’s typical understatement: “Although the tacking margin had not seemed to exhibit exceptional sensitivity to moisture…the canvas was found to be extremely responsive.”[^20] They switched to using Beva with sailcloth at 60°C–65°C and using 12"Hg vacuum envelope pressure. The envelope system was designed to avoid textural changes, and the conservators also removed large slubs and residues from the reverse prior to lining. However, when reviewing the treatment with the aid of archive raking light images, it did seem that there had been some increased weave emphasis. Despite this, the treatment was published by Hedley as an exemplar treatment the following year ({% cite 'Hedley and Villers 1982' '157' %}). It was interesting to reflect on this treatment with the expert group. It seemed to particularly highlight the change in attitudes towards lining over the 38 years since this painting was treated. The consensus now would be to accept the deformations out of plane and to try to avoid lining for as long as possible.
 
-Edgar Degas’s *Lady with a Parasol,* 1870–72 (P.1978.PG.87) was treated almost immediately after the Manet. The painting was first strip-lined using Permawear 122 and Beva, but during restretching the original canvas fractured along the turnover edge. At this point, close to the exhibition opening, it was decided to mend the tear locally and return to the painting after the show. The painting returned for treatment in 1983 in preparation for considerable travel as part of a loan to Japan and Australia, and the decision was taken to line the painting ([fig. 4.10](#fig-4-10)). Hedley, leading the treatment, selected Fabri-Sil, but adapted the process to incorporate solvent activation, which was concurrently investigated by Phenix in his research project ([[Phenix and Hedley 1984]]). Using solvent activation, the peel strength of Fabri-Sil increased to approximately match a “strong wax-resin” formulation. Despite the treatment being among the early Fabri-Sil linings, our inspection of the painting found that the experimental method performed well: the impasto looks crisp and sharp, and the ground layer appears unchanged by the adhesive, with the lining remaining well adhered throughout.
+Edgar Degas’s *Lady with a Parasol,* 1870–72 (P.1978.PG.87) was treated almost immediately after the Manet. The painting was first strip-lined using Permawear 122 and Beva, but during restretching the original canvas fractured along the turnover edge. At this point, close to the exhibition opening, it was decided to mend the tear locally and return to the painting after the show. The painting returned for treatment in 1983 in preparation for considerable travel as part of a loan to Japan and Australia, and the decision was taken to line the painting ([fig. 4.10](#fig-4-10)). Hedley, leading the treatment, selected Fabri-Sil, but adapted the process to incorporate solvent activation, which was concurrently investigated by Phenix in his research project ({% cite 'Phenix and Hedley 1984' %}). Using solvent activation, the peel strength of Fabri-Sil increased to approximately match a “strong wax-resin” formulation. Despite the treatment being among the early Fabri-Sil linings, our inspection of the painting found that the experimental method performed well: the impasto looks crisp and sharp, and the ground layer appears unchanged by the adhesive, with the lining remaining well adhered throughout.
 
 {% figure 'fig-4-10' %}
 
