--- a/content/2-present-practice/10.md
+++ b/content/2-present-practice/10.md
@@ -17,7 +17,7 @@ abstract: "The author, a liner with long experience in structural conservation o
 
 Forty years has passed since I first stepped into a conservation studio. I have spent all those years in Italy, but I have also had the opportunity to travel and build strong friendships with colleagues over the world. Working with them, I realized that each of us comes from a specific background that has particular economic issues, culture, and conservation management, all of which has influenced our training, knowledge, approaches, methodologies, and working practice.
 
-Italy is a small and challenging country with a huge heritage to preserve and a very long conservation history that has influenced generations of conservators in Europe. Because of this richness, in 1939, Italy established precise rules and roles to defend and protect its heritage based on central control by the Ministry of Cultural Heritage ([[Coccolo 2017]]). The ministry fixes the scale of priorities, the way projects have to be designed, and how cost estimates must be calculated (often by the square meter). It is a low-value economy, with private companies covering ninety percent of active conservation, competing to reduce prices and trying to work within tight schedules. It’s not necessary to describe in detail how this public administration manages conservation needs, but certainly one of the first concerns is how to be sustainable without sacrificing quality of treatments. Our community in Italy has suffered under this condition, and only occasionally has it been possible to share our methods, approach, problems, and concerns with an international community. For this reason, I am deeply grateful to the Getty Foundation for the great opportunity offered by the Conserving Canvas initiative.
+Italy is a small and challenging country with a huge heritage to preserve and a very long conservation history that has influenced generations of conservators in Europe. Because of this richness, in 1939, Italy established precise rules and roles to defend and protect its heritage based on central control by the Ministry of Cultural Heritage ({% cite 'Coccolo 2017' %}). The ministry fixes the scale of priorities, the way projects have to be designed, and how cost estimates must be calculated (often by the square meter). It is a low-value economy, with private companies covering ninety percent of active conservation, competing to reduce prices and trying to work within tight schedules. It’s not necessary to describe in detail how this public administration manages conservation needs, but certainly one of the first concerns is how to be sustainable without sacrificing quality of treatments. Our community in Italy has suffered under this condition, and only occasionally has it been possible to share our methods, approach, problems, and concerns with an international community. For this reason, I am deeply grateful to the Getty Foundation for the great opportunity offered by the Conserving Canvas initiative.
 
 ## Consolidation
 
@@ -25,9 +25,9 @@ At the Yale conference in 2019 we all focused on linings, showing different appr
 
 {% figure 'fig-10-1' %}
 
-Consolidation is an irreversible process, and for this reason it is viewed as an embarrassment, something that’s better not to talk about. The Center for the Study of Restoration Materials (CESMAR7), an Italian association devoted to research on polychrome surfaces, organized two international meetings on this specific issue in 2006 and 2008 ([[CESMAR7 2008]]; [[CESMAR7 2010]]). We realized at that time only a few publications covered the subject and little research was being done; it looked to us that everybody was trying to avoid this field full of uncertainties.
+Consolidation is an irreversible process, and for this reason it is viewed as an embarrassment, something that’s better not to talk about. The Center for the Study of Restoration Materials (CESMAR7), an Italian association devoted to research on polychrome surfaces, organized two international meetings on this specific issue in 2006 and 2008 ({% cite 'CESMAR7 2008' %}; {% cite 'CESMAR7 2010' %}). We realized at that time only a few publications covered the subject and little research was being done; it looked to us that everybody was trying to avoid this field full of uncertainties.
 
-Of course, early lining methods were designed to provide some sort of strength to the grounds and paint film by infusing waxes, resins, and animal glues with the aid of huge pressures and high temperatures. But to definitively step out of this old story we have to design specific consolidation strategies that are informed by a full understanding of the mechanical stresses and damages and of the degree and speed of deterioration of each component.[^1] To do honest work we should openly discuss many of our totems and try to establish a path toward an adequate decision-making process ([[Ciatti and Signorini 2007]]; [[Michalski and Rossi-Doria 2011]]; [[Rossi-Doria 2010]]).[^2]
+Of course, early lining methods were designed to provide some sort of strength to the grounds and paint film by infusing waxes, resins, and animal glues with the aid of huge pressures and high temperatures. But to definitively step out of this old story we have to design specific consolidation strategies that are informed by a full understanding of the mechanical stresses and damages and of the degree and speed of deterioration of each component.[^1] To do honest work we should openly discuss many of our totems and try to establish a path toward an adequate decision-making process ({% cite 'Ciatti and Signorini 2007' %}; {% cite 'Michalski and Rossi-Doria 2011' %}; {% cite 'Rossi-Doria 2010' %}).[^2]
 
 Consolidation involves a vast amount of knowledge and difficult ethical issues. Each of us has developed a personal framework to understand what the needs are in terms of consolidation, considering future deterioration and designing specific strategies that can guarantee efficacy and respect for the features of original materials—a difficult but necessary task—and we first must understand the best way to achieve a reliable result: from the front, or from the back? It’s a never-ending story, and each of us has his or her own ideas.
 
@@ -45,7 +45,7 @@ During my career I have had to remove some of these old linings and many times I
 
 My practice was influenced by the “Roman method” designed by the Istituto Centrale per il Restauro (ICR). This method was brought to the ICR by assistants to Mauro Pelliccioli, a famous Italian restorer from Bergamo who was called to provide linings for war-damaged paintings. In 1963, facing the restoration of the three big paintings by Caravaggio, Giovanni Urbani, the head of paintings labs, refined the method by introducing the use of temporary expandable metal lining stretchers, instead of the heavy wooden looms that were unable to control tension during the lining process. The original Bergamo recipe went through some modifications, as did the ironing process.
 
-Over the next forty years Italians continued to line paintings using traditional methods, with some modifications. The big campaigns of restoration after the war, after the Florence flood, in Venice, and in Rome from 1980 to 2000, confirmed the big differences between regional traditions. One example of this dynamic is the existence of two official Italian methods—the Florentine and the Roman—designed respectively by the Opificio delle Pietre Dure and ICR, both part of the same institution, the Ministry of Cultural Heritage ([[Phenix 1995]]; [[Stoner and Rushfield 2012]]).
+Over the next forty years Italians continued to line paintings using traditional methods, with some modifications. The big campaigns of restoration after the war, after the Florence flood, in Venice, and in Rome from 1980 to 2000, confirmed the big differences between regional traditions. One example of this dynamic is the existence of two official Italian methods—the Florentine and the Roman—designed respectively by the Opificio delle Pietre Dure and ICR, both part of the same institution, the Ministry of Cultural Heritage ({% cite 'Phenix 1995' %}; {% cite 'Stoner and Rushfield 2012' %}).
 
 ## Reevaluation of Water-Based Adhesives
 
@@ -55,11 +55,11 @@ As mentioned earlier, sustainability is a crucial issue. The traditional glue-pa
 
 For these reasons, in 1995 I started to reconsider all aspects of traditional methods. It has been a long process and remains a work in progress. In the last ten years, I intensified my studies, assessed test results, worked with international researchers, and monitored long-term results.
 
-A big concern is mold growth and attack by *Stegobium paniceum* (the only insect we find on linings). All natural materials are hygroscopic and have that element of risk, but our observations in Italy indicate that problems occur only in specific microclimates with long exposure to high RH and poor ventilation. Recent tests ([[Fuster-López et al. 2017]]; see also [Fuster-López et al. in this volume](/8-posters/51/)) demonstrate that the use of close-weave fabrics and some traditional ingredients—such as rye flour and molasses—can increase the risk. A good backing board, some space between the painting and the wall, and some basic control of damp will reduce this risk in a very effective way.
+A big concern is mold growth and attack by *Stegobium paniceum* (the only insect we find on linings). All natural materials are hygroscopic and have that element of risk, but our observations in Italy indicate that problems occur only in specific microclimates with long exposure to high RH and poor ventilation. Recent tests ({% cite 'Fuster-López et al. 2017' %}; see also [Fuster-López et al. in this volume](/8-posters/51/)) demonstrate that the use of close-weave fabrics and some traditional ingredients—such as rye flour and molasses—can increase the risk. A good backing board, some space between the painting and the wall, and some basic control of damp will reduce this risk in a very effective way.
 
 What worries me most about traditional linings is the amount of adhesive applied to the reverse of the painting. Excessive amounts (we might say abusive amounts) of adhesive, of very strong glues, increase the sensitivity to humidity variations, resulting in mechanical stresses being transmitted to the paint layers.
 
-The results of the ICOM-CC International Working Group, available in this publication ([Fuster-López et al. 2022](/8-posters/51/)), represent the first attempt at a scientific assessment of glue-paste linings. Some conservators have published results before this of experiments with modified recipes ([[Ackroyd 1995]]), but a full understanding was missing. Now, for the first time, it has become possible to study the influence of different materials and different application methods from a mechanical, physical, chemical, and biological point of view, and to establish precise parameters for further investigation.
+The results of the ICOM-CC International Working Group, available in this publication ([Fuster-López et al. 2022](/8-posters/51/)), represent the first attempt at a scientific assessment of glue-paste linings. Some conservators have published results before this of experiments with modified recipes ({% cite 'Ackroyd 1995' %}), but a full understanding was missing. Now, for the first time, it has become possible to study the influence of different materials and different application methods from a mechanical, physical, chemical, and biological point of view, and to establish precise parameters for further investigation.
 
 ## Materials Selection
 
@@ -67,7 +67,7 @@ Geographically, the list of materials used in traditional linings is more or les
 
 ### Fabrics
 
-Over the centuries, liners have never stopped discussing the selection of the best lining canvas to use, and the search continues to this day—although we now use a more quantitative approach ([[Young 1999]]). The selection of the fabric affects the method, the adhesive application, and many other factors.
+Over the centuries, liners have never stopped discussing the selection of the best lining canvas to use, and the search continues to this day—although we now use a more quantitative approach ({% cite 'Young 1999' %}). The selection of the fabric affects the method, the adhesive application, and many other factors.
 
 #### *Close-weave canvases*
 
@@ -93,13 +93,13 @@ Apart from the Russian tradition, where only sturgeon glue and some honey was us
 
 #### *Animal gels*
 
-These amazing materials are used in many steps of treatment—as an adhesive for facings, a consolidant for paint film decohesion, an ingredient in glue-paste compositions, and as a binder for fillings. In tests over the years, animal glues were chosen for their high strength compared to all synthetic materials. I think it is useful, therefore, to establish some essential information that will guide how and why they can be used ([[Pearson 2003]]; [[Schellmann 2007]]; [[Bigi, Panzavolta, and Rubini 2004]]).
+These amazing materials are used in many steps of treatment—as an adhesive for facings, a consolidant for paint film decohesion, an ingredient in glue-paste compositions, and as a binder for fillings. In tests over the years, animal glues were chosen for their high strength compared to all synthetic materials. I think it is useful, therefore, to establish some essential information that will guide how and why they can be used ({% cite 'Pearson 2003' %}; {% cite 'Schellmann 2007' %}; {% cite 'Bigi, Panzavolta, and Rubini 2004' %}).
 
 Animal gels are produced in two different ways: Type 1 with acid, and Type 2 with alkaline treatments. Mostly conservators work with Type 1 for their higher adhesive properties and gel strength. Manufacturers and mostly wholesale sellers and traders established in Asia (China, Vietnam, Cambodia, India), and to a lesser extend in North America, produce a huge variety of blends for food, cosmetics, and pharmaceuticals.
 
 Gel strength (GS) is measured in terms of the Bloom number.[^3] Manufacturers produce gelatins with different Bloom values for different intended uses by varying the fundamental steps in biochemical treatments and number of extractions. Of course, the quality of collagen and basic materials plays a big role, as do other additives.
 
-Depending on Bloom value, gelatins vary their behavior with moisture and their rate of sorption and desorption. Mechanical tests in the conservation literature show curves measured at different RH values but, until now, none of them has specified the gel strength, only the general type of gelatin: rabbit, sturgeon, hide, or bone. Because it’s difficult to find precise technical data on gelatin suppliers’ labeling, it’s probably necessary to develop our manual and sensory skills to (at least) establish a method to estimate gel strength. Specific features can be interpreted and evaluated to correlate with the Bloom scale: speed and quantity of water absorption/release, speed of gel degradation, color, smell, viscosity, time of tack, and gel stiffness. Sturgeon bladder glue Bloom values have only recently been investigated. (All the samples I tried had different Bloom values, as did other gelatins, and any considerations related to flexibility or the higher stability of bladder collagen are not correct if not related to measured Bloom and RH values [[fig. 10.3](#fig-10-3)] ([[Bridarolli et al. 2022]]).
+Depending on Bloom value, gelatins vary their behavior with moisture and their rate of sorption and desorption. Mechanical tests in the conservation literature show curves measured at different RH values but, until now, none of them has specified the gel strength, only the general type of gelatin: rabbit, sturgeon, hide, or bone. Because it’s difficult to find precise technical data on gelatin suppliers’ labeling, it’s probably necessary to develop our manual and sensory skills to (at least) establish a method to estimate gel strength. Specific features can be interpreted and evaluated to correlate with the Bloom scale: speed and quantity of water absorption/release, speed of gel degradation, color, smell, viscosity, time of tack, and gel stiffness. Sturgeon bladder glue Bloom values have only recently been investigated. (All the samples I tried had different Bloom values, as did other gelatins, and any considerations related to flexibility or the higher stability of bladder collagen are not correct if not related to measured Bloom and RH values [[fig. 10.3](#fig-10-3)] ({% cite 'Bridarolli et al. 2022' %}).
 
 {% figure 'fig-10-3' %}
 
@@ -111,7 +111,7 @@ Animal glues lose their properties if exposed to high temperature or if reheated
 
 #### *Flours*
 
-Liners have used flours from various grains since the beginning. The reason is simple: they were easy to find and prepare, they were (and remain) very cheap, and they provide good adhesion, tack, and a nice stiffness. Their unbelievable mechanical properties ([[Delcour and Hoseney 2010]]) have been exploited by humans in thousands of different ways, depending on materials’ availability and local culture.
+Liners have used flours from various grains since the beginning. The reason is simple: they were easy to find and prepare, they were (and remain) very cheap, and they provide good adhesion, tack, and a nice stiffness. Their unbelievable mechanical properties ({% cite 'Delcour and Hoseney 2010' %}) have been exploited by humans in thousands of different ways, depending on materials’ availability and local culture.
 
 Flour plus water plus heat produces a gel with amazing capacities to trap water and keep it suspended for a long time. Properties can be varied depending on the type of grain and the complex biochemical reactions of their preparation. In conservation, only wheat and rye flours were used since they had better mechanical properties than other grains.
 
@@ -187,7 +187,7 @@ At the end of the drying process, the facing can be removed easily.
 
 ## Conclusion
 
-Looking ahead, it is possible that these methods will disappear from the accepted list of lining options and be mentioned only in lectures on the history of conservation—or will remain in use only by traditional liners in the private sector. However, I think that omitting this information risks the next generation of conservators losing a full understanding of how to properly preserve many thousands of glue-paste-lined paintings all over the world. I hope this paper can contribute to a better understanding of the potentialities, features, and behavior of water-based adhesives, as well as stimulate the curiosity to finally assess them in a rational, open-minded way ([[Rossi-Doria 2013]]).
+Looking ahead, it is possible that these methods will disappear from the accepted list of lining options and be mentioned only in lectures on the history of conservation—or will remain in use only by traditional liners in the private sector. However, I think that omitting this information risks the next generation of conservators losing a full understanding of how to properly preserve many thousands of glue-paste-lined paintings all over the world. I hope this paper can contribute to a better understanding of the potentialities, features, and behavior of water-based adhesives, as well as stimulate the curiosity to finally assess them in a rational, open-minded way ({% cite 'Rossi-Doria 2013' %}).
 
 As mentioned, I do work with other materials—Beva and acrylics—as other options. These alternative methods have their advantages and disadvantages, the latter mostly due to the use of high temperatures or solvents for reactivation; these linings have low elastic modulus and are quite difficult to remove without additional heat or solvents. The recent habit to use Beva film extensively worries me, just as Vishwa Mehra in 1970 was scared by wax and its abuse. I hope we can soon reconsider this habit.
 
@@ -199,8 +199,8 @@ Even when using these modern procedures, I try to apply the same approach I use 
 
 {% endbackmatter %}
 
-[^1]: Of the various texts on the mechanics of paintings, adhesives and consolidants from a conservation perspective, I particularly value [[CCI 2011]], [[Clarricoates et al. 2012]], [[Mecklenburg and Tumosa 1991b]], and [[Michalski 1991]].
+[^1]: Of the various texts on the mechanics of paintings, adhesives and consolidants from a conservation perspective, I particularly value {% cite 'CCI 2011' %}, {% cite 'Clarricoates et al. 2012' %}, {% cite 'Mecklenburg and Tumosa 1991b' %}, and {% cite 'Michalski 1991' %}.
 
-[^2]: [[Ciatti and Signorini 2007]] is the postprints of a one-day meeting dedicated to traditional Italian lining methods and is the only book that contains a good comparison of Florentine and Roman methods.
+[^2]: {% cite 'Ciatti and Signorini 2007' %} is the postprints of a one-day meeting dedicated to traditional Italian lining methods and is the only book that contains a good comparison of Florentine and Roman methods.
 
 [^3]: See https://www.sizes.com/units/bloom.htm.
