--- a/content/3-open-questions/19.md
+++ b/content/3-open-questions/19.md
@@ -31,19 +31,19 @@ The developments in the structural treatment of paintings in the late 1970s and 
 
 It is important to recognize the research and innovation that influenced the field in the 1970s and 1980s, setting the stage for our own research program and treatment development at CCI.
 
-Papers and discussion during the 1975 ICOM-CC conference in Venice led to a revaluation of treatment practices. “All at once” structural treatments, using heat and significant vacuum pressure, were the norm before the 1970s. Vishwa Mehra countered with a much less interventive, stepwise approach ([[Mehra 1975a]]; [[Mehra 1978]]; [[Mehra 1981]]). Each painting was considered as structurally unique, each aspect of the structural treatment (out-of-plane distortions, tears, flaking, flattening, lining, etc.) was a separate step, and only the necessary treatment steps were undertaken.
+Papers and discussion during the 1975 ICOM-CC conference in Venice led to a revaluation of treatment practices. “All at once” structural treatments, using heat and significant vacuum pressure, were the norm before the 1970s. Vishwa Mehra countered with a much less interventive, stepwise approach ({% cite 'Mehra 1975a' %}; {% cite 'Mehra 1978' %}; {% cite 'Mehra 1981' %}). Each painting was considered as structurally unique, each aspect of the structural treatment (out-of-plane distortions, tears, flaking, flattening, lining, etc.) was a separate step, and only the necessary treatment steps were undertaken.
 
-As part of his system, Mehra used a low-pressure “cold” table.[^1] Like the tables introduced by Bent Hacke in the 1960s, it pulled high volumes of air through a perforated surface into a plenum below. This enabled drying of an aqueous adhesive while maintaining (low) pressure on the painting ([[Hacke 1978]]; [[Hacke 1981b]]). The design of these “suction” tables proliferated, allowing for controlled humidification for relaxation and flattening treatments of paintings, both on and off their auxiliary supports. (See [Jim Coddington’s article](/3-open-questions/20/) in these proceedings.)
+As part of his system, Mehra used a low-pressure “cold” table.[^1] Like the tables introduced by Bent Hacke in the 1960s, it pulled high volumes of air through a perforated surface into a plenum below. This enabled drying of an aqueous adhesive while maintaining (low) pressure on the painting ({% cite 'Hacke 1978' %}; {% cite 'Hacke 1981b' %}). The design of these “suction” tables proliferated, allowing for controlled humidification for relaxation and flattening treatments of paintings, both on and off their auxiliary supports. (See [Jim Coddington’s article](/3-open-questions/20/) in these proceedings.)
 
-New lining fabrics and new adhesives were also introduced. Mehra used a woven polyester fabric and a thickened acrylic dispersion ([[Mehra 1981]]). Conservators in Europe turned to acrylic dispersions for cold or low heat, nap-bond linings; Alois Diethelm commercialized these adhesives under the mark Lascaux. In the US, conservators turned to heat-seal adhesives: Rabin developed a nap-bond system based on PVA adhesives,[^2] Berger developed Beva 371 based on ethylene vinyl acetate. Fieux developed Fabri-Sil linings, a pressure-sensitive silicone adhesive cured onto Teflon-impregnated fiberglass ([[Fieux 1978]]; [[John G. Shelley Co. 1985]]). (Initially, Fabri-Sil looked like an excellent option, but bonds failed within a few years \[[[Shwartzbaum 1993]]; [[Belloli 1993]]\].)
+New lining fabrics and new adhesives were also introduced. Mehra used a woven polyester fabric and a thickened acrylic dispersion ({% cite 'Mehra 1981' %}). Conservators in Europe turned to acrylic dispersions for cold or low heat, nap-bond linings; Alois Diethelm commercialized these adhesives under the mark Lascaux. In the US, conservators turned to heat-seal adhesives: Rabin developed a nap-bond system based on PVA adhesives,[^2] Berger developed Beva 371 based on ethylene vinyl acetate. Fieux developed Fabri-Sil linings, a pressure-sensitive silicone adhesive cured onto Teflon-impregnated fiberglass ({% cite 'Fieux 1978' %}; {% cite 'John G. Shelley Co. 1985' %}). (Initially, Fabri-Sil looked like an excellent option, but bonds failed within a few years [{% cite 'Shwartzbaum 1993' %}; {% cite 'Belloli 1993' %}].)
 
-To avoid the use of heat or moisture to activate adhesives, solvent activation was studied ([[Phenix and Hedley 1984]]; [[Phenix and Hedley 1993]]). Unfortunately, safety issues with electric blowers and pumps prevented us from fully incorporating this into our practice at the time. With the current mist-lining techniques of Jos van Och, we see the resurgence of solvent activation ([[van Och and Hoppenbrouwers 2003]]).
+To avoid the use of heat or moisture to activate adhesives, solvent activation was studied ({% cite 'Phenix and Hedley 1984' %}; {% cite 'Phenix and Hedley 1993' %}). Unfortunately, safety issues with electric blowers and pumps prevented us from fully incorporating this into our practice at the time. With the current mist-lining techniques of Jos van Och, we see the resurgence of solvent activation ({% cite 'van Och and Hoppenbrouwers 2003' %}).
 
-Mehra, Hedley, and Villers began systematic studies of available synthetic fabrics and their properties ([[Hedley, Villers, and Mehra 1980]]; [[Hedley, Villers, and Mehra 1993]]). They encouraged a manufacturer to produce a wide, heat-set sailcloth without the usual impregnants ([[Hedley and Villers 1982]]). In Canada and the United States, respectively, Roger Roche ([[Roche 1976]]), and Blakney and Sutton introduced industrial monofilament fabrics and stiff filter and belt fabrics ([[Blakney and Sutton 1983]]; [[Blakney 1993]]).[^3] Methods of stiffening fabrics by using sizing or retaining Mylar on the reverse of linings were explored. Marouflage onto aluminum honeycomb supports was common, and laminates to increase rigidity were explored.[^4]
+Mehra, Hedley, and Villers began systematic studies of available synthetic fabrics and their properties ({% cite 'Hedley, Villers, and Mehra 1980' %}; {% cite 'Hedley, Villers, and Mehra 1993' %}). They encouraged a manufacturer to produce a wide, heat-set sailcloth without the usual impregnants ({% cite 'Hedley and Villers 1982' %}). In Canada and the United States, respectively, Roger Roche ({% cite 'Roche 1976' %}), and Blakney and Sutton introduced industrial monofilament fabrics and stiff filter and belt fabrics ({% cite 'Blakney and Sutton 1983' %}; {% cite 'Blakney 1993' %}).[^3] Methods of stiffening fabrics by using sizing or retaining Mylar on the reverse of linings were explored. Marouflage onto aluminum honeycomb supports was common, and laminates to increase rigidity were explored.[^4]
 
 ## The Influence of Research by Others
 
-In 1982, Mecklenburg’s unpublished report “Some Aspects of the Mechanical Behavior of Fabric Supported Paintings: Report to the Smithsonian Institution” circulated widely ([[Mecklenburg 1982]]). This had us thinking about how everything fit together; the hygro-thermo-mechanical properties of the individual materials and their contribution to the behavior of the painting as a whole; the influence of the geometry and behavior of the wood stretcher, and the effects of our interventions, such as lining and stretching.
+In 1982, Mecklenburg’s unpublished report “Some Aspects of the Mechanical Behavior of Fabric Supported Paintings: Report to the Smithsonian Institution” circulated widely ({% cite 'Mecklenburg 1982' %}). This had us thinking about how everything fit together; the hygro-thermo-mechanical properties of the individual materials and their contribution to the behavior of the painting as a whole; the influence of the geometry and behavior of the wood stretcher, and the effects of our interventions, such as lining and stretching.
 
 Mecklenburg introduced three concepts: first, that the total tension in a painting (the double red arrow running across the painting in [fig. 19.1](#fig-19-1)) was simply the sum of the individual tensions in each layer (the smaller arrows on the far right of [fig. 19.1](#fig-19-1)). Second, that the response of each layer to changes in relative humidity (RH) was not simply a change in dimension but also a change in elasticity. And third, that “force realignment” (later phrased as stress alignment) could explain many deformations of paintings while under tension, as in [fig. 19.1a](#fig-19-1). (Curl, a separate mechanism for cupping, is described by [Hough and Michalski](/7-modern-contemporary/40/) in these proceedings.)
 
@@ -61,23 +61,23 @@ In terms of lining, however, the question was whether the new materials were cap
 
 ### Humidification and Canvas Shrinkage
 
-In the first phase of the Lining Project (1980s) we prepared samples with successive layers applied: linen canvas, linen canvas + size, linen canvas + size + oil ground, linen canvas + size + oil ground + oil paint. At the time, we used manual testing equipment to measure the weight, length, and tension of the samples during changes in RH ([[Daly and Michalski 1987]]), and it was the conservator who made the measurements ([fig. 19.3](#fig-19-3)). This intimate tactile and visual engagement of the conservator with the samples as they underwent rapid changes influenced her practice as much as the measurements being collected.
+In the first phase of the Lining Project (1980s) we prepared samples with successive layers applied: linen canvas, linen canvas + size, linen canvas + size + oil ground, linen canvas + size + oil ground + oil paint. At the time, we used manual testing equipment to measure the weight, length, and tension of the samples during changes in RH ({% cite 'Daly and Michalski 1987' %}), and it was the conservator who made the measurements ([fig. 19.3](#fig-19-3)). This intimate tactile and visual engagement of the conservator with the samples as they underwent rapid changes influenced her practice as much as the measurements being collected.
 
 {% figure 'fig-19-3' %}
 
-In our dimensional response study of 1985–1986 we were surprised to see that samples taken from 47%–71% RH did not stabilize at their peak but began to shrink after only two hours at 71% RH. This was significantly lower than the \~85% RH we had presumed for onset of shrinkage based on tension studies prior to that date. By 1987, however, Hedley’s measurements ([[Hedley 1988]]; [[Hedley 1993]]) in our labs at CCI confirmed that a severe “shrinker,” when significantly prestressed, and before experiencing the permanent relaxation that occurs at 90% RH, could experience onset of shrinkage as early as 65% RH (see [fig. 19.2](#fig-19-2), double green line [10]). Such potential for shrinkage led to great caution in our use of humidity treatments in general.
+In our dimensional response study of 1985–1986 we were surprised to see that samples taken from 47%–71% RH did not stabilize at their peak but began to shrink after only two hours at 71% RH. This was significantly lower than the \~85% RH we had presumed for onset of shrinkage based on tension studies prior to that date. By 1987, however, Hedley’s measurements ({% cite 'Hedley 1988' %}; {% cite 'Hedley 1993' %}) in our labs at CCI confirmed that a severe “shrinker,” when significantly prestressed, and before experiencing the permanent relaxation that occurs at 90% RH, could experience onset of shrinkage as early as 65% RH (see [fig. 19.2](#fig-19-2), double green line [10]). Such potential for shrinkage led to great caution in our use of humidity treatments in general.
 
-When using humidification tables for relaxation and flattening treatments, it is easy to produce higher humidity conditions than intended, particularly when that is combined with heat, even at low levels. Early monitoring of the Willard Multipurpose Table[^6] at CCI showed that even with a moderate setting of 76% RH and duct heating at 30°C, the humidity under the painting can rise to 90% RH and above, due to the temperature difference between the warmer ducts and the cooler table surface. To reduce this risk, the conservator requested a monitoring system for RH under the painting ([[Daly Hartin et al. 2011]]; [[Daly Hartin et al. 2015b]]). By glancing at the computer display of conditions under an experimental painting—placed to one side of the painting being treated—the conservator could adjust the table settings to maintain safe levels of humidification.
+When using humidification tables for relaxation and flattening treatments, it is easy to produce higher humidity conditions than intended, particularly when that is combined with heat, even at low levels. Early monitoring of the Willard Multipurpose Table[^6] at CCI showed that even with a moderate setting of 76% RH and duct heating at 30°C, the humidity under the painting can rise to 90% RH and above, due to the temperature difference between the warmer ducts and the cooler table surface. To reduce this risk, the conservator requested a monitoring system for RH under the painting ({% cite 'Daly Hartin et al. 2011' %}; {% cite 'Daly Hartin et al. 2015b' %}). By glancing at the computer display of conditions under an experimental painting—placed to one side of the painting being treated—the conservator could adjust the table settings to maintain safe levels of humidification.
 
 ### Sensitivity of the Size Layer and Preventive Conservation Measures
 
 The response of the linen + size sample was fast, whether change in weight, dimension, or tension. When exposed to a jump in RH, half the eventual change of length occurred within five to seven minutes, and total change happened within one to two hours. Under the binocular microscope one could literally see the scale attached to the end of each sample moving past the reference point (see [fig. 19.3](#fig-19-3)). This instilled a deep appreciation of the reactivity of sized canvas, and the consequent importance of backing boards and enclosed frames to reduce RH fluctuations.
 
-Controlled humidification is sometimes used to reactivate glue size in paintings, readhering incipient cleavage without adding another adhesive. During one such treatment on the Willard table, areas of missing paint allowed us to observe the glue size bridging canvas interstices. Before humidification, the glue size was fractured; during humidification, the fractures disappeared. The size coalesced into a continuous film that moved under slight pressure from a probe. While that was a desired outcome, the reactivated size layer was once again a source of stresses. As demonstrated in previous research (e.g., [[Mecklenburg 1982]], [[Daly and Michalski 1987]], and [[Hedley 1988]]), the coherent size is reactive to low RH conditions and thereby particularly vulnerable to stretching and shock under these conditions. This understanding further reinforced our emphasis on the passive control of RH by enclosures, that is, the importance of preventive conservation.
+Controlled humidification is sometimes used to reactivate glue size in paintings, readhering incipient cleavage without adding another adhesive. During one such treatment on the Willard table, areas of missing paint allowed us to observe the glue size bridging canvas interstices. Before humidification, the glue size was fractured; during humidification, the fractures disappeared. The size coalesced into a continuous film that moved under slight pressure from a probe. While that was a desired outcome, the reactivated size layer was once again a source of stresses. As demonstrated in previous research (e.g., {% cite 'Mecklenburg 1982' %}, {% cite 'Daly and Michalski 1987' %}, and {% cite 'Hedley 1988' %}), the coherent size is reactive to low RH conditions and thereby particularly vulnerable to stretching and shock under these conditions. This understanding further reinforced our emphasis on the passive control of RH by enclosures, that is, the importance of preventive conservation.
 
 ### Bond Strength of the Lining
 
-In the 1980s and early 1990s, conservators reported bond strengths of the newly introduced fabrics and adhesives using peel tests. In our peel tests we often found it difficult to reproduce results even within our own studies ([[Daly Hartin, Michalski, and Pacquet 1993]]), and inferring comparison between studies or from one lab to another is even more difficult. We concluded that although published results could provide guidance, trial mock-ups of new materials and procedures in one’s own lab are essential. For example, when trying to reproduce the results of solvent activation tests described by Phenix and Hedley ([[Phenix and Hedley 1984]]; [[Phenix and Hedley 1993]])—with Gerry Hedley himself present to guide us—we were unable to obtain the acceptable results that he had published. We had to use mock-ups, modifying the procedure by varying the amount of solvent used and allowing time for swelling of the adhesive, to obtain an adequate bond. We learned that peel tests provide guidelines, but they do not necessarily reflect actual practice. Peel tests can inform us which combinations of materials and procedures do not work and which do work or have the potential to work. Trial linings, using test or model paintings and the equipment and procedures in one’s own lab, must be undertaken to refine the method and ensure the resulting lining will be satisfactory.
+In the 1980s and early 1990s, conservators reported bond strengths of the newly introduced fabrics and adhesives using peel tests. In our peel tests we often found it difficult to reproduce results even within our own studies ({% cite 'Daly Hartin, Michalski, and Pacquet 1993' %}), and inferring comparison between studies or from one lab to another is even more difficult. We concluded that although published results could provide guidance, trial mock-ups of new materials and procedures in one’s own lab are essential. For example, when trying to reproduce the results of solvent activation tests described by Phenix and Hedley ({% cite 'Phenix and Hedley 1984' %}; {% cite 'Phenix and Hedley 1993' %})—with Gerry Hedley himself present to guide us—we were unable to obtain the acceptable results that he had published. We had to use mock-ups, modifying the procedure by varying the amount of solvent used and allowing time for swelling of the adhesive, to obtain an adequate bond. We learned that peel tests provide guidelines, but they do not necessarily reflect actual practice. Peel tests can inform us which combinations of materials and procedures do not work and which do work or have the potential to work. Trial linings, using test or model paintings and the equipment and procedures in one’s own lab, must be undertaken to refine the method and ensure the resulting lining will be satisfactory.
 
 Trial or mock-up linings are not only important when new materials or procedures are used, or when there is a change in lab equipment such as purchase or refurbishment of a new hot table, but they have become increasingly important with our design of more customized linings for the specific needs of a particular painting. To allow for repetition or improvement to the trial, or mock-up, lining, there must be careful attention to, and documentation of, all details of the lining materials and procedures. This includes the amount of adhesive used, details of its application to the lining fabric, the method and conditions of adhesive activation (activation temperature, time of heating, time at activation temperature, time of cooling), and the lining pressure.
 
@@ -85,13 +85,13 @@ Conservators were aware of the high sensitivity of bond strength to temperature,
 
 A particularly important example of the importance of mock-ups and of monitoring temperature uniformity of hot table surfaces was adapting to the change in Beva 371 film from its original formulation to Beva 371b. In 2010, we were informed by the manufacturer that despite this change, the new product had the same properties.[^7] Many conservators, however, had found differences in performance.
 
-Élisabeth Forest, a painting conservator at the Centre de Conservation du Québec, had used peel tests to study Beva 371 film while a student ([[Forest 1997]]). She found that 65˚C and a 10-minute holding time gave an acceptable bond.[^8] This formed the guideline for many successful linings. However, using the new formulation under the same conditions, she found there was a high probability of local detachment during restretching of both linings and strip linings.
+Élisabeth Forest, a painting conservator at the Centre de Conservation du Québec, had used peel tests to study Beva 371 film while a student ({% cite 'Forest 1997' %}). She found that 65˚C and a 10-minute holding time gave an acceptable bond.[^8] This formed the guideline for many successful linings. However, using the new formulation under the same conditions, she found there was a high probability of local detachment during restretching of both linings and strip linings.
 
-In 2018, Forest compared the two formulations in a study undertaken at the Centre de Conservation du Québec ([[Forest 2019]]). As in the previous tests, two reactivation temperatures (65°C and 70°C) and two holding times (0 and 10 minutes at the activation temperature) were used ([fig. 19.4](#fig-19-4)). The nap bond strength of both formulations was strongly influenced by temperature, more than doubling in force between 65°C and 70°C. Based on what was considered a reliable bond, 0.33–0.41 kN/m,[^9] shown by red lines in [fig. 19.4](#fig-19-4), only lining at 70°C with a duration of 10 minutes was successful.
+In 2018, Forest compared the two formulations in a study undertaken at the Centre de Conservation du Québec ({% cite 'Forest 2019' %}). As in the previous tests, two reactivation temperatures (65°C and 70°C) and two holding times (0 and 10 minutes at the activation temperature) were used ([fig. 19.4](#fig-19-4)). The nap bond strength of both formulations was strongly influenced by temperature, more than doubling in force between 65°C and 70°C. Based on what was considered a reliable bond, 0.33–0.41 kN/m,[^9] shown by red lines in [fig. 19.4](#fig-19-4), only lining at 70°C with a duration of 10 minutes was successful.
 
 {% figure 'fig-19-4' %}
 
-These results corroborate an earlier study by Ploeger et al. of the two formulations used in solution as a consolidant for painted surfaces ([[Ploeger, McGlinchey, and de la Rie 2015]]). The original Beva 371 was shown to have a larger tack window with a gradual increase in tack, while Beva 371b had a narrow tack window with a sudden increase in tack. In summary, if the tack window (of any adhesive) becomes too narrow, or if time at the activation temperature is a determining factor in obtaining an acceptable bond, then temperature uniformity and monitoring become even more critical.
+These results corroborate an earlier study by Ploeger et al. of the two formulations used in solution as a consolidant for painted surfaces ({% cite 'Ploeger, McGlinchey, and de la Rie 2015' %}). The original Beva 371 was shown to have a larger tack window with a gradual increase in tack, while Beva 371b had a narrow tack window with a sudden increase in tack. In summary, if the tack window (of any adhesive) becomes too narrow, or if time at the activation temperature is a determining factor in obtaining an acceptable bond, then temperature uniformity and monitoring become even more critical.
 
 ### Stress Relaxation of Linings and Paintings
 
@@ -99,9 +99,9 @@ The overall goal of the Lining Project, besides understanding the fundamental me
 
 The primary measurement for answering this question is stress relaxation—the loss in tension of a restrained sample over time. The primary concept within which to place such measurements is that of viscoelasticity in polymers (see also [Hagan](/1-history/2/) and [Hough and Michalski](/7-modern-contemporary/40/)). Conservators intuit this concept in their use of the terms *relaxation* and *memory* of deformations. In the initial research on mechanical properties of paintings, such as the tension versus RH studies in [fig. 19.2](#fig-19-2), or stress strain plots, authors were not overly concerned with reporting time issues: How fast was the test? How much time had passed since the initial stretch? Tension, and its underlying parameter elasticity, depend on time, not just temperature and RH.
 
-By 1991, we were placing our review of published data on the mechanics of paints within the framework of polymer viscoelasticity. Specifically, we introduced the primary tool of that framework—the “master curve”—which plotted elasticity over the full range of a polymer’s behavior, from glassy through leathery to rubbery as a function of temperature, plasticizer, and time ([[Michalski 1991]]).
+By 1991, we were placing our review of published data on the mechanics of paints within the framework of polymer viscoelasticity. Specifically, we introduced the primary tool of that framework—the “master curve”—which plotted elasticity over the full range of a polymer’s behavior, from glassy through leathery to rubbery as a function of temperature, plasticizer, and time ({% cite 'Michalski 1991' %}).
 
-To understand whether a lining will actually support the painting, and by how much, analysis of results focused on whether the lining is at higher tension than the painting during stretching, during shock and vibration, and during fluctuations in relative humidity and temperature—and on whether the lining can maintain this support over many years. Sample preparation and experimental procedures have been published elsewhere ([[Michalski and Daly Hartin 1996]]; [[Daly Hartin et al. 2010]]; [[Daly Hartin et al. 2011]]; [[Michalski et al. 2014]]; [[Daly Hartin et al. 2015a]]). The 2015 article also summarizes the results of the project and their implications for linings.
+To understand whether a lining will actually support the painting, and by how much, analysis of results focused on whether the lining is at higher tension than the painting during stretching, during shock and vibration, and during fluctuations in relative humidity and temperature—and on whether the lining can maintain this support over many years. Sample preparation and experimental procedures have been published elsewhere ({% cite 'Michalski and Daly Hartin 1996' %}; {% cite 'Daly Hartin et al. 2010' %}; {% cite 'Daly Hartin et al. 2011' %}; {% cite 'Michalski et al. 2014' %}; {% cite 'Daly Hartin et al. 2015a' %}). The 2015 article also summarizes the results of the project and their implications for linings.
 
 Tension was measured continuously over time. If the sample is undergoing stress relaxation, then the tension drops over time, as shown by all curves in [fig. 19.5](#fig-19-5). The process of building these master curves that extend to very short and very long times is described by [Hagan](/1-history/2) in this volume.
 
@@ -113,13 +113,13 @@ The question of whether these stiffer linings provide enough support to reduce d
 
 {% figure 'fig-19-6' %}
 
-The influence of the lining in reducing cupping was studied using a set of square samples prepared with a T-shape cut in the center of the model painting prior to a nap-bond Beva lining ([[Daly Hartin et al. 2015a]]). After eighteen years, the model painting lined with Beva onto a rigid aluminum plate showed no cupping as depicted in [fig. 19.1b](#fig-19-1). The cupping along the “tear” of the sailcloth lining could be described as minimal to none; the sailcloth lining did not prevent cupping along the tear as well as the rigid aluminum, but it performed much better than the loosely woven linen and polyester linings which appeared as [fig. 19.1a](#fig-19-1). This is consistent with sailcloth’s performance over days and years ([fig. 19.6](#fig-19-6)).
+The influence of the lining in reducing cupping was studied using a set of square samples prepared with a T-shape cut in the center of the model painting prior to a nap-bond Beva lining ({% cite 'Daly Hartin et al. 2015a' %}). After eighteen years, the model painting lined with Beva onto a rigid aluminum plate showed no cupping as depicted in [fig. 19.1b](#fig-19-1). The cupping along the “tear” of the sailcloth lining could be described as minimal to none; the sailcloth lining did not prevent cupping along the tear as well as the rigid aluminum, but it performed much better than the loosely woven linen and polyester linings which appeared as [fig. 19.1a](#fig-19-1). This is consistent with sailcloth’s performance over days and years ([fig. 19.6](#fig-19-6)).
 
 ### RH Change
 
-We measured the response of samples to RH fluctuations up to 70% RH to give comparative data on the ability of the lining to support the stress in a painting during daily humidity cycles ([[Daly Hartin et al. 2015a]]). Some of these data are shown elsewhere in these proceedings ([fig. 2.4](/1-history/2/#fig-2-4/)). The sailcloth + Beva lining, unaffected by RH, provides a constant absolute level of support during RH fluctuations, but during periods of very low RH (20%), rising tension in the oil painting overwhelms that of the sailcloth + Beva (i.e., the system goes from [fig. 19.1b](#fig-19-1) to [fig. 19.1a](#fig-19-1)). Linen + wax is very different; it completely blocks response to one hour of 70% RH, and blocks response to a 12-hour exposure by two-thirds. (It is not our intent to promote wax linings, but to understand them as historic treatments with advantages as well as known disadvantages.)
+We measured the response of samples to RH fluctuations up to 70% RH to give comparative data on the ability of the lining to support the stress in a painting during daily humidity cycles ({% cite 'Daly Hartin et al. 2015a' %}). Some of these data are shown elsewhere in these proceedings ([fig. 2.4](/1-history/2/#fig-2-4/)). The sailcloth + Beva lining, unaffected by RH, provides a constant absolute level of support during RH fluctuations, but during periods of very low RH (20%), rising tension in the oil painting overwhelms that of the sailcloth + Beva (i.e., the system goes from [fig. 19.1b](#fig-19-1) to [fig. 19.1a](#fig-19-1)). Linen + wax is very different; it completely blocks response to one hour of 70% RH, and blocks response to a 12-hour exposure by two-thirds. (It is not our intent to promote wax linings, but to understand them as historic treatments with advantages as well as known disadvantages.)
 
-This ability of wax linings to reduce sensitivity to short RH fluctuations (1–12 hours) must be placed alongside the increased sensitivity to longer RH fluctuations shown by Andersen and colleagues ([[Andersen et al. 2014]]). They showed that a restrained sample of an old wax-lined painting that had not yet been exposed to the permanent relaxation that occurs at 90% RH ([fig. 19.2](#fig-19-2), double brown line [12]) increased dramatically in tension at RH above \~60% when exposed for at least 18 hours. Whereas our short-term data showed the moisture barrier effects of wax linings, Andersen’s data showed the transformation of the canvas from porous yarns, which need to swell a lot before they tighten the textile, into a composite of fibers embedded in a wax matrix that tightens as soon as any fiber swelling occurs. The longer exposure permitted this to happen. Andersen’s 18-hour exposures also showed a second phenomenon: in the second cycle, after the exposure to 90% RH ([fig. 19.2](#fig-19-2), dashed double brown line [13]), the V-shape response seen in the graph reverted to more of a hockey stick shape. Something was transformed irreversibly in the canvas by a single exposure to high RH while restrained.
+This ability of wax linings to reduce sensitivity to short RH fluctuations (1–12 hours) must be placed alongside the increased sensitivity to longer RH fluctuations shown by Andersen and colleagues ({% cite 'Andersen et al. 2014' %}). They showed that a restrained sample of an old wax-lined painting that had not yet been exposed to the permanent relaxation that occurs at 90% RH ([fig. 19.2](#fig-19-2), double brown line [12]) increased dramatically in tension at RH above \~60% when exposed for at least 18 hours. Whereas our short-term data showed the moisture barrier effects of wax linings, Andersen’s data showed the transformation of the canvas from porous yarns, which need to swell a lot before they tighten the textile, into a composite of fibers embedded in a wax matrix that tightens as soon as any fiber swelling occurs. The longer exposure permitted this to happen. Andersen’s 18-hour exposures also showed a second phenomenon: in the second cycle, after the exposure to 90% RH ([fig. 19.2](#fig-19-2), dashed double brown line [13]), the V-shape response seen in the graph reverted to more of a hockey stick shape. Something was transformed irreversibly in the canvas by a single exposure to high RH while restrained.
 
 We can see a similar but slightly less pronounced example of these two phenomena in a painting that was not wax lined: the Walker 1868–69 painting ([fig. 19.2](#fig-19-2); compare 10, before exposure to 90% RH, to 11, after exposure to 90% RH). In both cases, when a canvas is impregnated with a liquid that solidifies, whether wax or size, it becomes a composite of fibers in a matrix. If the size, wax, or any adhesive just sits on top, we have instead a laminate. In practice, in a painting, one probably has a hybrid. The increase in tension (due to fiber swelling and crimp) of a restrained textile as RH climbs will occur at lower RH if those fibers are locked within a matrix. But if the tension in this composite gets high enough, for long enough, a viscoelastic matrix will irreversibly slip, slide, and even exude, leading to a change in subsequent behavior.
 
@@ -159,4 +159,4 @@ Our thanks to Élisabeth Forest, painting conservator, Centre de Conservation du
 
 [^8]: The hot table was quick to heat (13 minutes to 65°C and 18 minutes to 70°C) and quick to cool to 25°C (20–21 minutes). During heating and cooling, the samples remained under low pressure (the Dartek membrane could be easily lifted from the linings with the fingers).
 
-[^9]: Forest referenced two articles that described adequate bond strengths; a bond strength between 0.33 and 0.41 kN/m was considered reliable without being excessive, and 0.1 N/mm was a minimum, very weak lining adhesive bond ([[Phenix and Hedley 1993]]). A bond strength of 0.5 kN/m was considered strong; and 0.7 kN/m, too strong ([[Daly Hartin, Michalski, and Pacquet 1993]]).
+[^9]: Forest referenced two articles that described adequate bond strengths; a bond strength between 0.33 and 0.41 kN/m was considered reliable without being excessive, and 0.1 N/mm was a minimum, very weak lining adhesive bond ({% cite 'Phenix and Hedley 1993' %}). A bond strength of 0.5 kN/m was considered strong; and 0.7 kN/m, too strong ({% cite 'Daly Hartin, Michalski, and Pacquet 1993' %}).
