--- a/content/3-open-questions/21.md
+++ b/content/3-open-questions/21.md
@@ -16,13 +16,13 @@ abstract: "In this paper, Vishwa Mehra’s eight requirements for linings—as w
 
 ## Introduction
 
-The aim of this paper is to revisit and evaluate some early requirements for linings of canvas paintings proposed by Vishwa Mehra ([[Mehra 1972]]) and review them in a contemporary context. The requirements have been very influential within the field of conservation. They were used as guidelines for working conservators and teachers in structural conservation (see [Mikkel Scharff's paper](/1-history/3/) in this publication), and the recommendations have been referenced in normative discussions about conservation praxis. Mehra’s ideas inspired a whole generation of conservators and influenced best practice considerations in structural conservation of canvas paintings for decades ([[Beltinger 1995]]; [[Hackney et al. 2012]]; [[Phenix 1995]]; [[van Och and Hoppenbrouwers 2003]]).
+The aim of this paper is to revisit and evaluate some early requirements for linings of canvas paintings proposed by Vishwa Mehra ({% cite 'Mehra 1972' %}) and review them in a contemporary context. The requirements have been very influential within the field of conservation. They were used as guidelines for working conservators and teachers in structural conservation (see [Mikkel Scharff's paper](/1-history/3/) in this publication), and the recommendations have been referenced in normative discussions about conservation praxis. Mehra’s ideas inspired a whole generation of conservators and influenced best practice considerations in structural conservation of canvas paintings for decades ({% cite 'Beltinger 1995' %}; {% cite 'Hackney et al. 2012' %}; {% cite 'Phenix 1995' %}; {% cite 'van Och and Hoppenbrouwers 2003' %}).
 
 Vishwa Mehra is an Indian conservator of paintings and an art historian born in 1931. He studied conservation in India, Yugoslavia, and Rome and worked in Israel before he acquired a position at the Central Research Laboratory for Objects of Art and Science in Amsterdam.[^1]
 
-Through the 1960s there was an increased effort to strengthen and professionalize the field of conservation of cultural heritage. The first ethnical guidelines for conservators, the Murray Pease report, were written for IIC-American group (later the American Institute for Conservation \[AIC\]) in 1963 ([[Pease 1964]]), and in 1964 the Venice charter expanded on these thoughts (charter and introduction can be found in [[Jokilehto 1998]]). The founding of ICOMOS (International Council of Monuments and Sites) in 1965, of ICOM-CC in 1967, and the 1972 UNESCO World Heritage Convention are also key events in the effort to protect cultural heritage, in light of which Mehra’s paper should be seen.
+Through the 1960s there was an increased effort to strengthen and professionalize the field of conservation of cultural heritage. The first ethnical guidelines for conservators, the Murray Pease report, were written for IIC-American group (later the American Institute for Conservation \[AIC\]) in 1963 ({% cite 'Pease 1964' %}), and in 1964 the Venice charter expanded on these thoughts (charter and introduction can be found in {% cite 'Jokilehto 1998' %}). The founding of ICOMOS (International Council of Monuments and Sites) in 1965, of ICOM-CC in 1967, and the 1972 UNESCO World Heritage Convention are also key events in the effort to protect cultural heritage, in light of which Mehra’s paper should be seen.
 
-One event that also had enormous influence on this development was the catastrophic flooding of Florence on November 4, 1966. It became a milestone in the history of conservation for many reasons, one of them being that the need for education and conservation norms became evident as a result ([[Federspiel 2015]]). At the second plenary ICOM-CC meeting in Amsterdam, the Italian conservator Giovanni Urbani called for a more systematic and rational approach to lining canvas paintings ([[Urbani 1969]]). In 1972, Mehra presented his eight requirements for linings in an interim report for the ICOM-CC meeting in Madrid on behalf of Central Research Laboratory for Objects of Art and Science, Amsterdam, “Comparative Study of Conventional Relining Methods and Materials and Research towards Their Improvement” ([[Mehra 1972]]). In this report, Mehra discussed concepts that to this day remain essential to conservation. Some concepts were relevant for the general field of conservation-restoration, such as structural integrity of objects, reversibility, and compatibility of treatments. Other concepts in Mehra’s paper, including flexibility/stiffness, hygroscopicity, and permittivity, were especially important for lining paintings.
+One event that also had enormous influence on this development was the catastrophic flooding of Florence on November 4, 1966. It became a milestone in the history of conservation for many reasons, one of them being that the need for education and conservation norms became evident as a result ({% cite 'Federspiel 2015' %}). At the second plenary ICOM-CC meeting in Amsterdam, the Italian conservator Giovanni Urbani called for a more systematic and rational approach to lining canvas paintings ({% cite 'Urbani 1969' %}). In 1972, Mehra presented his eight requirements for linings in an interim report for the ICOM-CC meeting in Madrid on behalf of Central Research Laboratory for Objects of Art and Science, Amsterdam, “Comparative Study of Conventional Relining Methods and Materials and Research towards Their Improvement” ({% cite 'Mehra 1972' %}). In this report, Mehra discussed concepts that to this day remain essential to conservation. Some concepts were relevant for the general field of conservation-restoration, such as structural integrity of objects, reversibility, and compatibility of treatments. Other concepts in Mehra’s paper, including flexibility/stiffness, hygroscopicity, and permittivity, were especially important for lining paintings.
 
 Mehra argued that traditional lining techniques using glue paste and wax resin were too invasive and nonreversible, as they caused the whole painting structure to become embedded in adhesive. Furthermore, he warned against the use of heat in linings, the forces exerted by retensioning a painting, and the extra weight of a wax-resin lining.
 
@@ -32,35 +32,35 @@ In his paper Mehra, proposed eight basic requirements for linings. [Table 21.1](
 
 {% figure 'table-21-1' %}
 
-This paper was presented at the 2019 Conserving Canvas Symposium held at the Institute for the Preservation of Cultural Heritage at Yale University.[^2] The symposium title, Conserving Canvas, echoes the core of the discussions around Mehra’s paper. Mehra, in the Netherlands, and Bent Hacke ([[Hacke 1963]]), in Denmark, became advocates for treatment strategies that were designed treat one problem at a time rather than the complete range of problems in a painting at once. Problems related to the canvas were now seen as a separate part of the canvas painting, and the treatments proposed (nap bond in The Netherlands and lamination in Denmark) were designed to deal with this layer. The ideas behind this concept of separation were presented in Mehra’s paper ([[Mehra 1972]]), where he warned against the long-held tradition of linings impregnating the structure. In this paper the specific requirements written by Mehra are discussed in a contemporary context.
+This paper was presented at the 2019 Conserving Canvas Symposium held at the Institute for the Preservation of Cultural Heritage at Yale University.[^2] The symposium title, Conserving Canvas, echoes the core of the discussions around Mehra’s paper. Mehra, in the Netherlands, and Bent Hacke ({% cite 'Hacke 1963' %}), in Denmark, became advocates for treatment strategies that were designed treat one problem at a time rather than the complete range of problems in a painting at once. Problems related to the canvas were now seen as a separate part of the canvas painting, and the treatments proposed (nap bond in The Netherlands and lamination in Denmark) were designed to deal with this layer. The ideas behind this concept of separation were presented in Mehra’s paper ({% cite 'Mehra 1972' %}), where he warned against the long-held tradition of linings impregnating the structure. In this paper the specific requirements written by Mehra are discussed in a contemporary context.
 
 ### Reversibility
 
-The first requirement is that the materials used should remain fully reversible ([table 21.1](#table-21-1)). According to Applebaum, the “principle of reversibility” was written into the AIC code of ethics and it was advised that the conservator “should avoid the use of materials which may become so intractable that their future removal could endanger the physical safety of the object. He also should avoid the use of techniques the results of which cannot be un-done if that should become desirable” ([[Applebaum 1987]]). However, fully reversible treatments are rarely possible, and the concept has been subject to much discussion. Muñoz Viñas has argued that the greater the reversibility the less the conservator’s responsibility ([[Muñoz Viñas 2005]]). Concepts like removability and retreatability ([[Applebaum 1987]]; [[Charteris 1999]]) have been suggested as alternatives, but these still require an understanding of issues like surface tension, penetration, solubility with age, and peel strength—all topics that are still not properly investigated with respect to lining techniques. Despite the debates around the concept, reversibility is still written into the E.C.C.O. Professional Guidelines, in article IX of the Code of Ethics ([[E.C.C.O. 2003]]).
+The first requirement is that the materials used should remain fully reversible ([table 21.1](#table-21-1)). According to Applebaum, the “principle of reversibility” was written into the AIC code of ethics and it was advised that the conservator “should avoid the use of materials which may become so intractable that their future removal could endanger the physical safety of the object. He also should avoid the use of techniques the results of which cannot be un-done if that should become desirable” ({% cite 'Applebaum 1987' %}). However, fully reversible treatments are rarely possible, and the concept has been subject to much discussion. Muñoz Viñas has argued that the greater the reversibility the less the conservator’s responsibility ({% cite 'Muñoz Viñas 2005' %}). Concepts like removability and retreatability ({% cite 'Applebaum 1987' %}; {% cite 'Charteris 1999' %}) have been suggested as alternatives, but these still require an understanding of issues like surface tension, penetration, solubility with age, and peel strength—all topics that are still not properly investigated with respect to lining techniques. Despite the debates around the concept, reversibility is still written into the E.C.C.O. Professional Guidelines, in article IX of the Code of Ethics ({% cite 'E.C.C.O. 2003' %}).
 
 ### Changing the Structure
 
-The second requirement ([table 21.1](#table-21-1)) is that lining, or relining, as Mehra called it ([[Andersen 2012]]), may not in any way cause alterations to the structural character of a painting. Although it is not completely clear what he means by “the structural character,” it is known that he wanted to avoid heat and high pressure, which may change the shape of the paint. He therefore described the nap-bond treatment that targeted the needs of the canvas specifically.
+The second requirement ([table 21.1](#table-21-1)) is that lining, or relining, as Mehra called it ({% cite 'Andersen 2012' %}), may not in any way cause alterations to the structural character of a painting. Although it is not completely clear what he means by “the structural character,” it is known that he wanted to avoid heat and high pressure, which may change the shape of the paint. He therefore described the nap-bond treatment that targeted the needs of the canvas specifically.
 
 The reality, now and then, is probably that most active treatments change the structure slightly, but some changes are more invasive than others and some create more potential for future damage than others. The traditional adhesives for lining, glue paste and wax resin, were intended to penetrate the painting structure, but Mehra’s new thoughts were to avoid the penetration.
 
-The seventh requirement ([table 21.1](#table-21-1))—that the adhesive selected should not be allowed to permeate the canvas, ground, and paint film—is closely related to Mehra’s second requirement. Mehra wanted the adhesive to form only a film between old and new canvases, instead of penetrating the structure. This idea has prevailed in many traditions, and the nap-bond lining (or, in Scandinavia, lamination, inspired by Bent Hacke) became popular among progressive conservators of the time. The nap-bond technique was considered minimal intervention and was intended to ensure reversibility. Saving the physical integrity of an object is written into E.C.C.O.’s Professional Guidelines, in article V of the Code of Ethics ([[E.C.C.O. 2003]]) as well as AIC’s Code of Ethics, article 21 of the Guidelines for Practice ([[AIC n.d.]]). Thus, the requirement could probably still be seen as having significant weight, even though both glue paste and wax resin lining are still practiced, as is impregnation of canvas paintings with glue and Beva.
+The seventh requirement ([table 21.1](#table-21-1))—that the adhesive selected should not be allowed to permeate the canvas, ground, and paint film—is closely related to Mehra’s second requirement. Mehra wanted the adhesive to form only a film between old and new canvases, instead of penetrating the structure. This idea has prevailed in many traditions, and the nap-bond lining (or, in Scandinavia, lamination, inspired by Bent Hacke) became popular among progressive conservators of the time. The nap-bond technique was considered minimal intervention and was intended to ensure reversibility. Saving the physical integrity of an object is written into E.C.C.O.’s Professional Guidelines, in article V of the Code of Ethics ({% cite 'E.C.C.O. 2003' %}) as well as AIC’s Code of Ethics, article 21 of the Guidelines for Practice ({% cite 'AIC n.d.' %}). Thus, the requirement could probably still be seen as having significant weight, even though both glue paste and wax resin lining are still practiced, as is impregnation of canvas paintings with glue and Beva.
 
 This is much in line with the sixth requirement ([table 21.1](#table-21-1)), that increase of weight due to lining should be minimal. This, of course, was in comparison to a wax-resin lining, which was very heavy. A large format could be deformed simply by the weight of a heavy lining material if it was not supported. Lightweight treatments are still preferable, including stretchers and backing boards—especially for large formats—in light of increased loan activity between museums. In these situations, extra weight makes the painting more difficult to handle and increases the risk of high forces due to impact if the painting is dropped during transportation. Furthermore, a heavy structure can increase the risk of failure in the hanging system.
 
 ### The Flexibility Requirement
 
-The fourth requirement ([table 21.1](#table-21-1)) is that flexibility must be guaranteed for an unlimited period of time. It is not specified if Mehra means in the complete lining structure or in the canvas, adhesive, or a possible interleaf. An argument for a flexible lining adhesive was mentioned as early as 1931, when the Canadian painter and sculptor Percyval Tudor-Hart advised that a lining adhesive should provide unlimited flexibility and recommended the “Dutch” adhesive ([[Tudor-Hart 1931]]), and that same year, two American conservators remarked that a wax lining is “the best that is yet found for relining . . . It is flexible, never becoming brittle” ({% cite 'Durham and Leser 1931' '38' %}). The unlimited flexibility mentioned by Mehra should be seen in light of these sources and the long historic experience with brittle glue-paste linings. However, flexibility in lining adhesive and flexibility in lining as a whole are two very different concepts. In his requirements, Mehra mentioned the lining as a whole and not just the adhesive. In 1981, he contradicted this requirement in a paper on lining canvases, where he wrote that lining canvases should be as stiff as possible ([[Mehra 1981b]]).
+The fourth requirement ([table 21.1](#table-21-1)) is that flexibility must be guaranteed for an unlimited period of time. It is not specified if Mehra means in the complete lining structure or in the canvas, adhesive, or a possible interleaf. An argument for a flexible lining adhesive was mentioned as early as 1931, when the Canadian painter and sculptor Percyval Tudor-Hart advised that a lining adhesive should provide unlimited flexibility and recommended the “Dutch” adhesive ({% cite 'Tudor-Hart 1931' %}), and that same year, two American conservators remarked that a wax lining is “the best that is yet found for relining . . . It is flexible, never becoming brittle” ({% cite 'Durham and Leser 1931' '38' %}). The unlimited flexibility mentioned by Mehra should be seen in light of these sources and the long historic experience with brittle glue-paste linings. However, flexibility in lining adhesive and flexibility in lining as a whole are two very different concepts. In his requirements, Mehra mentioned the lining as a whole and not just the adhesive. In 1981, he contradicted this requirement in a paper on lining canvases, where he wrote that lining canvases should be as stiff as possible ({% cite 'Mehra 1981b' %}).
 
 A year later, Mecklenburg summed up his approach to providing stability in a painting: “\[T\]o support a painting, the material chosen must: 1) be capable of developing and maintaining a large percentage of the total force of a stretched painting; 2) be able to restrain in-plane displacement as developed by desiccated glue and paint films; 3) restrain out-of-plane distortion such as cupping and buckling” ({% cite 'Mecklenburg 1982' '27' %})*.* He furthermore advised that a high modulus[^3] of the lining material was preferable and that thickness would provide support against out-of-plane distortions.
 
-Thus, research has shown that stiff linings can reduce the risk of further cracks and cupping in a painting ([[Mecklenburg 1982]]; [[Hedley 1988]]; [[Andersen 2013]]), which contradicts Mehra’s 1972 report. However, it is worth remarking that Mehra had been measuring the bending stiffness of the linings he tested, as opposed to the later studies, which measured stiffness in tension. For paintings, this means the difference between in-plane and out-of-plane forces.
+Thus, research has shown that stiff linings can reduce the risk of further cracks and cupping in a painting ({% cite 'Mecklenburg 1982' %}; {% cite 'Hedley 1988' %}; {% cite 'Andersen 2013' %}), which contradicts Mehra’s 1972 report. However, it is worth remarking that Mehra had been measuring the bending stiffness of the linings he tested, as opposed to the later studies, which measured stiffness in tension. For paintings, this means the difference between in-plane and out-of-plane forces.
 
-With this development in mind, it is interesting to observe how Mehra’s early thoughts on flexibility have inspired conservators to require flexible linings ([[Heiber 1987]]; [[van Och and Hoppenbrouwers 2003]]). Thus, the properties of lining canvases remained a cause for disagreement within the conservation profession for many years after Mehra’s report, despite the fact that he was the first to change his statement.
+With this development in mind, it is interesting to observe how Mehra’s early thoughts on flexibility have inspired conservators to require flexible linings ({% cite 'Heiber 1987' %}; {% cite 'van Och and Hoppenbrouwers 2003' %}). Thus, the properties of lining canvases remained a cause for disagreement within the conservation profession for many years after Mehra’s report, despite the fact that he was the first to change his statement.
 
 ### Degradation Agents—What is Worse?
 
-The fifth requirement ([table 21.1](#table-21-1)) was that the use of heat should be avoided altogether, or at least must be considerably minimized. Heat could deform the painting and increase the chemical degradation rate. While this is true, high moisture/water, pressure, and solvents can also have a lasting negative effect on paint layers, and are all used in paintings conservation. The question of what is causing more degradation remains unanswered and relies heavily on the materials and properties of each individual painting. Solvents can cause swelling and leaching in paint and ground layers ([[Phenix 2002]]), and the development of metal soaps can be accelerated by moisture ([[Garrappa et al. 2020]]). However, all of this is a question of the extent and duration of exposure to these elements. The discussion of what is worse for a paint layer—exposure to fluctuating climate or exposure to water or solvents while cleaning, lining, or other conservation treatments—is still unresolved. New research is, however, starting to tackle these questions with, for example, nanoindentation, which allows for the study of the mechanical properties of paint surfaces ([[Andersen et al. 2019]]).
+The fifth requirement ([table 21.1](#table-21-1)) was that the use of heat should be avoided altogether, or at least must be considerably minimized. Heat could deform the painting and increase the chemical degradation rate. While this is true, high moisture/water, pressure, and solvents can also have a lasting negative effect on paint layers, and are all used in paintings conservation. The question of what is causing more degradation remains unanswered and relies heavily on the materials and properties of each individual painting. Solvents can cause swelling and leaching in paint and ground layers ({% cite 'Phenix 2002' %}), and the development of metal soaps can be accelerated by moisture ({% cite 'Garrappa et al. 2020' %}). However, all of this is a question of the extent and duration of exposure to these elements. The discussion of what is worse for a paint layer—exposure to fluctuating climate or exposure to water or solvents while cleaning, lining, or other conservation treatments—is still unresolved. New research is, however, starting to tackle these questions with, for example, nanoindentation, which allows for the study of the mechanical properties of paint surfaces ({% cite 'Andersen et al. 2019' %}).
 
 ### Choice of Materials for Specific Purposes
 
@@ -74,9 +74,9 @@ Consider the case of a very torn canvas painting with frayed tacking edges. Diff
 
 In the last requirement ([table 21.1](#table-21-1)) Mehra wrote that the lining adhesive should “be compatible with the other materials used for the relining which it serves.” The meaning of “compatible” is not clear, and Mehra does not define it. It remains an open question whether poor compatibility means that the material does not bond well, that is it historically or ethically wrong, or perhaps that it has different properties from the original materials. It is also not clear how compatibility may be judged in a scientific manner. And yet the word is frequently used.
 
-In E.C.C.O.’s Code of Ethics article IX, compatibility is included as a requirement, but it remains undefined. The European Committee for Standardization (CEN) standard defining the most important general terms used in conservation of cultural heritage EN 15898:2011 defined compatibility as the “extent to which one material can be used with another material without putting significance or stability at risk” ({% cite 'CEN 2011' '10' %}). Acknowledging that this was still a rather vague definition, Revez proposed the following definition: “Compatibility corresponds to the extent to which a product, method or action may be used upon a heritage object without putting its present or future significance at risk” ([[Revez 2016]]). In the updated version of the CEN standard from 2019 (EN 15898:2019) the definition was clarified further: “extent to which one material can be used with another material without *compromising **significance** or **stability** of the object. Note 1 to entry: this relates to conservation materials or to components of the **object***” ({% cite 'CEN 2019' '25' %}).
+In E.C.C.O.’s Code of Ethics article IX, compatibility is included as a requirement, but it remains undefined. The European Committee for Standardization (CEN) standard defining the most important general terms used in conservation of cultural heritage EN 15898:2011 defined compatibility as the “extent to which one material can be used with another material without putting significance or stability at risk” ({% cite 'CEN 2011' '10' %}). Acknowledging that this was still a rather vague definition, Revez proposed the following definition: “Compatibility corresponds to the extent to which a product, method or action may be used upon a heritage object without putting its present or future significance at risk” ({% cite 'Revez 2016' %}). In the updated version of the CEN standard from 2019 (EN 15898:2019) the definition was clarified further: “extent to which one material can be used with another material without *compromising **significance** or **stability** of the object. Note 1 to entry: this relates to conservation materials or to components of the **object***” ({% cite 'CEN 2019' '25' %}).
 
-Useful compatibility indicators have been proposed for stone conservation and the conservation of archeological sites by Rodrigues and Grossi ([[Rodrigues and Grossi 2007]]), but due to the difference in materials, these are not easily translated to paintings conservation. One indicator that might be useful, however, is physical content, which represents “intrinsic properties responsible for the performance of the intervention action, considered in its material side” ([[Rodrigues and Grossi 2007]]). The other indicators are the operational background, the sociocultural context, and the environmental constraints. Assuming that compatibility is a multifaceted concept that can be broken down into a number of simpler categories, they propose a rating system (from 1 to 10) for each action taken, which would then be translated to an incompatibility degree for a proposed treatment of stone and buildings. The question remains whether this concept works for structural painting conservation.
+Useful compatibility indicators have been proposed for stone conservation and the conservation of archeological sites by Rodrigues and Grossi ({% cite 'Rodrigues and Grossi 2007' %}), but due to the difference in materials, these are not easily translated to paintings conservation. One indicator that might be useful, however, is physical content, which represents “intrinsic properties responsible for the performance of the intervention action, considered in its material side” ({% cite 'Rodrigues and Grossi 2007' %}). The other indicators are the operational background, the sociocultural context, and the environmental constraints. Assuming that compatibility is a multifaceted concept that can be broken down into a number of simpler categories, they propose a rating system (from 1 to 10) for each action taken, which would then be translated to an incompatibility degree for a proposed treatment of stone and buildings. The question remains whether this concept works for structural painting conservation.
 
 It seems that in the context of Mehra’s paper, the physical indicator was probably what was more on his mind. If for the sake of simplicity one stays with this concept, it may be possible to propose compatibility indicators for mechanical and structural properties of conservation materials. Problems with the concept of compatibility in the context of canvas paintings include that the materials of canvas paintings (canvas, glue, ground, paint, etc.) have very different properties, and research suggests that lining material should not have the same mechanical and structural properties as the original canvas, as described above. Stiffer and less hygroscopic materials have been found to provide better supports, so perhaps compatibility of structure should rather be considered in relation to the paint and ground layers. Another, and possibly more comprehensive approach, to assessing treatment options is risk assessment, which is considered in the next section.
 
@@ -84,7 +84,7 @@ It seems that in the context of Mehra’s paper, the physical indicator was prob
 
 In structural conservation of canvas paintings, very little research progress has been made in the last decades, especially when it comes to predicting the risks of structural conservation treatments. Instead, the tendency has been to avoid treatments. However, one tool that can help us move toward rational risk assessment could be computational finite element modeling to predict stresses and the resultant strain and failure in the painting structure with fluctuating ambient climate conditions. A comprehensive computational model and subsequent parametric studies are missing for both treated and untreated paintings, as is validation of the results through epidemiological paintings collection studies. Computer-generated prediction requires not only detailed model design but also reliable experimental data on material properties that can help answer specific questions about structure and mechanical properties. The potential is promising and can point the way to more solid guides for conservators, but until such a tool exists —with validated results—the best option we have is to rely on risk assessment for guidance.
 
-In cleaning literature, the concept of star diagrams for evaluating specific parameters was developed and used repeatedly ([[Daudin-Schotte et al. 2013]]; [[Chung et al. 2017]]; [[Ornsby et al. 2019]]; [[Bartoletti et al. 2020]]). This approach could be useful for other conservation treatments as well, and would follow the trend of preventive conservation that moves away from requirements and recommendations or guidelines toward risk assessments.
+In cleaning literature, the concept of star diagrams for evaluating specific parameters was developed and used repeatedly ({% cite 'Daudin-Schotte et al. 2013' %}; {% cite 'Chung et al. 2017' %}; {% cite 'Ornsby et al. 2019' %}; {% cite 'Bartoletti et al. 2020' %}). This approach could be useful for other conservation treatments as well, and would follow the trend of preventive conservation that moves away from requirements and recommendations or guidelines toward risk assessments.
 
 Linings and related structural treatments are still performed widely, and the different alternatives should be evaluated when choosing a treatment option or considering paintings that have already been lined. A star diagram shows risk factors situated around the center ([fig. 21.1](#fig-21-1)). A value from 1 through 5 is given for each risk factor, with 1 as low risk and 5 as high risk. This is different from the approaches proposed in the articles referenced above, in that it is intuitive that the higher the rating number the higher the risk, and vice versa. Thus, a smaller shape means lower risk, as shown in [fig. 21.1](#fig-21-1). Of course, the scale is a matter of interpretation and must be discussed for each factor.
 
