--- a/content/5-adhesives/28.md
+++ b/content/5-adhesives/28.md
@@ -35,15 +35,15 @@ Production and application of adhesive meshes was the objective of a research pr
 
 ## Current Lining Techniques and Materials—Opportunities and Limits
 
-Looking back at the evolution of lining techniques over the last decades, one finds multiple approaches that attempt to reduce the amount of adhesive applied and adhesive penetration, as well as the impact of elevated temperatures, water, or solvents, all of which enable increased reversibility. The most important achievements include Mehra's nap-bond cold-lining ([[Mehra 1975]]), Heiber’s *Geweberasterhaftung* (grid adhesion) technique ([[Heiber 1987]]), and the more recent mist-lining ([[van Och and Hoppenbrouwers 2003]]). Their common characteristic is the application of the adhesive compound as an openly structured layer on the lining canvas, rather than on the original canvas. When dried and solid, it is reactivated by means of heat or solvents.
+Looking back at the evolution of lining techniques over the last decades, one finds multiple approaches that attempt to reduce the amount of adhesive applied and adhesive penetration, as well as the impact of elevated temperatures, water, or solvents, all of which enable increased reversibility. The most important achievements include Mehra's nap-bond cold-lining ({% cite 'Mehra 1975' %}), Heiber’s *Geweberasterhaftung* (grid adhesion) technique ({% cite 'Heiber 1987' %}), and the more recent mist-lining ({% cite 'van Och and Hoppenbrouwers 2003' %}). Their common characteristic is the application of the adhesive compound as an openly structured layer on the lining canvas, rather than on the original canvas. When dried and solid, it is reactivated by means of heat or solvents.
 
-Adhesives based on synthetic polymers are popular for those and most other lining applications today, including heat-seal adhesives like Beva 371 and different polymer dispersions. However, all are composed of highly complex formulations, prone to segregation, altering mechanical properties, and they often exhibit poor long-term stability.[^1] Surfactants in acrylic dispersions, for instance, can degrade or migrate from the bulk adhesive, whereas the plasticizer in Beva 371 is basically able to migrate into the painting structure ([[Cimino et al. 2020]]; [[Lazzari et al. 2011]]). Of utmost concern, though, are modifications of the composition without indication by the manufacturer, as well as renaming and discontinuation of products, resulting in altered working and aging properties ([[Cimino et al. 2020]]; [[Ploeger, McGlinchey, and de la Rie 2015]]). In addition, application of synthetic polymer adhesives requires high temperatures (in excess of 60°C) or harmful solvents, which might also pose a risk to paint layers. Although modern techniques emphasize reversibility, inevitable residues may limit the options for further treatments.
+Adhesives based on synthetic polymers are popular for those and most other lining applications today, including heat-seal adhesives like Beva 371 and different polymer dispersions. However, all are composed of highly complex formulations, prone to segregation, altering mechanical properties, and they often exhibit poor long-term stability.[^1] Surfactants in acrylic dispersions, for instance, can degrade or migrate from the bulk adhesive, whereas the plasticizer in Beva 371 is basically able to migrate into the painting structure ({% cite 'Cimino et al. 2020' %}; {% cite 'Lazzari et al. 2011' %}). Of utmost concern, though, are modifications of the composition without indication by the manufacturer, as well as renaming and discontinuation of products, resulting in altered working and aging properties ({% cite 'Cimino et al. 2020' %}; {% cite 'Ploeger, McGlinchey, and de la Rie 2015' %}). In addition, application of synthetic polymer adhesives requires high temperatures (in excess of 60°C) or harmful solvents, which might also pose a risk to paint layers. Although modern techniques emphasize reversibility, inevitable residues may limit the options for further treatments.
 
 ## Toward a New Approach to Canvas Bonding
 
-Based on the concerns outlined above, pure, extensively tested adhesives with good aging properties are preferable as materials for canvas bonding. Methylcellulose, sturgeon glue, and PiBMA, which have, so far, not commonly been used for this particular purpose, show good long-term aging behavior and have found broad application in the field of conservation for several decades (see Characteristics and Materials of Adhesive Meshes below). However, these adhesives are mostly applied in liquid form, commonly as weak solutions. Owing to the high proportion of water or solvent, such solutions tend to penetrate porous materials like canvas. This may result in a weak bond ([[Soppa et al. 2014]]), heterogenous adhesive distribution, stiffening and darkening of the canvas, or water-induced shrinkage of the canvas, with subsequent paint delamination.
+Based on the concerns outlined above, pure, extensively tested adhesives with good aging properties are preferable as materials for canvas bonding. Methylcellulose, sturgeon glue, and PiBMA, which have, so far, not commonly been used for this particular purpose, show good long-term aging behavior and have found broad application in the field of conservation for several decades (see Characteristics and Materials of Adhesive Meshes below). However, these adhesives are mostly applied in liquid form, commonly as weak solutions. Owing to the high proportion of water or solvent, such solutions tend to penetrate porous materials like canvas. This may result in a weak bond ({% cite 'Soppa et al. 2014' %}), heterogenous adhesive distribution, stiffening and darkening of the canvas, or water-induced shrinkage of the canvas, with subsequent paint delamination.
 
-To overcome the risks related to the application of liquid solutions, solid and dry adhesive films that can be activated have been developed, of which Beva 371 films are the most common. With the aim to minimize adhesive input and reduce heat-induced risks, we developed adhesive meshes rather than films, made from the materials mentioned above. These can be activated with controlled supply of water or solvent. The method originates from a diploma project’s approach to fix an old lining with sturgeon glue meshes. In this thesis, the manual production and a first application of mesh prototypes were implemented, followed by preliminary tests of the bond strength using different activation parameters ([[Konietzny 2014]]; [[Konietzny 2015]]). The highly promising results initiated the idea to pursue this approach with a dedicated research project.
+To overcome the risks related to the application of liquid solutions, solid and dry adhesive films that can be activated have been developed, of which Beva 371 films are the most common. With the aim to minimize adhesive input and reduce heat-induced risks, we developed adhesive meshes rather than films, made from the materials mentioned above. These can be activated with controlled supply of water or solvent. The method originates from a diploma project’s approach to fix an old lining with sturgeon glue meshes. In this thesis, the manual production and a first application of mesh prototypes were implemented, followed by preliminary tests of the bond strength using different activation parameters ({% cite 'Konietzny 2014' %}; {% cite 'Konietzny 2015' %}). The highly promising results initiated the idea to pursue this approach with a dedicated research project.
 
 ## Characteristics and Materials of Adhesive Meshes
 
@@ -55,17 +55,17 @@ In contact with water or solvent, the solid meshes become tacky, thereby requiri
 
 Thanks to the mesh structure, a more homogenous bonding can be achieved, while maintaining higher flexibility, permeability, and presumably less tension compared to the adhesive's application as solution or gel. Furthermore, the reversibility of the bond will be improved due to lower tendency of the adhesive to migrate and penetrate. Depending on the requirements of the individual painting and treatment, the adhesive can be tailored using three materials that differ mainly in activation time and bonding properties.
 
-Methylcellulose is among the most durable adhesives used in conservation ([[Feller and Wilt 1993]]). The water-soluble, semisynthetic carbohydrate exhibits constant material properties due to its standardized industrial production. Hydrophilic and hydrophobic substituents along the polymer chain can develop affinities to a broad range of substrates of polar and nonpolar nature. The material has been investigated extensively for conservation treatments, with the conclusion that its common perception as a weak adhesive is obsolete ([[Sindlinger-Maushardt and Petersen 2007]]). Convincing results have been reported for adhering paint flakes on canvas ([[Soppa et al. 2014]]; [[Soppa et al. 2017]]) and for canvas bonding ([[Sindlinger-Maushardt and Petersen 2007]]).
+Methylcellulose is among the most durable adhesives used in conservation ({% cite 'Feller and Wilt 1993' %}). The water-soluble, semisynthetic carbohydrate exhibits constant material properties due to its standardized industrial production. Hydrophilic and hydrophobic substituents along the polymer chain can develop affinities to a broad range of substrates of polar and nonpolar nature. The material has been investigated extensively for conservation treatments, with the conclusion that its common perception as a weak adhesive is obsolete ({% cite 'Sindlinger-Maushardt and Petersen 2007' %}). Convincing results have been reported for adhering paint flakes on canvas ({% cite 'Soppa et al. 2014' %}; {% cite 'Soppa et al. 2017' %}) and for canvas bonding ({% cite 'Sindlinger-Maushardt and Petersen 2007' %}).
 
-For adhesive meshes, two types of Methocel were chosen.[^4] They differ mainly in degree of polymerization—and thus viscosity. Methocel A15LV is of low viscosity and hence requires a short activation time with low amounts of water. It proved suitable for inaccessible bonding surfaces and water-sensitive materials where only a minimum of humidity is acceptable. Methocel A4C is of medium viscosity but requires more time and water to be activated. The bond strength exceeds that of Methocel A15LV and seems to be equivalent to Beva 371 film (65 µm) bonding ([[Sindlinger-Maushardt and Petersen 2007]]). Consequently, its use is recommended in cases where bonding surfaces are accessible, water input can be controlled, and a high bond strength is desired. Due to the delayed response to humidity, methylcellulose might be advantageous for larger areas that need to be bonded, as well as objects that do not require climate control. Methylcellulose meshes are particularly suitable for paintings that are sensitive to heat, as no elevated temperatures are required for activation.
+For adhesive meshes, two types of Methocel were chosen.[^4] They differ mainly in degree of polymerization—and thus viscosity. Methocel A15LV is of low viscosity and hence requires a short activation time with low amounts of water. It proved suitable for inaccessible bonding surfaces and water-sensitive materials where only a minimum of humidity is acceptable. Methocel A4C is of medium viscosity but requires more time and water to be activated. The bond strength exceeds that of Methocel A15LV and seems to be equivalent to Beva 371 film (65 µm) bonding ({% cite 'Sindlinger-Maushardt and Petersen 2007' %}). Consequently, its use is recommended in cases where bonding surfaces are accessible, water input can be controlled, and a high bond strength is desired. Due to the delayed response to humidity, methylcellulose might be advantageous for larger areas that need to be bonded, as well as objects that do not require climate control. Methylcellulose meshes are particularly suitable for paintings that are sensitive to heat, as no elevated temperatures are required for activation.
 
-Sturgeon glue is a traditional adhesive and still in frequent use in conservation.[^5] Sturgeon glue is gaining popularity in modern paintings conservation thanks to its good adhesive properties and has been investigated for paint consolidation ([[Sindlinger-Maushardt and Petersen 2007]]; [[Soppa et al. 2014]]), tear mending ([[Flock 2014]]), and canvas bonding using glue solutions ([[Geißinger and Krekel 2007]]; [[Mecklenburg, Fuster-López, and Ottolini 2012]]). As a material of natural origin, with variations in the raw material and processing ({% cite 'Soppa 2018' '42' %}), it can display a range of bonding properties. The glue does slightly discolor over time, unlike methylcellulose ([[Pataki-Hundt 2018]]).
+Sturgeon glue is a traditional adhesive and still in frequent use in conservation.[^5] Sturgeon glue is gaining popularity in modern paintings conservation thanks to its good adhesive properties and has been investigated for paint consolidation ({% cite 'Sindlinger-Maushardt and Petersen 2007' %}; {% cite 'Soppa et al. 2014' %}), tear mending ({% cite 'Flock 2014' %}), and canvas bonding using glue solutions ({% cite 'Geißinger and Krekel 2007' %}; {% cite 'Mecklenburg, Fuster-López, and Ottolini 2012' %}). As a material of natural origin, with variations in the raw material and processing ({% cite 'Soppa 2018' '42' %}), it can display a range of bonding properties. The glue does slightly discolor over time, unlike methylcellulose ({% cite 'Pataki-Hundt 2018' %}).
 
-Sturgeon glue remains sufficiently water soluble over time, and its adhesive strength barely changes ([[Geißinger and Krekel 2007]]; [[Przybylo 2006]]). It is prone to rapid response to fluctuating relative humidity and, in the long run, to increased crystallinity in films ([[Schellmann 2007]]). This fact limits the application of sturgeon glue meshes preferably to smaller areas or objects in controlled environmental conditions. On the other hand, considerable tack develops within a very short activation time with only small amounts of activation water. Thermal energy (35°C) further mobilizes the gel, leading to better adhesion—albeit at the cost of propagating penetration into the canvas ([[Konietzny 2015]]). Elevated temperatures can thus help to reduce the amount of activation water required. Like methylcellulose, sturgeon glue is capable of adhering to various materials, including natural wax ([[Fischer and Eska 2011]]).
+Sturgeon glue remains sufficiently water soluble over time, and its adhesive strength barely changes ({% cite 'Geißinger and Krekel 2007' %}; {% cite 'Przybylo 2006' %}). It is prone to rapid response to fluctuating relative humidity and, in the long run, to increased crystallinity in films ({% cite 'Schellmann 2007' %}). This fact limits the application of sturgeon glue meshes preferably to smaller areas or objects in controlled environmental conditions. On the other hand, considerable tack develops within a very short activation time with only small amounts of activation water. Thermal energy (35°C) further mobilizes the gel, leading to better adhesion—albeit at the cost of propagating penetration into the canvas ({% cite 'Konietzny 2015' %}). Elevated temperatures can thus help to reduce the amount of activation water required. Like methylcellulose, sturgeon glue is capable of adhering to various materials, including natural wax ({% cite 'Fischer and Eska 2011' %}).
 
-PiBMA Degalan PQ 611 N (formerly Plexigum PQ 611)[^6] is soluble in aliphatic hydrocarbon solvents such as isooctane or petrol ether without any aromatics. Therefore, acrylic meshes qualify for water-sensitive painting structures, such as canvas that tends to shrink or water-soluble paint layers. Activation of the acrylate requires comparably small amounts of solvents that can be sprayed or vaporized. Lower bond strength can be achieved without solvents by applying elevated temperatures just above the glass transition temperature of 33°C ([[Brandt and Volbracht 2018]]). Owing to the brittleness of PiBMA, a stiffening effect occurs when used for canvas bonding. This might be an advantage when the movement of a highly degraded textile support needs to be reduced.
+PiBMA Degalan PQ 611 N (formerly Plexigum PQ 611)[^6] is soluble in aliphatic hydrocarbon solvents such as isooctane or petrol ether without any aromatics. Therefore, acrylic meshes qualify for water-sensitive painting structures, such as canvas that tends to shrink or water-soluble paint layers. Activation of the acrylate requires comparably small amounts of solvents that can be sprayed or vaporized. Lower bond strength can be achieved without solvents by applying elevated temperatures just above the glass transition temperature of 33°C ({% cite 'Brandt and Volbracht 2018' %}). Owing to the brittleness of PiBMA, a stiffening effect occurs when used for canvas bonding. This might be an advantage when the movement of a highly degraded textile support needs to be reduced.
 
-Degalan PQ 611 provides very good adhesion to polar and nonpolar substrates alike, for instance, to both wax ([[Fischer and Eska 2011]]) and cellulosic materials. Concerning long-term material behavior, PiBMA-based adhesives are stable in terms of discoloration, but they may cross-link to a certain amount. Nevertheless, the solubility likely remains in aliphatic hydrocarbon solvents with a small proportion of aromatics ([[Feller 1984]]; [[Down 2015]]). However, PiBMA has not yet been processed into stable adhesive meshes due to its brittleness, which would require extensive adjustments to the method.
+Degalan PQ 611 provides very good adhesion to polar and nonpolar substrates alike, for instance, to both wax ({% cite 'Fischer and Eska 2011' %}) and cellulosic materials. Concerning long-term material behavior, PiBMA-based adhesives are stable in terms of discoloration, but they may cross-link to a certain amount. Nevertheless, the solubility likely remains in aliphatic hydrocarbon solvents with a small proportion of aromatics ({% cite 'Feller 1984' %}; {% cite 'Down 2015' %}). However, PiBMA has not yet been processed into stable adhesive meshes due to its brittleness, which would require extensive adjustments to the method.
 
 ## Production of Adhesive Meshes
 
@@ -121,11 +121,11 @@ The authors would like to thank the following persons and organizations for thei
 
 {% endbackmatter %}
 
-[^1]: See [[Bianco et al. 2015]]; [[Cimino et al. 2020]]; [[Witte, Florqin, and Goessens-Landrie 1984]]; [[Down 2015]]; [[Howells et al. 1984]]; [[Lazzari et al. 2011]]; [[McGlinchey et al. 2011]]; [[Ploeger, McGlinchey, and de la Rie 2015]]; [[Silva, Doménech-Carbó, and Osete-Cortina 2015]].
+[^1]: See {% cite 'Bianco et al. 2015' %}; {% cite 'Cimino et al. 2020' %}; {% cite 'Witte, Florqin, and Goessens-Landrie 1984' %}; {% cite 'Down 2015' %}; {% cite 'Howells et al. 1984' %}; {% cite 'Lazzari et al. 2011' %}; {% cite 'McGlinchey et al. 2011' %}; {% cite 'Ploeger, McGlinchey, and de la Rie 2015' %}; {% cite 'Silva, Doménech-Carbó, and Osete-Cortina 2015' %}.
 
 [^2]: This is less than the weight of Beva 371 film (25 µm): 43 g/m².
 
-[^3]: The bond strength has also been evaluated for sturgeon glue meshes ([[Konietzny 2015]]) and methylcellulose meshes ([[Konietzny et al. 2022]] and ongoing research).
+[^3]: The bond strength has also been evaluated for sturgeon glue meshes ({% cite 'Konietzny 2015' %}) and methylcellulose meshes ({% cite 'Konietzny et al. 2022' %} and ongoing research).
 
 [^4]: Methocel has been produced by DuPont since 2019, and formerly by Dow Chemical (until 2017) and DowDuPont (2017–2019).
 
@@ -133,7 +133,7 @@ The authors would like to thank the following persons and organizations for thei
 
 [^6]: Degalan has been produced by Röhm GmbH since 2019. Before that manufacturers were Degussa AG (until 2007) and Evonik Industries (2007–2019).
 
-[^7]: A detailed description of the process can be found in [[Konietzny 2014]] and [[Konietzny, Soppa, and Haller 2018]].
+[^7]: A detailed description of the process can be found in {% cite 'Konietzny 2014' %} and {% cite 'Konietzny, Soppa, and Haller 2018' %}.
 
 [^8]: Lining was performed by Sonja Bretschneider in 2019, in a private studio in Dresden, Germany, with adhesive meshes made from a mixture of Benecel A4C and sturgeon glue.
 
@@ -147,7 +147,7 @@ The authors would like to thank the following persons and organizations for thei
 
 [^13]: We used the nonwoven capillary fabric Paraprint OL 60, consisting of viscose and acrylic binder, produced by TWE Dierdorf GmbH & Co. KG, D-56269 Dierdorf, purchased from Deffner & Johann, D-97520 Röthlein.
 
-[^14]: Peel tests on canvas joined with sturgeon glue meshes confirmed that activation with minimal water results in easily separable bonds ([[Konietzny 2015]]).
+[^14]: Peel tests on canvas joined with sturgeon glue meshes confirmed that activation with minimal water results in easily separable bonds ({% cite 'Konietzny 2015' %}).
 
 [^15]: Frozen sturgeon glue meshes were implemented for partially readhering an old lining during a semester project at the Bern University of the Arts’ Conservation program in 2018.
 
@@ -159,4 +159,4 @@ The authors would like to thank the following persons and organizations for thei
 
 [^19]: The reattachment of silk decorations on a textile support was performed by Julia Dummer in 2019 at Museumslandschaft Hessen-Kassel, Germany.
 
-[^20]: Different paper objects have been treated using Klucel G meshes during semester projects at the Bern University of the Arts’ Conservation program, in 2019, and for a bachelor’s thesis at the University of Applied Sciences in Cologne ([[Hehl 2019]]).
+[^20]: Different paper objects have been treated using Klucel G meshes during semester projects at the Bern University of the Arts’ Conservation program, in 2019, and for a bachelor’s thesis at the University of Applied Sciences in Cologne ({% cite 'Hehl 2019' %}).
