--- a/content/6-interventions/35.md
+++ b/content/6-interventions/35.md
@@ -38,7 +38,7 @@ The behavior of paintings during and after immersion is linked to the physical a
 
 {% figure 'table-35-1' %}
 
-Canvas is a hygroscopic material that swells in the presence of water and shrinks upon drying if it is not properly stretched on a frame ([[Roche 2003]]). Consequently, paintings that had too weak a frame or were not sufficiently stretched suffered particularly during the flood. In addition, twenty-eight out of thirty-one past linings peeled off, partially or completely; only three linings of small-format paintings retained their mechanical properties. To limit the shrinkage of the canvases at the time of the rescue, conservators removed eighteen paintings from their stretchers and placed them on wooden boards. They also stapled a certain number of canvases to their stretchers. Nevertheless, many canvases were distorted during drying and some shrank at their edges or at tears. Indeed, tears were observed on thirty-five of the fifty-one paintings. Twenty paintings had old tears that had been treated in the past, and fifteen had new, more complex tears corresponding to traumas suffered during the flooding ([fig. 35.1](#fig-35-1)).
+Canvas is a hygroscopic material that swells in the presence of water and shrinks upon drying if it is not properly stretched on a frame ({% cite 'Roche 2003' %}). Consequently, paintings that had too weak a frame or were not sufficiently stretched suffered particularly during the flood. In addition, twenty-eight out of thirty-one past linings peeled off, partially or completely; only three linings of small-format paintings retained their mechanical properties. To limit the shrinkage of the canvases at the time of the rescue, conservators removed eighteen paintings from their stretchers and placed them on wooden boards. They also stapled a certain number of canvases to their stretchers. Nevertheless, many canvases were distorted during drying and some shrank at their edges or at tears. Indeed, tears were observed on thirty-five of the fifty-one paintings. Twenty paintings had old tears that had been treated in the past, and fifteen had new, more complex tears corresponding to traumas suffered during the flooding ([fig. 35.1](#fig-35-1)).
 
 {% figure 'fig-35-1' %}
 
@@ -54,13 +54,7 @@ During drying, the shrinking of the canvas led to the failure of adhesion betwee
 
 According to Cesare Brandi, matter is structure and aspect, and the aim of conservation is to stop the process of degradation of the artwork and to restore its structural unity to improve the perception of image and color ({% cite 'Brandi 2001' '34' %}). Additionally, conservation treatments and products must be compatible with the original materials, stable, and as reversible as possible.
 
-In 1974, the Greenwich conference on comparative lining techniques highlighted the risks incurred by paint layers when moisture, pressure, and heat are applied, particularly with regard to traditional glue-paste and wax-resin techniques ([[Villers 2003b' %}). Indeed, these treatments can crush the paint layers, especially the impasto, and can also induce blanching. More recently, new methods of lining with synthetic adhesives have been developed, while traditional methods have evolved to improve the control of the different parameters of the procedure.
-
-The goal of the 2016–2017 interventions was to correct the deformations of the canvas, to reduce the lifting of paint layers, and to restore the cohesion of the multilayer system. Conservation protocols for all the paintings were established by taking into consideration the characteristics of each painting: the physicochemical properties of the original materials, the nature of the alterations, and past conservation treatments. Due to the fragility of the paintings, the conservators intervened very gradually. They alternated operations from the front, such as cleaning, and from the back of the artwork: reduction of deformations, consolidation, and relining, taking care to protect the paint layer with facings when it was necessary.
-
-For all the paintings, the first intervention essentially consisted of locally consolidating the paint layer with sturgeon glue before removing the facings with Bollore paper and hide glue applied during the rescue. Securing the paint layer with new facings made it possible to remove the mud residue, the adhesive, the patches, and the deficient old linings. After the long work of reducing the fabric canvas deformations with controlled humidity and pressure, and stretching the paintings on temporary metallic stretchers or with paper strips on panel as necessary, the localized moisture input and the application of weights made it possible to relax the canvas and bring the edges of the tears closer together before consolidating them by linking them thread to thread.
-
-Moisture was also essential to relax the canvas and to allow the paint layer to regain its place in the areas of roof-shape lifting. The conservators then applied facings, often in several layers, to restore the flatness of the paint layer. The supply of moisture and the level of pressure was controlled by using a variety of papers or gauzes with different properties of stretching upon wetting and of tension and shrinkage upon drying, as well as synthetic or natural adhesives at different concentrations ([[Delsaut and Durand 1989]]). Facings adhered to the paint layer with glue paste along with moderate heat and moisture were the most successful in flattening the roof-shape lifting back to the surface plane. However, this treatment was not systematic. Throughout the interventions, conservators also used a low-pressure vacuum table, in particular to restore the flatness of the paint layer and to simultaneously consolidate it.
+In 1974, the Greenwich conference on comparative lining techniques highlighted the risks incurred by paint layers when moisture, pressure, and heat are applied, particularly with regard to traditional glue-paste and wax-resin techniques ({% cite 'Roche 2003' %}). Facings adhered to the paint layer with glue paste along with moderate heat and moisture were the most successful in flattening the roof-shape lifting back to the surface plane. However, this treatment was not systematic. Throughout the interventions, conservators also used a low-pressure vacuum table, in particular to restore the flatness of the paint layer and to simultaneously consolidate it.
 
 Another type of intervention was carried out to restore the cohesion of the different layers and the adhesion between the paint layers and the support. Most of the paintings were impregnated from the reverse of the canvas with different adhesives: Aquazol, hide glue, sturgeon glue, and acrylic resins: Beva 371, Plextol B500, Paraloid B72. A total of 41 paintings were thus consolidated ([table 35.2](#table-35-2)). Most of the paintings with a red-clay-based preparation layer were consolidated with protein adhesives (animal glues) used in colloidal solutions. Because the clay-based preparations have a significant absorption capacity, this consolidation restores the cohesion within the preparation layer and the adhesion between the different layers. In contrast, white preparations form a more cohesive and rigid layer, so the addition of an aqueous adhesive is likely to accentuate the stresses between the preparation layer and the canvas—which, on more recent paintings, is often more reactive to water. For that reason, synthetic adhesives were used on most artworks with a white preparation layer.
 
@@ -80,7 +74,7 @@ While in the past the majority of paintings were lined with glue paste (twenty-f
 
 *The Sacrifice of Abraham*, attributed to a follower of Maertens de Vos (sixteenth century), was originally an oil painting on panel; it entered the collections of the Musée Girodet between 1853 and 1857. The museum’s archives indicate that, due to extensive flaking, it was transferred from panel onto canvas in 1960.
 
-As a reminder, a transfer is the replacement of the original support of a painting by a new support. Transfer is no longer practiced today; our view on the artworks has changed, and we have set ourselves certain limits for ethical and philosophical reasons. But in the eighteenth century and for some time after, transfer was thought to “bring back life”"[^5] to paintings in poor condition, “saving” them from the ravages of time by giving them “eternal life” ({% cite 'B.-F. Lépicié 1752' '43–44' %}). Indeed, some restorers would be awarded the task of transferring the king’s royal paintings to other supports ({% cite 'Emile-Mâle 1982' '225' %}). There is therefore a whole corpus of paintings previously transferred, on a part of which it may be necessary to intervene.
+As a reminder, a transfer is the replacement of the original support of a painting by a new support. Transfer is no longer practiced today; our view on the artworks has changed, and we have set ourselves certain limits for ethical and philosophical reasons. But in the eighteenth century and for some time after, transfer was thought to “bring back life”"[^5] to paintings in poor condition, “saving” them from the ravages of time by giving them “eternal life” ({% cite 'Lépicié 1752' '43–44' %}). Indeed, some restorers would be awarded the task of transferring the king’s royal paintings to other supports ({% cite 'Emile-Mâle 1982' '225' %}). There is therefore a whole corpus of paintings previously transferred, on a part of which it may be necessary to intervene.
 
 In May 2016, *The Sacrifice of Abraham* remained submerged for seventy-two hours, due to the disaster that occurred in the Musée Girodet storerooms after the flooding of the Loing river in the city of Montargis. The deep immersion of the painting caused a significant alteration of the support of the artwork: very pronounced roof-shape lifting of the paint layer ([fig. 35.4](#fig-35-4)), separation of the canvas, and—as we discovered later—powdering of the ground layer. The transfer as a whole was weakened, and thus a complete dismounting was necessary.
 
