--- a/content/6-interventions/37.md
+++ b/content/6-interventions/37.md
@@ -24,7 +24,7 @@ abstract: "The paper discusses novel approaches and targeted structural treatmen
 
 Conservation treatment methodologies have historically exploited heat as an essential factor for the effective remediation of structural damage in paintings on canvas. However, past interventions were not without considerable risk, since heat was applied with rudimentary tools that provided quite limited control over the set temperature, the steadiness of delivery, and uniformity of distribution over the treatment surface area, leading to highly undesirable results ranging from incomplete treatments to irreversible changes in surface morphology of the paint and ground layers.
 
-During the 1974 Greenwich Conference on Comparative Lining Techniques, concerns over the effects of excessive heat during lining processes were raised, and this contributed to the overall conclusion that treatments should adhere to goals of minimal intervention and reversibility. The then-new “cold lining” methodologies were seen as an alternative to heat-driven methods with poorly managed or uncontrolled—and therefore damaging temperature ranges, and the call for a moratorium on lining in 1975 was a result of the dissatisfaction with the status quo in treatment outcomes ([[Percival-Prescott 2003a]]). In response to those monitions, conservators have since sought to limit or eliminate the application of heat, humidity, and pressure (which they could not control well due to limited technical means) in order to minimize the harmful impact of structural treatments.
+During the 1974 Greenwich Conference on Comparative Lining Techniques, concerns over the effects of excessive heat during lining processes were raised, and this contributed to the overall conclusion that treatments should adhere to goals of minimal intervention and reversibility. The then-new “cold lining” methodologies were seen as an alternative to heat-driven methods with poorly managed or uncontrolled—and therefore damaging temperature ranges, and the call for a moratorium on lining in 1975 was a result of the dissatisfaction with the status quo in treatment outcomes ({% cite 'Percival-Prescott 2003a' %}). In response to those monitions, conservators have since sought to limit or eliminate the application of heat, humidity, and pressure (which they could not control well due to limited technical means) in order to minimize the harmful impact of structural treatments.
 
 Precise and well-controlled heat, humidity, pressure, and associated time factors, however, do not have equally effective alternatives in structural treatments due to the inherent viscoelastic nature of painting materials: paint, ground, canvas support. Without the option of exploiting the physical factors of heat, humidity, and pressure, treatment choices become extremely limited. Control over time, temperature, and humidity allows the manipulation of Young’s modulus to temporarily plasticize the painting materials during the treatment and shift their physical properties toward the “safe zone” of viscoelastic dynamics, which is essential for both effective treatment and minimal risk.
 
@@ -32,7 +32,7 @@ This aspect has always been intuitively understood by practitioners, who continu
 
 The 2019 Conserving Canvas Symposium affirmed the field’s paradigm shift away from lining to a broader consideration of multiple material and intangible authenticity aspects and targeted structural treatment of traditional and unlined modern and contemporary paintings, as well as the challenges of the expanding types of new media used in twentieth and twenty-first century paintings on canvas. Since Greenwich, the approach of minimal intervention has fully matured in the field as a principal guiding ethos, yet technological advancements in heat transfer instrumentation and temperature-based methodology have lagged, leaving conservators without an essential temperature management technology to bridge theory and bench practice.
 
-An innovative approach that aims to overcome this gap involves a new low-temperature-optimized treatment methodology that employs flexible low-energy silicone-clad heating mats and associated precision temperature-management technology. Research, experimentation, and treatments have been conducted by the authors using the low-energy heating mats since 2003, and the design features of the technology have evolved to permit conservators to precisely apply heat, in particular in a low temperature range—from ambient temperatures to those customarily used for adhesive activation (25ºC–65ºC)— for localized and targeted methodologies to allow for minimal treatments to address the expanding needs in the laboratory ([[Olsson and Markevičius 2017]]). In particular, gaining control over steady, accurate heat transfer in the low-energy and temperature range (21ºC–40ºC) over an extended time period is the essential novelty of the new “low-and-slow” approach, an option that was previously inaccessible due to technological limitations.
+An innovative approach that aims to overcome this gap involves a new low-temperature-optimized treatment methodology that employs flexible low-energy silicone-clad heating mats and associated precision temperature-management technology. Research, experimentation, and treatments have been conducted by the authors using the low-energy heating mats since 2003, and the design features of the technology have evolved to permit conservators to precisely apply heat, in particular in a low temperature range—from ambient temperatures to those customarily used for adhesive activation (25ºC–65ºC)— for localized and targeted methodologies to allow for minimal treatments to address the expanding needs in the laboratory ({% cite 'Olsson and Markevičius 2017' %}). In particular, gaining control over steady, accurate heat transfer in the low-energy and temperature range (21ºC–40ºC) over an extended time period is the essential novelty of the new “low-and-slow” approach, an option that was previously inaccessible due to technological limitations.
 
 ## Heat Transfer in Conservation of Paintings on Canvas: History, Approaches, and Lessons from the Past
 
@@ -44,15 +44,15 @@ The execution of traditional flour-paste or wax-resin linings requires elevated 
 
 This lack of steadiness is even more problematic when the conservator attempts to heat a larger area with sweeping movement of the iron, which necessitates the set temperature to be considerably higher than the desired surface temperature. Furthermore, most hand irons are designed for household textiles, and therefore have operational parameters between 120ºC and 180ºC, far above the safe, low-energy range needed for painting materials. Other temperature controls, such as rheostats, measure energy output and are not corrected by local temperature readings, so the actual surface temperature is unknown.
 
-The primacy of lining as the most significant structural remediation method motivated conservators in the mid-to-late twentieth century to develop custom-fabricated hot tables to overcome the difficulties of heating a larger surface area than possible with a hand iron. The earliest of these were guided by the desire to improve impregnation at 65ºC or higher when performing the prevailing method of wax-resin lining ({% cite 'Ruhemann 1953' '73' %}; {P{lenderleith 1956\|, 169]]; [[Bomford 2003]]; [[Rees Jones, Cummings, and Hedley 2003]]; {% cite 'Berger and Zeliger 2003' 'v–ix' %}; [[Ackroyd 2002]]; [[Falvey 2008]]). Refinements were made to the design of multipurpose heating tables from the 1980s on, to be used in combination with thermoplastic synthetic adhesives for linings that are activated at 65ºC. Nonetheless, many heating tables lack uniformity in heat transfer over the table surface area, which is easily identified by thermal imaging cameras, and users come to know the idiosyncratic hot and cold spots present on their device ([[Olsson and Markevičius 2010]]).
+The primacy of lining as the most significant structural remediation method motivated conservators in the mid-to-late twentieth century to develop custom-fabricated hot tables to overcome the difficulties of heating a larger surface area than possible with a hand iron. The earliest of these were guided by the desire to improve impregnation at 65ºC or higher when performing the prevailing method of wax-resin lining ({% cite 'Ruhemann 1953' '73' %}; {P{lenderleith 1956\|, 169]]; {% cite 'Bomford 2003' %}; {% cite 'Rees Jones, Cummings, and Hedley 2003' %}; {% cite 'Berger and Zeliger 2003' 'v–ix' %}; {% cite 'Ackroyd 2002' %}; {% cite 'Falvey 2008' %}). Refinements were made to the design of multipurpose heating tables from the 1980s on, to be used in combination with thermoplastic synthetic adhesives for linings that are activated at 65ºC. Nonetheless, many heating tables lack uniformity in heat transfer over the table surface area, which is easily identified by thermal imaging cameras, and users come to know the idiosyncratic hot and cold spots present on their device ({% cite 'Olsson and Markevičius 2010' %}).
 
-From the 1970s to the 1990s, various low-pressure envelope methods were combined with infrared lamps for heat transfer ([[Hedley, Hackney, and Cummings 2003]])—or even heat guns—with the inevitable obstacles to accuracy and control, although these methods also aimed to achieve the customary 65ºC heat-activation temperatures for synthetic thermoplastic consolidating and lining adhesives. These large, costly devices do not resonate with the fundamental shift in conservation methodology to prioritize targeted, minimally invasive treatments, today performed by conservators rather than specialized reliners. The application of heat transfer expanded to localized remedial treatments, such as tear mending, consolidation, stabilization of cracked and lifted paint, and reduction of diverse deformations and planar distortions. In the absence of alternatives, these treatments are performed with spatulas and tacking and hand irons ([[Olsson and Markevičius 2010]]).
+From the 1970s to the 1990s, various low-pressure envelope methods were combined with infrared lamps for heat transfer ({% cite 'Hedley, Hackney, and Cummings 2003' %})—or even heat guns—with the inevitable obstacles to accuracy and control, although these methods also aimed to achieve the customary 65ºC heat-activation temperatures for synthetic thermoplastic consolidating and lining adhesives. These large, costly devices do not resonate with the fundamental shift in conservation methodology to prioritize targeted, minimally invasive treatments, today performed by conservators rather than specialized reliners. The application of heat transfer expanded to localized remedial treatments, such as tear mending, consolidation, stabilization of cracked and lifted paint, and reduction of diverse deformations and planar distortions. In the absence of alternatives, these treatments are performed with spatulas and tacking and hand irons ({% cite 'Olsson and Markevičius 2010' %}).
 
 ## Paintings on Canvas as Viscoelastic Systems: The Role of Temperature
 
-The risks and beneficial effects of heat transfer in conservation treatments must be assessed within a comprehensive understanding of the nature of paintings and painting as physical systems. This understanding is crucial to evaluating paintings’ materials, condition, potential response to treatment, and the long-term sustainability and stability of the intervention—and to formulating treatment protocols. In 1991, Mecklenburg published experimental data indicating that artist paints are viscoelastic systems ([[Mecklenburg and Tumosa 1991b]]). The viscoelastic behavior of paintings has been investigated in the context of their cleaning and mechanical properties ([[Hedley and Odlyha 1989]]; [[Michalski 1991]]; [[Hagen et al. 2007]]; [[Hagen 2017]]; [[Phenix 2011]]), and the effects of temperature and humidity have been investigated in the contexts of art transportation and preventive conservation. However, the effects of temperature and viscoelastic behavior have been investigated less in the context of structural treatments of paintings on canvas. These aspects were addressed by Berger and others ([[Russell and Berger 1982]]; [[Berger and Russell 1984]], [[Berger and Russell 1986]]; [[Berger and Russell 1988]]; ([[Goddard 1989]]); [[Olsson and Markevičius 2010]]; [[Markevičius et al. 2013]]; [[Olsson and Markevičius 2017]]; [[Markevičius et al. 2017]]).
+The risks and beneficial effects of heat transfer in conservation treatments must be assessed within a comprehensive understanding of the nature of paintings and painting as physical systems. This understanding is crucial to evaluating paintings’ materials, condition, potential response to treatment, and the long-term sustainability and stability of the intervention—and to formulating treatment protocols. In 1991, Mecklenburg published experimental data indicating that artist paints are viscoelastic systems ({% cite 'Mecklenburg and Tumosa 1991b' %}). The viscoelastic behavior of paintings has been investigated in the context of their cleaning and mechanical properties ({% cite 'Hedley and Odlyha 1989' %}; {% cite 'Michalski 1991' %}; {% cite 'Hagen et al. 2007' %}; {% cite 'Hagen 2017' %}; {% cite 'Phenix 2011' %}), and the effects of temperature and humidity have been investigated in the contexts of art transportation and preventive conservation. However, the effects of temperature and viscoelastic behavior have been investigated less in the context of structural treatments of paintings on canvas. These aspects were addressed by Berger and others ({% cite 'Russell and Berger 1982' %}; {% cite 'Berger and Russell 1984' %}, {% cite 'Berger and Russell 1986' %}; {% cite 'Berger and Russell 1988' %}; ({% cite 'Goddard 1989' %}); {% cite 'Olsson and Markevičius 2010' %}; {% cite 'Markevičius et al. 2013' %}; {% cite 'Olsson and Markevičius 2017' %}; {% cite 'Markevičius et al. 2017' %}).
 
-Once fully dry, paint films behave as elastic, viscoelastic, or viscoplastic materials, depending on the chemical nature of their components. With aging variations in the pigments used, oil films acquire a greater degree of cross-linking and stiffness, with a corresponding rise in glass transition temperature (Tg) from ambient temperature (0ºC–50ºC) to as high as 75ºC–100ºC for paints containing lead white ([[Phenix 2011]]). Glass transition temperatures of acrylic, alkyd, and oil primers were found to be in the range of 21ºC–44ºC ([[Hagan et al. 2007]]).
+Once fully dry, paint films behave as elastic, viscoelastic, or viscoplastic materials, depending on the chemical nature of their components. With aging variations in the pigments used, oil films acquire a greater degree of cross-linking and stiffness, with a corresponding rise in glass transition temperature (Tg) from ambient temperature (0ºC–50ºC) to as high as 75ºC–100ºC for paints containing lead white ({% cite 'Phenix 2011' %}). Glass transition temperatures of acrylic, alkyd, and oil primers were found to be in the range of 21ºC–44ºC ({% cite 'Hagan et al. 2007' %}).
 
 In structural conservation treatments of paintings on canvas, the constituent viscoelastic materials, such as paint films, may suffer structural failure caused by the rapid application of force while in the stiff, glassy state. However, it is possible to shift from a strain causing failure to one avoiding failure by temporarily rendering the viscoelastic material more plastic (enabling it to adapt to the required rate of deformation) in various ways: by adding moisture or other agent that acts as a plasticizer or increasing the amount of energy in the system, that is, raising the temperature. The relationship of stress and strain (Young’s modulus) is influenced by plasticizers, such as water (humidity treatments) and thermal energy (expressed in temperature). By tailoring the introduction of thermal energy to the required rate of deformation of the material during treatment, the stiffness of the system may be temporarily reduced, allowing planar distortions to be manipulated in the more malleable state. Optimal control of heat energy transfer is therefore paramount, as beneficial heat effects cannot be safely exploited without the precision instrumentation. 
 
@@ -64,7 +64,7 @@ As previously discussed, the heat transfer instrumentation used historically and
 
 In response to the omissions and gaps in currently available instrumentation, a precision heat-transfer technology in the form of flexible silicone-clad heating mats and associated temperature control consoles was developed specifically for art conservation applications. The mats provide the conservator with novel control in the low-energy range (ambient to 40ºC) making prolonged heat transfer possible and allowing implementation of a low-and-slow approach that permits conservators to gain control over the heat transfer and innovate safe, nuanced treatments of both lined and unlined paintings. The mats are designed to deliver heat at the temperatures slightly above those customarily used to activate thermoplastic adhesives (to 70ºC) and they provide access the low-energy range below 40ºC, which was previously inaccessible.
 
-For the novel treatment methodology, heating mat systems were designed to provide an accurate, versatile, mobile low-energy heat transfer technology. All are based on three key components: the heating mat, the thermocouple (TC), and the temperature control console ([fig. 37.2](#fig-37-2)). The heating mat is the thermal output surface. The mats are laminates composed of resistive elements embedded within an exterior cladding of vulcanized silicone. In 2010, the authors first proposed using carbon nanotubes (CNT) for precision low-energy heat transfer ([[Markevičius et al. 2011]]). The resulting heating mats are very flexible, with a nontack surface and thin profile that can be inserted between the wood strainer and canvas verso for treatment of a painting in situ on the stretcher.
+For the novel treatment methodology, heating mat systems were designed to provide an accurate, versatile, mobile low-energy heat transfer technology. All are based on three key components: the heating mat, the thermocouple (TC), and the temperature control console ([fig. 37.2](#fig-37-2)). The heating mat is the thermal output surface. The mats are laminates composed of resistive elements embedded within an exterior cladding of vulcanized silicone. In 2010, the authors first proposed using carbon nanotubes (CNT) for precision low-energy heat transfer ({% cite 'Markevičius et al. 2011' %}). The resulting heating mats are very flexible, with a nontack surface and thin profile that can be inserted between the wood strainer and canvas verso for treatment of a painting in situ on the stretcher.
 
 {% figure 'fig-37-2' %}
 
@@ -76,11 +76,11 @@ The control console is a unit composed of a PID (proportional-integral-derivativ
 
 ### First Practical Applications
 
- The first prototype heater was adopted from existing industrial technology in 2003 and manufactured for use in the lining treatment of two large-format New Deal murals by Howard S. Sewell in Oregon City, Oregon. The silicone heating mat was made with wound copper and fiberglass resistance wire elements plotted in a dense linear pattern at 1/4 inch intervals. It was custom made to accommodate the height of the murals. The relining process also employed a Dartek vacuum envelope with two outflowing points connected to a Gast vacuum pump. The mural sections were bonded with a Beva interleaf to the backing by heating them in sections, positioning the thermocouple between the heating mat and the backing surface. The portability of the mat allowed all of the work to be conducted on site ([[Olsson and Markevicius 2010]]).
+ The first prototype heater was adopted from existing industrial technology in 2003 and manufactured for use in the lining treatment of two large-format New Deal murals by Howard S. Sewell in Oregon City, Oregon. The silicone heating mat was made with wound copper and fiberglass resistance wire elements plotted in a dense linear pattern at 1/4 inch intervals. It was custom made to accommodate the height of the murals. The relining process also employed a Dartek vacuum envelope with two outflowing points connected to a Gast vacuum pump. The mural sections were bonded with a Beva interleaf to the backing by heating them in sections, positioning the thermocouple between the heating mat and the backing surface. The portability of the mat allowed all of the work to be conducted on site ({% cite 'Olsson and Markevicius 2010' %}).
 
 ### IMAT: Innovation using Carbon Nanotubes
 
-In 2010, the authors first proposed using carbon nanotubes for precision heat transfer in art conservation ([[Markevicius et al. 2011]]). From 2011 to 2014, the European Commission’s IMAT Project (Intelligent Mobile Multipurpose Accurate Thermo-Electrical Device[^1]), coordinated by the University of Florence, considerably refined the design of flexible heating laminates for art conservation. The IMAT mats were created with innovative e-textiles woven with integrated yarns coated with carbon nanotubes (CNT), as heating elements. Various prototypes were developed, including a transparent mat and a breathable version that allowed for permeability when humidity was used during treatment. The significant advantages of using CNTs lie in their ultra-low mass and extremely high electrical and thermal conductivity, which allows rapid thermal response (essential for accuracy) and safe, ultra-low voltage (36V), The project final deliverable was proof-of-concept IMAT prototypes, which continue to be used for diverse conservation and research projects. As of this writing, it is awaiting further investment for upscaling and production for the use in bench practice (see [fig. 37.2](#fig-37-2)). 
+In 2010, the authors first proposed using carbon nanotubes for precision heat transfer in art conservation ({% cite 'Markevicius et al. 2011' %}). From 2011 to 2014, the European Commission’s IMAT Project (Intelligent Mobile Multipurpose Accurate Thermo-Electrical Device[^1]), coordinated by the University of Florence, considerably refined the design of flexible heating laminates for art conservation. The IMAT mats were created with innovative e-textiles woven with integrated yarns coated with carbon nanotubes (CNT), as heating elements. Various prototypes were developed, including a transparent mat and a breathable version that allowed for permeability when humidity was used during treatment. The significant advantages of using CNTs lie in their ultra-low mass and extremely high electrical and thermal conductivity, which allows rapid thermal response (essential for accuracy) and safe, ultra-low voltage (36V), The project final deliverable was proof-of-concept IMAT prototypes, which continue to be used for diverse conservation and research projects. As of this writing, it is awaiting further investment for upscaling and production for the use in bench practice (see [fig. 37.2](#fig-37-2)). 
 
 ## Interim MAT System: Mobile Accurate Temperature Management
 
@@ -90,7 +90,7 @@ In order to advance research and treatment methodologies of precision heat trans
 
 ### Overview: The Use of Time, Temperature, and Moisture to Manipulate Failure Criteria and Remain Within the “Safe Zone”
 
-In practice, remedial treatment to reduce planar distortions, such as cupped paint and surface deformations of the paint, ground, and canvas layers, may be conducted by exploiting their viscoelastic properties with controlled increase in temperature to cause the paint film to transition from a glassy state to a pliable state, when pressure may be applied safely and effectively. The transition temperature may be reduced by introduction of a temporary plasticizer, such as humidity or heat energy. Accuracy is critical for safe and effective heat treatment, in order to maintain a steady set temperature for the duration of treatment within the Tg range and achieve the transition to a compliant state while avoiding undesirable overheating of the paint surface. Thick or aged films may require a longer period of heat transfer to achieve the even warming throughout the entire painting stratigraphy. With aging and given variations from the effects of pigments, oil films acquire a higher degree of cross-linking and stiffness with a corresponding rise in Tg from ambient temperature (0ºC–50ºC) to as high as 75ºC–100ºC for paints containing lead white ([[Phenix 2011]]). Therefore, in many instances the ideal operational temperature will be in the low or ambient temperature range, and in some cases even a small viscoelastic response can be significant. 
+In practice, remedial treatment to reduce planar distortions, such as cupped paint and surface deformations of the paint, ground, and canvas layers, may be conducted by exploiting their viscoelastic properties with controlled increase in temperature to cause the paint film to transition from a glassy state to a pliable state, when pressure may be applied safely and effectively. The transition temperature may be reduced by introduction of a temporary plasticizer, such as humidity or heat energy. Accuracy is critical for safe and effective heat treatment, in order to maintain a steady set temperature for the duration of treatment within the Tg range and achieve the transition to a compliant state while avoiding undesirable overheating of the paint surface. Thick or aged films may require a longer period of heat transfer to achieve the even warming throughout the entire painting stratigraphy. With aging and given variations from the effects of pigments, oil films acquire a higher degree of cross-linking and stiffness with a corresponding rise in Tg from ambient temperature (0ºC–50ºC) to as high as 75ºC–100ºC for paints containing lead white ({% cite 'Phenix 2011' %}). Therefore, in many instances the ideal operational temperature will be in the low or ambient temperature range, and in some cases even a small viscoelastic response can be significant. 
 
 ### Integration into Existing Treatment Methods and Development of New Treatments: Case Studies
 
@@ -122,19 +122,19 @@ Clifford Gleason’s *Still Life in Whites* (1939)[^5] had several indentations 
 
 Wax-resin adhesive was widely used for structural treatments until the 1974 Greenwich conference and continued after. When paintings with this treatment history require consolidation or treatment of planar deformations treatment, intervention is problematic without an accurate mild heat source, due to the thermal sensitivity and melting behavior of crystalline waxes, where the safe treatment temperature range is just above room temperature (\~20°C) and the critical upper limit is 40ºC or less. The lack of adequate low-temperature devices has led to invasive treatments to reverse the wax-resin linings.
 
-Testing of mild heat transfer on wax-treated paintings is nascent and has been limited to simulated treatments ([[Markevičius et al. 2017]]). The preliminary results indicate that gradual mild heat transfer over an extended period of time allows safe and efficient treatment of deformations and dents and reactivation of wax-based adhesives.
+Testing of mild heat transfer on wax-treated paintings is nascent and has been limited to simulated treatments ({% cite 'Markevičius et al. 2017' %}). The preliminary results indicate that gradual mild heat transfer over an extended period of time allows safe and efficient treatment of deformations and dents and reactivation of wax-based adhesives.
 
 #### *Case study 5: Targeted remedial treatment of Beva-lined paintings*
 
 Robert Motherwell’s *Open No.16 in Ultramarine with Charcoal Line* (1968)[^6] was damaged during transport, leaving a 13-centimeter concave dent in the center of the composition, and two areas of surface distortions in the lower corners. The work had been previously cold-lined with Beva Gel onto cotton canvas.
 
-A thin profile mat was introduced between the wood stretcher and the canvas verso and heated to 40˚C for ten minutes to soften the lining adhesive and relax the canvas and paint layers in a safe range for acrylic paint, in this specific case. Based on practical experience, temperatures below 40˚C appear to be relatively safe, but this is not always the case. The range is specific to both the material and treatment, and it needs to be to assessed together with other factors, such as applied pressure, physicochemical characteristics of specific paint, and the amount of moisture used, which is acting as a temporary plasticizer in a complex viscoelastic system ([[Hagan et al. 2015]]).
+A thin profile mat was introduced between the wood stretcher and the canvas verso and heated to 40˚C for ten minutes to soften the lining adhesive and relax the canvas and paint layers in a safe range for acrylic paint, in this specific case. Based on practical experience, temperatures below 40˚C appear to be relatively safe, but this is not always the case. The range is specific to both the material and treatment, and it needs to be to assessed together with other factors, such as applied pressure, physicochemical characteristics of specific paint, and the amount of moisture used, which is acting as a temporary plasticizer in a complex viscoelastic system ({% cite 'Hagan et al. 2015' %}).
 
-Once softened and smoothed, the deformation sites were cooled between two heat sink plates held in place for thirty seconds from either side. The same procedure was used to smooth the large concave dent in the center ([[Markevicius et al. 2017]]). 
+Once softened and smoothed, the deformation sites were cooled between two heat sink plates held in place for thirty seconds from either side. The same procedure was used to smooth the large concave dent in the center ({% cite 'Markevicius et al. 2017' %}). 
 
 #### *Case study 6: Sustainable lining, using diverse adaptive lining systems*
 
-Since 2003, flexible mats have been used in numerous lining treatments: in combination with low-pressure vacuum envelopes for the lining of a seventeenth-century painting by Orazio Gentileschi ([[Olsson and Markevičius 2017]]) ([fig. 37.7](#fig-37-7)), a series of six paintings by Kenneth Hudson ([[Markevičius et al. 2017}{), and in the 2010 loomed treatment of Veronese’s Petrobelli altarpiece at the National Gallery of Canada ([[Olsson and Markevičius 2010]]).
+Since 2003, flexible mats have been used in numerous lining treatments: in combination with low-pressure vacuum envelopes for the lining of a seventeenth-century painting by Orazio Gentileschi ({% cite 'Olsson and Markevičius 2017' %}) ([fig. 37.7](#fig-37-7)), a series of six paintings by Kenneth Hudson ({% cite 'Markevičius et al. 2017' %}), and in the 2010 loomed treatment of Veronese’s Petrobelli altarpiece at the National Gallery of Canada ({% cite 'Olsson and Markevičius 2010' %}).
 
 {% figure 'fig-37-7' %}
 
