--- a/content/7-modern-contemporary/38.md
+++ b/content/7-modern-contemporary/38.md
@@ -43,11 +43,11 @@ Naturally enough, those conservators used the tried-and-true structural repair t
 
 More often, it is the verso that is the problem. Paintings lined using heavy Mylar are a case in point. Even if the lining has successfully brought the cracks or tears into plane, the very shiny plastic appearance of the Mylar on the verso is an inescapable reminder that a painting has had fairly extensive conservation treatment. Localized repair of structural damage, while often much more labor intensive, and therefore expensive, than a global treatment like lining, satisfies two criteria I think are important: retreatability and a light touch, both of which leave the door open to better future solutions for these young paintings.
 
-The search for better methods and materials for structural treatments in the years leading up to Greenwich was an acknowledgment that lining treatments corrected some types of damage but could also create new ones. After Greenwich, this realization slowly manifested as an ethical dilemma: was lining too aggressive? *Should* the many individual issues a lining could resolve—flaking, distortions, cupping, tears, weakening fabric—be dealt with all at once? Or would it be better to deal with them separately, and perhaps delay a lining treatment? What began in Greenwich as an exciting, hopeful exchange of new research and techniques on improvements in the structural treatment of canvas paintings was flipped on its head by the realization that perhaps it was not the *method* of lining, but the *act* of lining that needed to be reevaluated ([[Percival-Prescott 2003b]]). Subsequently, a period of reflection set in, and many conservators began to pull away from global treatments, opting for more localized, targeted treatments instead.
+The search for better methods and materials for structural treatments in the years leading up to Greenwich was an acknowledgment that lining treatments corrected some types of damage but could also create new ones. After Greenwich, this realization slowly manifested as an ethical dilemma: was lining too aggressive? *Should* the many individual issues a lining could resolve—flaking, distortions, cupping, tears, weakening fabric—be dealt with all at once? Or would it be better to deal with them separately, and perhaps delay a lining treatment? What began in Greenwich as an exciting, hopeful exchange of new research and techniques on improvements in the structural treatment of canvas paintings was flipped on its head by the realization that perhaps it was not the *method* of lining, but the *act* of lining that needed to be reevaluated ({% cite 'Percival-Prescott 2003b' %}). Subsequently, a period of reflection set in, and many conservators began to pull away from global treatments, opting for more localized, targeted treatments instead.
 
-The ascendency of “minimal intervention,” as this approach came to be called, had a substantial effect on the continued prevalence of lining. When I was a graduate student at the Courtauld between 1988 and 1991, structural conservation of canvas paintings in London (and perhaps elsewhere) was at a crossroads. Although students were instructed in both structural and cosmetic treatments, there was a separation between the two in the real world at the time—an acknowledgment that only specialized knowledge and experience could confer mastery in one or the other. There were still private studios in London where pictures were sent to be lined, and the National Gallery of London maintained a separate studio and conservation staff that dealt only with structural work. The ample research into better methods, materials, and equipment in the 1970s and ’80s spurred many conservation studios to procure the new equipment needed to offer lining treatments to their clientele. But the equal and opposite move away from global interventions meant these tables were used less and less, until in many studios they became simply flat surfaces on which to do other kinds of work ([[Hedley and Villers 1993]]; [[Stoner 1994]]). In the first studio where I worked when I returned to New York in 1994, the lining table was used only for moisture and flattening treatments. I have not worked with a lining table since, using instead a portable suction platen or steel weights when flattening was necessary.
+The ascendency of “minimal intervention,” as this approach came to be called, had a substantial effect on the continued prevalence of lining. When I was a graduate student at the Courtauld between 1988 and 1991, structural conservation of canvas paintings in London (and perhaps elsewhere) was at a crossroads. Although students were instructed in both structural and cosmetic treatments, there was a separation between the two in the real world at the time—an acknowledgment that only specialized knowledge and experience could confer mastery in one or the other. There were still private studios in London where pictures were sent to be lined, and the National Gallery of London maintained a separate studio and conservation staff that dealt only with structural work. The ample research into better methods, materials, and equipment in the 1970s and ’80s spurred many conservation studios to procure the new equipment needed to offer lining treatments to their clientele. But the equal and opposite move away from global interventions meant these tables were used less and less, until in many studios they became simply flat surfaces on which to do other kinds of work ({% cite 'Hedley and Villers 1993' %}; {% cite 'Stoner 1994' %}). In the first studio where I worked when I returned to New York in 1994, the lining table was used only for moisture and flattening treatments. I have not worked with a lining table since, using instead a portable suction platen or steel weights when flattening was necessary.
 
-This shift toward separate and/or staggered treatments has become deeply embedded in the current conservation culture, and we have passed that philosophy on to a wider public. Conservation as a whole has a much higher profile today thanks to targeted exhibitions, public-facing conservation labs in museums, and treatments carried out in public galleries. One change I have observed over the last few decades is that our more sophisticated clients actually notice past structural treatments and have opinions about them, which is a testament to how much more mainstream conservation and discussion of condition has become. This is in stark contrast to what George Stout, one of the founders of science- and museum-based conservation in America, described as the “contempt for concern about condition” prevalent in his early years in the field ([[Stoner 2005]]). Historically, the importance of an artwork was confined to its surface imagery and art historical importance; whether the painting had had conservation treatment—even treatment that radically altered the surface—was not considered relevant.
+This shift toward separate and/or staggered treatments has become deeply embedded in the current conservation culture, and we have passed that philosophy on to a wider public. Conservation as a whole has a much higher profile today thanks to targeted exhibitions, public-facing conservation labs in museums, and treatments carried out in public galleries. One change I have observed over the last few decades is that our more sophisticated clients actually notice past structural treatments and have opinions about them, which is a testament to how much more mainstream conservation and discussion of condition has become. This is in stark contrast to what George Stout, one of the founders of science- and museum-based conservation in America, described as the “contempt for concern about condition” prevalent in his early years in the field ({% cite 'Stoner 2005' %}). Historically, the importance of an artwork was confined to its surface imagery and art historical importance; whether the painting had had conservation treatment—even treatment that radically altered the surface—was not considered relevant.
 
 ## Treatments on Modern and Contemporary Paintings
 
@@ -63,7 +63,7 @@ Wax-resin and Beva linings are less stiff and unyielding, but that can create pr
 
 {% figure 'fig-38-2' %}
 
-The use of a very stiff lining material or interlayer, such as heavy Mylar, has proved successful in some cases, but in others, such interventions only locked the partially flattened cracks in place. The same can be said for thickly flocked PVA adhesives, as noted above. Their stiffness overwhelmed the lining fabrics, and they cannot be reversed without a great deal of mechanical force or solvent ([[Rabin 1976]]). Local treatments with patches have resulted in unsightly bulges over time, caused by the shrinking of adhesives combined with realignment of forces between those canvas fibers that are held in place by adhesives and those that are not ([fig. 38.3](#fig-38-3)).
+The use of a very stiff lining material or interlayer, such as heavy Mylar, has proved successful in some cases, but in others, such interventions only locked the partially flattened cracks in place. The same can be said for thickly flocked PVA adhesives, as noted above. Their stiffness overwhelmed the lining fabrics, and they cannot be reversed without a great deal of mechanical force or solvent ({% cite 'Rabin 1976' %}). Local treatments with patches have resulted in unsightly bulges over time, caused by the shrinking of adhesives combined with realignment of forces between those canvas fibers that are held in place by adhesives and those that are not ([fig. 38.3](#fig-38-3)).
 
 {% figure 'fig-38-3' %}
 
@@ -73,7 +73,7 @@ For paintings meant to be displayed without frames or with only modest strip fra
 
 The most common structural damage we see in our studio is impact-related cracking of the paint film. This type of cracking often takes the form of concentric circles or feather-like shapes, resulting from accidental knocks to the face or the reverse. They also appear as straight lines directly on top of the edges of stretcher lips, rails, and crossbars, caused by repeated contact with the sub-support, or as smaller systems along the crossbars where people have distended the back of the canvas while grabbing the bars in transit.
 
-While aesthetically disturbing, these impact damages do not always pose an actual threat to the overall stability of the painting. Successful flattening of such damage has always depended on softening or reforming both the paint and ground layers while simultaneously stiffening the canvas layer. Doing this successfully through localized treatment is possible, but the history and literature on treating cracks without resorting to lining is scant and the conclusions often discouraging. Moisture, solvent, heat, and pressure have been explored in various combinations ([[Gridley 2017]]). Experiments have been carried out in which the reverse of the canvas is treated in various ways to equilibrate the distortion caused on the face by local breaks in tension ([[Hough and Michalski 1999]]; [[Dimond and Young 2003]]; and [Hough and Michalski](/7-modern-contemporary/40/) in this volume), but there are practical challenges, and local treatments are not always less time consuming than global interventions.
+While aesthetically disturbing, these impact damages do not always pose an actual threat to the overall stability of the painting. Successful flattening of such damage has always depended on softening or reforming both the paint and ground layers while simultaneously stiffening the canvas layer. Doing this successfully through localized treatment is possible, but the history and literature on treating cracks without resorting to lining is scant and the conclusions often discouraging. Moisture, solvent, heat, and pressure have been explored in various combinations ({% cite 'Gridley 2017' %}). Experiments have been carried out in which the reverse of the canvas is treated in various ways to equilibrate the distortion caused on the face by local breaks in tension ({% cite 'Hough and Michalski 1999' %}; {% cite 'Dimond and Young 2003' %}; and [Hough and Michalski](/7-modern-contemporary/40/) in this volume), but there are practical challenges, and local treatments are not always less time consuming than global interventions.
 
 Treating numerous similar damages one by one can be both labor intensive and expensive. However, there are collectors for whom an “untouched” or minimally treated artwork commands a premium, so there is value in underwriting the cost and time such treatments consume. This attitude has allowed our studio to develop expertise in carrying out such treatments. Treatment of impact cracks is often the first structural intervention in a modern or contemporary painting’s life, and it is very important to acknowledge that future, better treatments may be possible only if we tread lightly now.
 
@@ -89,9 +89,9 @@ An important strategy for mitigating against the return of old cracks or the cre
 
 Successful local treatment relies to some extent on the material integrity of the painting itself. If the canvas still has adequate strength and the paint films remain relatively coherent and well adhered to the support, minimal intervention can both solve the current problem and leave the door open to future treatments. While some artists have incorporated unpredictable and problematic non-art materials into their works, generally, the increased use of synthetic polymer-based materials and cotton supports in modern and contemporary paintings has advantages in problem-solving localized treatments.
 
-Perhaps the most significant material difference between older and newer paintings is the widespread use of acrylic grounds and synthetic sizing. I would estimate that 90% or more of the post-1965 paintings I have examined, regardless of the type of support fabric or paint medium, are painted on acrylic grounds. The fast-drying, nontoxic qualities of acrylic grounds and sizing are very appealing to painters. In a nod to both this and to conservation research, one American manufacturer, Gamblin Colors, has even discontinued sales of rabbit-skin glue sizing and its proprietary traditional gesso (which also contained rabbit-skin glue). In so doing, Gamblin cited scientific research by the Smithsonian Conservation Lab that deemed these materials to perform poorly on canvas paintings over the long term due to the glue and fabric’s high reactivity to changes in relative humidity. The more brittle paint layer(s) do not swell and contract as easily, and this incompatible elasticity can result in cracking or delamination of the paint ([[Gamblin n.d.]]).
+Perhaps the most significant material difference between older and newer paintings is the widespread use of acrylic grounds and synthetic sizing. I would estimate that 90% or more of the post-1965 paintings I have examined, regardless of the type of support fabric or paint medium, are painted on acrylic grounds. The fast-drying, nontoxic qualities of acrylic grounds and sizing are very appealing to painters. In a nod to both this and to conservation research, one American manufacturer, Gamblin Colors, has even discontinued sales of rabbit-skin glue sizing and its proprietary traditional gesso (which also contained rabbit-skin glue). In so doing, Gamblin cited scientific research by the Smithsonian Conservation Lab that deemed these materials to perform poorly on canvas paintings over the long term due to the glue and fabric’s high reactivity to changes in relative humidity. The more brittle paint layer(s) do not swell and contract as easily, and this incompatible elasticity can result in cracking or delamination of the paint ({% cite 'Gamblin n.d.' %}).
 
-In the past two decades, significant analysis and research has been done on acrylics. Much of it has centered on the various paint components and additives, as well as their aging properties, and what that means for cleaning,[^2] but from a structural repair perspective, acrylic has some unique features. Its continued sensitivity to moisture, heat, and commonly used solvents such as alcohols and ketones makes it an ideal candidate for reforming ([[Zumbühl et al. 2007]]). When the acrylic is confined to the ground and size layer, with other media in the image layers, there are additional opportunities to manipulate its properties, allowing less interference with the paint and canvas layers.
+In the past two decades, significant analysis and research has been done on acrylics. Much of it has centered on the various paint components and additives, as well as their aging properties, and what that means for cleaning,[^2] but from a structural repair perspective, acrylic has some unique features. Its continued sensitivity to moisture, heat, and commonly used solvents such as alcohols and ketones makes it an ideal candidate for reforming ({% cite 'Zumbühl et al. 2007' %}). When the acrylic is confined to the ground and size layer, with other media in the image layers, there are additional opportunities to manipulate its properties, allowing less interference with the paint and canvas layers.
 
 Since World War II, when imported linen was hard to come by, cotton duck has been widely used in America, and to a lesser degree elsewhere. It became popular due to availability of large bolt sizes and comparatively low cost. It is unclear what the widespread use of cotton supports will bring us in terms of future structural problems, but in my experience they seem to suffer less embrittlement than linen during aging, even though the shorter and fluffier fibers are harder to work with individually, as required in a thread-by-thread tear mending. Linen, still widely used globally, retains its strength and resiliency for decades, allowing conservators to delay lining or other major structural interventions. Ongoing research into the materials and structure of aging contemporary primed canvases remains necessary to guide us in the future (see [Carter et al.](/8-posters/62/) in this volume).
 
@@ -107,4 +107,4 @@ Structural treatment of modern and contemporary canvas paintings presents both t
 
 [^1]: Daniel Goldreyer was in private practice, active from approximately 1950 to 1995. Orrin Riley was at the Guggenheim Museum and in private practice from about 1960 to 1986. Jean Volkmer was at the Museum of Modern Art, circa 1958 to 1983. Margaret Watherston was at the Whitney Museum of American Art and in private practice, from around 1965 to 2005.
 
-[^2]: For a foundational overview of modern paints, see {Learner 2004}. For a brief summary of cleaning research, see [[Ormsby and Learner 2016]].
+[^2]: For a foundational overview of modern paints, see {Learner 2004}. For a brief summary of cleaning research, see {% cite 'Ormsby and Learner 2016' %}.
