--- a/content/8-posters/43.md
+++ b/content/8-posters/43.md
@@ -21,15 +21,15 @@ In the fall of 2018, the Arkansas Arts Center’s *Adoration of the Shepherds,* 
 
 {% figure 'fig-43-2' %}
 
-The lining has several characteristics that point to an Italian method of canvas lining. Although the original canvas has a fine weave, approximately 30 x 30 threads per inch, the lining has a very open, plain weave with approximately 16 x 16 threads per inch. The canvas is composed of threads with irregular widths, and the lining overall was adhered with a thin layer of glue-paste adhesive ([fig. 43.3](#fig-43-3)). Clues from the painting’s provenance were quite limited, leading back only to the dealer who sold it to the Kress Foundation in 1930; this was Florentine dealer Count Alessandro Contini-Bonacossi, who supplied many paintings to Samuel H. Kress ([[Shapley 1973]]). It is therefore likely the lining was applied in Italy before the painting was sold, though it is unknown where it might have been done, or by whom.
+The lining has several characteristics that point to an Italian method of canvas lining. Although the original canvas has a fine weave, approximately 30 x 30 threads per inch, the lining has a very open, plain weave with approximately 16 x 16 threads per inch. The canvas is composed of threads with irregular widths, and the lining overall was adhered with a thin layer of glue-paste adhesive ([fig. 43.3](#fig-43-3)). Clues from the painting’s provenance were quite limited, leading back only to the dealer who sold it to the Kress Foundation in 1930; this was Florentine dealer Count Alessandro Contini-Bonacossi, who supplied many paintings to Samuel H. Kress ({% cite 'Shapley 1973' %}). It is therefore likely the lining was applied in Italy before the painting was sold, though it is unknown where it might have been done, or by whom.
 
 {% figure 'fig-43-3' %}
 
 ## Roman versus Florentine Lining Canvases
 
-In Italy, there are two traditional glue-paste lining methods: Florentine and Roman. This distinction originates from the work of two nineteenth-century Italian restorers: Count Giovanni Secco-Suardo and Ulisse Forni. The glue-paste recipe and lining techniques advocated by Secco-Suardo informed the Florentine technique, whereas Forni’s became the basis for the Roman technique ([[Forni 1866]]; {% cite 'Reifsnyder 1995' '77–78' %}).[^3] A characteristic difference often cited between these approaches is the glue-paste recipes;[^4] however, there is also a large variation in the types of lining canvas chosen. While both methods generally employ plain weave hemp and/or flax-based canvases, their weave densities differ greatly.
+In Italy, there are two traditional glue-paste lining methods: Florentine and Roman. This distinction originates from the work of two nineteenth-century Italian restorers: Count Giovanni Secco-Suardo and Ulisse Forni. The glue-paste recipe and lining techniques advocated by Secco-Suardo informed the Florentine technique, whereas Forni’s became the basis for the Roman technique ({% cite 'Forni 1866' %}; {% cite 'Reifsnyder 1995' '77–78' %}).[^3] A characteristic difference often cited between these approaches is the glue-paste recipes;[^4] however, there is also a large variation in the types of lining canvas chosen. While both methods generally employ plain weave hemp and/or flax-based canvases, their weave densities differ greatly.
 
-Typically, the Florentine method uses a tighter weave, similar to the original canvas, though slightly more robust, to support the painting ([[Reifsnyder 1995\|, 79})}.[^5] This type of canvas is chosen to provide a more rigid support and minimize weave interference ({% cite 'Baldini and Taiti 2003' '116' %}). The Roman technique, in contrast, uses an open weave. There are two main types of this open-weave canvas: the more open *tela patta,* at 10–15 threads per inch, and the slightly more dense *tela pattina,* at 20–25 threads per inch. Selection of either the *tela patta* or *tela pattina* largely depends on the size of the painting, the structure of the original canvas, and the painting’s condition ({% cite 'Laroche and Saccarello 1996' '13' %}). Generally, this type of canvas allows for a lighter, more flexible support after lining; however, the overall flexibility is also highly dependent on the glue-paste recipe ([[Lavorini 2007]]).[^6]
+Typically, the Florentine method uses a tighter weave, similar to the original canvas, though slightly more robust, to support the painting ([[Reifsnyder 1995\|, 79})}.[^5] This type of canvas is chosen to provide a more rigid support and minimize weave interference ({% cite 'Baldini and Taiti 2003' '116' %}). The Roman technique, in contrast, uses an open weave. There are two main types of this open-weave canvas: the more open *tela patta,* at 10–15 threads per inch, and the slightly more dense *tela pattina,* at 20–25 threads per inch. Selection of either the *tela patta* or *tela pattina* largely depends on the size of the painting, the structure of the original canvas, and the painting’s condition ({% cite 'Laroche and Saccarello 1996' '13' %}). Generally, this type of canvas allows for a lighter, more flexible support after lining; however, the overall flexibility is also highly dependent on the glue-paste recipe ({% cite 'Lavorini 2007' %}).[^6]
 
 ## Brief Overview of the Traditional Roman Lining Process
 
@@ -75,9 +75,9 @@ The author would like to thank the following for their guidance and expertise: D
 
 [^2]: Dianne Dwyer Modestini, in discussion with the author, fall 2018.
 
-[^3]: See also {% cite 'Laroche and Saccarello' '11–12' %}. The Florentine technique has been used and taught by Opificio delle Pietre Dure, in Florence; the Roman technique, at the Instituto Centrale di Restauro, in Rome.
+[^3]: See also {% cite 'Laroche and Saccarello 1996' '11–12' %}. The Florentine technique has been used and taught by Opificio delle Pietre Dure, in Florence; the Roman technique, at the Instituto Centrale di Restauro, in Rome.
 
-[^4]: See [[Laroche and Saccarello 1996]], [[Lavorini 2007]], and [[Reifsnyder 1995]] for detailed descriptions of various glue-paste recipes.
+[^4]: See {% cite 'Laroche and Saccarello 1996' %}, {% cite 'Lavorini 2007' %}, and {% cite 'Reifsnyder 1995' %} for detailed descriptions of various glue-paste recipes.
 
 [^5]: This type of canvas can be called *olona* and is typically closer to 30 threads per inch; see {% cite 'Laroche and Saccarello, 1996' '17' %}.
 
