--- a/content/8-posters/51.md
+++ b/content/8-posters/51.md
@@ -61,23 +61,23 @@ abstract: "Glue-paste has been the most widely used lining adhesive in the South
 
 ## Introduction
 
-A variety of materials has been used in glue-paste linings throughout history, and this lining type is found on a significant number of the paintings in collections worldwide. Recipes varied from country to country and epoch to epoch. Cereal flours and animal glues were usually the main ingredients, either because they were readily available or simply owing to tradition. A variety of different additives (molasses, vinegar, Venetian turpentine, garlic, etc.) were commonly included in recipes, aiming to enhance performance or to prevent mold growth ([[Hackney et al. 2012]]; [[Macarrón Miguel, Calvo Manuel, and Gil Macarrón 2016]]).
+A variety of materials has been used in glue-paste linings throughout history, and this lining type is found on a significant number of the paintings in collections worldwide. Recipes varied from country to country and epoch to epoch. Cereal flours and animal glues were usually the main ingredients, either because they were readily available or simply owing to tradition. A variety of different additives (molasses, vinegar, Venetian turpentine, garlic, etc.) were commonly included in recipes, aiming to enhance performance or to prevent mold growth ({% cite 'Hackney et al. 2012' %}; {% cite 'Macarrón Miguel, Calvo Manuel, and Gil Macarrón 2016' %}).
 
-Glue-paste linings can be long lasting, but they can also lead to further degradation. It has remained unclear why some of these linings fail while others remain well preserved. In the last twenty-five years there has been a significant interest in understanding the performance and aging of glue-paste linings. Some studies have analyzed the role of each component and given some insight into the bond performance of the adhesive mixture ([[Ackroyd 1995]]; [[Ackroyd 1996]]; [[Young and Ackroyd 2001]]; [[Young, Hibberd, and Ackroyd 2002]]). The research presented here shows how varying the dominant ingredients of the glue-paste recipe influences the mechanical performance (bond strength, stiffness, etc.) and degradation processes (biodeterioration) of lined canvas paintings. The impact of cyclic relative humidity (RH) on the biological and physical stability of the laminate structure is also reported.
+Glue-paste linings can be long lasting, but they can also lead to further degradation. It has remained unclear why some of these linings fail while others remain well preserved. In the last twenty-five years there has been a significant interest in understanding the performance and aging of glue-paste linings. Some studies have analyzed the role of each component and given some insight into the bond performance of the adhesive mixture ({% cite 'Ackroyd 1995' %}; {% cite 'Ackroyd 1996' %}; {% cite 'Young and Ackroyd 2001' %}; {% cite 'Young, Hibberd, and Ackroyd 2002' %}). The research presented here shows how varying the dominant ingredients of the glue-paste recipe influences the mechanical performance (bond strength, stiffness, etc.) and degradation processes (biodeterioration) of lined canvas paintings. The impact of cyclic relative humidity (RH) on the biological and physical stability of the laminate structure is also reported.
 
 ## The Role of Glue and Flour in the Mechanical Performance of Glue-Paste Linings
 
 Glue and flour are the two main components of glue-paste adhesives. Their complex structure, properties, and stability suggested a need to prioritize the research aimed at understanding their behavior and interaction before considering the role of the different additives cited in treatises and recipe books.
 
-The study of protein glues in the conservation field has attracted some attention in recent years. Obtained from the skin and bones of animals through different preparations and purification treatments, their chemical, physical, and mechanical properties are largely influenced by the chemical structure of the protein and its denaturation process. Protein glues generally have high cohesive strength and stiffness in comparison to synthetic adhesives, as previous research has shown ([[Mecklenburg 1982]]; [[Andersen and Fuster López 2019]]).
+The study of protein glues in the conservation field has attracted some attention in recent years. Obtained from the skin and bones of animals through different preparations and purification treatments, their chemical, physical, and mechanical properties are largely influenced by the chemical structure of the protein and its denaturation process. Protein glues generally have high cohesive strength and stiffness in comparison to synthetic adhesives, as previous research has shown ({% cite 'Mecklenburg 1982' %}; {% cite 'Andersen and Fuster López 2019' %}).
 
-The molecular weight (size and length of the chains of the protein), the content of the helix structures formed during renaturation, and the type of intra- and intermolecular bonds in the protein as a function of the proline and hydroxyproline content determine the cohesive strength and the viscosity of the glue solution ([[Schellmann 2007]]). The stiffness of gelatin leads to the classification into different Bloom grades, which are also an indication of mechanical properties ([[Melià Angulo, Fuster López, and Vicente Escuder 2017]]). Hide glues are also responsive to humidity fluctuations, developing high internal stresses if restrained and subjected to desiccation and losing all strength and undergoing biodeterioration above 70% RH ([[Mecklenburg 1982]]). Together, these characteristics mean that animal glues play a major role in the behavior and long-term performance of glue paste adhesives.
+The molecular weight (size and length of the chains of the protein), the content of the helix structures formed during renaturation, and the type of intra- and intermolecular bonds in the protein as a function of the proline and hydroxyproline content determine the cohesive strength and the viscosity of the glue solution ({% cite 'Schellmann 2007' %}). The stiffness of gelatin leads to the classification into different Bloom grades, which are also an indication of mechanical properties ({% cite 'Melià Angulo, Fuster López, and Vicente Escuder 2017' %}). Hide glues are also responsive to humidity fluctuations, developing high internal stresses if restrained and subjected to desiccation and losing all strength and undergoing biodeterioration above 70% RH ({% cite 'Mecklenburg 1982' %}). Together, these characteristics mean that animal glues play a major role in the behavior and long-term performance of glue paste adhesives.
 
-The second main component in glue pastes are flours, in which starch, proteins, and lipids are the most relevant components. Starch has functional properties such as solubility, water-holding capacity, swelling power, viscosity, and consistency, all of which largely depend on the amylose-amylopectin ratio as well as on the size of their granules as a function of the botanical origin and nature of the starch. The protein content also plays a major physicochemical role in the rheological behavior of the adhesive mixture ([[García Castillo 2016]]).
+The second main component in glue pastes are flours, in which starch, proteins, and lipids are the most relevant components. Starch has functional properties such as solubility, water-holding capacity, swelling power, viscosity, and consistency, all of which largely depend on the amylose-amylopectin ratio as well as on the size of their granules as a function of the botanical origin and nature of the starch. The protein content also plays a major physicochemical role in the rheological behavior of the adhesive mixture ({% cite 'García Castillo 2016' %}).
 
 ## Biological, Chemical and Mechanical Performance of Glue-Paste Linings
 
-After preliminary research dedicated to the study of several protein glues with different Bloom grades and some flours with different protein content, mock-ups with eight different combinations of materials were prepared ([fig. 51.1](#fig-51-1-a)). For this purpose, one cowhide glue, one rye flour, and three wheat flours were selected ([table 51.1](#table-51-1)). Two different fabrics were used as lining support, and a commercial primed linen canvas with a ground layer of titanium white/zinc oxide bound in oil was used to simulate a canvas painting. Glue-paste mixtures were tested according to the ratio shown in [table 51.2](#table-51-2). Peel and tensile tests were run in order to record the adhesion and cohesion forces at different RH conditions for unaged and aged samples. Biodeterioration and insect infestation tests were also carried out ([[Fuster López et al. 2017]]).
+After preliminary research dedicated to the study of several protein glues with different Bloom grades and some flours with different protein content, mock-ups with eight different combinations of materials were prepared ([fig. 51.1](#fig-51-1-a)). For this purpose, one cowhide glue, one rye flour, and three wheat flours were selected ([table 51.1](#table-51-1)). Two different fabrics were used as lining support, and a commercial primed linen canvas with a ground layer of titanium white/zinc oxide bound in oil was used to simulate a canvas painting. Glue-paste mixtures were tested according to the ratio shown in [table 51.2](#table-51-2). Peel and tensile tests were run in order to record the adhesion and cohesion forces at different RH conditions for unaged and aged samples. Biodeterioration and insect infestation tests were also carried out ({% cite 'Fuster López et al. 2017' %}).
 
 {% figuregroup '3' 'fig-51-1-a, fig-51-1-b, fig-51-1-c, fig-51-1-d, fig-51-1-e, fig-51-1-f, fig-51-1-g, fig-51-1-h, fig-51-1-i, fig-51-1-j, fig-51-1-k, fig-51-1-l, fig-51-1-m ' %}
 
@@ -85,7 +85,7 @@ After preliminary research dedicated to the study of several protein glues with 
 
 {% figure 'table-51-2' %}
 
-Results ([table 51.3](#table-51-3)) evidenced the influence of lining materials and adhesive formulations on the mechanical properties and the tendency toward biodeterioration. Peel tests showed an average peel force of 6.52 N/cm in close-weave canvases and 4.98 N/cm in open-weave ones. In general, aging significantly increased (by 10%–27%) the force needed to peel off the close-weave lining fabrics in all cases, except for those where Type 45 wheat flour (WT45) had been used. Conversely, the average peel force decreased (by 32%–39%) in linings made of open-weave canvases except for those where WT45 wheat flour was used. Results also showed that the type of flour and the degree of milling, as well as the density of the lining canvas, strongly influence the mechanical and dimensional stability of glue-paste linings and determine the failure risk of the paint layers. This approach to the possible influence of weave tightness on crack formations has been recently witnessed in a study of four paintings by Pablo Picasso ([[Fuster-López et al. 2020]]).
+Results ([table 51.3](#table-51-3)) evidenced the influence of lining materials and adhesive formulations on the mechanical properties and the tendency toward biodeterioration. Peel tests showed an average peel force of 6.52 N/cm in close-weave canvases and 4.98 N/cm in open-weave ones. In general, aging significantly increased (by 10%–27%) the force needed to peel off the close-weave lining fabrics in all cases, except for those where Type 45 wheat flour (WT45) had been used. Conversely, the average peel force decreased (by 32%–39%) in linings made of open-weave canvases except for those where WT45 wheat flour was used. Results also showed that the type of flour and the degree of milling, as well as the density of the lining canvas, strongly influence the mechanical and dimensional stability of glue-paste linings and determine the failure risk of the paint layers. This approach to the possible influence of weave tightness on crack formations has been recently witnessed in a study of four paintings by Pablo Picasso ({% cite 'Fuster-López et al. 2020' %}).
 
 {% figure 'table-51-3' %}
 
@@ -99,7 +99,7 @@ Results evidenced that biodegradation is governed by the flour milling and flour
 
 {% figure 'fig-51-4' %}
 
-The need to agree on objective parameters that allow the comparison of the different variables considered when studying materials for a given treatment has been suggested elsewhere in this publication by [Cecil Krarup Andersen](/3-open-questions/21/). Such parameters could help conservators make informed decisions based on the mid- to long-term vulnerability of the materials used. [Fig. 51.5](#fig-51-5-a) presents different star diagrams corresponding to the eight glue-paste linings studied. Values of 1 to 5 are given for each risk factor, with 1 being low-risk and 5 high-risk. This means that numeric values measured for each factor ([[Fuster López et al. 2017]]) are normalized to fit this scale.
+The need to agree on objective parameters that allow the comparison of the different variables considered when studying materials for a given treatment has been suggested elsewhere in this publication by [Cecil Krarup Andersen](/3-open-questions/21/). Such parameters could help conservators make informed decisions based on the mid- to long-term vulnerability of the materials used. [Fig. 51.5](#fig-51-5-a) presents different star diagrams corresponding to the eight glue-paste linings studied. Values of 1 to 5 are given for each risk factor, with 1 being low-risk and 5 high-risk. This means that numeric values measured for each factor ({% cite 'Fuster López et al. 2017' %}) are normalized to fit this scale.
 
 {% figuregroup '2' 'fig-51-5-a, fig-51-5-b, fig-51-5-c, fig-51-5-d, fig-51-5-e, fig-51-5-f, fig-51-5-g, fig-51-5-h' %}
 
