--- a/content/8-posters/56.md
+++ b/content/8-posters/56.md
@@ -17,9 +17,9 @@ abstract: "The poster summarizes the morphology and function of two dozen double
 
 The paper describes a theoretical and practical approach to the remedial conservation of double-sided canvas paintings, cultic flags, and epitaphs on fabric with ritual functions, dating from the eighteenth and nineteenth centuries in Romania. Double-sided painted flags and banners call back to an ancient archetype, the Constantinian *labarum,* a semantic reconversion of the Roman *vexillum—*the flag of the Roman cavalry—to a symbol of Christianity. Painted cloth artifacts are known from Egyptian antiquity through the medieval period in Europe,[^1] with the *gonfalone,* the heraldic flags of the Renaissance and beyond to banners of ‘professional guilds in Europe. Asian *thangka* paintings are another example.
 
-Double-sided painted textiles have been used since ancient times in the Orthodox Church during processions, ecclesiastic feasts, and litanies. The identity of double-sided painted canvases with ritual function marks a particular chapter of challenges for painting conservators, starting from the cultural perspective and extending to the very specific technical aspects that define such complex objects, defined typologically as paintings on canvas or as painted textiles ([[Pollak 2003]]).
+Double-sided painted textiles have been used since ancient times in the Orthodox Church during processions, ecclesiastic feasts, and litanies. The identity of double-sided painted canvases with ritual function marks a particular chapter of challenges for painting conservators, starting from the cultural perspective and extending to the very specific technical aspects that define such complex objects, defined typologically as paintings on canvas or as painted textiles ({% cite 'Pollak 2003' %}).
 
-The conservation of such painted banners has rarely been addressed in the literature yet is a subject of interest to conservators of liturgical objects. The *Bibliography of Romanian Vexilology* ([[Mureșan and L-Șt. Szemkovics 2018]]) mentions sixty-nine titles referring to conservation aspects of flags and banners; however, most of the references address textile artifacts and embroideries, rather than painted banners. The Getty Conservation Institute’s online database AATA Online[^2] reveals ninety-eight results over a broad search on the topic. In this study, the technical examination of twenty-five of these banners is used to inform research into consolidant choices for the treatment of these objects.
+The conservation of such painted banners has rarely been addressed in the literature yet is a subject of interest to conservators of liturgical objects. The *Bibliography of Romanian Vexilology* ({% cite 'Mureșan and L-Șt. Szemkovics 2018' %}) mentions sixty-nine titles referring to conservation aspects of flags and banners; however, most of the references address textile artifacts and embroideries, rather than painted banners. The Getty Conservation Institute’s online database AATA Online[^2] reveals ninety-eight results over a broad search on the topic. In this study, the technical examination of twenty-five of these banners is used to inform research into consolidant choices for the treatment of these objects.
 
 ## Context
 
@@ -65,11 +65,11 @@ In preparation for future interventions in cases where the degraded canvas carri
 
 {% figure 'table-56-3' 'is-table-scale-5' %}
 
-Research on previous consolidation campaigns with similar objects reveal the use of protein glues and carboxymethyl cellulose ({% cite 'Dumitran and Rustoiu 2007' '30' %}). Beva 371b formulations were previously used ([[Petcu 2017]]), but some of the ingredients can raise concerns for conservators. Water-based consolidation systems and adhesives prone to severe shrinkage, as are protein glues, were not considered here, due to the fragility of the untensioned canvas and paint as well as the presence of metal soaps formation.[^9] Potentially cross-linking materials were also excluded from the list.
+Research on previous consolidation campaigns with similar objects reveal the use of protein glues and carboxymethyl cellulose ({% cite 'Dumitran and Rustoiu 2007' '30' %}). Beva 371b formulations were previously used ({% cite 'Petcu 2017' %}), but some of the ingredients can raise concerns for conservators. Water-based consolidation systems and adhesives prone to severe shrinkage, as are protein glues, were not considered here, due to the fragility of the untensioned canvas and paint as well as the presence of metal soaps formation.[^9] Potentially cross-linking materials were also excluded from the list.
 
-The properties of the chosen materials were researched with recommendations from the available literature,[^10] and further mixtures were selected, including particular additives. The 11 formulas chosen included polyethyloxazoline (PEOX) solutions, including Aquazol 200 and 500; polyvinyl alcohol (Mowiol 4-88), acrylic solutions as Degalan P 550 and Paraloid B72, nonionic cellulose ethers, such as MC and MHEC, as well as Celluforce NCC cellullose nanocrystals ([[Bridarolli et al. 2018b]]) (see [table 56.3](#table-56-3)). Aquazol was selected given its versatility, nontoxicity, minimal interaction with the constituent materials of paintings, and good reversibility ([[Bosetti 2012]]). To enhance the diffusion of the consolidant and its efficiency, surface cleaning and prewetting was carried out selectively.
+The properties of the chosen materials were researched with recommendations from the available literature,[^10] and further mixtures were selected, including particular additives. The 11 formulas chosen included polyethyloxazoline (PEOX) solutions, including Aquazol 200 and 500; polyvinyl alcohol (Mowiol 4-88), acrylic solutions as Degalan P 550 and Paraloid B72, nonionic cellulose ethers, such as MC and MHEC, as well as Celluforce NCC cellullose nanocrystals ({% cite 'Bridarolli et al. 2018b' %}) (see [table 56.3](#table-56-3)). Aquazol was selected given its versatility, nontoxicity, minimal interaction with the constituent materials of paintings, and good reversibility ({% cite 'Bosetti 2012' %}). To enhance the diffusion of the consolidant and its efficiency, surface cleaning and prewetting was carried out selectively.
 
-Considering the dry environment of current storage, Aquazol 500—stronger than Aquazol 200 ({% cite 'Mecklenburg, Fuster-López, and Ottoloni 2012' '21' %}) but with lower penetration ([[Arslanoglu and Tallent 2003]])—was used instead of protein glues, assuring optimum penetration, plasticization, and the necessary workability to reattach the flakes. The addition of 1% Celluforce NCC helped improving the interlayer adhesion and grip while simultaneously reinforcing the degraded canvas. Culminal 2000, a methylcellulose derivative, was added to impart gelled consistency to the adhesive, decreasing the RH responsiveness ([[Arslanoglu 2004]]) and better performance in filling gaps between shrunken ground and canvas threads. Repeated applications by brush and syringe and both cold mechanical pressure using a silicon tool and the heated spatula proved useful in achieving satisfactory adhesion and a stabilization of canvas and paint on both sides of the banner ([fig. 56.3](#fig-56-3)).
+Considering the dry environment of current storage, Aquazol 500—stronger than Aquazol 200 ({% cite 'Mecklenburg, Fuster-López, and Ottoloni 2012' '21' %}) but with lower penetration ({% cite 'Arslanoglu and Tallent 2003' %})—was used instead of protein glues, assuring optimum penetration, plasticization, and the necessary workability to reattach the flakes. The addition of 1% Celluforce NCC helped improving the interlayer adhesion and grip while simultaneously reinforcing the degraded canvas. Culminal 2000, a methylcellulose derivative, was added to impart gelled consistency to the adhesive, decreasing the RH responsiveness ({% cite 'Arslanoglu 2004' %}) and better performance in filling gaps between shrunken ground and canvas threads. Repeated applications by brush and syringe and both cold mechanical pressure using a silicon tool and the heated spatula proved useful in achieving satisfactory adhesion and a stabilization of canvas and paint on both sides of the banner ([fig. 56.3](#fig-56-3)).
 
 {% figure 'fig-56-3' %}
 
@@ -89,13 +89,13 @@ This study would not have been possible without the expertise, goodwill, and act
 
 {% endbackmatter %}
 
-[^1]: For *tüchlein* paintings, scenic backcloths, and theatrical cloths, see [[Villers 2000]] and [[Costaras and Young 2000]].
+[^1]: For *tüchlein* paintings, scenic backcloths, and theatrical cloths, see {% cite 'Villers 2000' %} and {% cite 'Costaras and Young 2000' %}.
 
 [^2]: <https://aata.getty.edu/>.
 
 [^3]: As described by Cennino Cennini, *The Book of the Art,* and by Dionysius of Fourna, *Hermeneia.*
 
-[^4]: Sometimes called *streamers* ([[Hourihane 2013, 514]]).
+[^4]: Sometimes called *streamers* ({% cite 'Hourihane 2013' '514' %}).
 
 [^5]: Quanta Feg-250 equipped with an EDAX Apollo silicon drift detector, 15 kV.
 
@@ -105,8 +105,8 @@ This study would not have been possible without the expertise, goodwill, and act
 
 [^8]: Andor Shamrock 500i Detector with iDus 420 CCD spectroscopy camera and a Bruker Vertex 70 FT-IR Spectrometer.
 
-[^9]: The introduction of water can lead to formation of metal soaps inside of paint layers. See [[van Loon, Noble, and Burnstock 2021]].
+[^9]: The introduction of water can lead to formation of metal soaps inside of paint layers. See {% cite 'van Loon, Noble, and Burnstock 2021' %}.
 
 [^10]: Adding 10% Aquazol 200 to Paraloid B72 improves qualities of B72 in acetone ({% cite 'Wolbers 2008' '115' %}).
 
-[^11]: The adhesive and cohesive properties of Beva are assessed in depth, compared to other conservation products ([[Mecklenburg, Fuster-Lopez, and Ottoloni 2012]]).
+[^11]: The adhesive and cohesive properties of Beva are assessed in depth, compared to other conservation products ({% cite 'Mecklenburg, Fuster-Lopez, and Ottoloni 2012' %}).
