--- a/content/8-posters/57.md
+++ b/content/8-posters/57.md
@@ -36,25 +36,25 @@ A shift from nineteenth-century academic painting to the modern approach of the 
 
 ## Strip Lining
 
-The problem of restretching such pictures without giving preference to one “principal” side is a serious challenge. Even if the artist had a certain idea about which side should be presented, nowadays we often selfishly want both sides to be accessible to the public and researchers. Conservators at the State Research Institute for Restoration (GOSNIIR) in Moscow adapted a method of tear mending for the strip-lining process in order to avoid overlaps, especially for pictures that have images of the same size on both sides. A common method of tear mending in Russia developed in 1978 treats tears and cuts of the textile painting supports with a 5% solution of polyvinyl butyral (PVB) in ethanol or isopropanol. Saturated threads are woven together, and after drying are fixed by hot spatula ([[Surovov and Yashkina 1979]]).
+The problem of restretching such pictures without giving preference to one “principal” side is a serious challenge. Even if the artist had a certain idea about which side should be presented, nowadays we often selfishly want both sides to be accessible to the public and researchers. Conservators at the State Research Institute for Restoration (GOSNIIR) in Moscow adapted a method of tear mending for the strip-lining process in order to avoid overlaps, especially for pictures that have images of the same size on both sides. A common method of tear mending in Russia developed in 1978 treats tears and cuts of the textile painting supports with a 5% solution of polyvinyl butyral (PVB) in ethanol or isopropanol. Saturated threads are woven together, and after drying are fixed by hot spatula ({% cite 'Surovov and Yashkina 1979' %}).
 
-PVB has been widely used in conservation practice in Russia since the 1950s ([[Rumyantsev 1953]]), especially for treating murals, ceramics, and fabric painting supports. Its glass transition temperature is approximately 60℃–70℃. “PVB films are resistant to light and heat-sealable at temperatures above 120℃. . . . PVB films are noted for their biostable and abrasion resistance properties as well as for good colourfastness against ultra-violet light, low static generation, and low water absorption” ([[Sannikova 2018, 106]]).
+PVB has been widely used in conservation practice in Russia since the 1950s ({% cite 'Rumyantsev 1953' %}), especially for treating murals, ceramics, and fabric painting supports. Its glass transition temperature is approximately 60℃–70℃. “PVB films are resistant to light and heat-sealable at temperatures above 120℃. . . . PVB films are noted for their biostable and abrasion resistance properties as well as for good colourfastness against ultra-violet light, low static generation, and low water absorption” ({% cite 'Sannikova 2018' '106' %}).
 
-For the issue of two-sided paintings, conservators from GOSNIIR offered this technique to attach new canvas strips thread-by-thread to the original supports of the pictures ([[Yashkina and Churakova 2013]]). Polyvinyl butyral is a polymer with strong, elastic films and stable properties ([[Sannikova 2018]]), and when used for such type of strip-lining it makes it possible to stretch the painting on a special frame by applying gentle pressure. The joint can also be slightly reinforced by applying some linen fibers mixed with the adhesive or by stitching ([fig. 57.1a, b](#fig-57-1)). This method can be especially useful for cases in which the paintings don’t have any original margins.
+For the issue of two-sided paintings, conservators from GOSNIIR offered this technique to attach new canvas strips thread-by-thread to the original supports of the pictures ({% cite 'Yashkina and Churakova 2013' %}). Polyvinyl butyral is a polymer with strong, elastic films and stable properties ({% cite 'Sannikova 2018' %}), and when used for such type of strip-lining it makes it possible to stretch the painting on a special frame by applying gentle pressure. The joint can also be slightly reinforced by applying some linen fibers mixed with the adhesive or by stitching ([fig. 57.1a, b](#fig-57-1)). This method can be especially useful for cases in which the paintings don’t have any original margins.
 
 {% figuregroup '2' 'fig-57-1-a, fig-57-1-b' %}
 
 ## Stretchers
 
-According to modern conservation standards new stretchers must be extensible, and in the case of double-sided pictures, systems with wedges, screws, and springs all may be suitable. But if conservators don’t want to give preference to one side of the picture, a system must be developed that results in a situation where the painting doesn’t have a verso. The stretching should be performed using the same standards as for an ordinary, one-sided picture: the tension should be evenly distributed along the perimeter and in the corners to keep the painting in plane for optimal viewing and display ([[Zaycev 1977]]). But now we also have a goal to prevent stretcher bars from obscuring the paint layer on both sides of the artwork, eliminating the possibility of crossbars. Following are technical details for an example of a two-sided picture that underwent structural treatment in our studio in GOSNIIR.
+According to modern conservation standards new stretchers must be extensible, and in the case of double-sided pictures, systems with wedges, screws, and springs all may be suitable. But if conservators don’t want to give preference to one side of the picture, a system must be developed that results in a situation where the painting doesn’t have a verso. The stretching should be performed using the same standards as for an ordinary, one-sided picture: the tension should be evenly distributed along the perimeter and in the corners to keep the painting in plane for optimal viewing and display ({% cite 'Zaycev 1977' %}). But now we also have a goal to prevent stretcher bars from obscuring the paint layer on both sides of the artwork, eliminating the possibility of crossbars. Following are technical details for an example of a two-sided picture that underwent structural treatment in our studio in GOSNIIR.
 
 ### Case Study: Andrey Vasnetsov’s *New Village*
 
-*New Village* by Andrey Vasnetsov (1924–2009) had been kept unstretched in the storage of Abramtsevo museum-reserve for a few decades. Both sides of the canvas were painted with finished landscapes, oriented in different directions. One of the paintings is also approximately 10 cm larger than the other ([fig. 57.2](#fig-57-2)). The painting was brought to our institution for research and restoration. Conservators consolidated the matte paint layer with copolymer of polyvinyl acetate with ethylene ([[Fedoseeva et al. 2016,\| 88]]). Then strip lining was performed. In this particular case we didn’t have to attach new linen margins thread-by-thread because one of the paintings was slightly smaller so there was enough space to do a traditional variant with an overlap. After these operations, the painting had to be stretched.
+*New Village* by Andrey Vasnetsov (1924–2009) had been kept unstretched in the storage of Abramtsevo museum-reserve for a few decades. Both sides of the canvas were painted with finished landscapes, oriented in different directions. One of the paintings is also approximately 10 cm larger than the other ([fig. 57.2](#fig-57-2)). The painting was brought to our institution for research and restoration. Conservators consolidated the matte paint layer with copolymer of polyvinyl acetate with ethylene ({% cite 'Fedoseeva et al. 2016' '88' %}). Then strip lining was performed. In this particular case we didn’t have to attach new linen margins thread-by-thread because one of the paintings was slightly smaller so there was enough space to do a traditional variant with an overlap. After these operations, the painting had to be stretched.
 
 {% figure 'fig-57-2' %}
 
-Conservator Artyom Romanov developed a system for doing so that was influenced by a constant tension system suggested by Barry B. Bauman of the Chicago Conservation Center. In 1982, Bauman designed a device for stretching and framing a double-sided painting that had an adjustable spring mechanism to ensure continuous canvas tension ([[Bauman 1982]]). In our case the museum and conservators decided to make the system manually controlled ([fig. 57.3](#fig-57-3)). The stretcher for *New Village* consisted, in fact, of two frames. The inner, extensile one, to which the painting was attached, had furniture bushings around the perimeter on its side ends. The outer frame, with rigidly fixed edges, had tension screws that moved forward and backward toward the bushings and changed the tension by pulling and pushing the inner frame ([[Romanov 2013]]). Instead of springs and wall grips, the screws went directly into the furniture bushings. The number of tension screws may vary depending on the size of the picture and the condition of canvas. In this particular case, a linen sackcloth with a weaving density of about 8 x 8 threads per square centimeter was used as the painting support. For the smaller stretcher, Artyom Romanov installed bushing in threes on the long sides and in pairs for the shorter ones.
+Conservator Artyom Romanov developed a system for doing so that was influenced by a constant tension system suggested by Barry B. Bauman of the Chicago Conservation Center. In 1982, Bauman designed a device for stretching and framing a double-sided painting that had an adjustable spring mechanism to ensure continuous canvas tension ({% cite 'Bauman 1982' %}). In our case the museum and conservators decided to make the system manually controlled ([fig. 57.3](#fig-57-3)). The stretcher for *New Village* consisted, in fact, of two frames. The inner, extensile one, to which the painting was attached, had furniture bushings around the perimeter on its side ends. The outer frame, with rigidly fixed edges, had tension screws that moved forward and backward toward the bushings and changed the tension by pulling and pushing the inner frame ({% cite 'Romanov 2013' %}). Instead of springs and wall grips, the screws went directly into the furniture bushings. The number of tension screws may vary depending on the size of the picture and the condition of canvas. In this particular case, a linen sackcloth with a weaving density of about 8 x 8 threads per square centimeter was used as the painting support. For the smaller stretcher, Artyom Romanov installed bushing in threes on the long sides and in pairs for the shorter ones.
 
 {% figure 'fig-57-3' %}
 
@@ -70,4 +70,4 @@ The screw stretching system was hidden inside the frame, which was attached to t
 
 ## Conclusion
 
-For decades, the problem of presenting both recto and verso of two-sided paintings was troubling to the artistic and scientific communities. Nowadays, modern restoration provides conservators with a wide variety of opportunities for treating such objects without sacrificing a part of the whole ([[Runeberg 2019]]). The big step of accepting the challenge was taken up in the past, so today our aim is to improve and modernize conservation techniques to make our work more effective. The projects presented in this paper contribute to the discussion about conservation and presentation of double-sided paintings.
+For decades, the problem of presenting both recto and verso of two-sided paintings was troubling to the artistic and scientific communities. Nowadays, modern restoration provides conservators with a wide variety of opportunities for treating such objects without sacrificing a part of the whole ({% cite 'Runeberg 2019' %}). The big step of accepting the challenge was taken up in the past, so today our aim is to improve and modernize conservation techniques to make our work more effective. The projects presented in this paper contribute to the discussion about conservation and presentation of double-sided paintings.
