--- a/content/8-posters/62.md
+++ b/content/8-posters/62.md
@@ -47,9 +47,9 @@ Research was prompted by observations that some contemporary paintings exhibit u
 
 ## Background
 
-Historical studies of commercially primed canvases document the frequent use of lead white, chalk, protein, and oil in single- or double priming layers on cotton or linen canvas supports ([[Ravaud et al. 2014]]; [[Hackney 2019]]; [[Townsend et al. 2008]]). Today, these priming layers are commonly substituted with synthetic alternatives, with acrylics being the most commonly encountered. For example, Ormsby et al. studied priming layers of fifty-two paintings from the Tate collection dated 1963–2008 and identified 60% of priming layers as acrylic emulsion, 27% as oil based, and 10% as alkyd, with 3% “other” ([[Ormsby et al. 2008]]). The prevalence of synthetic fiber use in contemporary canvas supports is also a question to be investigated.
+Historical studies of commercially primed canvases document the frequent use of lead white, chalk, protein, and oil in single- or double priming layers on cotton or linen canvas supports ({% cite 'Ravaud et al. 2014' %}; {% cite 'Hackney 2019' %}; {% cite 'Townsend et al. 2008' %}). Today, these priming layers are commonly substituted with synthetic alternatives, with acrylics being the most commonly encountered. For example, Ormsby et al. studied priming layers of fifty-two paintings from the Tate collection dated 1963–2008 and identified 60% of priming layers as acrylic emulsion, 27% as oil based, and 10% as alkyd, with 3% “other” ({% cite 'Ormsby et al. 2008' %}). The prevalence of synthetic fiber use in contemporary canvas supports is also a question to be investigated.
 
-To inform canvas sample selection for this current study, thirty-seven Australian and Singaporean painters were surveyed about their canvas choices revealing that most painters routinely purchased commercially primed canvases—selecting their canvas by trial and error, availability, working qualities, and price point ([[Osmond et al. 2018]]). Commercially primed canvases are usually produced as type U: universal (synthetic emulsion), suitable for both water- and oil-based paint; or type O: suitable for oil paint. However, many artists were unaware of the priming type and did not vary their canvas selection according to paint medium.
+To inform canvas sample selection for this current study, thirty-seven Australian and Singaporean painters were surveyed about their canvas choices revealing that most painters routinely purchased commercially primed canvases—selecting their canvas by trial and error, availability, working qualities, and price point ({% cite 'Osmond et al. 2018' %}). Commercially primed canvases are usually produced as type U: universal (synthetic emulsion), suitable for both water- and oil-based paint; or type O: suitable for oil paint. However, many artists were unaware of the priming type and did not vary their canvas selection according to paint medium.
 
 ## Methodology and Results
 
@@ -57,7 +57,7 @@ Fifty-three commercially primed artist canvases were collected from art stores i
 
 Canvas fiber, priming binder, and pigments/fillers were primarily analyzed using optical microscopy, attenuated total reflectance­–Fourier transform infrared spectroscopy (ATR-FTIR), pyrolysis gas chromatography/mass spectrometry (Py-GCMS), X-ray fluorescence spectroscopy (XRF), and some with Raman spectroscopy and scanning electron microscopy–energy-dispersive X-ray spectroscopy (SEM-EDX). In addition, uniaxial tensile strength testing and heat testing were undertaken.
 
-A summary of results is presented below. More detailed analysis for each sample is found as [supplementary data](https://www.qagoma.qld.gov.au/__data/assets/pdf_file/0004/596821/Investigating-commercially-primed-contemporary-artist-canvases-supplementary-data.pdf) [[Carter et al 2020]].
+A summary of results is presented below. More detailed analysis for each sample is found as [supplementary data](https://www.qagoma.qld.gov.au/__data/assets/pdf_file/0004/596821/Investigating-commercially-primed-contemporary-artist-canvases-supplementary-data.pdf) {% cite 'Carter et al 2020' %}.
 
 ### Priming Stratigraphy
 
@@ -65,13 +65,13 @@ Cross sections were prepared, and four priming layer stratigraphies were identif
 
 ### Binder
 
-The top surface of priming layers was characterized using ATR-FTIR ([table 62.1](#table-62-1), [fig. 62.1](#fig-62-1)) ([[Osmond et al. 2018]]). At this surface layer, forty-nine of the fifty-three canvas samples contained synthetic polymer binders and four samples contained oil priming. Styrenated-acrylic predominated as a binder, followed by acrylic and acrylic–polyvinyl acrylic (PVA) binders. No alkyd binders were found.
+The top surface of priming layers was characterized using ATR-FTIR ([table 62.1](#table-62-1), [fig. 62.1](#fig-62-1)) ({% cite 'Osmond et al. 2018' %}). At this surface layer, forty-nine of the fifty-three canvas samples contained synthetic polymer binders and four samples contained oil priming. Styrenated-acrylic predominated as a binder, followed by acrylic and acrylic–polyvinyl acrylic (PVA) binders. No alkyd binders were found.
 
 {% figure 'table-62-1' %}
 
 {% figure 'fig-62-1' %}
 
-Py-GCMS provided further detail of synthetic polymer binder constituents, including verification of the use of seven different acrylic monomers. Within the group of styrenated-acrylics, styrene– n-butyl acrylate (BA) predominated (37%), and within the group of “pure” acrylics, only ethyl acrylate–methyl methacrylate (EA-MMA) and BA-MMA were found, with a slightly higher occurrence of EA-MMA. One EA-MMA priming showed significant amounts of diethylene glycol dibenzoate plasticizer. Within the group of PVA-acrylic binders, some were copolymerized with vinyl versatate (VeoVa). Surfactants such as polyethylene oxide (PEO) ([[Scalarone and Chiantore 2004]]) were not observed with ATR-FTIR.
+Py-GCMS provided further detail of synthetic polymer binder constituents, including verification of the use of seven different acrylic monomers. Within the group of styrenated-acrylics, styrene– n-butyl acrylate (BA) predominated (37%), and within the group of “pure” acrylics, only ethyl acrylate–methyl methacrylate (EA-MMA) and BA-MMA were found, with a slightly higher occurrence of EA-MMA. One EA-MMA priming showed significant amounts of diethylene glycol dibenzoate plasticizer. Within the group of PVA-acrylic binders, some were copolymerized with vinyl versatate (VeoVa). Surfactants such as polyethylene oxide (PEO) ({% cite 'Scalarone and Chiantore 2004' %}) were not observed with ATR-FTIR.
 
 Priming layer combinations varied ([fig. 62.2](#fig-62-2)). Double priming layers included acrylic over styrenated acrylic ([fig. 62.2b](#fig-62-2)), acrylic over acrylic-PVA ([fig. 62.2d](#fig-62-2)), and oil over styrenated acrylic ([fig. 62.3](#fig-62-3)).
 
@@ -79,9 +79,9 @@ Priming layer combinations varied ([fig. 62.2](#fig-62-2)). Double priming layer
 
 {% figure 'fig-62-3' %}
 
-Variations were observed between ATR-FTIR and Py-GCMS data, including a significantly higher incidence of PVA detected with Py-GCMS. This was found to correlate with the presence of PVA in lower priming layers not captured by the surface-only ATR-FTIR. Thin surface layers were sometimes difficult to separate from other similarly colored layers for Py-GCMS analysis ([fig. 62.2d](#fig-62-2)) ([[Osmond et al. 2018]]).
+Variations were observed between ATR-FTIR and Py-GCMS data, including a significantly higher incidence of PVA detected with Py-GCMS. This was found to correlate with the presence of PVA in lower priming layers not captured by the surface-only ATR-FTIR. Thin surface layers were sometimes difficult to separate from other similarly colored layers for Py-GCMS analysis ([fig. 62.2d](#fig-62-2)) ({% cite 'Osmond et al. 2018' %}).
 
-In total, thirty-four different copolymer binder combinations in the upper layer were found in the surface layer of the forty-nine synthetic-primed samples—indicating a wide variety of formulations and subsequent properties. The history of synthetic emulsion binders and copolymer properties is well documented, including in conservation literature ([[Scalarone & Chiantore 2004]]; [[Learner 2004]]; [[Croll 2007]]; [[Standevan 2011]]), which describes how copolymers are formulated to provide optimal coating properties. For example, adding monomers that have a higher glass transition temperature (Tg), such as styrene (or MMA), to a “soft” acrylic monomer such as n-butyl acrylate results in a stiffer and possibly more heat tolerant priming, depending on the monomer ratio ([table 62.2](#table-62-2)).
+In total, thirty-four different copolymer binder combinations in the upper layer were found in the surface layer of the forty-nine synthetic-primed samples—indicating a wide variety of formulations and subsequent properties. The history of synthetic emulsion binders and copolymer properties is well documented, including in conservation literature ({% cite 'Scalarone and Chiantore 2004' %}; {% cite 'Learner 2004' %}; {% cite 'Croll 2007' %}; {% cite 'Standevan 2011' %}), which describes how copolymers are formulated to provide optimal coating properties. For example, adding monomers that have a higher glass transition temperature (Tg), such as styrene (or MMA), to a “soft” acrylic monomer such as n-butyl acrylate results in a stiffer and possibly more heat tolerant priming, depending on the monomer ratio ([table 62.2](#table-62-2)).
 
 {% figure 'table-62-2' %}
 
@@ -95,7 +95,7 @@ The four oil-primed samples were double primed. Three were oil over acrylic or a
 
 Amorphous zinc carboxylates (broadband centered 1571 cm^−1^) were found at the top surface of the double oil priming where zinc oxide was present only in the underlayer. This suggests in situ formation of zinc soaps and migration from the lower layer to the surface ([fig. 62.3a](#fig-62-3)).
 
-Crystalline zinc soaps (1538 cm^−1^) were detected at the surface of two oil-primed canvases with acrylic-PVA underlayers. The oil priming contained no zinc oxide, and thus zinc stearate was likely a constituent in the priming formulation ([fig. 62.3b](#fig-62-3)). These results are important, as zinc soaps at the surface of oil-primed canvases may pose a risk to subsequent oil-paint adhesion ([[Osmond 2019]]).
+Crystalline zinc soaps (1538 cm^−1^) were detected at the surface of two oil-primed canvases with acrylic-PVA underlayers. The oil priming contained no zinc oxide, and thus zinc stearate was likely a constituent in the priming formulation ([fig. 62.3b](#fig-62-3)). These results are important, as zinc soaps at the surface of oil-primed canvases may pose a risk to subsequent oil-paint adhesion ({% cite 'Osmond 2019' %}).
 
 ## Canvas
 
@@ -103,7 +103,7 @@ Fiber analysis showed good correlation with the information provided by manufact
 
 Three weave patterns were identified: plain weave (1 x 1), half basket (2 x 1), and full basket (2 x 2) ([table 62.1](#table-62-1)). Cotton was typically found as half basket, while linen, PET, and PET-cotton blends were mostly plain weave. Twenty-five percent of cotton samples had a thread count of 10 x 30 threads/cm^2^; otherwise, thread counts varied.
 
-Uniaxial tensile strength testing of canvas samples indicated that the type or number of priming layers did not significantly affect tensile strength. The force at maximum for cotton and cotton-PET (56—258 N) was generally lower than for linen and PET (191—514 N) regardless of priming layers. The modulus of elasticity of the samples varied, generally showing a lower modulus of elasticity in the warp direction than the weft, aligning with research by others ([[Young and Jardine 2012]]).
+Uniaxial tensile strength testing of canvas samples indicated that the type or number of priming layers did not significantly affect tensile strength. The force at maximum for cotton and cotton-PET (56—258 N) was generally lower than for linen and PET (191—514 N) regardless of priming layers. The modulus of elasticity of the samples varied, generally showing a lower modulus of elasticity in the warp direction than the weft, aligning with research by others ({% cite 'Young and Jardine 2012' %}).
 
 ## Heat tests
 
@@ -111,11 +111,11 @@ Response of the priming layer to heat was tested. Most samples were visually aff
 
 ## Conclusions
 
-The synthetic emulsion primings found in this study reflect commercial development over the past seventy years. However, where industry has broadly transitioned from PVA and PVA-acrylic copolymers to acrylics and styrenated-acrylics ([[Schwartz and Kossmann 1998]]) PVA remains a common constituent in commercially primed artist canvases.
+The synthetic emulsion primings found in this study reflect commercial development over the past seventy years. However, where industry has broadly transitioned from PVA and PVA-acrylic copolymers to acrylics and styrenated-acrylics ({% cite 'Schwartz and Kossmann 1998' %}) PVA remains a common constituent in commercially primed artist canvases.
 
-Styrene was found in 64% of priming surface layers—most frequently with acrylic but also combined with PVA. Styrenated acrylics were also found as underlayers for both oil and acrylic layers. The prevalence of styrenated acrylics indicates a trend of increased use since 2008 ([[Ormsby et al. 2008]]).
+Styrene was found in 64% of priming surface layers—most frequently with acrylic but also combined with PVA. Styrenated acrylics were also found as underlayers for both oil and acrylic layers. The prevalence of styrenated acrylics indicates a trend of increased use since 2008 ({% cite 'Ormsby et al. 2008' %}).
 
-Styrenated acrylic emulsions are generally used in more economical paints, as styrene monomers are cheaper than acrylics. However, styrenated acrylics can also produce high-end paints, depending on the performance required.[^1] Importantly, styrene is not stable when exposed to ultraviolet radiation ([[Standeven 2011)]]). It can become yellow and may “chalk” and crack if sufficient UV exposure occurs. When covered with another paint layer, styrenated acrylic is considered stable.[^2] Thus, a general recommendation from this research is for artists to avoid leaving commercial priming layers (which may contain styrene) exposed to possible UV degradation.
+Styrenated acrylic emulsions are generally used in more economical paints, as styrene monomers are cheaper than acrylics. However, styrenated acrylics can also produce high-end paints, depending on the performance required.[^1] Importantly, styrene is not stable when exposed to ultraviolet radiation ({% cite 'Standeven 2011)' %}). It can become yellow and may “chalk” and crack if sufficient UV exposure occurs. When covered with another paint layer, styrenated acrylic is considered stable.[^2] Thus, a general recommendation from this research is for artists to avoid leaving commercial priming layers (which may contain styrene) exposed to possible UV degradation.
 
 In regard to oil-primed canvases, surface zinc carboxylates were identified. They present the risk of delamination of subsequently applied oil paint.
 
